Added Open in Colab badges to all notebooks

--- a/00_KDE_Tutorial.ipynb
+++ b/00_KDE_Tutorial.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/00_KDE_Tutorial.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4d8d906",
    "metadata": {},
    "source": [
-    "# 📊 Tutorial: KDE (Kernel Density Estimation)\n",
+    "# \ud83d\udcca Tutorial: KDE (Kernel Density Estimation)\n",
     "\n",
     "## Czym jest KDE?\n",
-    "**KDE (Jądrowa Estymacja Gęstości)** to technika wizualizacji, która zamienia zbiór punktów danych w **gładką krzywą prawdopodobieństwa**.\n",
+    "**KDE (J\u0105drowa Estymacja G\u0119sto\u015bci)** to technika wizualizacji, kt\u00f3ra zamienia zbi\u00f3r punkt\u00f3w danych w **g\u0142adk\u0105 krzyw\u0105 prawdopodobie\u0144stwa**.\n",
     "\n",
-    "W Data Science używamy jej, aby:\n",
-    "1.  Zobaczyć **kształt danych** bez zakłóceń, które wprowadzają słupki histogramu.\n",
-    "2.  Porównać łatwo dwie grupy na jednym wykresie.\n",
-    "3.  Zrozumieć rozkład błędów modelu.\n",
+    "W Data Science u\u017cywamy jej, aby:\n",
+    "1.  Zobaczy\u0107 **kszta\u0142t danych** bez zak\u0142\u00f3ce\u0144, kt\u00f3re wprowadzaj\u0105 s\u0142upki histogramu.\n",
+    "2.  Por\u00f3wna\u0107 \u0142atwo dwie grupy na jednym wykresie.\n",
+    "3.  Zrozumie\u0107 rozk\u0142ad b\u0142\u0119d\u00f3w modelu.\n",
     "\n",
-    "### Intuicja (Jak to sobie wyobrazić?)\n",
-    "Wyobraź sobie, że rozsypujesz cukier na stole (to są Twoje dane).\n",
-    "*   **Histogram:** Dzielisz stół na kratki i ważysz cukier w każdej kratce. Wynik jest \"kanciasty\".\n",
-    "*   **KDE:** W miejscu każdego ziarenka cukru usypujesz małą, idealną górkę. Kiedy usypiesz górki dla wszystkich ziarenek, powstanie jeden pofałdowany krajobraz. To jest linia KDE."
+    "### Intuicja (Jak to sobie wyobrazi\u0107?)\n",
+    "Wyobra\u017a sobie, \u017ce rozsypujesz cukier na stole (to s\u0105 Twoje dane).\n",
+    "*   **Histogram:** Dzielisz st\u00f3\u0142 na kratki i wa\u017cysz cukier w ka\u017cdej kratce. Wynik jest \"kanciasty\".\n",
+    "*   **KDE:** W miejscu ka\u017cdego ziarenka cukru usypujesz ma\u0142\u0105, idealn\u0105 g\u00f3rk\u0119. Kiedy usypiesz g\u00f3rki dla wszystkich ziarenek, powstanie jeden pofa\u0142dowany krajobraz. To jest linia KDE."
    ]
   },
   {
@@ -31,22 +38,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biblioteki załadowane. Przejdź dalej.\n"
+      "Biblioteki za\u0142adowane. Przejd\u017a dalej.\n"
      ]
     }
    ],
    "source": [
-    "# Importujemy niezbędne biblioteki\n",
+    "# Importujemy niezb\u0119dne biblioteki\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "\n",
-    "# Ustawiamy ładny styl wykresów\n",
+    "# Ustawiamy \u0142adny styl wykres\u00f3w\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "plt.rcParams['figure.figsize'] = (10, 6)\n",
     "\n",
-    "print(\"Biblioteki załadowane. Przejdź dalej.\")"
+    "print(\"Biblioteki za\u0142adowane. Przejd\u017a dalej.\")"
    ]
   },
   {
@@ -54,14 +61,14 @@
    "id": "f2db38c0",
    "metadata": {},
    "source": [
-    "## Część 1: Dlaczego histogram bywa mylący?\n",
+    "## Cz\u0119\u015b\u0107 1: Dlaczego histogram bywa myl\u0105cy?\n",
     "\n",
-    "Stwórzmy dane symulujące **czasy reakcji** użytkowników na stronie internetowej.\n",
+    "Stw\u00f3rzmy dane symuluj\u0105ce **czasy reakcji** u\u017cytkownik\u00f3w na stronie internetowej.\n",
     "Mamy dwie grupy:\n",
-    "*   **Szybcy:** średnia 30ms.\n",
-    "*   **Wolni:** średnia 80ms.\n",
+    "*   **Szybcy:** \u015brednia 30ms.\n",
+    "*   **Wolni:** \u015brednia 80ms.\n",
     "\n",
-    "Poniżej zobaczysz, że histogram (z lewej) jest kanciasty i zależy od tego, jak szerokie ustawimy słupki. KDE (z prawej) płynnie pokazuje nam **dwa szczyty** (rozkład bimodalny)."
+    "Poni\u017cej zobaczysz, \u017ce histogram (z lewej) jest kanciasty i zale\u017cy od tego, jak szerokie ustawimy s\u0142upki. KDE (z prawej) p\u0142ynnie pokazuje nam **dwa szczyty** (rozk\u0142ad bimodalny)."
    ]
   },
   {
@@ -82,13 +89,13 @@
     }
    ],
    "source": [
-    "# 1. Generujemy dane (dwa skupiska punktów)\n",
+    "# 1. Generujemy dane (dwa skupiska punkt\u00f3w)\n",
     "np.random.seed(42)\n",
-    "grupa_szybka = np.random.normal(30, 8, 30)  # 30 osób\n",
-    "grupa_wolna = np.random.normal(80, 8, 30)   # 30 osób\n",
+    "grupa_szybka = np.random.normal(30, 8, 30)  # 30 os\u00f3b\n",
+    "grupa_wolna = np.random.normal(80, 8, 30)   # 30 os\u00f3b\n",
     "dane = np.concatenate([grupa_szybka, grupa_wolna])\n",
     "\n",
-    "# 2. Rysujemy porównanie\n",
+    "# 2. Rysujemy por\u00f3wnanie\n",
     "fig, ax = plt.subplots(1, 2, figsize=(14, 5))\n",
     "\n",
     "# Wykres A: Histogram\n",
@@ -97,9 +104,9 @@
     "\n",
     "# Wykres B: KDE\n",
     "sns.kdeplot(dane, fill=True, color='teal', ax=ax[1])\n",
-    "ax[1].set_title(\"KDE (Gładka linia)\")\n",
+    "ax[1].set_title(\"KDE (G\u0142adka linia)\")\n",
     "\n",
-    "# Dodajemy \"rug plot\" - małe kreski na dole pokazujące, gdzie dokładnie leżą punkty\n",
+    "# Dodajemy \"rug plot\" - ma\u0142e kreski na dole pokazuj\u0105ce, gdzie dok\u0142adnie le\u017c\u0105 punkty\n",
     "sns.rugplot(dane, color=\"black\", ax=ax[1])\n",
     "\n",
     "plt.show()"
@@ -110,16 +117,16 @@
    "id": "db7b0878",
    "metadata": {},
    "source": [
-    "## Część 2: Jak to działa pod maską? (Suma Dzwonów)\n",
+    "## Cz\u0119\u015b\u0107 2: Jak to dzia\u0142a pod mask\u0105? (Suma Dzwon\u00f3w)\n",
     "\n",
-    "To jest najważniejszy moment tego tutoriala. Zrozumiemy matematykę bez wzorów.\n",
+    "To jest najwa\u017cniejszy moment tego tutoriala. Zrozumiemy matematyk\u0119 bez wzor\u00f3w.\n",
     "\n",
-    "Algorytm KDE działa w 3 krokach:\n",
-    "1.  Bierze każdy pojedynczy punkt danych (kreskę na osi X).\n",
-    "2.  Stawia na nim **Krzywą Gaussa** (szary dzwon na wykresie poniżej).\n",
-    "3.  **Sumuje** wysokości wszystkich dzwonów.\n",
+    "Algorytm KDE dzia\u0142a w 3 krokach:\n",
+    "1.  Bierze ka\u017cdy pojedynczy punkt danych (kresk\u0119 na osi X).\n",
+    "2.  Stawia na nim **Krzyw\u0105 Gaussa** (szary dzwon na wykresie poni\u017cej).\n",
+    "3.  **Sumuje** wysoko\u015bci wszystkich dzwon\u00f3w.\n",
     "\n",
-    "Wynikowa czerwona linia to po prostu suma tych małych szarych górek."
+    "Wynikowa czerwona linia to po prostu suma tych ma\u0142ych szarych g\u00f3rek."
    ]
   },
   {
@@ -140,19 +147,19 @@
     }
    ],
    "source": [
-    "# Weźmy tylko 10 punktów, żeby wykres był czytelny\n",
+    "# We\u017amy tylko 10 punkt\u00f3w, \u017ceby wykres by\u0142 czytelny\n",
     "male_dane = dane[:10]\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "# 1. Przygotowanie osi X\n",
     "x_grid = np.linspace(0, 100, 500)\n",
-    "suma_dzwonow = np.zeros_like(x_grid) # Pusta tablica na sumę\n",
+    "suma_dzwonow = np.zeros_like(x_grid) # Pusta tablica na sum\u0119\n",
     "\n",
     "# 2. Rysujemy pojedyncze dzwony (Kernels)\n",
-    "bandwidth = 5  # Parametr szerokości dzwonu\n",
+    "bandwidth = 5  # Parametr szeroko\u015bci dzwonu\n",
     "for punkt in male_dane:\n",
-    "    # Generujemy dzwon Gaussa dla każdego punktu\n",
+    "    # Generujemy dzwon Gaussa dla ka\u017cdego punktu\n",
     "    kernel = stats.norm(punkt, bandwidth).pdf(x_grid)\n",
     "    \n",
     "    # Rysujemy szary dzwon\n",
@@ -164,10 +171,10 @@
     "# 3. Rysujemy punkty danych (kreski na dole)\n",
     "sns.rugplot(male_dane, color=\"black\", height=0.05, linewidth=2, label=\"Punkty Danych\")\n",
     "\n",
-    "# 4. Rysujemy wynikowe KDE (Sumę)\n",
+    "# 4. Rysujemy wynikowe KDE (Sum\u0119)\n",
     "plt.plot(x_grid, suma_dzwonow, color=\"red\", linewidth=3, label=\"Wynikowe KDE (Suma)\")\n",
     "\n",
-    "plt.title(\"Sekret działania KDE: Suma szarych dzwonów daje czerwoną linię\", fontsize=14)\n",
+    "plt.title(\"Sekret dzia\u0142ania KDE: Suma szarych dzwon\u00f3w daje czerwon\u0105 lini\u0119\", fontsize=14)\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -177,14 +184,14 @@
    "id": "f4dc195e",
    "metadata": {},
    "source": [
-    "## Część 3: Parametr Bandwidth (Szerokość pasma)\n",
+    "## Cz\u0119\u015b\u0107 3: Parametr Bandwidth (Szeroko\u015b\u0107 pasma)\n",
     "\n",
-    "W KDE mamy jeden główny \"suwak\", którym sterujemy wyglądem wykresu: **Bandwidth (bw)**.\n",
-    "Decyduje on o tym, jak szerokie są te szare dzwony z poprzedniego kroku.\n",
+    "W KDE mamy jeden g\u0142\u00f3wny \"suwak\", kt\u00f3rym sterujemy wygl\u0105dem wykresu: **Bandwidth (bw)**.\n",
+    "Decyduje on o tym, jak szerokie s\u0105 te szare dzwony z poprzedniego kroku.\n",
     "\n",
-    "*   **Małe bw (np. 0.2):** Wykres jest poszarpany, reaguje na każdy szum. To tzw. **Overfitting** (przeuczenie).\n",
-    "*   **Duże bw (np. 2.5):** Wykres jest zbyt płaski, zamazuje ważne cechy (np. skleja dwie grupy w jedną). To tzw. **Underfitting**.\n",
-    "*   **Optymalne bw:** Szukamy złotego środka."
+    "*   **Ma\u0142e bw (np. 0.2):** Wykres jest poszarpany, reaguje na ka\u017cdy szum. To tzw. **Overfitting** (przeuczenie).\n",
+    "*   **Du\u017ce bw (np. 2.5):** Wykres jest zbyt p\u0142aski, zamazuje wa\u017cne cechy (np. skleja dwie grupy w jedn\u0105). To tzw. **Underfitting**.\n",
+    "*   **Optymalne bw:** Szukamy z\u0142otego \u015brodka."
    ]
   },
   {
@@ -207,19 +214,19 @@
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "\n",
-    "# 1. Za małe wygładzanie (bw_adjust=0.2)\n",
+    "# 1. Za ma\u0142e wyg\u0142adzanie (bw_adjust=0.2)\n",
     "# Widzimy szum i pojedyncze \"szpilki\"\n",
-    "sns.kdeplot(dane, bw_adjust=0.2, label=\"BW = 0.2 (Za małe - szum)\", color='red', linestyle='--')\n",
+    "sns.kdeplot(dane, bw_adjust=0.2, label=\"BW = 0.2 (Za ma\u0142e - szum)\", color='red', linestyle='--')\n",
     "\n",
-    "# 2. Idealne wygładzanie (bw_adjust=1)\n",
-    "# Widzimy wyraźnie dwie grupy - domyślne ustawienie\n",
-    "sns.kdeplot(dane, bw_adjust=1, label=\"BW = 1.0 (Domyślne - OK)\", color='green', linewidth=3)\n",
+    "# 2. Idealne wyg\u0142adzanie (bw_adjust=1)\n",
+    "# Widzimy wyra\u017anie dwie grupy - domy\u015blne ustawienie\n",
+    "sns.kdeplot(dane, bw_adjust=1, label=\"BW = 1.0 (Domy\u015blne - OK)\", color='green', linewidth=3)\n",
     "\n",
-    "# 3. Za duże wygładzanie (bw_adjust=2.5)\n",
-    "# Dwie grupy zlały się w jedną wielką górę - straciliśmy informację!\n",
-    "sns.kdeplot(dane, bw_adjust=2.5, label=\"BW = 2.5 (Za duże - utrata info)\", color='blue', linestyle=':')\n",
+    "# 3. Za du\u017ce wyg\u0142adzanie (bw_adjust=2.5)\n",
+    "# Dwie grupy zla\u0142y si\u0119 w jedn\u0105 wielk\u0105 g\u00f3r\u0119 - stracili\u015bmy informacj\u0119!\n",
+    "sns.kdeplot(dane, bw_adjust=2.5, label=\"BW = 2.5 (Za du\u017ce - utrata info)\", color='blue', linestyle=':')\n",
     "\n",
-    "plt.title(\"Jak parametr Bandwidth zmienia kształt wykresu?\", fontsize=14)\n",
+    "plt.title(\"Jak parametr Bandwidth zmienia kszta\u0142t wykresu?\", fontsize=14)\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -229,14 +236,14 @@
    "id": "97cd4505",
    "metadata": {},
    "source": [
-    "## 🧠 Zadanie Domowe\n",
+    "## \ud83e\udde0 Zadanie Domowe\n",
     "\n",
-    "Sprawdź, jak KDE zachowuje się na danych całkowicie losowych.\n",
+    "Sprawd\u017a, jak KDE zachowuje si\u0119 na danych ca\u0142kowicie losowych.\n",
     "\n",
     "**Zadanie:**\n",
-    "1. Wygeneruj 200 losowych liczb z rozkładu jednostajnego (`np.random.rand(200)`).\n",
-    "2. Użyj `sns.histplot` z parametrem `kde=True`.\n",
-    "3. Czy KDE (linia) jest płaska (tak jak powinna być), czy próbuje na siłę znaleźć jakieś górki?"
+    "1. Wygeneruj 200 losowych liczb z rozk\u0142adu jednostajnego (`np.random.rand(200)`).\n",
+    "2. U\u017cyj `sns.histplot` z parametrem `kde=True`.\n",
+    "3. Czy KDE (linia) jest p\u0142aska (tak jak powinna by\u0107), czy pr\u00f3buje na si\u0142\u0119 znale\u017a\u0107 jakie\u015b g\u00f3rki?"
    ]
   }
  ],
