--- a/01_Correlations_and_Significance_of_Features.ipynb
+++ b/01_Correlations_and_Significance_of_Features.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/01_Correlations_and_Significance_of_Features.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "696d3408",
    "metadata": {},
    "source": [
-    "# 📉 Tutorial: Korelacja, Chi-Kwadrat i Istotność Cech\n",
+    "# \ud83d\udcc9 Tutorial: Korelacja, Chi-Kwadrat i Istotno\u015b\u0107 Cech\n",
     "\n",
-    "W Data Science nie każda kolumna w tabeli jest ważna. Często mamy \"śmieciowe\" dane (szum), które tylko mylą model.\n",
-    "Jak sprawdzić, co jest ważne? Zależy to od **typu danych**.\n",
+    "W Data Science nie ka\u017cda kolumna w tabeli jest wa\u017cna. Cz\u0119sto mamy \"\u015bmieciowe\" dane (szum), kt\u00f3re tylko myl\u0105 model.\n",
+    "Jak sprawdzi\u0107, co jest wa\u017cne? Zale\u017cy to od **typu danych**.\n",
     "\n",
-    "W tym notatniku nauczysz się 3 kluczowych metod:\n",
-    "1.  **Korelacja Pearsona:** Gdy badasz Liczbę vs Liczbę (np. Metraż a Cena).\n",
-    "2.  **Test Chi-Kwadrat:** Gdy badasz Kategorię vs Kategorię (np. Płeć a Wybór Marki).\n",
-    "3.  **Feature Importance (z modelu):** Metoda \"brutalna siła\", która mówi, co było ważne dla algorytmu (np. Lasu Losowego)."
+    "W tym notatniku nauczysz si\u0119 3 kluczowych metod:\n",
+    "1.  **Korelacja Pearsona:** Gdy badasz Liczb\u0119 vs Liczb\u0119 (np. Metra\u017c a Cena).\n",
+    "2.  **Test Chi-Kwadrat:** Gdy badasz Kategori\u0119 vs Kategori\u0119 (np. P\u0142e\u0107 a Wyb\u00f3r Marki).\n",
+    "3.  **Feature Importance (z modelu):** Metoda \"brutalna si\u0142a\", kt\u00f3ra m\u00f3wi, co by\u0142o wa\u017cne dla algorytmu (np. Lasu Losowego)."
    ]
   },
   {
@@ -31,7 +38,7 @@
     }
    ],
    "source": [
-    "# Import niezbędnych bibliotek\n",
+    "# Import niezb\u0119dnych bibliotek\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -54,10 +61,10 @@
    "source": [
     "## KROK 1: Generowanie Danych (Laboratorium)\n",
     "\n",
-    "Stworzymy zestaw danych o nieruchomościach, w którym **znamy prawdę**:\n",
-    "1.  **Cena** zależy liniowo od **Metrażu** (Silna korelacja).\n",
-    "2.  **Typ Budynku** (Dom/Blok) zależy od **Dzielnicy** (Zależność kategoryczna).\n",
-    "3.  **Kolor Ścian** jest kompletnie losowy (Szum - nieistotny)."
+    "Stworzymy zestaw danych o nieruchomo\u015bciach, w kt\u00f3rym **znamy prawd\u0119**:\n",
+    "1.  **Cena** zale\u017cy liniowo od **Metra\u017cu** (Silna korelacja).\n",
+    "2.  **Typ Budynku** (Dom/Blok) zale\u017cy od **Dzielnicy** (Zale\u017cno\u015b\u0107 kategoryczna).\n",
+    "3.  **Kolor \u015acian** jest kompletnie losowy (Szum - nieistotny)."
    ]
   },
   {
@@ -70,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Próbka danych:\n"
+      "Pr\u00f3bka danych:\n"
      ]
     },
     {
@@ -94,11 +101,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Metraż</th>\n",
+       "      <th>Metra\u017c</th>\n",
        "      <th>Cena</th>\n",
        "      <th>Dzielnica</th>\n",
        "      <th>Typ_Budynku</th>\n",
-       "      <th>Kolor_Ścian</th>\n",
+       "      <th>Kolor_\u015acian</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -108,7 +115,7 @@
        "      <td>1.189197e+06</td>\n",
        "      <td>Centrum</td>\n",
        "      <td>Blok</td>\n",
-       "      <td>Beżowy</td>\n",
+       "      <td>Be\u017cowy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -122,17 +129,17 @@
        "      <th>2</th>\n",
        "      <td>122</td>\n",
        "      <td>1.169868e+06</td>\n",
-       "      <td>Przedmieścia</td>\n",
+       "      <td>Przedmie\u015bcia</td>\n",
        "      <td>Dom</td>\n",
-       "      <td>Beżowy</td>\n",
+       "      <td>Be\u017cowy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>44</td>\n",
        "      <td>3.963653e+05</td>\n",
-       "      <td>Przedmieścia</td>\n",
+       "      <td>Przedmie\u015bcia</td>\n",
        "      <td>Dom</td>\n",
-       "      <td>Beżowy</td>\n",
+       "      <td>Be\u017cowy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -140,19 +147,19 @@
        "      <td>1.290544e+06</td>\n",
        "      <td>Centrum</td>\n",
        "      <td>Dom</td>\n",
-       "      <td>Beżowy</td>\n",
+       "      <td>Be\u017cowy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Metraż          Cena     Dzielnica Typ_Budynku Kolor_Ścian\n",
-       "0     132  1.189197e+06       Centrum        Blok      Beżowy\n",
+       "   Metra\u017c          Cena     Dzielnica Typ_Budynku Kolor_\u015acian\n",
+       "0     132  1.189197e+06       Centrum        Blok      Be\u017cowy\n",
        "1      81  7.725957e+05       Centrum         Dom       Szary\n",
-       "2     122  1.169868e+06  Przedmieścia         Dom      Beżowy\n",
-       "3      44  3.963653e+05  Przedmieścia         Dom      Beżowy\n",
-       "4     136  1.290544e+06       Centrum         Dom      Beżowy"
+       "2     122  1.169868e+06  Przedmie\u015bcia         Dom      Be\u017cowy\n",
+       "3      44  3.963653e+05  Przedmie\u015bcia         Dom      Be\u017cowy\n",
+       "4     136  1.290544e+06       Centrum         Dom      Be\u017cowy"
       ]
      },
      "metadata": {},
@@ -163,13 +170,13 @@
     "np.random.seed(42)\n",
     "n = 500\n",
     "\n",
-    "# 1. Dane Liczbowe (Metraż -> Cena)\n",
+    "# 1. Dane Liczbowe (Metra\u017c -> Cena)\n",
     "metraz = np.random.randint(30, 150, n)\n",
-    "# Cena to metraż * cena_za_metr + losowy szum\n",
+    "# Cena to metra\u017c * cena_za_metr + losowy szum\n",
     "cena = metraz * 9000 + np.random.normal(0, 50000, n)\n",
     "\n",
     "# 2. Dane Kategoryczne (Dzielnica -> Typ Budynku)\n",
-    "dzielnica = np.random.choice(['Centrum', 'Przedmieścia'], n)\n",
+    "dzielnica = np.random.choice(['Centrum', 'Przedmie\u015bcia'], n)\n",
     "typ_budynku = []\n",
     "\n",
     "for d in dzielnica:\n",
@@ -177,22 +184,22 @@
     "        # W centrum 90% to Bloki\n",
     "        typ_budynku.append(np.random.choice(['Blok', 'Dom'], p=[0.9, 0.1]))\n",
     "    else:\n",
-    "        # Na przedmieściach 80% to Domy\n",
+    "        # Na przedmie\u015bciach 80% to Domy\n",
     "        typ_budynku.append(np.random.choice(['Blok', 'Dom'], p=[0.2, 0.8]))\n",
     "\n",
     "# 3. Dane Losowe (Szum)\n",
-    "kolor_scian = np.random.choice(['Biały', 'Beżowy', 'Szary'], n)\n",
+    "kolor_scian = np.random.choice(['Bia\u0142y', 'Be\u017cowy', 'Szary'], n)\n",
     "\n",
-    "# Składamy DataFrame\n",
+    "# Sk\u0142adamy DataFrame\n",
     "df = pd.DataFrame({\n",
-    "    'Metraż': metraz,\n",
+    "    'Metra\u017c': metraz,\n",
     "    'Cena': cena,\n",
     "    'Dzielnica': dzielnica,\n",
     "    'Typ_Budynku': typ_budynku,\n",
-    "    'Kolor_Ścian': kolor_scian # To jest nasza pułapka (szum)\n",
+    "    'Kolor_\u015acian': kolor_scian # To jest nasza pu\u0142apka (szum)\n",
     "})\n",
     "\n",
-    "print(\"Próbka danych:\")\n",
+    "print(\"Pr\u00f3bka danych:\")\n",
     "display(df.head())"
    ]
   },
@@ -203,11 +210,11 @@
    "source": [
     "## Metoda 1: Korelacja Pearsona (Liczba vs Liczba)\n",
     "\n",
-    "Stosujemy, gdy chcemy sprawdzić związek liniowy między dwiema liczbami.\n",
-    "Wynik jest z przedziału **[-1, 1]**:\n",
-    "*   `1.0`: Idealna zależność (jedno rośnie, drugie rośnie).\n",
-    "*   `0.0`: Brak zależności (totalny chaos).\n",
-    "*   `-1.0`: Odwrotna zależność (jedno rośnie, drugie maleje)."
+    "Stosujemy, gdy chcemy sprawdzi\u0107 zwi\u0105zek liniowy mi\u0119dzy dwiema liczbami.\n",
+    "Wynik jest z przedzia\u0142u **[-1, 1]**:\n",
+    "*   `1.0`: Idealna zale\u017cno\u015b\u0107 (jedno ro\u015bnie, drugie ro\u015bnie).\n",
+    "*   `0.0`: Brak zale\u017cno\u015bci (totalny chaos).\n",
+    "*   `-1.0`: Odwrotna zale\u017cno\u015b\u0107 (jedno ro\u015bnie, drugie maleje)."
    ]
   },
   {
@@ -221,8 +228,8 @@
      "output_type": "stream",
      "text": [
       "Macierz korelacji:\n",
-      "          Metraż      Cena\n",
-      "Metraż  1.000000  0.986797\n",
+      "          Metra\u017c      Cena\n",
+      "Metra\u017c  1.000000  0.986797\n",
       "Cena    0.986797  1.000000\n",
       "------------------------------\n"
      ]
@@ -241,13 +248,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Współczynnik Pearsona: 0.9868 (Bardzo silny związek!)\n"
+      "Wsp\u00f3\u0142czynnik Pearsona: 0.9868 (Bardzo silny zwi\u0105zek!)\n"
      ]
     }
    ],
    "source": [
-    "# Obliczamy korelację między Metrażem a Ceną\n",
-    "corr_matrix = df[['Metraż', 'Cena']].corr()\n",
+    "# Obliczamy korelacj\u0119 mi\u0119dzy Metra\u017cem a Cen\u0105\n",
+    "corr_matrix = df[['Metra\u017c', 'Cena']].corr()\n",
     "\n",
     "print(\"Macierz korelacji:\")\n",
     "print(corr_matrix)\n",
@@ -256,12 +263,12 @@
     "# Wizualizacja (Heatmapa)\n",
     "plt.figure(figsize=(6, 5))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
-    "plt.title(\"Mapa Ciepła: Metraż vs Cena\")\n",
+    "plt.title(\"Mapa Ciep\u0142a: Metra\u017c vs Cena\")\n",
     "plt.show()\n",
     "\n",
-    "# Sprawdźmy korelację ręcznie\n",
-    "r, _ = pearsonr(df['Metraż'], df['Cena'])\n",
-    "print(f\"Współczynnik Pearsona: {r:.4f} (Bardzo silny związek!)\")"
+    "# Sprawd\u017amy korelacj\u0119 r\u0119cznie\n",
+    "r, _ = pearsonr(df['Metra\u017c'], df['Cena'])\n",
+    "print(f\"Wsp\u00f3\u0142czynnik Pearsona: {r:.4f} (Bardzo silny zwi\u0105zek!)\")"
    ]
   },
   {
@@ -271,13 +278,13 @@
    "source": [
     "## Metoda 2: Test Chi-Kwadrat (Kategoria vs Kategoria)\n",
     "\n",
-    "Pearson nie zadziała na tekst. Nie możesz policzyć korelacji między \"Centrum\" a \"Blokiem\".\n",
+    "Pearson nie zadzia\u0142a na tekst. Nie mo\u017cesz policzy\u0107 korelacji mi\u0119dzy \"Centrum\" a \"Blokiem\".\n",
     "Tutaj wchodzi **Chi-Kwadrat**.\n",
     "\n",
-    "Badamy: **Czy Dzielnica ma wpływ na Typ Budynku?**\n",
+    "Badamy: **Czy Dzielnica ma wp\u0142yw na Typ Budynku?**\n",
     "Patrzymy na **p-value**:\n",
-    "*   `p < 0.05`: Zależność jest istotna (to nie przypadek).\n",
-    "*   `p > 0.05`: Brak zależności (to czysty przypadek)."
+    "*   `p < 0.05`: Zale\u017cno\u015b\u0107 jest istotna (to nie przypadek).\n",
+    "*   `p > 0.05`: Brak zale\u017cno\u015bci (to czysty przypadek)."
    ]
   },
   {
@@ -290,25 +297,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ile budynków gdzie stoi?\n",
+      "Ile budynk\u00f3w gdzie stoi?\n",
       "Typ_Budynku   Blok  Dom\n",
       "Dzielnica              \n",
       "Centrum        240   28\n",
-      "Przedmieścia    48  184\n",
+      "Przedmie\u015bcia    48  184\n",
       "------------------------------\n",
       "Statystyka Chi2: 238.64\n",
       "P-value: 0.0000000000\n",
-      "✅ WNIOSEK: Istnieje silna zależność! Lokalizacja wpływa na typ budynku.\n",
+      "\u2705 WNIOSEK: Istnieje silna zale\u017cno\u015b\u0107! Lokalizacja wp\u0142ywa na typ budynku.\n",
       "\n",
-      "P-value dla koloru ścian: 0.7084 (Prawdopodobnie > 0.05, czyli brak związku)\n"
+      "P-value dla koloru \u015bcian: 0.7084 (Prawdopodobnie > 0.05, czyli brak zwi\u0105zku)\n"
      ]
     }
    ],
    "source": [
-    "# 1. Tworzymy tabelę krzyżową (contingency table)\n",
+    "# 1. Tworzymy tabel\u0119 krzy\u017cow\u0105 (contingency table)\n",
     "tabela = pd.crosstab(df['Dzielnica'], df['Typ_Budynku'])\n",
     "\n",
-    "print(\"Ile budynków gdzie stoi?\")\n",
+    "print(\"Ile budynk\u00f3w gdzie stoi?\")\n",
     "print(tabela)\n",
     "print(\"-\" * 30)\n",
     "\n",
@@ -316,17 +323,17 @@
     "chi2, p, dof, expected = chi2_contingency(tabela)\n",
     "\n",
     "print(f\"Statystyka Chi2: {chi2:.2f}\")\n",
-    "print(f\"P-value: {p:.10f}\") # Zapis dziesiętny\n",
+    "print(f\"P-value: {p:.10f}\") # Zapis dziesi\u0119tny\n",
     "\n",
     "if p < 0.05:\n",
-    "    print(\"✅ WNIOSEK: Istnieje silna zależność! Lokalizacja wpływa na typ budynku.\")\n",
+    "    print(\"\u2705 WNIOSEK: Istnieje silna zale\u017cno\u015b\u0107! Lokalizacja wp\u0142ywa na typ budynku.\")\n",
     "else:\n",
-    "    print(\"❌ WNIOSEK: Brak zależności.\")\n",
+    "    print(\"\u274c WNIOSEK: Brak zale\u017cno\u015bci.\")\n",
     "    \n",
-    "# Sprawdźmy dla Koloru Ścian (powinno wyjść brak zależności)\n",
-    "tabela_szum = pd.crosstab(df['Dzielnica'], df['Kolor_Ścian'])\n",
+    "# Sprawd\u017amy dla Koloru \u015acian (powinno wyj\u015b\u0107 brak zale\u017cno\u015bci)\n",
+    "tabela_szum = pd.crosstab(df['Dzielnica'], df['Kolor_\u015acian'])\n",
     "_, p_szum, _, _ = chi2_contingency(tabela_szum)\n",
-    "print(f\"\\nP-value dla koloru ścian: {p_szum:.4f} (Prawdopodobnie > 0.05, czyli brak związku)\")"
+    "print(f\"\\nP-value dla koloru \u015bcian: {p_szum:.4f} (Prawdopodobnie > 0.05, czyli brak zwi\u0105zku)\")"
    ]
   },
   {
@@ -336,11 +343,11 @@
    "source": [
     "## Metoda 3: Feature Importance (Las Losowy)\n",
     "\n",
-    "Co jeśli masz mieszane dane? I liczby, i tekst? I nieliniowe zależności?\n",
-    "Najlepiej wrzucić wszystko do modelu drzewiastego (np. **Random Forest**).\n",
+    "Co je\u015bli masz mieszane dane? I liczby, i tekst? I nieliniowe zale\u017cno\u015bci?\n",
+    "Najlepiej wrzuci\u0107 wszystko do modelu drzewiastego (np. **Random Forest**).\n",
     "\n",
-    "Model podczas nauki sam oceni, które kolumny były mu najbardziej potrzebne do zgadywania wyniku.\n",
-    "Tutaj naszym celem (Target) będzie **Typ_Budynku**. Zobaczymy, czy model wykryje, że \"Kolor Ścian\" jest bezużyteczny."
+    "Model podczas nauki sam oceni, kt\u00f3re kolumny by\u0142y mu najbardziej potrzebne do zgadywania wyniku.\n",
+    "Tutaj naszym celem (Target) b\u0119dzie **Typ_Budynku**. Zobaczymy, czy model wykryje, \u017ce \"Kolor \u015acian\" jest bezu\u017cyteczny."
    ]
   },
   {
@@ -367,28 +374,28 @@
     "# Zamieniamy tekst na liczby (Label Encoding)\n",
     "le = LabelEncoder()\n",
     "df_model['Dzielnica_Enc'] = le.fit_transform(df_model['Dzielnica'])\n",
-    "df_model['Kolor_Enc'] = le.fit_transform(df_model['Kolor_Ścian'])\n",
+    "df_model['Kolor_Enc'] = le.fit_transform(df_model['Kolor_\u015acian'])\n",
     "# Cel: 0 = Blok, 1 = Dom\n",
     "y = le.fit_transform(df_model['Typ_Budynku']) \n",
     "\n",
     "# Cechy (X) - usuwamy to, co przewidujemy\n",
-    "X = df_model[['Metraż', 'Cena', 'Dzielnica_Enc', 'Kolor_Enc']]\n",
+    "X = df_model[['Metra\u017c', 'Cena', 'Dzielnica_Enc', 'Kolor_Enc']]\n",
     "\n",
     "# Trenujemy Las Losowy\n",
     "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf.fit(X, y)\n",
     "\n",
-    "# Pobieramy ważność cech\n",
+    "# Pobieramy wa\u017cno\u015b\u0107 cech\n",
     "importances = rf.feature_importances_\n",
     "cechy = X.columns\n",
     "\n",
     "# Wizualizacja\n",
     "plt.figure(figsize=(10, 5))\n",
-    "# Sortujemy dla lepszego wyglądu\n",
+    "# Sortujemy dla lepszego wygl\u0105du\n",
     "indices = np.argsort(importances)\n",
     "plt.barh(range(len(indices)), importances[indices], color='purple', align='center')\n",
     "plt.yticks(range(len(indices)), [cechy[i] for i in indices])\n",
-    "plt.xlabel('Ważność cechy (0 - 1)')\n",
+    "plt.xlabel('Wa\u017cno\u015b\u0107 cechy (0 - 1)')\n",
     "plt.title('Feature Importance: Co decyduje o typie budynku?')\n",
     "plt.show()"
    ]
@@ -398,15 +405,15 @@
    "id": "add6c97f",
    "metadata": {},
    "source": [
-    "## 🧠 Interpretacja wyników\n",
+    "## \ud83e\udde0 Interpretacja wynik\u00f3w\n",
     "\n",
-    "1.  **Dzielnica_Enc:** Powinna być bardzo ważna (długi pasek). Tak zaprojektowaliśmy dane.\n",
-    "2.  **Metraż / Cena:** Mogą mieć pewne znaczenie (domy są zazwyczaj większe i droższe niż mieszkania), model to wyłapał!\n",
-    "3.  **Kolor_Enc:** Powinien być na samym dole (krótki pasek). Model \"zorientował się\", że kolor ścian nie ma znaczenia przy zgadywaniu typu budynku.\n",
+    "1.  **Dzielnica_Enc:** Powinna by\u0107 bardzo wa\u017cna (d\u0142ugi pasek). Tak zaprojektowali\u015bmy dane.\n",
+    "2.  **Metra\u017c / Cena:** Mog\u0105 mie\u0107 pewne znaczenie (domy s\u0105 zazwyczaj wi\u0119ksze i dro\u017csze ni\u017c mieszkania), model to wy\u0142apa\u0142!\n",
+    "3.  **Kolor_Enc:** Powinien by\u0107 na samym dole (kr\u00f3tki pasek). Model \"zorientowa\u0142 si\u0119\", \u017ce kolor \u015bcian nie ma znaczenia przy zgadywaniu typu budynku.\n",
     "\n",
     "### Zadanie Domowe\n",
-    "Dodaj do DataFrame nową kolumnę `Losowa_Liczba = np.random.rand(n)`.\n",
-    "Uruchom ponownie **Pearsona** (dla Ceny) i **Feature Importance**. Sprawdź, czy metody poprawnie zignorują tę kolumnę."
+    "Dodaj do DataFrame now\u0105 kolumn\u0119 `Losowa_Liczba = np.random.rand(n)`.\n",
+    "Uruchom ponownie **Pearsona** (dla Ceny) i **Feature Importance**. Sprawd\u017a, czy metody poprawnie zignoruj\u0105 t\u0119 kolumn\u0119."
    ]
   }
  ],
