--- a/02_Advanced_Feature_Selection.ipynb
+++ b/02_Advanced_Feature_Selection.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/02_Advanced_Feature_Selection.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e852771e",
    "metadata": {},
    "source": [
-    "# 🚀 Advanced Feature Selection: Dlaczego korelacja kłamie? (SHAP & Mutual Info)\n",
+    "# \ud83d\ude80 Advanced Feature Selection: Dlaczego korelacja k\u0142amie? (SHAP & Mutual Info)\n",
     "\n",
-    "W poprzednim notatniku o korelacjach nauczyliśmy się używać Pearsona. Ma on jednak gigantyczną wadę: **Widzi tylko linie proste.**\n",
+    "W poprzednim notatniku o korelacjach nauczyli\u015bmy si\u0119 u\u017cywa\u0107 Pearsona. Ma on jednak gigantyczn\u0105 wad\u0119: **Widzi tylko linie proste.**\n",
     "\n",
-    "Jeśli Twoja dana zależy od innej w sposób nieliniowy (np. jak parabola `U` – \"za mało źle, za dużo źle, średnio najlepiej\"), to **Korelacja Pearsona pokaże 0**. Powie Ci: \"Te dane nie mają związku\", co jest kłamstwem!\n",
+    "Je\u015bli Twoja dana zale\u017cy od innej w spos\u00f3b nieliniowy (np. jak parabola `U` \u2013 \"za ma\u0142o \u017ale, za du\u017co \u017ale, \u015brednio najlepiej\"), to **Korelacja Pearsona poka\u017ce 0**. Powie Ci: \"Te dane nie maj\u0105 zwi\u0105zku\", co jest k\u0142amstwem!\n",
     "\n",
-    "Dziś poznamy narzędzia, których używa się w prawdziwych firmach AI, żeby nie dać się oszukać:\n",
-    "1.  **Mutual Information (Informacja Wzajemna):** Wykrywa KAŻDĄ zależność (nawet fale, kółka, parabole).\n",
-    "2.  **Permutation Importance:** Najuczciwszy test ważności (miesza dane i sprawdza, czy model zgłupiał).\n",
-    "3.  **SHAP:** Złoty standard wyjaśnialności AI (dlaczego model podjął taką decyzję?)."
+    "Dzi\u015b poznamy narz\u0119dzia, kt\u00f3rych u\u017cywa si\u0119 w prawdziwych firmach AI, \u017ceby nie da\u0107 si\u0119 oszuka\u0107:\n",
+    "1.  **Mutual Information (Informacja Wzajemna):** Wykrywa KA\u017bD\u0104 zale\u017cno\u015b\u0107 (nawet fale, k\u00f3\u0142ka, parabole).\n",
+    "2.  **Permutation Importance:** Najuczciwszy test wa\u017cno\u015bci (miesza dane i sprawdza, czy model zg\u0142upia\u0142).\n",
+    "3.  **SHAP:** Z\u0142oty standard wyja\u015bnialno\u015bci AI (dlaczego model podj\u0105\u0142 tak\u0105 decyzj\u0119?)."
    ]
   },
   {
@@ -32,15 +39,15 @@
     }
    ],
    "source": [
-    "# Instalujemy bibliotekę SHAP (często nie ma jej domyślnie w Colab)\n",
-    "# !pip install shap --quiet  <-- Odkomentuj jeśli działasz w Colab\n",
+    "# Instalujemy bibliotek\u0119 SHAP (cz\u0119sto nie ma jej domy\u015blnie w Colab)\n",
+    "# !pip install shap --quiet  <-- Odkomentuj je\u015bli dzia\u0142asz w Colab\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Narzędzia\n",
+    "# Narz\u0119dzia\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.feature_selection import mutual_info_regression\n",
     "from sklearn.inspection import permutation_importance\n",
@@ -55,16 +62,16 @@
    "id": "685baa67",
    "metadata": {},
    "source": [
-    "## Krok 1: Pułapka na Pearsona (Generujemy Dane)\n",
+    "## Krok 1: Pu\u0142apka na Pearsona (Generujemy Dane)\n",
     "\n",
-    "Stworzymy dane, które oszukają klasyczną statystykę. Wyobraź sobie **wydajność silnika**:\n",
-    "1.  **Cecha Liniowa:** Obroty silnika (im szybciej, tym głośniej). Prosta sprawa.\n",
-    "2.  **Cecha Paraboliczna (Pułapka):** Temperatura oleju.\n",
-    "    *   Zimny olej = Źle.\n",
-    "    *   Gorący olej = Źle.\n",
+    "Stworzymy dane, kt\u00f3re oszukaj\u0105 klasyczn\u0105 statystyk\u0119. Wyobra\u017a sobie **wydajno\u015b\u0107 silnika**:\n",
+    "1.  **Cecha Liniowa:** Obroty silnika (im szybciej, tym g\u0142o\u015bniej). Prosta sprawa.\n",
+    "2.  **Cecha Paraboliczna (Pu\u0142apka):** Temperatura oleju.\n",
+    "    *   Zimny olej = \u0179le.\n",
+    "    *   Gor\u0105cy olej = \u0179le.\n",
     "    *   Letni olej = Idealnie.\n",
-    "    *   To tworzy wykres w kształcie litery `U` (lub odwróconego U).\n",
-    "3.  **Szum:** Kolor karoserii (losowe liczby, bez wpływu na silnik)."
+    "    *   To tworzy wykres w kszta\u0142cie litery `U` (lub odwr\u00f3conego U).\n",
+    "3.  **Szum:** Kolor karoserii (losowe liczby, bez wp\u0142ywu na silnik)."
    ]
   },
   {
@@ -79,8 +86,8 @@
      "text": [
       "Korelacja Pearsona dla Paraboli: -0.0166\n",
       "---\n",
-      "Widzisz? Wynik bliski ZERA! Statystyka twierdzi, że Parabola nie ma znaczenia.\n",
-      "A teraz spójrz na wykres:\n"
+      "Widzisz? Wynik bliski ZERA! Statystyka twierdzi, \u017ce Parabola nie ma znaczenia.\n",
+      "A teraz sp\u00f3jrz na wykres:\n"
      ]
     },
     {
@@ -98,36 +105,36 @@
     "np.random.seed(42)\n",
     "n = 500\n",
     "\n",
-    "# 1. Cecha Liniowa (Im więcej X, tym więcej Y)\n",
+    "# 1. Cecha Liniowa (Im wi\u0119cej X, tym wi\u0119cej Y)\n",
     "x_lin = np.random.rand(n)\n",
     "\n",
-    "# 2. Cecha Paraboliczna (Wartości od -1 do 1)\n",
-    "# To będzie nasza pułapka. Zależność to X do kwadratu.\n",
+    "# 2. Cecha Paraboliczna (Warto\u015bci od -1 do 1)\n",
+    "# To b\u0119dzie nasza pu\u0142apka. Zale\u017cno\u015b\u0107 to X do kwadratu.\n",
     "x_parabola = np.random.uniform(-1, 1, n)\n",
     "\n",
-    "# 3. Szum (Losowe śmieci)\n",
+    "# 3. Szum (Losowe \u015bmieci)\n",
     "x_szum = np.random.rand(n)\n",
     "\n",
-    "# TWORZYMY TARGET (Y - np. Wydajność)\n",
-    "# Wzór: 2*Liniowa + 5*(Parabola^2) + Szum\n",
+    "# TWORZYMY TARGET (Y - np. Wydajno\u015b\u0107)\n",
+    "# Wz\u00f3r: 2*Liniowa + 5*(Parabola^2) + Szum\n",
     "y = 2 * x_lin + 5 * (x_parabola ** 2) + np.random.normal(0, 0.1, n)\n",
     "\n",
     "df = pd.DataFrame({\n",
     "    'Liniowa': x_lin,\n",
-    "    'Parabola': x_parabola, # Tu Pearson zgłupieje\n",
+    "    'Parabola': x_parabola, # Tu Pearson zg\u0142upieje\n",
     "    'Szum': x_szum,\n",
     "    'Target': y\n",
     "})\n",
     "\n",
-    "# SPRAWDŹMY KORELACJĘ PEARSONA\n",
+    "# SPRAWD\u0179MY KORELACJ\u0118 PEARSONA\n",
     "pearson = df.corr()['Target']['Parabola']\n",
     "print(f\"Korelacja Pearsona dla Paraboli: {pearson:.4f}\")\n",
     "print(\"---\")\n",
-    "print(\"Widzisz? Wynik bliski ZERA! Statystyka twierdzi, że Parabola nie ma znaczenia.\")\n",
-    "print(\"A teraz spójrz na wykres:\")\n",
+    "print(\"Widzisz? Wynik bliski ZERA! Statystyka twierdzi, \u017ce Parabola nie ma znaczenia.\")\n",
+    "print(\"A teraz sp\u00f3jrz na wykres:\")\n",
     "\n",
     "sns.scatterplot(data=df, x='Parabola', y='Target', alpha=0.6)\n",
-    "plt.title(\"Wykres: Parabola vs Target (Wyraźna zależność 'U')\")\n",
+    "plt.title(\"Wykres: Parabola vs Target (Wyra\u017ana zale\u017cno\u015b\u0107 'U')\")\n",
     "plt.show()"
    ]
   },
@@ -136,13 +143,13 @@
    "id": "81864244",
    "metadata": {},
    "source": [
-    "## Metoda 1: Mutual Information (Wykrywacz Wszelkiego Sygnału)\n",
+    "## Metoda 1: Mutual Information (Wykrywacz Wszelkiego Sygna\u0142u)\n",
     "\n",
-    "Skoro Pearson jest ślepy na łuki, użyjmy **Mutual Information**.\n",
+    "Skoro Pearson jest \u015blepy na \u0142uki, u\u017cyjmy **Mutual Information**.\n",
     "Ta metoda nie pyta *\"Czy to jest prosta linia?\"*.\n",
-    "Ona pyta: *\"O ile mniejsza jest moja niewiedza na temat Y, jeśli znam X?\"*.\n",
+    "Ona pyta: *\"O ile mniejsza jest moja niewiedza na temat Y, je\u015bli znam X?\"*.\n",
     "\n",
-    "Działa na każdy kształt. Wynik 0 = brak zależności. Im więcej = tym lepiej."
+    "Dzia\u0142a na ka\u017cdy kszta\u0142t. Wynik 0 = brak zale\u017cno\u015bci. Im wi\u0119cej = tym lepiej."
    ]
   },
   {
@@ -176,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wniosek: MI poprawnie wykryło, że Parabola jest najważniejsza (nawet ważniejsza niż Liniowa!).\n"
+      "Wniosek: MI poprawnie wykry\u0142o, \u017ce Parabola jest najwa\u017cniejsza (nawet wa\u017cniejsza ni\u017c Liniowa!).\n"
      ]
     }
    ],
@@ -194,10 +201,10 @@
     "\n",
     "# Wykres\n",
     "mi_series.plot(kind='barh', color='teal')\n",
-    "plt.title(\"Mutual Information: Prawda wyszła na jaw\")\n",
+    "plt.title(\"Mutual Information: Prawda wysz\u0142a na jaw\")\n",
     "plt.show()\n",
     "\n",
-    "print(\"Wniosek: MI poprawnie wykryło, że Parabola jest najważniejsza (nawet ważniejsza niż Liniowa!).\")"
+    "print(\"Wniosek: MI poprawnie wykry\u0142o, \u017ce Parabola jest najwa\u017cniejsza (nawet wa\u017cniejsza ni\u017c Liniowa!).\")"
    ]
   },
   {
@@ -207,16 +214,16 @@
    "source": [
     "## Metoda 2: Permutation Importance (Test przez Mieszanie)\n",
     "\n",
-    "To technika, którą możesz zastosować do **każdego** modelu (Drzewa, Sieci Neuronowe).\n",
+    "To technika, kt\u00f3r\u0105 mo\u017cesz zastosowa\u0107 do **ka\u017cdego** modelu (Drzewa, Sieci Neuronowe).\n",
     "Jest genialna w swojej prostocie.\n",
     "\n",
     "**Algorytm:**\n",
-    "1.  Wytrenuj model i zmierz jego błąd (np. 95% skuteczności).\n",
-    "2.  Weź kolumnę \"Parabola\" i **wymieszaj jej wartości losowo** (zrób jajecznicę). Resztę zostaw bez zmian.\n",
-    "3.  Każ modelowi przewidywać na tych zepsutych danych.\n",
-    "4.  Sprawdź błąd.\n",
-    "    *   Jeśli błąd **wzrósł drastycznie** -> Znaczy, że ta kolumna była kluczowa.\n",
-    "    *   Jeśli błąd **się nie zmienił** -> Znaczy, że model i tak nie patrzył na tę kolumnę (była śmieciem)."
+    "1.  Wytrenuj model i zmierz jego b\u0142\u0105d (np. 95% skuteczno\u015bci).\n",
+    "2.  We\u017a kolumn\u0119 \"Parabola\" i **wymieszaj jej warto\u015bci losowo** (zr\u00f3b jajecznic\u0119). Reszt\u0119 zostaw bez zmian.\n",
+    "3.  Ka\u017c modelowi przewidywa\u0107 na tych zepsutych danych.\n",
+    "4.  Sprawd\u017a b\u0142\u0105d.\n",
+    "    *   Je\u015bli b\u0142\u0105d **wzr\u00f3s\u0142 drastycznie** -> Znaczy, \u017ce ta kolumna by\u0142a kluczowa.\n",
+    "    *   Je\u015bli b\u0142\u0105d **si\u0119 nie zmieni\u0142** -> Znaczy, \u017ce model i tak nie patrzy\u0142 na t\u0119 kolumn\u0119 (by\u0142a \u015bmieciem)."
    ]
   },
   {
@@ -237,23 +244,23 @@
     }
    ],
    "source": [
-    "# 1. Musimy mieć wytrenowany model\n",
+    "# 1. Musimy mie\u0107 wytrenowany model\n",
     "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "model.fit(X, y)\n",
     "\n",
-    "# 2. Uruchamiamy test permutacji (n_repeats=10 oznacza, że mieszamy 10 razy dla pewności)\n",
+    "# 2. Uruchamiamy test permutacji (n_repeats=10 oznacza, \u017ce mieszamy 10 razy dla pewno\u015bci)\n",
     "perm = permutation_importance(model, X, y, n_repeats=10, random_state=42)\n",
     "\n",
-    "# 3. Wizualizacja wyników\n",
+    "# 3. Wizualizacja wynik\u00f3w\n",
     "cols = X.columns\n",
     "importances = perm.importances_mean\n",
     "indices = np.argsort(importances)\n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.title(\"Permutation Importance (O ile popsuł się model po wymieszaniu cechy?)\")\n",
+    "plt.title(\"Permutation Importance (O ile popsu\u0142 si\u0119 model po wymieszaniu cechy?)\")\n",
     "plt.barh(range(len(indices)), importances[indices], color='purple', align='center')\n",
     "plt.yticks(range(len(indices)), [cols[i] for i in indices])\n",
-    "plt.xlabel(\"Spadek wydajności modelu\")\n",
+    "plt.xlabel(\"Spadek wydajno\u015bci modelu\")\n",
     "plt.show()"
    ]
   },
@@ -262,16 +269,16 @@
    "id": "3d83faa0",
    "metadata": {},
    "source": [
-    "## Metoda 3: SHAP (Wyjaśnialność AI)\n",
+    "## Metoda 3: SHAP (Wyja\u015bnialno\u015b\u0107 AI)\n",
     "\n",
     "Na koniec **SHAP**. To obecnie standard w bankach i medycynie.\n",
-    "Permutation Importance mówi nam, że cecha jest ważna \"ogólnie\".\n",
-    "SHAP mówi nam, jak cecha wpłynęła na **konkretny przypadek**.\n",
+    "Permutation Importance m\u00f3wi nam, \u017ce cecha jest wa\u017cna \"og\u00f3lnie\".\n",
+    "SHAP m\u00f3wi nam, jak cecha wp\u0142yn\u0119\u0142a na **konkretny przypadek**.\n",
     "\n",
-    "Wykres **Beeswarm (Rój pszczół)** pokazuje wszystko naraz:\n",
-    "*   Każda kropka to jeden wiersz danych.\n",
-    "*   **Kolor:** Czerwony = Wysoka wartość cechy, Niebieski = Niska.\n",
-    "*   **Położenie (lewo/prawo):** Czy ta cecha zwiększyła (prawo) czy zmniejszyła (lewo) wynik modelu?"
+    "Wykres **Beeswarm (R\u00f3j pszcz\u00f3\u0142)** pokazuje wszystko naraz:\n",
+    "*   Ka\u017cda kropka to jeden wiersz danych.\n",
+    "*   **Kolor:** Czerwony = Wysoka warto\u015b\u0107 cechy, Niebieski = Niska.\n",
+    "*   **Po\u0142o\u017cenie (lewo/prawo):** Czy ta cecha zwi\u0119kszy\u0142a (prawo) czy zmniejszy\u0142a (lewo) wynik modelu?"
    ]
   },
   {
@@ -307,7 +314,7 @@
     }
    ],
    "source": [
-    "# 1. Tworzymy Explainer (Tłumacza dla modelu drzewiastego)\n",
+    "# 1. Tworzymy Explainer (T\u0142umacza dla modelu drzewiastego)\n",
     "explainer = shap.TreeExplainer(model)\n",
     "shap_values = explainer.shap_values(X)\n",
     "\n",
@@ -321,24 +328,24 @@
    "id": "5223f36c",
    "metadata": {},
    "source": [
-    "## 🧠 Jak czytać ten wykres SHAP?\n",
+    "## \ud83e\udde0 Jak czyta\u0107 ten wykres SHAP?\n",
     "\n",
     "1.  **Liniowa:**\n",
-    "    *   Widzisz, że czerwone kropki (wysokie wartości) są po prawej stronie (zwiększają wynik).\n",
-    "    *   Niebieskie kropki (niskie wartości) są po lewej (zmniejszają wynik).\n",
-    "    *   To logiczne: $y = 2x$. Im więcej, tym więcej.\n",
+    "    *   Widzisz, \u017ce czerwone kropki (wysokie warto\u015bci) s\u0105 po prawej stronie (zwi\u0119kszaj\u0105 wynik).\n",
+    "    *   Niebieskie kropki (niskie warto\u015bci) s\u0105 po lewej (zmniejszaj\u0105 wynik).\n",
+    "    *   To logiczne: $y = 2x$. Im wi\u0119cej, tym wi\u0119cej.\n",
     "\n",
     "2.  **Parabola:**\n",
-    "    *   Tutaj kolory są wymieszane!\n",
-    "    *   Zarówno bardzo wysokie (czerwone), jak i bardzo niskie (niebieskie) wartości mogą podbijać wynik (bo $x^2$ zamienia minusy na plusy).\n",
-    "    *   SHAP idealnie pokazuje tę nieliniowość.\n",
+    "    *   Tutaj kolory s\u0105 wymieszane!\n",
+    "    *   Zar\u00f3wno bardzo wysokie (czerwone), jak i bardzo niskie (niebieskie) warto\u015bci mog\u0105 podbija\u0107 wynik (bo $x^2$ zamienia minusy na plusy).\n",
+    "    *   SHAP idealnie pokazuje t\u0119 nieliniowo\u015b\u0107.\n",
     "\n",
     "3.  **Szum:**\n",
-    "    *   Kropki są skupione na środku (wartość 0 na osi X).\n",
-    "    *   To znaczy, że ta cecha nie popycha modelu ani w górę, ani w dół. Jest ignorowana.\n",
+    "    *   Kropki s\u0105 skupione na \u015brodku (warto\u015b\u0107 0 na osi X).\n",
+    "    *   To znaczy, \u017ce ta cecha nie popycha modelu ani w g\u00f3r\u0119, ani w d\u00f3\u0142. Jest ignorowana.\n",
     "\n",
     "**Wniosek:**\n",
-    "Dzięki SHAP, Mutual Info i Permutation Importance, nie dasz się oszukać fałszywym korelacjom. Twój model będzie widział to, czego \"zwykła statystyka\" nie widzi."
+    "Dzi\u0119ki SHAP, Mutual Info i Permutation Importance, nie dasz si\u0119 oszuka\u0107 fa\u0142szywym korelacjom. Tw\u00f3j model b\u0119dzie widzia\u0142 to, czego \"zwyk\u0142a statystyka\" nie widzi."
    ]
   }
  ],
