--- a/05_Top_p_Top_k.ipynb
+++ b/05_Top_p_Top_k.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/05_Top_p_Top_k.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7a412f9",
    "metadata": {},
    "source": [
-    "# 🧠 Top-k vs Top-p: Jak myśli AI?\n",
+    "# \ud83e\udde0 Top-k vs Top-p: Jak my\u015bli AI?\n",
     "\n",
     "Mamy zdanie: **\"Na obiad zjem...\"**\n",
-    "Model wyliczył prawdopodobieństwa dla następnego słowa. Zobaczmy, jak filtry **Top-k** i **Top-p** zmieniają pulę dostępnych opcji.\n",
+    "Model wyliczy\u0142 prawdopodobie\u0144stwa dla nast\u0119pnego s\u0142owa. Zobaczmy, jak filtry **Top-k** i **Top-p** zmieniaj\u0105 pul\u0119 dost\u0119pnych opcji.\n",
     "\n",
-    "*   **Top-k:** Bierze sztywną liczbę kandydatów.\n",
-    "*   **Top-p:** Bierze kandydatów do momentu osiągnięcia progu pewności (skumulowane prawdopodobieństwo)."
+    "*   **Top-k:** Bierze sztywn\u0105 liczb\u0119 kandydat\u00f3w.\n",
+    "*   **Top-p:** Bierze kandydat\u00f3w do momentu osi\u0105gni\u0119cia progu pewno\u015bci (skumulowane prawdopodobie\u0144stwo)."
    ]
   },
   {
@@ -48,19 +55,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Słowo</th>\n",
-       "      <th>Prawdopodobieństwo</th>\n",
+       "      <th>S\u0142owo</th>\n",
+       "      <th>Prawdopodobie\u0144stwo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>pizzę</td>\n",
+       "      <td>pizz\u0119</td>\n",
        "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>zupę</td>\n",
+       "      <td>zup\u0119</td>\n",
        "      <td>0.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -70,17 +77,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>kanapkę</td>\n",
+       "      <td>kanapk\u0119</td>\n",
        "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>gwoździe</td>\n",
+       "      <td>gwo\u017adzie</td>\n",
        "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>chmurę</td>\n",
+       "      <td>chmur\u0119</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -88,13 +95,13 @@
        "</div>"
       ],
       "text/plain": [
-       "        Słowo  Prawdopodobieństwo\n",
-       "0       pizzę                0.50\n",
-       "1        zupę                0.20\n",
+       "        S\u0142owo  Prawdopodobie\u0144stwo\n",
+       "0       pizz\u0119                0.50\n",
+       "1        zup\u0119                0.20\n",
        "2  schabowego                0.15\n",
-       "3     kanapkę                0.09\n",
-       "4    gwoździe                0.05\n",
-       "5      chmurę                0.01"
+       "3     kanapk\u0119                0.09\n",
+       "4    gwo\u017adzie                0.05\n",
+       "5      chmur\u0119                0.01"
       ]
      },
      "metadata": {},
@@ -106,22 +113,22 @@
      "text": [
       "\n",
       "\n",
-      "--- ✂️ FILTR TOP-K (k=3) ---\n",
+      "--- \u2702\ufe0f FILTR TOP-K (k=3) ---\n",
       "Zasada: Bierzemy tylko 3 najlepszych.\n",
-      "Dostępne słowa: ['pizzę', 'zupę', 'schabowego']\n",
-      "Reszta została odcięta (nawet jeśli 'kanapka' była sensowna).\n",
+      "Dost\u0119pne s\u0142owa: ['pizz\u0119', 'zup\u0119', 'schabowego']\n",
+      "Reszta zosta\u0142a odci\u0119ta (nawet je\u015bli 'kanapka' by\u0142a sensowna).\n",
       "\n",
       "\n",
-      "--- 🧠 FILTR TOP-P (p=0.9) ---\n",
-      "Zasada: Zbieraj słowa, aż uzbierasz 90.0% pewności.\n",
-      "        Słowo  Prawdopodobieństwo  Suma_Skumulowana\n",
-      "0       pizzę                0.50              0.50\n",
-      "1        zupę                0.20              0.70\n",
+      "--- \ud83e\udde0 FILTR TOP-P (p=0.9) ---\n",
+      "Zasada: Zbieraj s\u0142owa, a\u017c uzbierasz 90.0% pewno\u015bci.\n",
+      "        S\u0142owo  Prawdopodobie\u0144stwo  Suma_Skumulowana\n",
+      "0       pizz\u0119                0.50              0.50\n",
+      "1        zup\u0119                0.20              0.70\n",
       "2  schabowego                0.15              0.85\n",
-      "3     kanapkę                0.09              0.94\n",
+      "3     kanapk\u0119                0.09              0.94\n",
       "\n",
-      "Dostępne słowa: ['pizzę', 'zupę', 'schabowego', 'kanapkę']\n",
-      "Zauważ: Top-p wziął 'kanapkę' (bo mieściła się w 90%), ale odrzucił 'gwoździe'.\n"
+      "Dost\u0119pne s\u0142owa: ['pizz\u0119', 'zup\u0119', 'schabowego', 'kanapk\u0119']\n",
+      "Zauwa\u017c: Top-p wzi\u0105\u0142 'kanapk\u0119' (bo mie\u015bci\u0142a si\u0119 w 90%), ale odrzuci\u0142 'gwo\u017adzie'.\n"
      ]
     }
    ],
@@ -129,20 +136,20 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. SYMULACJA MÓZGU AI\n",
-    "# Model przewiduje, co będzie po: \"Na obiad zjem...\"\n",
-    "# Mamy słownik: {Słowo: Prawdopodobieństwo}\n",
+    "# 1. SYMULACJA M\u00d3ZGU AI\n",
+    "# Model przewiduje, co b\u0119dzie po: \"Na obiad zjem...\"\n",
+    "# Mamy s\u0142ownik: {S\u0142owo: Prawdopodobie\u0144stwo}\n",
     "kandydaci = {\n",
-    "    'pizzę': 0.50,      # Bardzo prawdopodobne\n",
-    "    'zupę': 0.20,\n",
+    "    'pizz\u0119': 0.50,      # Bardzo prawdopodobne\n",
+    "    'zup\u0119': 0.20,\n",
     "    'schabowego': 0.15,\n",
-    "    'kanapkę': 0.09,\n",
-    "    'gwoździe': 0.05,   # Mało sensowne\n",
-    "    'chmurę': 0.01      # Totalna bzdura\n",
+    "    'kanapk\u0119': 0.09,\n",
+    "    'gwo\u017adzie': 0.05,   # Ma\u0142o sensowne\n",
+    "    'chmur\u0119': 0.01      # Totalna bzdura\n",
     "}\n",
     "\n",
-    "# Zamieniamy na tabelę\n",
-    "df = pd.DataFrame(list(kandydaci.items()), columns=['Słowo', 'Prawdopodobieństwo'])\n",
+    "# Zamieniamy na tabel\u0119\n",
+    "df = pd.DataFrame(list(kandydaci.items()), columns=['S\u0142owo', 'Prawdopodobie\u0144stwo'])\n",
     "print(\"--- WSZYSTKIE OPCJE MODELU (RAW) ---\")\n",
     "display(df)\n",
     "print(\"\\n\")\n",
@@ -150,29 +157,29 @@
     "\n",
     "# --- METODA 1: TOP-K (Sztywna granica) ---\n",
     "K = 3\n",
-    "print(f\"--- ✂️ FILTR TOP-K (k={K}) ---\")\n",
+    "print(f\"--- \u2702\ufe0f FILTR TOP-K (k={K}) ---\")\n",
     "print(f\"Zasada: Bierzemy tylko {K} najlepszych.\")\n",
     "\n",
     "df_top_k = df.head(K).copy()\n",
-    "print(f\"Dostępne słowa: {df_top_k['Słowo'].tolist()}\")\n",
-    "print(\"Reszta została odcięta (nawet jeśli 'kanapka' była sensowna).\")\n",
+    "print(f\"Dost\u0119pne s\u0142owa: {df_top_k['S\u0142owo'].tolist()}\")\n",
+    "print(\"Reszta zosta\u0142a odci\u0119ta (nawet je\u015bli 'kanapka' by\u0142a sensowna).\")\n",
     "print(\"\\n\")\n",
     "\n",
     "\n",
     "# --- METODA 2: TOP-P (Elastyczna granica) ---\n",
     "P = 0.90  # 90%\n",
-    "print(f\"--- 🧠 FILTR TOP-P (p={P}) ---\")\n",
-    "print(f\"Zasada: Zbieraj słowa, aż uzbierasz {P*100}% pewności.\")\n",
+    "print(f\"--- \ud83e\udde0 FILTR TOP-P (p={P}) ---\")\n",
+    "print(f\"Zasada: Zbieraj s\u0142owa, a\u017c uzbierasz {P*100}% pewno\u015bci.\")\n",
     "\n",
-    "df['Suma_Skumulowana'] = df['Prawdopodobieństwo'].cumsum()\n",
+    "df['Suma_Skumulowana'] = df['Prawdopodobie\u0144stwo'].cumsum()\n",
     "\n",
-    "# Wybieramy słowa, które łapią się w progu 0.90\n",
-    "# (Trick: bierzemy te, gdzie suma poprzednich była mniejsza niż P)\n",
-    "df_top_p = df[df['Suma_Skumulowana'] - df['Prawdopodobieństwo'] < P].copy()\n",
+    "# Wybieramy s\u0142owa, kt\u00f3re \u0142api\u0105 si\u0119 w progu 0.90\n",
+    "# (Trick: bierzemy te, gdzie suma poprzednich by\u0142a mniejsza ni\u017c P)\n",
+    "df_top_p = df[df['Suma_Skumulowana'] - df['Prawdopodobie\u0144stwo'] < P].copy()\n",
     "\n",
-    "print(df_top_p[['Słowo', 'Prawdopodobieństwo', 'Suma_Skumulowana']])\n",
-    "print(f\"\\nDostępne słowa: {df_top_p['Słowo'].tolist()}\")\n",
-    "print(f\"Zauważ: Top-p wziął 'kanapkę' (bo mieściła się w 90%), ale odrzucił 'gwoździe'.\")"
+    "print(df_top_p[['S\u0142owo', 'Prawdopodobie\u0144stwo', 'Suma_Skumulowana']])\n",
+    "print(f\"\\nDost\u0119pne s\u0142owa: {df_top_p['S\u0142owo'].tolist()}\")\n",
+    "print(f\"Zauwa\u017c: Top-p wzi\u0105\u0142 'kanapk\u0119' (bo mie\u015bci\u0142a si\u0119 w 90%), ale odrzuci\u0142 'gwo\u017adzie'.\")"
    ]
   }
  ],
