--- a/06_Naive_Bayes_Spam.ipynb
+++ b/06_Naive_Bayes_Spam.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/06_Naive_Bayes_Spam.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcc2bd92",
    "metadata": {},
    "source": [
-    "# 📧 Filtr Antyspamowy: Naiwny Klasyfikator Bayesa\n",
+    "# \ud83d\udce7 Filtr Antyspamowy: Naiwny Klasyfikator Bayesa\n",
     "\n",
-    "Naiwny Bayes to algorytm, który uwielbia pracować z tekstem. Jest prosty, szybki i zaskakująco skuteczny.\n",
+    "Naiwny Bayes to algorytm, kt\u00f3ry uwielbia pracowa\u0107 z tekstem. Jest prosty, szybki i zaskakuj\u0105co skuteczny.\n",
     "\n",
     "**Dlaczego \"Naiwny\"?**\n",
-    "Bo patrzy na każde słowo w SMS-ie oddzielnie. Nie rozumie kontekstu (nie wie, że \"Biały\" i \"Dom\" to co innego niż \"Dom\" i \"Biały\"). Traktuje słowa jak składniki wrzucone do worka.\n",
+    "Bo patrzy na ka\u017cde s\u0142owo w SMS-ie oddzielnie. Nie rozumie kontekstu (nie wie, \u017ce \"Bia\u0142y\" i \"Dom\" to co innego ni\u017c \"Dom\" i \"Bia\u0142y\"). Traktuje s\u0142owa jak sk\u0142adniki wrzucone do worka.\n",
     "\n",
     "**Cel:**\n",
-    "Stworzymy model, który nauczy się rozróżniać **SPAM** (śmieci) od **HAM** (normalnych wiadomości)."
+    "Stworzymy model, kt\u00f3ry nauczy si\u0119 rozr\u00f3\u017cnia\u0107 **SPAM** (\u015bmieci) od **HAM** (normalnych wiadomo\u015bci)."
    ]
   },
   {
@@ -57,7 +64,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Wygrałeś darmowe pieniądze kliknij</td>\n",
+       "      <td>Wygra\u0142e\u015b darmowe pieni\u0105dze kliknij</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -67,12 +74,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Odbierz nagrodę darmowe leki</td>\n",
+       "      <td>Odbierz nagrod\u0119 darmowe leki</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Cześć idziemy jutro na kawę</td>\n",
+       "      <td>Cze\u015b\u0107 idziemy jutro na kaw\u0119</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -82,7 +89,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Mama dzwoniła pytać o obiad</td>\n",
+       "      <td>Mama dzwoni\u0142a pyta\u0107 o obiad</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -91,12 +98,12 @@
       ],
       "text/plain": [
        "                                tekst  kategoria\n",
-       "0  Wygrałeś darmowe pieniądze kliknij          1\n",
+       "0  Wygra\u0142e\u015b darmowe pieni\u0105dze kliknij          1\n",
        "1     Kup teraz super oferta promocja          1\n",
-       "2        Odbierz nagrodę darmowe leki          1\n",
-       "3         Cześć idziemy jutro na kawę          0\n",
+       "2        Odbierz nagrod\u0119 darmowe leki          1\n",
+       "3         Cze\u015b\u0107 idziemy jutro na kaw\u0119          0\n",
        "4        Spotkanie w biurze o 10 rano          0\n",
-       "5         Mama dzwoniła pytać o obiad          0"
+       "5         Mama dzwoni\u0142a pyta\u0107 o obiad          0"
       ]
      },
      "metadata": {},
@@ -105,19 +112,19 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import CountVectorizer # Do zamiany słów na liczby\n",
+    "from sklearn.feature_extraction.text import CountVectorizer # Do zamiany s\u0142\u00f3w na liczby\n",
     "from sklearn.naive_bayes import MultinomialNB # Nasz Naiwny Model\n",
     "\n",
-    "# 1. TWORZYMY DANE TRENINGOWE (Mała baza SMS-ów)\n",
+    "# 1. TWORZYMY DANE TRENINGOWE (Ma\u0142a baza SMS-\u00f3w)\n",
     "# 1 = SPAM, 0 = HAM (Normalne)\n",
     "dane = {\n",
     "    'tekst': [\n",
-    "        \"Wygrałeś darmowe pieniądze kliknij\",  # Spam\n",
+    "        \"Wygra\u0142e\u015b darmowe pieni\u0105dze kliknij\",  # Spam\n",
     "        \"Kup teraz super oferta promocja\",     # Spam\n",
-    "        \"Odbierz nagrodę darmowe leki\",        # Spam\n",
-    "        \"Cześć idziemy jutro na kawę\",         # Normalne\n",
+    "        \"Odbierz nagrod\u0119 darmowe leki\",        # Spam\n",
+    "        \"Cze\u015b\u0107 idziemy jutro na kaw\u0119\",         # Normalne\n",
     "        \"Spotkanie w biurze o 10 rano\",        # Normalne\n",
-    "        \"Mama dzwoniła pytać o obiad\"          # Normalne\n",
+    "        \"Mama dzwoni\u0142a pyta\u0107 o obiad\"          # Normalne\n",
     "    ],\n",
     "    'kategoria': [1, 1, 1, 0, 0, 0]\n",
     "}\n",
@@ -133,14 +140,14 @@
    "id": "f844434f",
    "metadata": {},
    "source": [
-    "## Krok 2: Zamiana słów na liczby (Bag of Words)\n",
+    "## Krok 2: Zamiana s\u0142\u00f3w na liczby (Bag of Words)\n",
     "\n",
-    "Model matematyczny nie umie czytać. Nie rozumie słowa \"Wygrałeś\".\n",
-    "Musimy zamienić tekst na macierz liczb. Użyjemy techniki **Bag of Words (Worek Słów)**.\n",
+    "Model matematyczny nie umie czyta\u0107. Nie rozumie s\u0142owa \"Wygra\u0142e\u015b\".\n",
+    "Musimy zamieni\u0107 tekst na macierz liczb. U\u017cyjemy techniki **Bag of Words (Worek S\u0142\u00f3w)**.\n",
     "\n",
-    "Komputer zrobi tabelę:\n",
-    "*   Kolumny to wszystkie znane mu słowa (Wygrałeś, Kawa, Mama...).\n",
-    "*   Wartości to liczba wystąpień słowa w zdaniu."
+    "Komputer zrobi tabel\u0119:\n",
+    "*   Kolumny to wszystkie znane mu s\u0142owa (Wygra\u0142e\u015b, Kawa, Mama...).\n",
+    "*   Warto\u015bci to liczba wyst\u0105pie\u0144 s\u0142owa w zdaniu."
    ]
   },
   {
@@ -179,25 +186,25 @@
        "      <th></th>\n",
        "      <th>10</th>\n",
        "      <th>biurze</th>\n",
-       "      <th>cześć</th>\n",
+       "      <th>cze\u015b\u0107</th>\n",
        "      <th>darmowe</th>\n",
-       "      <th>dzwoniła</th>\n",
+       "      <th>dzwoni\u0142a</th>\n",
        "      <th>idziemy</th>\n",
        "      <th>jutro</th>\n",
-       "      <th>kawę</th>\n",
+       "      <th>kaw\u0119</th>\n",
        "      <th>kliknij</th>\n",
        "      <th>kup</th>\n",
        "      <th>...</th>\n",
        "      <th>odbierz</th>\n",
        "      <th>oferta</th>\n",
-       "      <th>pieniądze</th>\n",
+       "      <th>pieni\u0105dze</th>\n",
        "      <th>promocja</th>\n",
-       "      <th>pytać</th>\n",
+       "      <th>pyta\u0107</th>\n",
        "      <th>rano</th>\n",
        "      <th>spotkanie</th>\n",
        "      <th>super</th>\n",
        "      <th>teraz</th>\n",
-       "      <th>wygrałeś</th>\n",
+       "      <th>wygra\u0142e\u015b</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -347,11 +354,11 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 25 columns</p>\n",
+       "<p>6 rows \u00d7 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   10  biurze  cześć  darmowe  dzwoniła  idziemy  jutro  kawę  kliknij  kup  \\\n",
+       "   10  biurze  cze\u015b\u0107  darmowe  dzwoni\u0142a  idziemy  jutro  kaw\u0119  kliknij  kup  \\\n",
        "0   0       0      0        1         0        0      0     0        1    0   \n",
        "1   0       0      0        0         0        0      0     0        0    1   \n",
        "2   0       0      0        1         0        0      0     0        0    0   \n",
@@ -359,7 +366,7 @@
        "4   1       1      0        0         0        0      0     0        0    0   \n",
        "5   0       0      0        0         1        0      0     0        0    0   \n",
        "\n",
-       "   ...  odbierz  oferta  pieniądze  promocja  pytać  rano  spotkanie  super  \\\n",
+       "   ...  odbierz  oferta  pieni\u0105dze  promocja  pyta\u0107  rano  spotkanie  super  \\\n",
        "0  ...        0       0          1         0      0     0          0      0   \n",
        "1  ...        0       1          0         1      0     0          0      1   \n",
        "2  ...        1       0          0         0      0     0          0      0   \n",
@@ -367,7 +374,7 @@
        "4  ...        0       0          0         0      0     1          1      0   \n",
        "5  ...        0       0          0         0      1     0          0      0   \n",
        "\n",
-       "   teraz  wygrałeś  \n",
+       "   teraz  wygra\u0142e\u015b  \n",
        "0      0         1  \n",
        "1      1         0  \n",
        "2      0         0  \n",
@@ -386,24 +393,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Każda kolumna to jedno słowo. 1 oznacza 'słowo występuje', 0 'brak słowa'.\n"
+      "Ka\u017cda kolumna to jedno s\u0142owo. 1 oznacza 's\u0142owo wyst\u0119puje', 0 'brak s\u0142owa'.\n"
      ]
     }
    ],
    "source": [
-    "# 1. Przygotowujemy \"Tłumacza\" (Vectorizer)\n",
+    "# 1. Przygotowujemy \"T\u0142umacza\" (Vectorizer)\n",
     "vectorizer = CountVectorizer()\n",
     "\n",
-    "# 2. Uczymy tłumacza naszych słów i zamieniamy tekst na liczby\n",
+    "# 2. Uczymy t\u0142umacza naszych s\u0142\u00f3w i zamieniamy tekst na liczby\n",
     "X_matrix = vectorizer.fit_transform(df['tekst'])\n",
     "\n",
     "# Zobaczmy, jak komputer \"widzi\" nasze zdania\n",
-    "# (Zamieniamy to z powrotem na DataFrame tylko po to, żebyś to ładnie widział)\n",
+    "# (Zamieniamy to z powrotem na DataFrame tylko po to, \u017ceby\u015b to \u0142adnie widzia\u0142)\n",
     "tabela_liczbow = pd.DataFrame(X_matrix.toarray(), columns=vectorizer.get_feature_names_out())\n",
     "\n",
     "print(\"--- TAK KOMPUTER WIDZI ZDANIA (Bag of Words) ---\")\n",
     "display(tabela_liczbow)\n",
-    "print(\"\\nKażda kolumna to jedno słowo. 1 oznacza 'słowo występuje', 0 'brak słowa'.\")"
+    "print(\"\\nKa\u017cda kolumna to jedno s\u0142owo. 1 oznacza 's\u0142owo wyst\u0119puje', 0 'brak s\u0142owa'.\")"
    ]
   },
   {
@@ -414,10 +421,10 @@
     "## Krok 3: Trening i Testowanie Naiwnego Bayesa\n",
     "\n",
     "Teraz wrzucamy te zera i jedynki do algorytmu `MultinomialNB`.\n",
-    "Model policzy statystykę:\n",
-    "*   \"Skoro słowo 'Darmowe' pojawiło się 2 razy w Spamie i 0 razy w Normalnych, to jak zobaczę je znowu, to na 99% będzie Spam\".\n",
+    "Model policzy statystyk\u0119:\n",
+    "*   \"Skoro s\u0142owo 'Darmowe' pojawi\u0142o si\u0119 2 razy w Spamie i 0 razy w Normalnych, to jak zobacz\u0119 je znowu, to na 99% b\u0119dzie Spam\".\n",
     "\n",
-    "Przetestujemy go na nowych zdaniach, których nigdy wcześniej nie widział!"
+    "Przetestujemy go na nowych zdaniach, kt\u00f3rych nigdy wcze\u015bniej nie widzia\u0142!"
    ]
   },
   {
@@ -431,17 +438,17 @@
      "output_type": "stream",
      "text": [
       "--- WYNIKI TESTU ---\n",
-      "SMS: 'Wygrałeś darmowe spotkanie'\n",
-      "Werdykt: 🚨 SPAM\n",
-      "Pewność modelu, że to SPAM: 75.00%\n",
+      "SMS: 'Wygra\u0142e\u015b darmowe spotkanie'\n",
+      "Werdykt: \ud83d\udea8 SPAM\n",
+      "Pewno\u015b\u0107 modelu, \u017ce to SPAM: 75.00%\n",
       "------------------------------\n",
-      "SMS: 'Cześć mamo idziemy na obiad'\n",
-      "Werdykt: ✅ NORMALNA\n",
-      "Pewność modelu, że to SPAM: 5.88%\n",
+      "SMS: 'Cze\u015b\u0107 mamo idziemy na obiad'\n",
+      "Werdykt: \u2705 NORMALNA\n",
+      "Pewno\u015b\u0107 modelu, \u017ce to SPAM: 5.88%\n",
       "------------------------------\n",
-      "SMS: 'Kliknij po nagrodę'\n",
-      "Werdykt: 🚨 SPAM\n",
-      "Pewność modelu, że to SPAM: 80.00%\n",
+      "SMS: 'Kliknij po nagrod\u0119'\n",
+      "Werdykt: \ud83d\udea8 SPAM\n",
+      "Pewno\u015b\u0107 modelu, \u017ce to SPAM: 80.00%\n",
       "------------------------------\n"
      ]
     }
@@ -451,28 +458,28 @@
     "model = MultinomialNB()\n",
     "model.fit(X_matrix, df['kategoria'])\n",
     "\n",
-    "# 2. NOWE WIADOMOŚCI DO SPRAWDZENIA\n",
+    "# 2. NOWE WIADOMO\u015aCI DO SPRAWDZENIA\n",
     "nowe_smsy = [\n",
-    "    \"Wygrałeś darmowe spotkanie\",  # Podchwytliwe: \"Wygrałeś\" (spam) + \"Spotkanie\" (normalne)\n",
-    "    \"Cześć mamo idziemy na obiad\", # Normalne\n",
-    "    \"Kliknij po nagrodę\"           # Spam\n",
+    "    \"Wygra\u0142e\u015b darmowe spotkanie\",  # Podchwytliwe: \"Wygra\u0142e\u015b\" (spam) + \"Spotkanie\" (normalne)\n",
+    "    \"Cze\u015b\u0107 mamo idziemy na obiad\", # Normalne\n",
+    "    \"Kliknij po nagrod\u0119\"           # Spam\n",
     "]\n",
     "\n",
-    "# Zamieniamy nowe SMS-y na liczby (używając TEGO SAMEGO tłumacza co wcześniej)\n",
+    "# Zamieniamy nowe SMS-y na liczby (u\u017cywaj\u0105c TEGO SAMEGO t\u0142umacza co wcze\u015bniej)\n",
     "nowe_X = vectorizer.transform(nowe_smsy)\n",
     "\n",
-    "# Robimy predykcję\n",
+    "# Robimy predykcj\u0119\n",
     "wynik = model.predict(nowe_X)\n",
     "prawdopodobienstwo = model.predict_proba(nowe_X)\n",
     "\n",
     "print(\"--- WYNIKI TESTU ---\")\n",
     "for i, sms in enumerate(nowe_smsy):\n",
-    "    werdykt = \"🚨 SPAM\" if wynik[i] == 1 else \"✅ NORMALNA\"\n",
-    "    pewnosc_spamu = prawdopodobienstwo[i][1] * 100 # Szansa że to spam\n",
+    "    werdykt = \"\ud83d\udea8 SPAM\" if wynik[i] == 1 else \"\u2705 NORMALNA\"\n",
+    "    pewnosc_spamu = prawdopodobienstwo[i][1] * 100 # Szansa \u017ce to spam\n",
     "    \n",
     "    print(f\"SMS: '{sms}'\")\n",
     "    print(f\"Werdykt: {werdykt}\")\n",
-    "    print(f\"Pewność modelu, że to SPAM: {pewnosc_spamu:.2f}%\")\n",
+    "    print(f\"Pewno\u015b\u0107 modelu, \u017ce to SPAM: {pewnosc_spamu:.2f}%\")\n",
     "    print(\"-\" * 30)"
    ]
   },
@@ -481,22 +488,22 @@
    "id": "d117aea0",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Geniusz czy Idiota?\n",
+    "## \ud83e\udde0 Podsumowanie: Geniusz czy Idiota?\n",
     "\n",
-    "Dlaczego ten algorytm nazywamy \"Naiwnym\" i dlaczego mimo to rządzi w filtrach antyspamowych?\n",
+    "Dlaczego ten algorytm nazywamy \"Naiwnym\" i dlaczego mimo to rz\u0105dzi w filtrach antyspamowych?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Nazywamy go naiwnym, bo zachowuje się jak dziecko, które myśli, że **świat składa się z niepowiązanych klocków**.\n",
+    "Nazywamy go naiwnym, bo zachowuje si\u0119 jak dziecko, kt\u00f3re my\u015bli, \u017ce **\u015bwiat sk\u0142ada si\u0119 z niepowi\u0105zanych klock\u00f3w**.\n",
     "\n",
-    "*   Dla Bayesa zdanie *\"Wygrałeś darmowe pieniądze\"* to po prostu worek trzech słów: [Wygrałeś, Darmowe, Pieniądze].\n",
-    "*   Nie rozumie, że *\"Darmowe\"* i *\"Pieniądze\"* występujące obok siebie to znacznie silniejszy sygnał niż każde z osobna. Traktuje je jak niezależne rzuty monetą.\n",
+    "*   Dla Bayesa zdanie *\"Wygra\u0142e\u015b darmowe pieni\u0105dze\"* to po prostu worek trzech s\u0142\u00f3w: [Wygra\u0142e\u015b, Darmowe, Pieni\u0105dze].\n",
+    "*   Nie rozumie, \u017ce *\"Darmowe\"* i *\"Pieni\u0105dze\"* wyst\u0119puj\u0105ce obok siebie to znacznie silniejszy sygna\u0142 ni\u017c ka\u017cde z osobna. Traktuje je jak niezale\u017cne rzuty monet\u0105.\n",
     "\n",
-    "**Dlaczego więc to działa?**\n",
-    "Wyobraź sobie głosowanie.\n",
-    "Jeśli w zdaniu masz 10 słów typowych dla spamu (głosują na \"SPAM\") i 2 słowa typowe dla normalnej rozmowy (głosują na \"HAM\"), to nie musisz rozumieć gramatyki ani kontekstu. **Siła głosów przeważa.**\n",
+    "**Dlaczego wi\u0119c to dzia\u0142a?**\n",
+    "Wyobra\u017a sobie g\u0142osowanie.\n",
+    "Je\u015bli w zdaniu masz 10 s\u0142\u00f3w typowych dla spamu (g\u0142osuj\u0105 na \"SPAM\") i 2 s\u0142owa typowe dla normalnej rozmowy (g\u0142osuj\u0105 na \"HAM\"), to nie musisz rozumie\u0107 gramatyki ani kontekstu. **Si\u0142a g\u0142os\u00f3w przewa\u017ca.**\n",
     "\n",
     "**Wniosek:**\n",
-    "Naiwny Bayes jest jak **szybki czytacz**, który nie wnika w sens książki, ale skanuje słowa kluczowe. Może nie zrozumie ironii, ale błyskawicznie wrzuci śmieci do kosza. Dlatego jest standardem w pracy z tekstem."
+    "Naiwny Bayes jest jak **szybki czytacz**, kt\u00f3ry nie wnika w sens ksi\u0105\u017cki, ale skanuje s\u0142owa kluczowe. Mo\u017ce nie zrozumie ironii, ale b\u0142yskawicznie wrzuci \u015bmieci do kosza. Dlatego jest standardem w pracy z tekstem."
    ]
   }
  ],
