--- a/07_Confusion_Matrix_Precision_Recall.ipynb
+++ b/07_Confusion_Matrix_Precision_Recall.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/07_Confusion_Matrix_Precision_Recall.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4457cfbf",
    "metadata": {},
    "source": [
-    "# 🎯 Confusion Matrix, Precision i Recall (Dlaczego \"Accuracy\" kłamie?)\n",
+    "# \ud83c\udfaf Confusion Matrix, Precision i Recall (Dlaczego \"Accuracy\" k\u0142amie?)\n",
     "\n",
-    "Wszyscy kochają \"Dokładność\" (Accuracy). Jeśli model ma 99% dokładności, to jest świetny, prawda?\n",
+    "Wszyscy kochaj\u0105 \"Dok\u0142adno\u015b\u0107\" (Accuracy). Je\u015bli model ma 99% dok\u0142adno\u015bci, to jest \u015bwietny, prawda?\n",
     "**NIE.**\n",
     "\n",
-    "Wyobraź sobie, że budujesz system do wykrywania terrorystów na lotnisku.\n",
-    "*   Na 1 000 000 pasażerów jest 10 terrorystów.\n",
-    "*   Twój model jest \"leniwy\" i mówi: **\"Wszyscy są bezpieczni\"**. Nikogo nie zatrzymuje.\n",
+    "Wyobra\u017a sobie, \u017ce budujesz system do wykrywania terroryst\u00f3w na lotnisku.\n",
+    "*   Na 1 000 000 pasa\u017cer\u00f3w jest 10 terroryst\u00f3w.\n",
+    "*   Tw\u00f3j model jest \"leniwy\" i m\u00f3wi: **\"Wszyscy s\u0105 bezpieczni\"**. Nikogo nie zatrzymuje.\n",
     "\n",
-    "Jaka jest jego dokładność?\n",
+    "Jaka jest jego dok\u0142adno\u015b\u0107?\n",
     "$$ \\frac{999 990}{1 000 000} = 99.99\\% $$\n",
     "\n",
-    "Masz 99.99% dokładności, a przepuściłeś wszystkich 10 terrorystów. Twój model jest bezużyteczny.\n",
-    "Dlatego potrzebujemy **Macierzy Pomyłek (Confusion Matrix)**."
+    "Masz 99.99% dok\u0142adno\u015bci, a przepu\u015bci\u0142e\u015b wszystkich 10 terroryst\u00f3w. Tw\u00f3j model jest bezu\u017cyteczny.\n",
+    "Dlatego potrzebujemy **Macierzy Pomy\u0142ek (Confusion Matrix)**."
    ]
   },
   {
@@ -48,17 +55,17 @@
     "# 0 = Uczciwa transakcja (Normalna)\n",
     "# 1 = Oszustwo (Fraud)\n",
     "\n",
-    "# Stwórzmy sytuację, gdzie mamy 10 transakcji.\n",
-    "# Prawdziwe dane (to, co się stało naprawdę):\n",
+    "# Stw\u00f3rzmy sytuacj\u0119, gdzie mamy 10 transakcji.\n",
+    "# Prawdziwe dane (to, co si\u0119 sta\u0142o naprawd\u0119):\n",
     "y_true = [0, 0, 0, 0, 0, 0, 0, 1, 1, 1] \n",
     "# Mamy 7 uczciwych i 3 oszustwa.\n",
     "\n",
-    "# Przewidywania naszego modelu (co \"zgadł\" komputer):\n",
+    "# Przewidywania naszego modelu (co \"zgad\u0142\" komputer):\n",
     "y_pred = [0, 0, 0, 0, 0, 1, 1, 1, 1, 0]\n",
-    "# Model trochę pomylił:\n",
-    "# - Oskarżył 2 niewinnych (indeks 5 i 6).\n",
-    "# - Wykrył 2 oszustów (indeks 7 i 8).\n",
-    "# - Przegapił 1 oszusta (indeks 9).\n",
+    "# Model troch\u0119 pomyli\u0142:\n",
+    "# - Oskar\u017cy\u0142 2 niewinnych (indeks 5 i 6).\n",
+    "# - Wykry\u0142 2 oszust\u00f3w (indeks 7 i 8).\n",
+    "# - Przegapi\u0142 1 oszusta (indeks 9).\n",
     "\n",
     "print(\"Dane przygotowane.\")\n",
     "print(f\"Prawdziwe: {y_true}\")\n",
@@ -70,14 +77,14 @@
    "id": "62df9ee1",
    "metadata": {},
    "source": [
-    "## Krok 1: Macierz Pomyłek (Mapa Błędów)\n",
+    "## Krok 1: Macierz Pomy\u0142ek (Mapa B\u0142\u0119d\u00f3w)\n",
     "\n",
-    "Zamiast jednej liczby, chcemy widzieć 4 sytuacje:\n",
+    "Zamiast jednej liczby, chcemy widzie\u0107 4 sytuacje:\n",
     "\n",
-    "1.  **True Negative (TN):** Przewidziałem 0, było 0. (Uczciwy klient, spokój).\n",
-    "2.  **False Positive (FP):** Przewidziałem 1, było 0. (**Fałszywy Alarm** - oskarżyliśmy niewinnego).\n",
-    "3.  **False Negative (FN):** Przewidziałem 0, było 1. (**Przeoczenie** - złodziej uciekł!).\n",
-    "4.  **True Positive (TP):** Przewidziałem 1, było 1. (Sukces - złapaliśmy złodzieja)."
+    "1.  **True Negative (TN):** Przewidzia\u0142em 0, by\u0142o 0. (Uczciwy klient, spok\u00f3j).\n",
+    "2.  **False Positive (FP):** Przewidzia\u0142em 1, by\u0142o 0. (**Fa\u0142szywy Alarm** - oskar\u017cyli\u015bmy niewinnego).\n",
+    "3.  **False Negative (FN):** Przewidzia\u0142em 0, by\u0142o 1. (**Przeoczenie** - z\u0142odziej uciek\u0142!).\n",
+    "4.  **True Positive (TP):** Przewidzia\u0142em 1, by\u0142o 1. (Sukces - z\u0142apali\u015bmy z\u0142odzieja)."
    ]
   },
   {
@@ -100,15 +107,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TN (Dobrze - spokój): 5\n",
-      "FP (Fałszywy Alarm):  2\n",
+      "TN (Dobrze - spok\u00f3j): 5\n",
+      "FP (Fa\u0142szywy Alarm):  2\n",
       "FN (Przeoczenie!):    1\n",
       "TP (Sukces):          2\n"
      ]
     }
    ],
    "source": [
-    "# Generujemy Macierz Pomyłek\n",
+    "# Generujemy Macierz Pomy\u0142ek\n",
     "cm = confusion_matrix(y_true, y_pred)\n",
     "\n",
     "# Wizualizacja\n",
@@ -116,15 +123,15 @@
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False, annot_kws={\"size\": 20},\n",
     "            xticklabels=['Przewidywane: 0 (Czysto)', 'Przewidywane: 1 (Fraud)'],\n",
     "            yticklabels=['Prawdziwe: 0 (Czysto)', 'Prawdziwe: 1 (Fraud)'])\n",
-    "plt.xlabel('Co powiedział model?')\n",
+    "plt.xlabel('Co powiedzia\u0142 model?')\n",
     "plt.ylabel('Jaka jest prawda?')\n",
-    "plt.title('Macierz Pomyłek')\n",
+    "plt.title('Macierz Pomy\u0142ek')\n",
     "plt.show()\n",
     "\n",
     "# Rozpiszmy to na zmienne\n",
     "tn, fp, fn, tp = cm.ravel()\n",
-    "print(f\"TN (Dobrze - spokój): {tn}\")\n",
-    "print(f\"FP (Fałszywy Alarm):  {fp}\")\n",
+    "print(f\"TN (Dobrze - spok\u00f3j): {tn}\")\n",
+    "print(f\"FP (Fa\u0142szywy Alarm):  {fp}\")\n",
     "print(f\"FN (Przeoczenie!):    {fn}\")\n",
     "print(f\"TP (Sukces):          {tp}\")"
    ]
@@ -134,18 +141,18 @@
    "id": "c4d6937d",
    "metadata": {},
    "source": [
-    "## Krok 2: Precision (Precyzja) vs Recall (Czułość)\n",
+    "## Krok 2: Precision (Precyzja) vs Recall (Czu\u0142o\u015b\u0107)\n",
     "\n",
-    "Skoro \"Accuracy\" kłamie, używamy dwóch lepszych metryk. Zawsze jest coś za coś.\n",
+    "Skoro \"Accuracy\" k\u0142amie, u\u017cywamy dw\u00f3ch lepszych metryk. Zawsze jest co\u015b za co\u015b.\n",
     "\n",
     "### 1. Precision (Precyzja)\n",
-    "**Pytanie:** *\"Jak już kogoś aresztujesz, to czy na pewno jest winny?\"*\n",
-    "Jeśli Precyzja jest niska, to Twój model \"strzela na oślep\" i oskarża niewinnych (dużo False Positive).\n",
+    "**Pytanie:** *\"Jak ju\u017c kogo\u015b aresztujesz, to czy na pewno jest winny?\"*\n",
+    "Je\u015bli Precyzja jest niska, to Tw\u00f3j model \"strzela na o\u015blep\" i oskar\u017ca niewinnych (du\u017co False Positive).\n",
     "$$ Precision = \\frac{TP}{TP + FP} $$\n",
     "\n",
-    "### 2. Recall (Czułość / Pełność)\n",
-    "**Pytanie:** *\"Czy udało Ci się wyłapać wszystkich złodziei z miasta?\"*\n",
-    "Jeśli Recall jest niski, to znaczy, że wielu złodziei uciekło (dużo False Negative).\n",
+    "### 2. Recall (Czu\u0142o\u015b\u0107 / Pe\u0142no\u015b\u0107)\n",
+    "**Pytanie:** *\"Czy uda\u0142o Ci si\u0119 wy\u0142apa\u0107 wszystkich z\u0142odziei z miasta?\"*\n",
+    "Je\u015bli Recall jest niski, to znaczy, \u017ce wielu z\u0142odziei uciek\u0142o (du\u017co False Negative).\n",
     "$$ Recall = \\frac{TP}{TP + FN} $$"
    ]
   },
@@ -160,16 +167,16 @@
      "output_type": "stream",
      "text": [
       "--- WYNIKI MODELU ---\n",
-      "Accuracy (Dokładność):  0.70 (Ogólnie nieźle, ale mylące)\n",
+      "Accuracy (Dok\u0142adno\u015b\u0107):  0.70 (Og\u00f3lnie nie\u017ale, ale myl\u0105ce)\n",
       "------------------------------\n",
       "PRECISION (Precyzja):   0.50\n",
-      "Interpretacja: Kiedy model krzyczy 'ZŁODZIEJ!', ma rację tylko w 50% przypadków. (2 trafił, 2 pomylił).\n",
+      "Interpretacja: Kiedy model krzyczy 'Z\u0141ODZIEJ!', ma racj\u0119 tylko w 50% przypadk\u00f3w. (2 trafi\u0142, 2 pomyli\u0142).\n",
       "------------------------------\n",
-      "RECALL (Czułość):       0.67\n",
-      "Interpretacja: Model wykrył 67% wszystkich złodziei. Jeden mu uciekł.\n",
+      "RECALL (Czu\u0142o\u015b\u0107):       0.67\n",
+      "Interpretacja: Model wykry\u0142 67% wszystkich z\u0142odziei. Jeden mu uciek\u0142.\n",
       "------------------------------\n",
-      "F1-SCORE (Średnia):     0.57\n",
-      "To jest średnia harmoniczna między Precision a Recall. Dobra jedna liczba do oceny.\n"
+      "F1-SCORE (\u015arednia):     0.57\n",
+      "To jest \u015brednia harmoniczna mi\u0119dzy Precision a Recall. Dobra jedna liczba do oceny.\n"
      ]
     }
    ],
@@ -181,16 +188,16 @@
     "f1 = f1_score(y_true, y_pred)\n",
     "\n",
     "print(f\"--- WYNIKI MODELU ---\")\n",
-    "print(f\"Accuracy (Dokładność):  {accuracy:.2f} (Ogólnie nieźle, ale mylące)\")\n",
+    "print(f\"Accuracy (Dok\u0142adno\u015b\u0107):  {accuracy:.2f} (Og\u00f3lnie nie\u017ale, ale myl\u0105ce)\")\n",
     "print(\"-\" * 30)\n",
     "print(f\"PRECISION (Precyzja):   {precision:.2f}\")\n",
-    "print(\"Interpretacja: Kiedy model krzyczy 'ZŁODZIEJ!', ma rację tylko w 50% przypadków. (2 trafił, 2 pomylił).\")\n",
+    "print(\"Interpretacja: Kiedy model krzyczy 'Z\u0141ODZIEJ!', ma racj\u0119 tylko w 50% przypadk\u00f3w. (2 trafi\u0142, 2 pomyli\u0142).\")\n",
     "print(\"-\" * 30)\n",
-    "print(f\"RECALL (Czułość):       {recall:.2f}\")\n",
-    "print(\"Interpretacja: Model wykrył 67% wszystkich złodziei. Jeden mu uciekł.\")\n",
+    "print(f\"RECALL (Czu\u0142o\u015b\u0107):       {recall:.2f}\")\n",
+    "print(\"Interpretacja: Model wykry\u0142 67% wszystkich z\u0142odziei. Jeden mu uciek\u0142.\")\n",
     "print(\"-\" * 30)\n",
-    "print(f\"F1-SCORE (Średnia):     {f1:.2f}\")\n",
-    "print(\"To jest średnia harmoniczna między Precision a Recall. Dobra jedna liczba do oceny.\")"
+    "print(f\"F1-SCORE (\u015arednia):     {f1:.2f}\")\n",
+    "print(\"To jest \u015brednia harmoniczna mi\u0119dzy Precision a Recall. Dobra jedna liczba do oceny.\")"
    ]
   },
   {
@@ -198,20 +205,20 @@
    "id": "67e12a21",
    "metadata": {},
    "source": [
-    "## Co jest ważniejsze?\n",
+    "## Co jest wa\u017cniejsze?\n",
     "\n",
-    "To zależy od biznesu!\n",
+    "To zale\u017cy od biznesu!\n",
     "\n",
-    "1.  **Wolisz wysoki RECALL (Czułość)?**\n",
-    "    *   Przykład: **Wykrywanie Raka.**\n",
-    "    *   Lepiej zrobić fałszywy alarm (wysłać zdrowego na dodatkowe badania - FP), niż przegapić chorego i pozwolić mu umrzeć (FN).\n",
-    "    *   *Akceptujemy pomyłki w jedną stronę, byle nikogo nie przegapić.*\n",
+    "1.  **Wolisz wysoki RECALL (Czu\u0142o\u015b\u0107)?**\n",
+    "    *   Przyk\u0142ad: **Wykrywanie Raka.**\n",
+    "    *   Lepiej zrobi\u0107 fa\u0142szywy alarm (wys\u0142a\u0107 zdrowego na dodatkowe badania - FP), ni\u017c przegapi\u0107 chorego i pozwoli\u0107 mu umrze\u0107 (FN).\n",
+    "    *   *Akceptujemy pomy\u0142ki w jedn\u0105 stron\u0119, byle nikogo nie przegapi\u0107.*\n",
     "\n",
-    "2.  **Wolisz wysoką PRECISION (Precyzję)?**\n",
-    "    *   Przykład: **System Antyspamowy (lub filtr YouTube).**\n",
-    "    *   Jeśli Twój ważny mail od szefa trafi do spamu (FP), będziesz wściekły.\n",
-    "    *   Lepiej wpuścić trochę śmieci do skrzynki (FN), niż wyrzucić jeden ważny list.\n",
-    "    *   *System musi być na 100% pewny, zanim coś zablokuje.*"
+    "2.  **Wolisz wysok\u0105 PRECISION (Precyzj\u0119)?**\n",
+    "    *   Przyk\u0142ad: **System Antyspamowy (lub filtr YouTube).**\n",
+    "    *   Je\u015bli Tw\u00f3j wa\u017cny mail od szefa trafi do spamu (FP), b\u0119dziesz w\u015bciek\u0142y.\n",
+    "    *   Lepiej wpu\u015bci\u0107 troch\u0119 \u015bmieci do skrzynki (FN), ni\u017c wyrzuci\u0107 jeden wa\u017cny list.\n",
+    "    *   *System musi by\u0107 na 100% pewny, zanim co\u015b zablokuje.*"
    ]
   }
  ],
