--- a/08_Overfitting_Underfitting.ipynb
+++ b/08_Overfitting_Underfitting.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/08_Overfitting_Underfitting.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a9a572b",
    "metadata": {},
    "source": [
-    "# 📉 Overfitting vs Underfitting (Problem Złotowłosej)\n",
+    "# \ud83d\udcc9 Overfitting vs Underfitting (Problem Z\u0142otow\u0142osej)\n",
     "\n",
-    "W Machine Learningu nie chodzi o to, żeby model idealnie znał dane, które już widział.\n",
-    "Chodzi o to, żeby radził sobie z danymi, których **jeszcze nie widział**.\n",
+    "W Machine Learningu nie chodzi o to, \u017ceby model idealnie zna\u0142 dane, kt\u00f3re ju\u017c widzia\u0142.\n",
+    "Chodzi o to, \u017ceby radzi\u0142 sobie z danymi, kt\u00f3rych **jeszcze nie widzia\u0142**.\n",
     "\n",
     "Mamy trzy stany:\n",
-    "1.  **Underfitting (Niedouczenie):** Model jest \"za głupi\". Nie widzi żadnych zależności. (Np. próbuje opisać łuk prostą linią).\n",
-    "2.  **Overfitting (Przeuczenie):** Model jest \"kujonem\". Nauczył się danych treningowych na pamięć, łącznie z szumem i błędami. Na nowych danych wyłoży się koncertowo.\n",
-    "3.  **Good Fit (Dobry model):** Złoty środek. Ignoruje szum, łapie ogólny trend.\n",
+    "1.  **Underfitting (Niedouczenie):** Model jest \"za g\u0142upi\". Nie widzi \u017cadnych zale\u017cno\u015bci. (Np. pr\u00f3buje opisa\u0107 \u0142uk prost\u0105 lini\u0105).\n",
+    "2.  **Overfitting (Przeuczenie):** Model jest \"kujonem\". Nauczy\u0142 si\u0119 danych treningowych na pami\u0119\u0107, \u0142\u0105cznie z szumem i b\u0142\u0119dami. Na nowych danych wy\u0142o\u017cy si\u0119 koncertowo.\n",
+    "3.  **Good Fit (Dobry model):** Z\u0142oty \u015brodek. Ignoruje szum, \u0142apie og\u00f3lny trend.\n",
     "\n",
     "Zobaczymy to na wykresach."
    ]
@@ -28,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dane wygenerowane. Mamy punkty, które układają się w łuk, ale są trochę 'rozchwiane'.\n"
+      "Dane wygenerowane. Mamy punkty, kt\u00f3re uk\u0142adaj\u0105 si\u0119 w \u0142uk, ale s\u0105 troch\u0119 'rozchwiane'.\n"
      ]
     }
    ],
@@ -39,23 +46,23 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "# 1. GENERUJEMY DANE (Symulacja rzeczywistości)\n",
-    "# Wyobraź sobie, że to ceny mieszkań w zależności od wielkości.\n",
-    "# Prawdziwa zależność to lekki łuk (funkcja cosinus), ale dodamy trochę chaosu (szumu).\n",
+    "# 1. GENERUJEMY DANE (Symulacja rzeczywisto\u015bci)\n",
+    "# Wyobra\u017a sobie, \u017ce to ceny mieszka\u0144 w zale\u017cno\u015bci od wielko\u015bci.\n",
+    "# Prawdziwa zale\u017cno\u015b\u0107 to lekki \u0142uk (funkcja cosinus), ale dodamy troch\u0119 chaosu (szumu).\n",
     "\n",
     "np.random.seed(0)\n",
     "n_samples = 30\n",
     "\n",
-    "# Oś X (Wielkość mieszkania)\n",
+    "# O\u015b X (Wielko\u015b\u0107 mieszkania)\n",
     "X = np.sort(np.random.rand(n_samples))\n",
     "\n",
-    "# Prawdziwa funkcja (To jest \"Prawda objawiona\", której model szuka)\n",
+    "# Prawdziwa funkcja (To jest \"Prawda objawiona\", kt\u00f3rej model szuka)\n",
     "true_fun = lambda X: np.cos(1.5 * np.pi * X)\n",
     "\n",
-    "# Oś Y (Cena) + Szum (losowe wahania rynku)\n",
+    "# O\u015b Y (Cena) + Szum (losowe wahania rynku)\n",
     "y = true_fun(X) + np.random.randn(n_samples) * 0.1\n",
     "\n",
-    "print(\"Dane wygenerowane. Mamy punkty, które układają się w łuk, ale są trochę 'rozchwiane'.\")"
+    "print(\"Dane wygenerowane. Mamy punkty, kt\u00f3re uk\u0142adaj\u0105 si\u0119 w \u0142uk, ale s\u0105 troch\u0119 'rozchwiane'.\")"
    ]
   },
   {
@@ -63,13 +70,13 @@
    "id": "ca474ea8",
    "metadata": {},
    "source": [
-    "## Wizualizacja 3 Światów\n",
+    "## Wizualizacja 3 \u015awiat\u00f3w\n",
     "\n",
-    "Stworzymy teraz trzy modele, żeby spróbowały przewidzieć ten kształt:\n",
+    "Stworzymy teraz trzy modele, \u017ceby spr\u00f3bowa\u0142y przewidzie\u0107 ten kszta\u0142t:\n",
     "\n",
-    "1.  **Model Liniowy (Stopień 1):** Prosta kreska. (Underfitting).\n",
-    "2.  **Model Wielomianowy (Stopień 4):** Ładny łuk. (Idealny).\n",
-    "3.  **Model Szalony (Stopień 15):** Bardzo powyginana krzywa, która próbuje przejść przez KAŻDY punkt. (Overfitting)."
+    "1.  **Model Liniowy (Stopie\u0144 1):** Prosta kreska. (Underfitting).\n",
+    "2.  **Model Wielomianowy (Stopie\u0144 4):** \u0141adny \u0142uk. (Idealny).\n",
+    "3.  **Model Szalony (Stopie\u0144 15):** Bardzo powyginana krzywa, kt\u00f3ra pr\u00f3buje przej\u015b\u0107 przez KA\u017bDY punkt. (Overfitting)."
    ]
   },
   {
@@ -104,28 +111,28 @@
     "    degree = degrees[i]\n",
     "    \n",
     "    # Tworzymy model wielomianowy (Polynomial Regression)\n",
-    "    # To po prostu sposób na narysowanie krzywej linii zamiast prostej\n",
+    "    # To po prostu spos\u00f3b na narysowanie krzywej linii zamiast prostej\n",
     "    polynomial_features = PolynomialFeatures(degree=degree, include_bias=False)\n",
     "    linear_regression = LinearRegression()\n",
     "    \n",
-    "    # Łączymy to w rurę (Pipeline): Najpierw zrób krzywą, potem dopasuj linię\n",
+    "    # \u0141\u0105czymy to w rur\u0119 (Pipeline): Najpierw zr\u00f3b krzyw\u0105, potem dopasuj lini\u0119\n",
     "    pipeline = Pipeline([(\"polynomial_features\", polynomial_features),\n",
     "                         (\"linear_regression\", linear_regression)])\n",
     "    \n",
     "    # Trenujemy model na naszych punktach\n",
     "    pipeline.fit(X[:, np.newaxis], y)\n",
     "\n",
-    "    # Sprawdzamy, jak model widzi świat (rysujemy linię modelu)\n",
+    "    # Sprawdzamy, jak model widzi \u015bwiat (rysujemy lini\u0119 modelu)\n",
     "    X_test = np.linspace(0, 1, 100)\n",
     "    plt.plot(X_test, pipeline.predict(X_test[:, np.newaxis]), label=\"Model\", linewidth=2, color='red')\n",
     "    \n",
-    "    # Rysujemy prawdziwą funkcję (ideał)\n",
+    "    # Rysujemy prawdziw\u0105 funkcj\u0119 (idea\u0142)\n",
     "    plt.plot(X_test, true_fun(X_test), label=\"Prawda\", linewidth=2, linestyle='--', color='green')\n",
     "    \n",
     "    # Rysujemy nasze punkty treningowe (dane)\n",
     "    plt.scatter(X, y, edgecolor='b', s=20, label=\"Dane\")\n",
     "    \n",
-    "    plt.title(f\"{titles[i]}\\n(Stopień wielomianu: {degree})\")\n",
+    "    plt.title(f\"{titles[i]}\\n(Stopie\u0144 wielomianu: {degree})\")\n",
     "    plt.legend(loc=\"best\")\n",
     "\n",
     "plt.show()"
@@ -138,11 +145,11 @@
    "source": [
     "## Co widzisz na wykresach?\n",
     "\n",
-    "1.  **Wykres 1 (Underfitting):** Czerwona linia jest prosta. Kompletnie ignoruje kształt danych (łuk). Błąd jest duży.\n",
-    "2.  **Wykres 2 (Good Fit):** Czerwona linia ładnie pokrywa się z zieloną linią przerywaną (Prawdą). Ignoruje pojedyncze kropki, które odstają, ale łapie sens.\n",
-    "3.  **Wykres 3 (Overfitting):** Czerwona linia szaleje! Wywija się w górę i w dół, byle tylko zaliczyć każdą niebieską kropkę.\n",
-    "    *   To wygląda imponująco (\"Patrz szefie, przechodzi przez wszystkie punkty!\").\n",
-    "    *   Ale spójrz na końcówkę wykresu – linia wystrzeliwuje w kosmos. Gdyby przyszedł nowy klient (nowy punkt), model pomyliłby się gigantycznie."
+    "1.  **Wykres 1 (Underfitting):** Czerwona linia jest prosta. Kompletnie ignoruje kszta\u0142t danych (\u0142uk). B\u0142\u0105d jest du\u017cy.\n",
+    "2.  **Wykres 2 (Good Fit):** Czerwona linia \u0142adnie pokrywa si\u0119 z zielon\u0105 lini\u0105 przerywan\u0105 (Prawd\u0105). Ignoruje pojedyncze kropki, kt\u00f3re odstaj\u0105, ale \u0142apie sens.\n",
+    "3.  **Wykres 3 (Overfitting):** Czerwona linia szaleje! Wywija si\u0119 w g\u00f3r\u0119 i w d\u00f3\u0142, byle tylko zaliczy\u0107 ka\u017cd\u0105 niebiesk\u0105 kropk\u0119.\n",
+    "    *   To wygl\u0105da imponuj\u0105co (\"Patrz szefie, przechodzi przez wszystkie punkty!\").\n",
+    "    *   Ale sp\u00f3jrz na ko\u0144c\u00f3wk\u0119 wykresu \u2013 linia wystrzeliwuje w kosmos. Gdyby przyszed\u0142 nowy klient (nowy punkt), model pomyli\u0142by si\u0119 gigantycznie."
    ]
   },
   {
@@ -150,20 +157,20 @@
    "id": "2739335d",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Kujon vs Geniusz\n",
+    "## \ud83e\udde0 Podsumowanie: Kujon vs Geniusz\n",
     "\n",
-    "Dlaczego Overfitting jest gorszy niż Underfitting?\n",
+    "Dlaczego Overfitting jest gorszy ni\u017c Underfitting?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Overfitting daje złudne poczucie bezpieczeństwa. Podczas testów w domu (na danych treningowych) masz 100% skuteczności. Myślisz, że zbudowałeś najlepsze AI na świecie.\n",
-    "Wypuszczasz je na rynek i następuje katastrofa.\n",
+    "Overfitting daje z\u0142udne poczucie bezpiecze\u0144stwa. Podczas test\u00f3w w domu (na danych treningowych) masz 100% skuteczno\u015bci. My\u015blisz, \u017ce zbudowa\u0142e\u015b najlepsze AI na \u015bwiecie.\n",
+    "Wypuszczasz je na rynek i nast\u0119puje katastrofa.\n",
     "\n",
-    "To tak, jakbyś uczył się na egzamin z historii, zapamiętując kolejność pytań na kartce (\"1. A, 2. C, 3. B\"), zamiast dat i wydarzeń.\n",
-    "*   Jeśli nauczyciel da tę samą kartkę -> Dostaniesz 6 (Overfitting).\n",
-    "*   Jeśli nauczyciel zmieni kolejność pytań -> Dostaniesz 1.\n",
+    "To tak, jakby\u015b uczy\u0142 si\u0119 na egzamin z historii, zapami\u0119tuj\u0105c kolejno\u015b\u0107 pyta\u0144 na kartce (\"1. A, 2. C, 3. B\"), zamiast dat i wydarze\u0144.\n",
+    "*   Je\u015bli nauczyciel da t\u0119 sam\u0105 kartk\u0119 -> Dostaniesz 6 (Overfitting).\n",
+    "*   Je\u015bli nauczyciel zmieni kolejno\u015b\u0107 pyta\u0144 -> Dostaniesz 1.\n",
     "\n",
     "**Wniosek:**\n",
-    "Lepiej mieć model, który popełnia małe błędy, ale \"rozumie\" ogólną zasadę, niż taki, który jest perfekcyjny na starych danych, a bezradny wobec nowych. W AI Engineerigu nazywamy to **Generalizacją**."
+    "Lepiej mie\u0107 model, kt\u00f3ry pope\u0142nia ma\u0142e b\u0142\u0119dy, ale \"rozumie\" og\u00f3ln\u0105 zasad\u0119, ni\u017c taki, kt\u00f3ry jest perfekcyjny na starych danych, a bezradny wobec nowych. W AI Engineerigu nazywamy to **Generalizacj\u0105**."
    ]
   }
  ],
