--- a/09_K_Means_Clustering.ipynb
+++ b/09_K_Means_Clustering.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/09_K_Means_Clustering.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "185607d7",
    "metadata": {},
    "source": [
-    "# 🎯 K-Means Clustering (Grupowanie)\n",
+    "# \ud83c\udfaf K-Means Clustering (Grupowanie)\n",
     "\n",
-    "Wyobraź sobie, że masz sklep. Masz bazę 1000 klientów, ale nic o nich nie wiesz.\n",
-    "Chcesz wysłać do nich reklamy, ale nie chcesz wysyłać reklamy drogiego wina do studentów, ani reklamy taniego piwa do milionerów.\n",
+    "Wyobra\u017a sobie, \u017ce masz sklep. Masz baz\u0119 1000 klient\u00f3w, ale nic o nich nie wiesz.\n",
+    "Chcesz wys\u0142a\u0107 do nich reklamy, ale nie chcesz wysy\u0142a\u0107 reklamy drogiego wina do student\u00f3w, ani reklamy taniego piwa do milioner\u00f3w.\n",
     "\n",
-    "Musisz ich podzielić na grupy (Segmenty). Ale jak?\n",
+    "Musisz ich podzieli\u0107 na grupy (Segmenty). Ale jak?\n",
     "Tu wchodzi **K-Means**.\n",
     "\n",
-    "To algorytm, który:\n",
+    "To algorytm, kt\u00f3ry:\n",
     "1.  Patrzy na dane (np. Zarobki vs Wydatki).\n",
-    "2.  Samodzielnie zauważa, że pewne punkty \"lubią się trzymać razem\".\n",
+    "2.  Samodzielnie zauwa\u017ca, \u017ce pewne punkty \"lubi\u0105 si\u0119 trzyma\u0107 razem\".\n",
     "3.  Tworzy Klastry (Grupy).\n",
     "\n",
-    "To jest **Uczenie Bez Nadzoru** - komputer sam wymyśla strukturę danych."
+    "To jest **Uczenie Bez Nadzoru** - komputer sam wymy\u015bla struktur\u0119 danych."
    ]
   },
   {
@@ -52,22 +59,22 @@
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "# 1. GENERUJEMY DANE (Symulacja Klientów)\n",
-    "# Tworzymy 300 klientów, którzy naturalnie dzielą się na 4 grupy, ale my tego \"oficjalnie\" nie wiemy.\n",
-    "# X to nasze cechy: [Roczne Zarobki, Wynik Wydatków (0-100)]\n",
+    "# 1. GENERUJEMY DANE (Symulacja Klient\u00f3w)\n",
+    "# Tworzymy 300 klient\u00f3w, kt\u00f3rzy naturalnie dziel\u0105 si\u0119 na 4 grupy, ale my tego \"oficjalnie\" nie wiemy.\n",
+    "# X to nasze cechy: [Roczne Zarobki, Wynik Wydatk\u00f3w (0-100)]\n",
     "\n",
     "X, y = make_blobs(n_samples=300, centers=4, cluster_std=0.60, random_state=0)\n",
     "\n",
-    "# Zamieńmy to na DataFrame, żeby wyglądało profesjonalnie\n",
+    "# Zamie\u0144my to na DataFrame, \u017ceby wygl\u0105da\u0142o profesjonalnie\n",
     "df = pd.DataFrame(X, columns=['Zarobki', 'Wydatki'])\n",
     "\n",
     "print(\"--- DANE SUROWE ---\")\n",
-    "# Rysujemy wykres - na razie wszystkie kropki są szare (nie wiemy kto jest kim)\n",
+    "# Rysujemy wykres - na razie wszystkie kropki s\u0105 szare (nie wiemy kto jest kim)\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.scatter(df['Zarobki'], df['Wydatki'], s=50, color='grey')\n",
     "plt.xlabel('Zarobki')\n",
     "plt.ylabel('Wydatki')\n",
-    "plt.title('Klienci przed segmentacją (Chaos)')\n",
+    "plt.title('Klienci przed segmentacj\u0105 (Chaos)')\n",
     "plt.show()"
    ]
   },
@@ -79,15 +86,15 @@
     "## Algorytm w akcji\n",
     "\n",
     "Teraz uruchomimy algorytm **K-Means**.\n",
-    "Musimy mu podać tylko jedną rzecz: **K** (czyli: ile grup chcemy znaleźć?).\n",
+    "Musimy mu poda\u0107 tylko jedn\u0105 rzecz: **K** (czyli: ile grup chcemy znale\u017a\u0107?).\n",
     "\n",
-    "Powiedzmy, że chcemy znaleźć **4 grupy** klientów (K=4).\n",
+    "Powiedzmy, \u017ce chcemy znale\u017a\u0107 **4 grupy** klient\u00f3w (K=4).\n",
     "\n",
     "Algorytm zrobi tak:\n",
     "1.  Rzuci losowo 4 punkty (Centroidy) na wykres.\n",
-    "2.  Każdy klient \"przytuli się\" do najbliższego punktu.\n",
-    "3.  Centroid przesunie się w środek swojej grupy.\n",
-    "4.  Powtórzy to, aż znajdzie idealny środek każdej grupy."
+    "2.  Ka\u017cdy klient \"przytuli si\u0119\" do najbli\u017cszego punktu.\n",
+    "3.  Centroid przesunie si\u0119 w \u015brodek swojej grupy.\n",
+    "4.  Powt\u00f3rzy to, a\u017c znajdzie idealny \u015brodek ka\u017cdej grupy."
    ]
   },
   {
@@ -112,20 +119,20 @@
     "kmeans = KMeans(n_clusters=4, random_state=0)\n",
     "kmeans.fit(X)\n",
     "\n",
-    "# 2. Przewidujemy, kto należy do jakiej grupy\n",
+    "# 2. Przewidujemy, kto nale\u017cy do jakiej grupy\n",
     "y_kmeans = kmeans.predict(X)\n",
     "\n",
     "# 3. WIZUALIZACJA WYNIKU\n",
     "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "# Rysujemy punkty, ale kolorujemy je według grupy (c=y_kmeans)\n",
+    "# Rysujemy punkty, ale kolorujemy je wed\u0142ug grupy (c=y_kmeans)\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y_kmeans, s=50, cmap='viridis')\n",
     "\n",
-    "# Rysujemy CENTROIDY (Te czarne kropki w środku - to są \"Szefowie\" grup)\n",
+    "# Rysujemy CENTROIDY (Te czarne kropki w \u015brodku - to s\u0105 \"Szefowie\" grup)\n",
     "centers = kmeans.cluster_centers_\n",
     "plt.scatter(centers[:, 0], centers[:, 1], c='black', s=200, alpha=0.7, label='Centroidy')\n",
     "\n",
-    "plt.title('Klienci po segmentacji (Porządek)')\n",
+    "plt.title('Klienci po segmentacji (Porz\u0105dek)')\n",
     "plt.xlabel('Zarobki')\n",
     "plt.ylabel('Wydatki')\n",
     "plt.legend()\n",
@@ -137,16 +144,16 @@
    "id": "462757b9",
    "metadata": {},
    "source": [
-    "## Problem: Skąd wziąć \"K\"? (Metoda Łokcia)\n",
+    "## Problem: Sk\u0105d wzi\u0105\u0107 \"K\"? (Metoda \u0141okcia)\n",
     "\n",
-    "W powyższym przykładzie \"oszukiwaliśmy\" – wiedzieliśmy, że generujemy 4 grupy.\n",
-    "W prawdziwym życiu nie wiesz, czy klientów należy podzielić na 3, 5 czy 10 segmentów.\n",
+    "W powy\u017cszym przyk\u0142adzie \"oszukiwali\u015bmy\" \u2013 wiedzieli\u015bmy, \u017ce generujemy 4 grupy.\n",
+    "W prawdziwym \u017cyciu nie wiesz, czy klient\u00f3w nale\u017cy podzieli\u0107 na 3, 5 czy 10 segment\u00f3w.\n",
     "\n",
-    "Jak to sprawdzić? Używamy **Metody Łokcia (Elbow Method)**.\n",
-    "Liczymy \"błąd\" (WCSS - suma odległości punktów od środka grupy) dla K=1, K=2, K=3...\n",
-    "Im więcej grup, tym błąd mniejszy (bo punkty są bliżej swoich szefów).\n",
+    "Jak to sprawdzi\u0107? U\u017cywamy **Metody \u0141okcia (Elbow Method)**.\n",
+    "Liczymy \"b\u0142\u0105d\" (WCSS - suma odleg\u0142o\u015bci punkt\u00f3w od \u015brodka grupy) dla K=1, K=2, K=3...\n",
+    "Im wi\u0119cej grup, tym b\u0142\u0105d mniejszy (bo punkty s\u0105 bli\u017cej swoich szef\u00f3w).\n",
     "\n",
-    "Szukamy momentu, gdzie wykres \"łamie się jak łokieć\". To jest optymalna liczba grup."
+    "Szukamy momentu, gdzie wykres \"\u0142amie si\u0119 jak \u0142okie\u0107\". To jest optymalna liczba grup."
    ]
   },
   {
@@ -167,20 +174,20 @@
     }
    ],
    "source": [
-    "wcss = [] # Tu będziemy zbierać wyniki \"błędu\"\n",
+    "wcss = [] # Tu b\u0119dziemy zbiera\u0107 wyniki \"b\u0142\u0119du\"\n",
     "\n",
     "# Sprawdzamy dla K od 1 do 10\n",
     "for i in range(1, 11):\n",
     "    kmeans = KMeans(n_clusters=i, random_state=0, n_init=10)\n",
     "    kmeans.fit(X)\n",
-    "    wcss.append(kmeans.inertia_) # inertia_ to właśnie nasza miara \"zbicia\" klastra\n",
+    "    wcss.append(kmeans.inertia_) # inertia_ to w\u0142a\u015bnie nasza miara \"zbicia\" klastra\n",
     "\n",
     "# Rysujemy wykres\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(range(1, 11), wcss, marker='o', linestyle='--')\n",
-    "plt.title('Metoda Łokcia (Szukamy zagięcia)')\n",
-    "plt.xlabel('Liczba klastrów (K)')\n",
-    "plt.ylabel('WCSS (Suma odległości)')\n",
+    "plt.title('Metoda \u0141okcia (Szukamy zagi\u0119cia)')\n",
+    "plt.xlabel('Liczba klastr\u00f3w (K)')\n",
+    "plt.ylabel('WCSS (Suma odleg\u0142o\u015bci)')\n",
     "plt.show()"
    ]
   },
@@ -189,20 +196,20 @@
    "id": "0f0fb82f",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Samotność w tłumie\n",
+    "## \ud83e\udde0 Podsumowanie: Samotno\u015b\u0107 w t\u0142umie\n",
     "\n",
-    "Co pokazuje wykres \"Metoda Łokcia\"?\n",
-    "Zauważ, że linia gwałtownie spada, a w okolicy **K=4** zaczyna się wypłaszczać.\n",
-    "To jest ten \"łokieć\". To znak dla Ciebie: *\"Hej, 4 grupy mają sens. Dzielenie na 5, 6, 7 grup niewiele już poprawia, a tylko komplikuje sprawę\"*.\n",
+    "Co pokazuje wykres \"Metoda \u0141okcia\"?\n",
+    "Zauwa\u017c, \u017ce linia gwa\u0142townie spada, a w okolicy **K=4** zaczyna si\u0119 wyp\u0142aszcza\u0107.\n",
+    "To jest ten \"\u0142okie\u0107\". To znak dla Ciebie: *\"Hej, 4 grupy maj\u0105 sens. Dzielenie na 5, 6, 7 grup niewiele ju\u017c poprawia, a tylko komplikuje spraw\u0119\"*.\n",
     "\n",
     "**Tu jest haczyk (Unsupervised Learning):**\n",
-    "Algorytm podzielił ludzi na grupy: Żółtą, Zieloną, Fioletową...\n",
+    "Algorytm podzieli\u0142 ludzi na grupy: \u017b\u00f3\u0142t\u0105, Zielon\u0105, Fioletow\u0105...\n",
     "Ale **on nie wie, co to znaczy**.\n",
-    "To Ty (Człowiek) musisz spojrzeć na wykres i powiedzieć:\n",
+    "To Ty (Cz\u0142owiek) musisz spojrze\u0107 na wykres i powiedzie\u0107:\n",
     "*   \"Aha! Grupa Fioletowa ma niskie zarobki i wysokie wydatki -> Nazwijmy ich **Rozrzutni Studenci**\".\n",
-    "*   \"Grupa Zielona to wysokie zarobki i niskie wydatki -> Nazwijmy ich **Skąpi Milionerzy**\".\n",
+    "*   \"Grupa Zielona to wysokie zarobki i niskie wydatki -> Nazwijmy ich **Sk\u0105pi Milionerzy**\".\n",
     "\n",
-    "W Uczeniu Bez Nadzoru AI daje Ci strukturę, ale Ty musisz nadać jej **sens biznesowy**."
+    "W Uczeniu Bez Nadzoru AI daje Ci struktur\u0119, ale Ty musisz nada\u0107 jej **sens biznesowy**."
    ]
   }
  ],
