--- a/10_Decision_Trees.ipynb
+++ b/10_Decision_Trees.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/10_Decision_Trees.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73a98634",
    "metadata": {},
    "source": [
-    "# 🌳 Drzewa Decyzyjne (Decision Trees)\n",
+    "# \ud83c\udf33 Drzewa Decyzyjne (Decision Trees)\n",
     "\n",
-    "Większość algorytmów ML to \"Czarne Skrzynki\" (Black Box). Wrzucasz dane, wychodzi wynik, ale nie wiesz DLACZEGO.\n",
-    "**Drzewo Decyzyjne** jest \"Białą Skrzynką\". Możesz je narysować i prześledzić każdą decyzję palcem.\n",
+    "Wi\u0119kszo\u015b\u0107 algorytm\u00f3w ML to \"Czarne Skrzynki\" (Black Box). Wrzucasz dane, wychodzi wynik, ale nie wiesz DLACZEGO.\n",
+    "**Drzewo Decyzyjne** jest \"Bia\u0142\u0105 Skrzynk\u0105\". Mo\u017cesz je narysowa\u0107 i prze\u015bledzi\u0107 ka\u017cd\u0105 decyzj\u0119 palcem.\n",
     "\n",
-    "**Jak to działa?**\n",
-    "Algorytm szuka \"Najlepszego Pytania\", które podzieli dane na dwie jak najbardziej różne grupy.\n",
-    "*   Pytanie 1: \"Czy to zwierzę jest większe od psa?\"\n",
-    "    *   TAK -> (Idziemy w prawo: Konie, Słonie...)\n",
+    "**Jak to dzia\u0142a?**\n",
+    "Algorytm szuka \"Najlepszego Pytania\", kt\u00f3re podzieli dane na dwie jak najbardziej r\u00f3\u017cne grupy.\n",
+    "*   Pytanie 1: \"Czy to zwierz\u0119 jest wi\u0119ksze od psa?\"\n",
+    "    *   TAK -> (Idziemy w prawo: Konie, S\u0142onie...)\n",
     "    *   NIE -> (Idziemy w lewo: Koty, Myszy...)\n",
     "\n",
-    "Będziemy klasyfikować słynne kwiaty **Iris** (Irysy). Mamy 3 gatunki i wymiary ich płatków."
+    "B\u0119dziemy klasyfikowa\u0107 s\u0142ynne kwiaty **Iris** (Irysy). Mamy 3 gatunki i wymiary ich p\u0142atk\u00f3w."
    ]
   },
   {
@@ -29,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- TAK WYGLĄDAJĄ DANE ---\n",
-      "Mamy wymiary płatków (Petal) i działek kielicha (Sepal).\n"
+      "--- TAK WYGL\u0104DAJ\u0104 DANE ---\n",
+      "Mamy wymiary p\u0142atk\u00f3w (Petal) i dzia\u0142ek kielicha (Sepal).\n"
      ]
     },
     {
@@ -132,21 +139,21 @@
     "from sklearn.datasets import load_iris\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "\n",
-    "# 1. ŁADUJEMY DANE (Irysy)\n",
-    "# To najsłynniejszy zbiór danych w historii ML.\n",
+    "# 1. \u0141ADUJEMY DANE (Irysy)\n",
+    "# To najs\u0142ynniejszy zbi\u00f3r danych w historii ML.\n",
     "iris = load_iris()\n",
     "X = iris.data\n",
     "y = iris.target\n",
     "feature_names = iris.feature_names\n",
     "class_names = iris.target_names\n",
     "\n",
-    "# Zobaczmy przykładowe dane\n",
+    "# Zobaczmy przyk\u0142adowe dane\n",
     "df = pd.DataFrame(X, columns=feature_names)\n",
     "df['Gatunek'] = [class_names[i] for i in y]\n",
     "\n",
-    "print(\"--- TAK WYGLĄDAJĄ DANE ---\")\n",
-    "print(\"Mamy wymiary płatków (Petal) i działek kielicha (Sepal).\")\n",
-    "display(df.sample(5)) # Pokaż 5 losowych wierszy"
+    "print(\"--- TAK WYGL\u0104DAJ\u0104 DANE ---\")\n",
+    "print(\"Mamy wymiary p\u0142atk\u00f3w (Petal) i dzia\u0142ek kielicha (Sepal).\")\n",
+    "display(df.sample(5)) # Poka\u017c 5 losowych wierszy"
    ]
   },
   {
@@ -156,9 +163,9 @@
    "source": [
     "## Budujemy Drzewo\n",
     "\n",
-    "Użyjemy `DecisionTreeClassifier`.\n",
+    "U\u017cyjemy `DecisionTreeClassifier`.\n",
     "Ustawimy parametr `max_depth=3`.\n",
-    "Dlaczego? Bo jeśli pozwolimy drzewu rosnąć w nieskończoność, stanie się gigantycznym krzakiem, którego nie rozczytamy (i wpadniemy w Overfitting!). Ograniczenie głębokości zmusza je do zadawania tylko najważniejszych pytań."
+    "Dlaczego? Bo je\u015bli pozwolimy drzewu rosn\u0105\u0107 w niesko\u0144czono\u015b\u0107, stanie si\u0119 gigantycznym krzakiem, kt\u00f3rego nie rozczytamy (i wpadniemy w Overfitting!). Ograniczenie g\u0142\u0119boko\u015bci zmusza je do zadawania tylko najwa\u017cniejszych pyta\u0144."
    ]
   },
   {
@@ -188,9 +195,9 @@
     "plot_tree(model, \n",
     "          feature_names=feature_names,  \n",
     "          class_names=class_names,\n",
-    "          filled=True, # Kolory oznaczają gatunki\n",
+    "          filled=True, # Kolory oznaczaj\u0105 gatunki\n",
     "          rounded=True)\n",
-    "plt.title(\"Jak myśli nasz model?\")\n",
+    "plt.title(\"Jak my\u015bli nasz model?\")\n",
     "plt.show()"
    ]
   },
@@ -199,22 +206,22 @@
    "id": "5898bd11",
    "metadata": {},
    "source": [
-    "## Jak to czytać?\n",
+    "## Jak to czyta\u0107?\n",
     "\n",
-    "Spójrz na obrazek powyżej.\n",
+    "Sp\u00f3jrz na obrazek powy\u017cej.\n",
     "\n",
-    "1.  **Korzeń (Na samej górze):**\n",
+    "1.  **Korze\u0144 (Na samej g\u00f3rze):**\n",
     "    *   Pytanie: `petal length (cm) <= 2.45`?\n",
-    "    *   To jest najważniejsze pytanie w całym zestawie danych!\n",
-    "    *   Jeśli **TAK** (idziemy w lewo) -> Trafiamy do pomarańczowego pudełka `class = setosa`.\n",
-    "    *   Zauważ `gini = 0.0`. To znaczy, że **zagadka rozwiązana**. Wszystkie kwiaty tutaj to Setosa. Model jest w 100% pewny.\n",
+    "    *   To jest najwa\u017cniejsze pytanie w ca\u0142ym zestawie danych!\n",
+    "    *   Je\u015bli **TAK** (idziemy w lewo) -> Trafiamy do pomara\u0144czowego pude\u0142ka `class = setosa`.\n",
+    "    *   Zauwa\u017c `gini = 0.0`. To znaczy, \u017ce **zagadka rozwi\u0105zana**. Wszystkie kwiaty tutaj to Setosa. Model jest w 100% pewny.\n",
     "\n",
-    "2.  **Gałęzie:**\n",
-    "    *   Jeśli **NIE** (idziemy w prawo) -> Model musi pytać dalej.\n",
+    "2.  **Ga\u0142\u0119zie:**\n",
+    "    *   Je\u015bli **NIE** (idziemy w prawo) -> Model musi pyta\u0107 dalej.\n",
     "    *   Kolejne pytanie: `petal width (cm) <= 1.75`?\n",
     "\n",
     "**Wniosek:**\n",
-    "Model odkrył, że **Długość Płatka (Petal Length)** to kluczowa cecha. Inne cechy (jak Sepal Width) mogą być w ogóle nieistotne!"
+    "Model odkry\u0142, \u017ce **D\u0142ugo\u015b\u0107 P\u0142atka (Petal Length)** to kluczowa cecha. Inne cechy (jak Sepal Width) mog\u0105 by\u0107 w og\u00f3le nieistotne!"
    ]
   },
   {
@@ -227,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- CO JEST WAŻNE DLA DRZEWA? ---\n"
+      "--- CO JEST WA\u017bNE DLA DRZEWA? ---\n"
      ]
     },
     {
@@ -242,7 +249,7 @@
     }
    ],
    "source": [
-    "# Sprawdźmy to matematycznie - Feature Importance\n",
+    "# Sprawd\u017amy to matematycznie - Feature Importance\n",
     "import seaborn as sns\n",
     "\n",
     "waznosc_cech = pd.DataFrame({\n",
@@ -250,8 +257,8 @@
     "    'Waznosc': model.feature_importances_\n",
     "}).sort_values('Waznosc', ascending=False)\n",
     "\n",
-    "print(\"--- CO JEST WAŻNE DLA DRZEWA? ---\")\n",
-    "# POPRAWKA: Dodaliśmy hue='Cecha' i legend=False\n",
+    "print(\"--- CO JEST WA\u017bNE DLA DRZEWA? ---\")\n",
+    "# POPRAWKA: Dodali\u015bmy hue='Cecha' i legend=False\n",
     "sns.barplot(x='Waznosc', y='Cecha', data=waznosc_cech, hue='Cecha', legend=False, palette='viridis')\n",
     "\n",
     "plt.title(\"Ranking Cech\")\n",
@@ -263,18 +270,18 @@
    "id": "3d2f54d0",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Siła prostoty i jej słabość\n",
+    "## \ud83e\udde0 Podsumowanie: Si\u0142a prostoty i jej s\u0142abo\u015b\u0107\n",
     "\n",
-    "Dlaczego nie używamy samych Drzew, skoro są tak genialnie proste i czytelne?\n",
+    "Dlaczego nie u\u017cywamy samych Drzew, skoro s\u0105 tak genialnie proste i czytelne?\n",
     "\n",
     "**Tu jest haczyk.**\n",
     "Pojedyncze drzewo jest bardzo **niestabilne**.\n",
-    "Wystarczy, że zmienisz jeden mały szczegół w danych treningowych, a cała struktura drzewa może się wywrócić do góry nogami (zmienią się pytania). Drzewa mają też tendencję do \"wkuwania na pamięć\" (Overfitting), jeśli nie ograniczymy ich głębokości.\n",
+    "Wystarczy, \u017ce zmienisz jeden ma\u0142y szczeg\u00f3\u0142 w danych treningowych, a ca\u0142a struktura drzewa mo\u017ce si\u0119 wywr\u00f3ci\u0107 do g\u00f3ry nogami (zmieni\u0105 si\u0119 pytania). Drzewa maj\u0105 te\u017c tendencj\u0119 do \"wkuwania na pami\u0119\u0107\" (Overfitting), je\u015bli nie ograniczymy ich g\u0142\u0119boko\u015bci.\n",
     "\n",
-    "**Rozwiązanie? Las.**\n",
+    "**Rozwi\u0105zanie? Las.**\n",
     "W nowoczesnym ML rzadko sadzimy jedno drzewo. Sadzimy ich 100 albo 1000.\n",
-    "Każde drzewo uczy się na trochę innym fragmencie danych. Potem robimy głosowanie.\n",
-    "Tak powstaje **Random Forest (Las Losowy)** – jeden z najpotężniejszych algorytmów świata, którego \"ojcem\" jest właśnie to proste drzewko."
+    "Ka\u017cde drzewo uczy si\u0119 na troch\u0119 innym fragmencie danych. Potem robimy g\u0142osowanie.\n",
+    "Tak powstaje **Random Forest (Las Losowy)** \u2013 jeden z najpot\u0119\u017cniejszych algorytm\u00f3w \u015bwiata, kt\u00f3rego \"ojcem\" jest w\u0142a\u015bnie to proste drzewko."
    ]
   }
  ],
