--- a/11_Embeddings_Vector_Space.ipynb
+++ b/11_Embeddings_Vector_Space.ipynb
@@ -2,28 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/11_Embeddings_Vector_Space.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a5d1a6b",
    "metadata": {},
    "source": [
-    "# 🔢 Tokenizacja i Embeddings (Jak matematyka widzi słowa?)\n",
+    "# \ud83d\udd22 Tokenizacja i Embeddings (Jak matematyka widzi s\u0142owa?)\n",
     "\n",
-    "Komputery są świetne w liczeniu, ale beznadziejne w czytaniu.\n",
-    "Nie rozumieją słowa \"Król\". Widzą tylko ciąg zer i jedynek.\n",
+    "Komputery s\u0105 \u015bwietne w liczeniu, ale beznadziejne w czytaniu.\n",
+    "Nie rozumiej\u0105 s\u0142owa \"Kr\u00f3l\". Widz\u0105 tylko ci\u0105g zer i jedynek.\n",
     "\n",
-    "Jak zamienić słowa na liczby, żeby zachować ich **znaczenie**?\n",
+    "Jak zamieni\u0107 s\u0142owa na liczby, \u017ceby zachowa\u0107 ich **znaczenie**?\n",
     "\n",
-    "1.  **Podejście Stare (One-Hot / Bag of Words):**\n",
-    "    *   Jabłko = [1, 0, 0]\n",
+    "1.  **Podej\u015bcie Stare (One-Hot / Bag of Words):**\n",
+    "    *   Jab\u0142ko = [1, 0, 0]\n",
     "    *   Gruszka = [0, 1, 0]\n",
-    "    *   **Problem:** Dla komputera te dwa owoce są tak samo różne, jak Jabłko i Samochód. Nie widzi podobieństwa.\n",
+    "    *   **Problem:** Dla komputera te dwa owoce s\u0105 tak samo r\u00f3\u017cne, jak Jab\u0142ko i Samoch\u00f3d. Nie widzi podobie\u0144stwa.\n",
     "\n",
-    "2.  **Podejście Nowe (Embeddings / Wektory):**\n",
-    "    *   Każde słowo to punkt na mapie (współrzędne).\n",
-    "    *   Słowa o podobnym znaczeniu leżą **blisko siebie**.\n",
-    "    *   Możemy na nich robić matematykę!\n",
+    "2.  **Podej\u015bcie Nowe (Embeddings / Wektory):**\n",
+    "    *   Ka\u017cde s\u0142owo to punkt na mapie (wsp\u00f3\u0142rz\u0119dne).\n",
+    "    *   S\u0142owa o podobnym znaczeniu le\u017c\u0105 **blisko siebie**.\n",
+    "    *   Mo\u017cemy na nich robi\u0107 matematyk\u0119!\n",
     "\n",
-    "W tym notatniku zrobimy symulację \"Mózgu AI\" w uproszczeniu (2D), żeby zobaczyć słynne równanie:\n",
-    "$$ Król - Mężczyzna + Kobieta = ? $$"
+    "W tym notatniku zrobimy symulacj\u0119 \"M\u00f3zgu AI\" w uproszczeniu (2D), \u017ceby zobaczy\u0107 s\u0142ynne r\u00f3wnanie:\n",
+    "$$ Kr\u00f3l - M\u0119\u017cczyzna + Kobieta = ? $$"
    ]
   },
   {
@@ -36,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- NASZA PRZESTRZEŃ WEKTOROWA ---\n"
+      "--- NASZA PRZESTRZE\u0143 WEKTOROWA ---\n"
      ]
     },
     {
@@ -60,8 +67,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Oś_Statusu</th>\n",
-       "      <th>Oś_Płci</th>\n",
+       "      <th>O\u015b_Statusu</th>\n",
+       "      <th>O\u015b_P\u0142ci</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -100,7 +107,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        Oś_Statusu  Oś_Płci\n",
+       "        O\u015b_Statusu  O\u015b_P\u0142ci\n",
        "Man            0.1      0.1\n",
        "Woman          0.1      0.9\n",
        "King           0.9      0.1\n",
@@ -119,27 +126,27 @@
     "import numpy as np\n",
     "\n",
     "# 1. SYMULACJA EMBEDDINGS (Wektory 2D)\n",
-    "# W prawdziwym GPT wektor ma np. 1536 wymiarów. My zrobimy 2, żeby dało się to narysować.\n",
-    "# Oś X: \"Status Społeczny\" (0 = Zwykły, 1 = Królewski)\n",
-    "# Oś Y: \"Płeć\" (0 = Męska, 1 = Żeńska)\n",
+    "# W prawdziwym GPT wektor ma np. 1536 wymiar\u00f3w. My zrobimy 2, \u017ceby da\u0142o si\u0119 to narysowa\u0107.\n",
+    "# O\u015b X: \"Status Spo\u0142eczny\" (0 = Zwyk\u0142y, 1 = Kr\u00f3lewski)\n",
+    "# O\u015b Y: \"P\u0142e\u0107\" (0 = M\u0119ska, 1 = \u017be\u0144ska)\n",
     "\n",
     "word_embeddings = {\n",
-    "    # Słowa \"Ludzkie\"\n",
+    "    # S\u0142owa \"Ludzkie\"\n",
     "    \"Man\":      np.array([0.1, 0.1]),\n",
     "    \"Woman\":    np.array([0.1, 0.9]),\n",
     "    \"King\":     np.array([0.9, 0.1]),\n",
     "    \"Queen\":    np.array([0.9, 0.9]),\n",
     "    \n",
-    "    # Słowa \"Owocowe\" (Zupełnie inna kategoria)\n",
+    "    # S\u0142owa \"Owocowe\" (Zupe\u0142nie inna kategoria)\n",
     "    \"Apple\":    np.array([-0.5, 0.4]),\n",
     "    \"Orange\":   np.array([-0.5, 0.6]),\n",
     "}\n",
     "\n",
-    "# Zamieńmy to na DataFrame dla wygody\n",
+    "# Zamie\u0144my to na DataFrame dla wygody\n",
     "df = pd.DataFrame(word_embeddings).T\n",
-    "df.columns = ['Oś_Statusu', 'Oś_Płci']\n",
+    "df.columns = ['O\u015b_Statusu', 'O\u015b_P\u0142ci']\n",
     "\n",
-    "print(\"--- NASZA PRZESTRZEŃ WEKTOROWA ---\")\n",
+    "print(\"--- NASZA PRZESTRZE\u0143 WEKTOROWA ---\")\n",
     "display(df)"
    ]
   },
@@ -148,11 +155,11 @@
    "id": "666a442b",
    "metadata": {},
    "source": [
-    "## Wizualizacja: Mapa Znaczeń\n",
+    "## Wizualizacja: Mapa Znacze\u0144\n",
     "\n",
-    "Zobaczmy, gdzie leżą słowa.\n",
-    "Zauważysz, że \"Jabłko\" i \"Pomarańcza\" są blisko siebie (klaster owoców), a ludzie są osobno.\n",
-    "To właśnie jest **Semantic Search** (Wyszukiwanie Semantyczne). Gdy szukasz \"Owoce\", Google szuka wektorów w tamtej okolicy."
+    "Zobaczmy, gdzie le\u017c\u0105 s\u0142owa.\n",
+    "Zauwa\u017cysz, \u017ce \"Jab\u0142ko\" i \"Pomara\u0144cza\" s\u0105 blisko siebie (klaster owoc\u00f3w), a ludzie s\u0105 osobno.\n",
+    "To w\u0142a\u015bnie jest **Semantic Search** (Wyszukiwanie Semantyczne). Gdy szukasz \"Owoce\", Google szuka wektor\u00f3w w tamtej okolicy."
    ]
   },
   {
@@ -173,17 +180,17 @@
     }
    ],
    "source": [
-    "# Rysujemy mapę słów\n",
+    "# Rysujemy map\u0119 s\u0142\u00f3w\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(df['Oś_Statusu'], df['Oś_Płci'], s=100, c='blue')\n",
+    "plt.scatter(df['O\u015b_Statusu'], df['O\u015b_P\u0142ci'], s=100, c='blue')\n",
     "\n",
     "# Dodajemy podpisy\n",
     "for word, pos in word_embeddings.items():\n",
     "    plt.text(pos[0]+0.02, pos[1]+0.02, word, fontsize=12)\n",
     "\n",
-    "plt.title(\"Przestrzeń Wektorowa (Gdzie leżą słowa?)\")\n",
-    "plt.xlabel(\"Status (Biedny -> Królewski)\")\n",
-    "plt.ylabel(\"Płeć (Męska -> Żeńska)\")\n",
+    "plt.title(\"Przestrze\u0144 Wektorowa (Gdzie le\u017c\u0105 s\u0142owa?)\")\n",
+    "plt.xlabel(\"Status (Biedny -> Kr\u00f3lewski)\")\n",
+    "plt.ylabel(\"P\u0142e\u0107 (M\u0119ska -> \u017be\u0144ska)\")\n",
     "plt.grid(True)\n",
     "plt.axhline(0, color='black', linewidth=0.5)\n",
     "plt.axvline(0, color='black', linewidth=0.5)\n",
@@ -195,16 +202,16 @@
    "id": "c796f621",
    "metadata": {},
    "source": [
-    "## Matematyka na Słowach (Algebra Liniowa)\n",
+    "## Matematyka na S\u0142owach (Algebra Liniowa)\n",
     "\n",
-    "To jest najciekawszy moment. Skoro słowa to liczby (współrzędne), to możemy je **dodawać i odejmować**.\n",
+    "To jest najciekawszy moment. Skoro s\u0142owa to liczby (wsp\u00f3\u0142rz\u0119dne), to mo\u017cemy je **dodawa\u0107 i odejmowa\u0107**.\n",
     "\n",
-    "Sprawdźmy słynne równanie:\n",
-    "1.  Bierzemy wektor **Króla** (`King`).\n",
-    "2.  Odejmujemy pierwiastek \"Męskości\" (`Man`).\n",
-    "3.  Dodajemy pierwiastek \"Żeńskości\" (`Woman`).\n",
+    "Sprawd\u017amy s\u0142ynne r\u00f3wnanie:\n",
+    "1.  Bierzemy wektor **Kr\u00f3la** (`King`).\n",
+    "2.  Odejmujemy pierwiastek \"M\u0119sko\u015bci\" (`Man`).\n",
+    "3.  Dodajemy pierwiastek \"\u017be\u0144sko\u015bci\" (`Woman`).\n",
     "\n",
-    "Co wyjdzie? Czy komputer \"wymyśli\" słowo Królowa?"
+    "Co wyjdzie? Czy komputer \"wymy\u015bli\" s\u0142owo Kr\u00f3lowa?"
    ]
   },
   {
@@ -219,29 +226,29 @@
      "text": [
       "Wektor wynikowy: [0.9 0.9]\n",
       "----------------------------------------\n",
-      "Równanie: King - Man + Woman = ???\n",
-      "Odpowiedź komputera: Queen\n",
-      "Dystans (błąd): 0.0\n",
+      "R\u00f3wnanie: King - Man + Woman = ???\n",
+      "Odpowied\u017a komputera: Queen\n",
+      "Dystans (b\u0142\u0105d): 0.0\n",
       "----------------------------------------\n",
-      "✅ SUKCES! Matematyka zadziałała idealnie.\n"
+      "\u2705 SUKCES! Matematyka zadzia\u0142a\u0142a idealnie.\n"
      ]
     }
    ],
    "source": [
-    "# 1. Wykonujemy operację matematyczną\n",
+    "# 1. Wykonujemy operacj\u0119 matematyczn\u0105\n",
     "wynik_wektora = word_embeddings[\"King\"] - word_embeddings[\"Man\"] + word_embeddings[\"Woman\"]\n",
     "\n",
     "print(f\"Wektor wynikowy: {wynik_wektora}\")\n",
     "\n",
-    "# 2. Szukamy, jakie słowo leży najbliżej tego wyniku\n",
-    "# (Obliczamy odległość euklidesową od wyniku do wszystkich innych słów)\n",
+    "# 2. Szukamy, jakie s\u0142owo le\u017cy najbli\u017cej tego wyniku\n",
+    "# (Obliczamy odleg\u0142o\u015b\u0107 euklidesow\u0105 od wyniku do wszystkich innych s\u0142\u00f3w)\n",
     "\n",
     "def find_closest_word(vec):\n",
     "    min_dist = float('inf')\n",
     "    best_word = None\n",
     "    \n",
     "    for word, features in word_embeddings.items():\n",
-    "        # Pomijamy słowa składowe (żeby nie wyszło nam, że King to King)\n",
+    "        # Pomijamy s\u0142owa sk\u0142adowe (\u017ceby nie wysz\u0142o nam, \u017ce King to King)\n",
     "        if word in [\"King\", \"Man\", \"Woman\"]:\n",
     "            continue\n",
     "            \n",
@@ -257,15 +264,15 @@
     "najblizsze_slowo, dystans = find_closest_word(wynik_wektora)\n",
     "\n",
     "print(\"-\" * 40)\n",
-    "print(f\"Równanie: King - Man + Woman = ???\")\n",
-    "print(f\"Odpowiedź komputera: {najblizsze_slowo}\")\n",
-    "print(f\"Dystans (błąd): {dystans}\")\n",
+    "print(f\"R\u00f3wnanie: King - Man + Woman = ???\")\n",
+    "print(f\"Odpowied\u017a komputera: {najblizsze_slowo}\")\n",
+    "print(f\"Dystans (b\u0142\u0105d): {dystans}\")\n",
     "print(\"-\" * 40)\n",
     "\n",
     "if dystans < 0.1:\n",
-    "    print(\"✅ SUKCES! Matematyka zadziałała idealnie.\")\n",
+    "    print(\"\u2705 SUKCES! Matematyka zadzia\u0142a\u0142a idealnie.\")\n",
     "else:\n",
-    "    print(\"❌ Coś poszło nie tak.\")"
+    "    print(\"\u274c Co\u015b posz\u0142o nie tak.\")"
    ]
   },
   {
@@ -273,19 +280,19 @@
    "id": "1b1bfc3e",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Jak myśli ChatGPT?\n",
+    "## \ud83e\udde0 Podsumowanie: Jak my\u015bli ChatGPT?\n",
     "\n",
-    "To, co zrobiliśmy powyżej na 2 wymiarach, ChatGPT robi na **1536 lub więcej wymiarach**.\n",
+    "To, co zrobili\u015bmy powy\u017cej na 2 wymiarach, ChatGPT robi na **1536 lub wi\u0119cej wymiarach**.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Model językowy tak naprawdę nie \"wie\", co to jest Królowa. On nie ma definicji w encyklopedii.\n",
-    "On po prostu widzi, że w gigantycznej przestrzeni liczb, punkt, który powstaje z przesunięcia `King` o wektor płci, ląduje idealnie w miejscu, gdzie znajduje się etykieta `Queen`.\n",
+    "Model j\u0119zykowy tak naprawd\u0119 nie \"wie\", co to jest Kr\u00f3lowa. On nie ma definicji w encyklopedii.\n",
+    "On po prostu widzi, \u017ce w gigantycznej przestrzeni liczb, punkt, kt\u00f3ry powstaje z przesuni\u0119cia `King` o wektor p\u0142ci, l\u0105duje idealnie w miejscu, gdzie znajduje si\u0119 etykieta `Queen`.\n",
     "\n",
-    "**Dlaczego to jest ważne dla Ciebie?**\n",
-    "Tak działają bazy wektorowe (Pinecone, Weaviate) i RAG.\n",
-    "1.  Zamieniasz pytanie użytkownika na wektor.\n",
+    "**Dlaczego to jest wa\u017cne dla Ciebie?**\n",
+    "Tak dzia\u0142aj\u0105 bazy wektorowe (Pinecone, Weaviate) i RAG.\n",
+    "1.  Zamieniasz pytanie u\u017cytkownika na wektor.\n",
     "2.  Zamieniasz swoje pliki PDF na wektory.\n",
-    "3.  Komputer szuka, który fragment PDF leży \"najbliżej\" pytania na mapie (nawet jeśli nie używa tych samych słów!)."
+    "3.  Komputer szuka, kt\u00f3ry fragment PDF le\u017cy \"najbli\u017cej\" pytania na mapie (nawet je\u015bli nie u\u017cywa tych samych s\u0142\u00f3w!)."
    ]
   }
  ],
