--- a/12_LLM_Temperature.ipynb
+++ b/12_LLM_Temperature.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/12_LLM_Temperature.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32017d9f",
    "metadata": {},
    "source": [
-    "# 🌡️ Temperatura w LLM (Odwaga vs Precyzja)\n",
+    "# \ud83c\udf21\ufe0f Temperatura w LLM (Odwaga vs Precyzja)\n",
     "\n",
-    "Kiedy używasz API OpenAI lub lokalnych modeli, \"Temperature\" to najważniejszy suwak.\n",
-    "Często słyszysz:\n",
+    "Kiedy u\u017cywasz API OpenAI lub lokalnych modeli, \"Temperature\" to najwa\u017cniejszy suwak.\n",
+    "Cz\u0119sto s\u0142yszysz:\n",
     "*   *Do kodowania ustaw T=0.*\n",
     "*   *Do pisania wierszy ustaw T=0.8.*\n",
     "\n",
     "Dlaczego?\n",
     "\n",
-    "Model na wyjściu produkuje tzw. **Logity** (surowe punkty dla każdego słowa).\n",
-    "Temperatura to dzielnik w równaniu matematycznym (Softmax), który zmienia te punkty:\n",
-    "1.  **Niska Temperatura (<1):** Wyostrza różnice. Faworyt bierze wszystko. (Pewność siebie).\n",
-    "2.  **Wysoka Temperatura (>1):** Spłaszcza różnice. Słabe słowa zyskują szansę. (Kreatywność / Chaos).\n",
+    "Model na wyj\u015bciu produkuje tzw. **Logity** (surowe punkty dla ka\u017cdego s\u0142owa).\n",
+    "Temperatura to dzielnik w r\u00f3wnaniu matematycznym (Softmax), kt\u00f3ry zmienia te punkty:\n",
+    "1.  **Niska Temperatura (<1):** Wyostrza r\u00f3\u017cnice. Faworyt bierze wszystko. (Pewno\u015b\u0107 siebie).\n",
+    "2.  **Wysoka Temperatura (>1):** Sp\u0142aszcza r\u00f3\u017cnice. S\u0142abe s\u0142owa zyskuj\u0105 szans\u0119. (Kreatywno\u015b\u0107 / Chaos).\n",
     "\n",
-    "Zrobimy symulację tego mechanizmu."
+    "Zrobimy symulacj\u0119 tego mechanizmu."
    ]
   },
   {
@@ -47,14 +54,14 @@
     "import seaborn as sns\n",
     "\n",
     "# 1. SYMULACJA SYTUACJI\n",
-    "# Model kończy zdanie: \"Niebo jest...\"\n",
-    "# Mamy 4 kandydatów z surowymi punktami (Logits):\n",
+    "# Model ko\u0144czy zdanie: \"Niebo jest...\"\n",
+    "# Mamy 4 kandydat\u00f3w z surowymi punktami (Logits):\n",
     "slowa = ['Niebieskie', 'Szare', 'Ciemne', 'Zielone']\n",
     "logits = np.array([10.0, 8.0, 4.0, 1.0]) \n",
     "\n",
-    "# Zauważ:\n",
+    "# Zauwa\u017c:\n",
     "# \"Niebieskie\" ma 10 pkt (Faworyt)\n",
-    "# \"Zielone\" ma 1 pkt (Bzdura, ale czasem występuje w piosenkach)\n",
+    "# \"Zielone\" ma 1 pkt (Bzdura, ale czasem wyst\u0119puje w piosenkach)\n",
     "\n",
     "print(\"--- SUROWE PUNKTY (LOGITS) ---\")\n",
     "for s, l in zip(slowa, logits):\n",
@@ -68,17 +75,17 @@
    "source": [
     "## Matematyka Temperatury (Softmax)\n",
     "\n",
-    "Wzór na prawdopodobieństwo z temperaturą ($T$) wygląda tak:\n",
+    "Wz\u00f3r na prawdopodobie\u0144stwo z temperatur\u0105 ($T$) wygl\u0105da tak:\n",
     "$$ P_i = \\frac{e^{logit_i / T}}{\\sum e^{logit_j / T}} $$\n",
     "\n",
-    "Brzmi strasznie, ale robi prostą rzecz:\n",
+    "Brzmi strasznie, ale robi prost\u0105 rzecz:\n",
     "1.  Dzieli punkty przez $T$.\n",
-    "2.  Potęguje wynik (to sprawia, że duże liczby stają się gigantyczne).\n",
+    "2.  Pot\u0119guje wynik (to sprawia, \u017ce du\u017ce liczby staj\u0105 si\u0119 gigantyczne).\n",
     "\n",
-    "Zdefiniujmy funkcję i zobaczmy 3 scenariusze:\n",
+    "Zdefiniujmy funkcj\u0119 i zobaczmy 3 scenariusze:\n",
     "*   **T = 0.5** (Zimny, konserwatywny)\n",
     "*   **T = 1.0** (Standardowy, neutralny)\n",
-    "*   **T = 2.0** (Gorący, szalony)"
+    "*   **T = 2.0** (Gor\u0105cy, szalony)"
    ]
   },
   {
@@ -92,27 +99,27 @@
     "    # Zabezpieczenie przed dzieleniem przez zero\n",
     "    if T <= 0: T = 0.0001\n",
     "    \n",
-    "    # KROK 1: Podziel przez temperaturę\n",
+    "    # KROK 1: Podziel przez temperatur\u0119\n",
     "    scaled_logits = logits / T\n",
     "    \n",
-    "    # KROK 2: Potęgowanie (exp) - żeby zamienić to na prawdopodobieństwa\n",
-    "    # (Odejmujemy max, żeby nie wysadzić pamięci komputera przy dużych liczbach - trick numeryczny)\n",
+    "    # KROK 2: Pot\u0119gowanie (exp) - \u017ceby zamieni\u0107 to na prawdopodobie\u0144stwa\n",
+    "    # (Odejmujemy max, \u017ceby nie wysadzi\u0107 pami\u0119ci komputera przy du\u017cych liczbach - trick numeryczny)\n",
     "    exp_logits = np.exp(scaled_logits - np.max(scaled_logits))\n",
     "    \n",
-    "    # KROK 3: Normalizacja (żeby suma wynosiła 100%)\n",
+    "    # KROK 3: Normalizacja (\u017ceby suma wynosi\u0142a 100%)\n",
     "    probabilities = exp_logits / np.sum(exp_logits)\n",
     "    return probabilities\n",
     "\n",
-    "# Obliczamy dla różnych temperatur\n",
+    "# Obliczamy dla r\u00f3\u017cnych temperatur\n",
     "probs_low = softmax_with_temperature(logits, T=0.1)  # Bardzo niska\n",
     "probs_med = softmax_with_temperature(logits, T=1.0)  # Standard\n",
     "probs_high = softmax_with_temperature(logits, T=3.0) # Bardzo wysoka\n",
     "\n",
     "# Przygotujmy dane do wykresu\n",
     "df_viz = pd.DataFrame({\n",
-    "    'Słowo': slowa * 3,\n",
-    "    'Prawdopodobieństwo': np.concatenate([probs_low, probs_med, probs_high]),\n",
-    "    'Temperatura': ['T=0.1 (Zimny)']*4 + ['T=1.0 (Baza)']*4 + ['T=3.0 (Gorący)']*4\n",
+    "    'S\u0142owo': slowa * 3,\n",
+    "    'Prawdopodobie\u0144stwo': np.concatenate([probs_low, probs_med, probs_high]),\n",
+    "    'Temperatura': ['T=0.1 (Zimny)']*4 + ['T=1.0 (Baza)']*4 + ['T=3.0 (Gor\u0105cy)']*4\n",
     "})"
    ]
   },
@@ -139,24 +146,24 @@
       "ANALIZA:\n",
       "Przy T=0.1 szansa na 'Niebieskie': 100.00% (Prawie pewne)\n",
       "Przy T=3.0 szansa na 'Niebieskie': 58.87% (Ledwo wygrywa)\n",
-      "Przy T=3.0 szansa na 'Zielone':    2.93% (Nagle możliwe!)\n"
+      "Przy T=3.0 szansa na 'Zielone':    2.93% (Nagle mo\u017cliwe!)\n"
      ]
     }
    ],
    "source": [
-    "# Rysujemy wykresy porównawcze\n",
+    "# Rysujemy wykresy por\u00f3wnawcze\n",
     "plt.figure(figsize=(14, 6))\n",
-    "sns.barplot(data=df_viz, x='Słowo', y='Prawdopodobieństwo', hue='Temperatura', palette='hot')\n",
+    "sns.barplot(data=df_viz, x='S\u0142owo', y='Prawdopodobie\u0144stwo', hue='Temperatura', palette='hot')\n",
     "\n",
-    "plt.title(\"Jak Temperatura zmienia 'odwagę' modelu?\")\n",
-    "plt.ylabel(\"Szansa wylosowania słowa\")\n",
+    "plt.title(\"Jak Temperatura zmienia 'odwag\u0119' modelu?\")\n",
+    "plt.ylabel(\"Szansa wylosowania s\u0142owa\")\n",
     "plt.grid(axis='y', alpha=0.3)\n",
     "plt.show()\n",
     "\n",
     "print(\"ANALIZA:\")\n",
     "print(f\"Przy T=0.1 szansa na 'Niebieskie': {probs_low[0]*100:.2f}% (Prawie pewne)\")\n",
     "print(f\"Przy T=3.0 szansa na 'Niebieskie': {probs_high[0]*100:.2f}% (Ledwo wygrywa)\")\n",
-    "print(f\"Przy T=3.0 szansa na 'Zielone':    {probs_high[3]*100:.2f}% (Nagle możliwe!)\")"
+    "print(f\"Przy T=3.0 szansa na 'Zielone':    {probs_high[3]*100:.2f}% (Nagle mo\u017cliwe!)\")"
    ]
   },
   {
@@ -164,21 +171,21 @@
    "id": "32cb6cbe",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Pokrętło Halucynacji\n",
+    "## \ud83e\udde0 Podsumowanie: Pokr\u0119t\u0142o Halucynacji\n",
     "\n",
-    "Spójrz na słupki powyżej.\n",
+    "Sp\u00f3jrz na s\u0142upki powy\u017cej.\n",
     "\n",
-    "1.  **T=0.1 (Ciemny słupek):** Model widzi tylko jedno rozwiązanie (\"Niebieskie\"). Reszta nie istnieje.\n",
-    "    *   *Zastosowanie:* Matematyka, Kodowanie, Wyciąganie danych z faktur. (Chcemy fakty, a nie fantazje).\n",
-    "2.  **T=3.0 (Jasny słupek):** Słupki się wyrównują. \"Niebieskie\" jest tylko trochę lepsze od bzdurnego \"Zielone\".\n",
-    "    *   *Efekt:* Model zaczyna \"gadać głupoty\" albo być \"bardzo kreatywny\" (zależy jak na to patrzysz).\n",
+    "1.  **T=0.1 (Ciemny s\u0142upek):** Model widzi tylko jedno rozwi\u0105zanie (\"Niebieskie\"). Reszta nie istnieje.\n",
+    "    *   *Zastosowanie:* Matematyka, Kodowanie, Wyci\u0105ganie danych z faktur. (Chcemy fakty, a nie fantazje).\n",
+    "2.  **T=3.0 (Jasny s\u0142upek):** S\u0142upki si\u0119 wyr\u00f3wnuj\u0105. \"Niebieskie\" jest tylko troch\u0119 lepsze od bzdurnego \"Zielone\".\n",
+    "    *   *Efekt:* Model zaczyna \"gada\u0107 g\u0142upoty\" albo by\u0107 \"bardzo kreatywny\" (zale\u017cy jak na to patrzysz).\n",
     "\n",
     "**Tu jest haczyk.**\n",
     "Wysoka temperatura nie dodaje inteligencji. Ona dodaje **szum**.\n",
-    "Jeśli model nie zna odpowiedzi, niska temperatura sprawi, że powie \"Nie wiem\" (lub powtórzy najczęstszy błąd). Wysoka temperatura sprawi, że zacznie zmyślać (halucynować) barwne historie, bo matematycznie pozwoliliśmy mu wylosować słowa, które normalnie by odrzucił.\n",
+    "Je\u015bli model nie zna odpowiedzi, niska temperatura sprawi, \u017ce powie \"Nie wiem\" (lub powt\u00f3rzy najcz\u0119stszy b\u0142\u0105d). Wysoka temperatura sprawi, \u017ce zacznie zmy\u015bla\u0107 (halucynowa\u0107) barwne historie, bo matematycznie pozwolili\u015bmy mu wylosowa\u0107 s\u0142owa, kt\u00f3re normalnie by odrzuci\u0142.\n",
     "\n",
-    "**Wniosek inżynierski:**\n",
-    "Zawsze zaczynaj od `Temperature=0`. Podnoś ją tylko wtedy, gdy czujesz, że model jest zbyt \"sztywny\" i powtarzalny."
+    "**Wniosek in\u017cynierski:**\n",
+    "Zawsze zaczynaj od `Temperature=0`. Podno\u015b j\u0105 tylko wtedy, gdy czujesz, \u017ce model jest zbyt \"sztywny\" i powtarzalny."
    ]
   }
  ],
