--- a/13_Missing_Data_Imputation.ipynb
+++ b/13_Missing_Data_Imputation.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/13_Missing_Data_Imputation.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "21c1b1e2",
    "metadata": {},
    "source": [
-    "# 🧹 Obsługa Brakujących Danych (Missing Data)\n",
+    "# \ud83e\uddf9 Obs\u0142uga Brakuj\u0105cych Danych (Missing Data)\n",
     "\n",
-    "W prawdziwym świecie dane nigdy nie są czyste. Zawsze czegoś brakuje:\n",
-    "*   Klient nie podał wieku.\n",
+    "W prawdziwym \u015bwiecie dane nigdy nie s\u0105 czyste. Zawsze czego\u015b brakuje:\n",
+    "*   Klient nie poda\u0142 wieku.\n",
     "*   Awaria czujnika temperatury.\n",
-    "*   Błąd zapisu w bazie.\n",
+    "*   B\u0142\u0105d zapisu w bazie.\n",
     "\n",
     "W Pythonie braki oznaczamy jako **NaN** (Not a Number).\n",
-    "Większość modeli ML (Regresja, Sieci Neuronowe) **wywali się**, jeśli zobaczy NaN.\n",
+    "Wi\u0119kszo\u015b\u0107 modeli ML (Regresja, Sieci Neuronowe) **wywali si\u0119**, je\u015bli zobaczy NaN.\n",
     "\n",
-    "Mamy trzy główne strategie:\n",
-    "1.  **Usuwanie:** \"Nie ma danych? Do śmieci.\" (Ryzykowne).\n",
-    "2.  **Imputacja Prosta:** \"Wstaw średnią.\" (Szybkie, ale zniekształca).\n",
-    "3.  **Imputacja Inteligentna:** \"Zgadnij wartość na podstawie grupy.\" (Najlepsze)."
+    "Mamy trzy g\u0142\u00f3wne strategie:\n",
+    "1.  **Usuwanie:** \"Nie ma danych? Do \u015bmieci.\" (Ryzykowne).\n",
+    "2.  **Imputacja Prosta:** \"Wstaw \u015bredni\u0105.\" (Szybkie, ale zniekszta\u0142ca).\n",
+    "3.  **Imputacja Inteligentna:** \"Zgadnij warto\u015b\u0107 na podstawie grupy.\" (Najlepsze)."
    ]
   },
   {
@@ -31,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- ORYGINAŁ (Zauważ NaN) ---\n"
+      "--- ORYGINA\u0141 (Zauwa\u017c NaN) ---\n"
      ]
     },
     {
@@ -126,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Ile braków w każdej kolumnie?\n",
+      "Ile brak\u00f3w w ka\u017cdej kolumnie?\n",
       "Stanowisko    0\n",
       "Wiek          2\n",
       "Pensja        2\n",
@@ -140,7 +147,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# 1. TWORZYMY BRUDNE DANE (Symulacja HR)\n",
-    "# Mamy pracowników. Niektórzy nie podali WIEKU, inni PENSJI.\n",
+    "# Mamy pracownik\u00f3w. Niekt\u00f3rzy nie podali WIEKU, inni PENSJI.\n",
     "data = {\n",
     "    'Stanowisko': ['Junior', 'Senior', 'Junior', 'Senior', 'Junior', 'Senior', 'Boss'],\n",
     "    'Wiek':       [22,       45,       np.nan,   50,       23,       np.nan,   55],\n",
@@ -149,11 +156,11 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "print(\"--- ORYGINAŁ (Zauważ NaN) ---\")\n",
+    "print(\"--- ORYGINA\u0141 (Zauwa\u017c NaN) ---\")\n",
     "display(df)\n",
     "\n",
-    "# Sprawdźmy, ile dokładnie brakuje\n",
-    "print(\"\\nIle braków w każdej kolumnie?\")\n",
+    "# Sprawd\u017amy, ile dok\u0142adnie brakuje\n",
+    "print(\"\\nIle brak\u00f3w w ka\u017cdej kolumnie?\")\n",
     "print(df.isnull().sum())"
    ]
   },
@@ -164,8 +171,8 @@
    "source": [
     "## Metoda 1: Usuwanie (The Nuclear Option)\n",
     "\n",
-    "Najprostsze podejście: `dropna()`.\n",
-    "Usuwamy każdy wiersz, który ma chociaż jedną dziurę."
+    "Najprostsze podej\u015bcie: `dropna()`.\n",
+    "Usuwamy ka\u017cdy wiersz, kt\u00f3ry ma chocia\u017c jedn\u0105 dziur\u0119."
    ]
   },
   {
@@ -179,7 +186,7 @@
      "output_type": "stream",
      "text": [
       "Oryginalny rozmiar: (7, 3)\n",
-      "Po usunięciu braków: (3, 3)\n",
+      "Po usuni\u0119ciu brak\u00f3w: (3, 3)\n",
       "------------------------------\n",
       "--- WYNIK ---\n"
      ]
@@ -248,8 +255,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "WNIOSEK: Straciliśmy prawie połowę danych! (3 z 7 wierszy).\n",
-      "Jeśli masz mało danych, to samobójstwo.\n"
+      "WNIOSEK: Stracili\u015bmy prawie po\u0142ow\u0119 danych! (3 z 7 wierszy).\n",
+      "Je\u015bli masz ma\u0142o danych, to samob\u00f3jstwo.\n"
      ]
     }
    ],
@@ -257,14 +264,14 @@
     "df_dropped = df.dropna()\n",
     "\n",
     "print(f\"Oryginalny rozmiar: {df.shape}\")\n",
-    "print(f\"Po usunięciu braków: {df_dropped.shape}\")\n",
+    "print(f\"Po usuni\u0119ciu brak\u00f3w: {df_dropped.shape}\")\n",
     "print(\"-\" * 30)\n",
     "\n",
     "print(\"--- WYNIK ---\")\n",
     "display(df_dropped)\n",
     "\n",
-    "print(\"\\nWNIOSEK: Straciliśmy prawie połowę danych! (3 z 7 wierszy).\")\n",
-    "print(\"Jeśli masz mało danych, to samobójstwo.\")"
+    "print(\"\\nWNIOSEK: Stracili\u015bmy prawie po\u0142ow\u0119 danych! (3 z 7 wierszy).\")\n",
+    "print(\"Je\u015bli masz ma\u0142o danych, to samob\u00f3jstwo.\")"
    ]
   },
   {
@@ -272,14 +279,14 @@
    "id": "8b2507f4",
    "metadata": {},
    "source": [
-    "## Metoda 2: Prosta Imputacja (Średnia)\n",
+    "## Metoda 2: Prosta Imputacja (\u015arednia)\n",
     "\n",
-    "Zamiast usuwać, wstawmy średnią z całej kolumny.\n",
-    "Użyjemy do tego `SimpleImputer` z biblioteki Scikit-Learn.\n",
+    "Zamiast usuwa\u0107, wstawmy \u015bredni\u0105 z ca\u0142ej kolumny.\n",
+    "U\u017cyjemy do tego `SimpleImputer` z biblioteki Scikit-Learn.\n",
     "\n",
     "**Problem:**\n",
-    "Średnia pensja w firmie to np. 10 000.\n",
-    "Jeśli wstawimy tę liczbę Juniorowi (który zarabia 4000), to sztucznie go \"wzbogacimy\". Model zgłupieje."
+    "\u015arednia pensja w firmie to np. 10 000.\n",
+    "Je\u015bli wstawimy t\u0119 liczb\u0119 Juniorowi (kt\u00f3ry zarabia 4000), to sztucznie go \"wzbogacimy\". Model zg\u0142upieje."
    ]
   },
   {
@@ -292,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- IMPUTACJA ŚREDNIĄ ---\n"
+      "--- IMPUTACJA \u015aREDNI\u0104 ---\n"
      ]
     },
     {
@@ -386,26 +393,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spójrz na wiersz 4 (Junior). Dostał pensję ok. 11 500.\n",
-      "To nie ma sensu! Juniorzy tyle nie zarabiają.\n"
+      "Sp\u00f3jrz na wiersz 4 (Junior). Dosta\u0142 pensj\u0119 ok. 11 500.\n",
+      "To nie ma sensu! Juniorzy tyle nie zarabiaj\u0105.\n"
      ]
     }
    ],
    "source": [
-    "# Tworzymy Imputer (Strategia: Średnia)\n",
+    "# Tworzymy Imputer (Strategia: \u015arednia)\n",
     "imputer = SimpleImputer(strategy='mean')\n",
     "\n",
-    "# Kopiujemy dane, żeby nie zepsuć oryginału\n",
+    "# Kopiujemy dane, \u017ceby nie zepsu\u0107 orygina\u0142u\n",
     "df_mean = df.copy()\n",
     "\n",
-    "# Wybieramy tylko kolumny liczbowe (Stanowiska nie da się uśrednić matematycznie)\n",
+    "# Wybieramy tylko kolumny liczbowe (Stanowiska nie da si\u0119 u\u015bredni\u0107 matematycznie)\n",
     "cols_num = ['Wiek', 'Pensja']\n",
     "df_mean[cols_num] = imputer.fit_transform(df[cols_num])\n",
     "\n",
-    "print(\"--- IMPUTACJA ŚREDNIĄ ---\")\n",
+    "print(\"--- IMPUTACJA \u015aREDNI\u0104 ---\")\n",
     "display(df_mean)\n",
-    "print(\"Spójrz na wiersz 4 (Junior). Dostał pensję ok. 11 500.\")\n",
-    "print(\"To nie ma sensu! Juniorzy tyle nie zarabiają.\")"
+    "print(\"Sp\u00f3jrz na wiersz 4 (Junior). Dosta\u0142 pensj\u0119 ok. 11 500.\")\n",
+    "print(\"To nie ma sensu! Juniorzy tyle nie zarabiaj\u0105.\")"
    ]
   },
   {
@@ -415,12 +422,12 @@
    "source": [
     "## Metoda 3: Imputacja Kontekstowa (Grupowanie)\n",
     "\n",
-    "To jest **sprytne podejście**.\n",
-    "Zamiast brać średnią wszystkich ludzi, weźmy:\n",
-    "*   Dla brakującego wieku Juniora -> Średnią wieku **innych Juniorów**.\n",
-    "*   Dla brakującej pensji Seniora -> Średnią pensję **innych Seniorów**.\n",
+    "To jest **sprytne podej\u015bcie**.\n",
+    "Zamiast bra\u0107 \u015bredni\u0105 wszystkich ludzi, we\u017amy:\n",
+    "*   Dla brakuj\u0105cego wieku Juniora -> \u015aredni\u0105 wieku **innych Junior\u00f3w**.\n",
+    "*   Dla brakuj\u0105cej pensji Seniora -> \u015aredni\u0105 pensj\u0119 **innych Senior\u00f3w**.\n",
     "\n",
-    "Użyjemy do tego magii Pandasa: `groupby() + transform()`."
+    "U\u017cyjemy do tego magii Pandasa: `groupby() + transform()`."
    ]
   },
   {
@@ -528,20 +535,20 @@
      "output_type": "stream",
      "text": [
       "ANALIZA:\n",
-      "- Junior (wiersz 4) dostał pensję 3750 (średnia Juniorów). Bardzo realne!\n",
-      "- Senior (wiersz 3) dostał pensję 12500 (średnia Seniorów). Też realne.\n"
+      "- Junior (wiersz 4) dosta\u0142 pensj\u0119 3750 (\u015brednia Junior\u00f3w). Bardzo realne!\n",
+      "- Senior (wiersz 3) dosta\u0142 pensj\u0119 12500 (\u015brednia Senior\u00f3w). Te\u017c realne.\n"
      ]
     }
    ],
    "source": [
     "df_smart = df.copy()\n",
     "\n",
-    "# 1. Wypełniamy PENSJĘ średnią w ramach STANOWISKA\n",
+    "# 1. Wype\u0142niamy PENSJ\u0118 \u015bredni\u0105 w ramach STANOWISKA\n",
     "df_smart['Pensja'] = df_smart['Pensja'].fillna(\n",
     "    df_smart.groupby('Stanowisko')['Pensja'].transform('mean')\n",
     ")\n",
     "\n",
-    "# 2. Wypełniamy WIEK średnią w ramach STANOWISKA\n",
+    "# 2. Wype\u0142niamy WIEK \u015bredni\u0105 w ramach STANOWISKA\n",
     "df_smart['Wiek'] = df_smart['Wiek'].fillna(\n",
     "    df_smart.groupby('Stanowisko')['Wiek'].transform('mean')\n",
     ")\n",
@@ -550,8 +557,8 @@
     "display(df_smart)\n",
     "\n",
     "print(\"ANALIZA:\")\n",
-    "print(\"- Junior (wiersz 4) dostał pensję 3750 (średnia Juniorów). Bardzo realne!\")\n",
-    "print(\"- Senior (wiersz 3) dostał pensję 12500 (średnia Seniorów). Też realne.\")"
+    "print(\"- Junior (wiersz 4) dosta\u0142 pensj\u0119 3750 (\u015brednia Junior\u00f3w). Bardzo realne!\")\n",
+    "print(\"- Senior (wiersz 3) dosta\u0142 pensj\u0119 12500 (\u015brednia Senior\u00f3w). Te\u017c realne.\")"
    ]
   },
   {
@@ -559,18 +566,18 @@
    "id": "08123b8f",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Nie kłam danymi\n",
+    "## \ud83e\udde0 Podsumowanie: Nie k\u0142am danymi\n",
     "\n",
-    "Dlaczego sposób łatania dziur ma znaczenie?\n",
+    "Dlaczego spos\u00f3b \u0142atania dziur ma znaczenie?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Każda imputacja to trochę **kłamstwo**. Wymyślamy dane, których nie było.\n",
-    "*   Jeśli usuniesz dane -> Wprowadzasz **Bias** (np. usuwasz tylko biednych ludzi, bo oni rzadziej podają zarobki, więc Twój model myśli, że świat jest bogaty).\n",
-    "*   Jeśli wstawisz średnią globalną -> Zabijasz różnorodność (**Variance**). Wszyscy stają się \"przeciętni\".\n",
-    "*   Jeśli użyjesz kontekstu (Grupy) -> Twoje \"kłamstwo\" jest najbardziej prawdopodobne.\n",
+    "Ka\u017cda imputacja to troch\u0119 **k\u0142amstwo**. Wymy\u015blamy dane, kt\u00f3rych nie by\u0142o.\n",
+    "*   Je\u015bli usuniesz dane -> Wprowadzasz **Bias** (np. usuwasz tylko biednych ludzi, bo oni rzadziej podaj\u0105 zarobki, wi\u0119c Tw\u00f3j model my\u015bli, \u017ce \u015bwiat jest bogaty).\n",
+    "*   Je\u015bli wstawisz \u015bredni\u0105 globaln\u0105 -> Zabijasz r\u00f3\u017cnorodno\u015b\u0107 (**Variance**). Wszyscy staj\u0105 si\u0119 \"przeci\u0119tni\".\n",
+    "*   Je\u015bli u\u017cyjesz kontekstu (Grupy) -> Twoje \"k\u0142amstwo\" jest najbardziej prawdopodobne.\n",
     "\n",
     "**Zasada AI Engineera:**\n",
-    "Zanim wpiszesz `fillna(0)` albo `dropna()`, zastanów się przez minutę: *\"Dlaczego tej wartości brakuje i co najbardziej przypomina prawdę?\"*."
+    "Zanim wpiszesz `fillna(0)` albo `dropna()`, zastan\u00f3w si\u0119 przez minut\u0119: *\"Dlaczego tej warto\u015bci brakuje i co najbardziej przypomina prawd\u0119?\"*."
    ]
   }
  ],
