--- a/14_Random_Forest_Ensemble.ipynb
+++ b/14_Random_Forest_Ensemble.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/14_Random_Forest_Ensemble.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9825ab92",
    "metadata": {},
    "source": [
-    "# 🌲 Random Forest: Siła Tłumu (Ensemble Learning)\n",
+    "# \ud83c\udf32 Random Forest: Si\u0142a T\u0142umu (Ensemble Learning)\n",
     "\n",
-    "W poprzednich lekcjach używaliśmy jednego modelu (jednego Drzewa).\n",
-    "Problem z jednym drzewem jest taki, że łatwo popada w skrajności. Jeśli dane są trochę zaszumione, drzewo wariuje.\n",
+    "W poprzednich lekcjach u\u017cywali\u015bmy jednego modelu (jednego Drzewa).\n",
+    "Problem z jednym drzewem jest taki, \u017ce \u0142atwo popada w skrajno\u015bci. Je\u015bli dane s\u0105 troch\u0119 zaszumione, drzewo wariuje.\n",
     "\n",
-    "**Rozwiązanie: Ensemble Learning (Zespoły).**\n",
-    "Zamiast pytać jednego eksperta, pytamy 100 ekspertów i robimy głosowanie.\n",
+    "**Rozwi\u0105zanie: Ensemble Learning (Zespo\u0142y).**\n",
+    "Zamiast pyta\u0107 jednego eksperta, pytamy 100 ekspert\u00f3w i robimy g\u0142osowanie.\n",
     "\n",
-    "**Random Forest (Las Losowy)** to algorytm, który:\n",
-    "1.  Tworzy 100 (lub więcej) drzew decyzyjnych.\n",
-    "2.  Każde drzewo uczy się na **innym, losowym fragmencie danych** (to się nazywa *Bootstrapping*).\n",
-    "3.  Każde drzewo widzi tylko **losowe kolumny** (nie widzi całego obrazka).\n",
-    "4.  Na koniec: **Głosowanie Większościowe**.\n",
+    "**Random Forest (Las Losowy)** to algorytm, kt\u00f3ry:\n",
+    "1.  Tworzy 100 (lub wi\u0119cej) drzew decyzyjnych.\n",
+    "2.  Ka\u017cde drzewo uczy si\u0119 na **innym, losowym fragmencie danych** (to si\u0119 nazywa *Bootstrapping*).\n",
+    "3.  Ka\u017cde drzewo widzi tylko **losowe kolumny** (nie widzi ca\u0142ego obrazka).\n",
+    "4.  Na koniec: **G\u0142osowanie Wi\u0119kszo\u015bciowe**.\n",
     "\n",
-    "Dzięki temu błędy pojedynczych drzew się niwelują."
+    "Dzi\u0119ki temu b\u0142\u0119dy pojedynczych drzew si\u0119 niweluj\u0105."
    ]
   },
   {
@@ -53,14 +60,14 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# 1. GENERUJEMY TRUDNE DANE (Księżyce - Moons)\n",
-    "# To dane nieliniowe. Prostą kreską tego nie rozdzielisz.\n",
+    "# 1. GENERUJEMY TRUDNE DANE (Ksi\u0119\u017cyce - Moons)\n",
+    "# To dane nieliniowe. Prost\u0105 kresk\u0105 tego nie rozdzielisz.\n",
     "X, y = make_moons(n_samples=300, noise=0.25, random_state=42)\n",
     "\n",
     "print(\"--- DANE TRENINGOWE ---\")\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, cmap='coolwarm', edgecolor='k', s=50)\n",
-    "plt.title(\"Dwa Księżyce (Trochę zaszumione)\")\n",
+    "plt.title(\"Dwa Ksi\u0119\u017cyce (Troch\u0119 zaszumione)\")\n",
     "plt.show()"
    ]
   },
@@ -72,8 +79,8 @@
     "## Pojedynek: Samotne Drzewo vs Las\n",
     "\n",
     "Teraz wytrenujemy dwa modele:\n",
-    "1.  **Samotne Drzewo:** Pozwolimy mu rosnąć bez ograniczeń. Zobaczysz, jak bardzo \"szarpana\" będzie jego granica decyzyjna (Overfitting).\n",
-    "2.  **Random Forest:** Zespół 100 drzew. Zobaczysz, jak gładka i płynna będzie jego decyzja."
+    "1.  **Samotne Drzewo:** Pozwolimy mu rosn\u0105\u0107 bez ogranicze\u0144. Zobaczysz, jak bardzo \"szarpana\" b\u0119dzie jego granica decyzyjna (Overfitting).\n",
+    "2.  **Random Forest:** Zesp\u00f3\u0142 100 drzew. Zobaczysz, jak g\u0142adka i p\u0142ynna b\u0119dzie jego decyzja."
    ]
   },
   {
@@ -94,15 +101,15 @@
     }
    ],
    "source": [
-    "# Funkcja pomocnicza do rysowania granic decyzji (Nie musisz jej analizować w 100%)\n",
+    "# Funkcja pomocnicza do rysowania granic decyzji (Nie musisz jej analizowa\u0107 w 100%)\n",
     "def plot_decision_boundary(model, X, y, title):\n",
-    "    # Tworzymy siatkę punktów (tło wykresu)\n",
+    "    # Tworzymy siatk\u0119 punkt\u00f3w (t\u0142o wykresu)\n",
     "    x_min, x_max = X[:, 0].min() - 0.5, X[:, 0].max() + 0.5\n",
     "    y_min, y_max = X[:, 1].min() - 0.5, X[:, 1].max() + 0.5\n",
     "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.02),\n",
     "                         np.arange(y_min, y_max, 0.02))\n",
     "    \n",
-    "    # Model przewiduje tło\n",
+    "    # Model przewiduje t\u0142o\n",
     "    Z = model.predict(np.c_[xx.ravel(), yy.ravel()])\n",
     "    Z = Z.reshape(xx.shape)\n",
     "    \n",
@@ -112,14 +119,14 @@
     "    plt.title(title)\n",
     "\n",
     "# --- MODEL 1: SAMOTNE DRZEWO ---\n",
-    "tree_clf = DecisionTreeClassifier(random_state=42) # Bez ograniczeń głębokości!\n",
+    "tree_clf = DecisionTreeClassifier(random_state=42) # Bez ogranicze\u0144 g\u0142\u0119boko\u015bci!\n",
     "tree_clf.fit(X, y)\n",
     "\n",
     "# --- MODEL 2: RANDOM FOREST (100 DRZEW) ---\n",
     "forest_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "forest_clf.fit(X, y)\n",
     "\n",
-    "# --- PORÓWNANIE WIZUALNE ---\n",
+    "# --- POR\u00d3WNANIE WIZUALNE ---\n",
     "plt.figure(figsize=(14, 6))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -136,19 +143,19 @@
    "id": "d554c7a3",
    "metadata": {},
    "source": [
-    "## Analiza Wykresów\n",
+    "## Analiza Wykres\u00f3w\n",
     "\n",
-    "Spójrz na obrazek powyżej.\n",
+    "Sp\u00f3jrz na obrazek powy\u017cej.\n",
     "\n",
     "1.  **Samotne Drzewo (Po lewej):**\n",
-    "    *   Widzisz te dziwne, kanciaste \"wyspy\" i wąskie paski?\n",
-    "    *   Drzewo próbuje na siłę otoczyć każdą pojedynczą niebieską kropkę, która wpadła w czerwony obszar (szum).\n",
-    "    *   To klasyczny **Overfitting**. Na nowych danych to drzewo by poległo.\n",
+    "    *   Widzisz te dziwne, kanciaste \"wyspy\" i w\u0105skie paski?\n",
+    "    *   Drzewo pr\u00f3buje na si\u0142\u0119 otoczy\u0107 ka\u017cd\u0105 pojedyncz\u0105 niebiesk\u0105 kropk\u0119, kt\u00f3ra wpad\u0142a w czerwony obszar (szum).\n",
+    "    *   To klasyczny **Overfitting**. Na nowych danych to drzewo by poleg\u0142o.\n",
     "\n",
     "2.  **Random Forest (Po prawej):**\n",
-    "    *   Granica jest gładka, zaokrąglona.\n",
-    "    *   Algorytm ignoruje pojedyncze, mylące kropki. Patrzy na **Większość**.\n",
-    "    *   To jest **Generalizacja**. Las rozumie kształt księżyca, a nie tylko położenie konkretnych kropek."
+    "    *   Granica jest g\u0142adka, zaokr\u0105glona.\n",
+    "    *   Algorytm ignoruje pojedyncze, myl\u0105ce kropki. Patrzy na **Wi\u0119kszo\u015b\u0107**.\n",
+    "    *   To jest **Generalizacja**. Las rozumie kszta\u0142t ksi\u0119\u017cyca, a nie tylko po\u0142o\u017cenie konkretnych kropek."
    ]
   },
   {
@@ -156,20 +163,20 @@
    "id": "8089a833",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Demokracja w AI\n",
+    "## \ud83e\udde0 Podsumowanie: Demokracja w AI\n",
     "\n",
     "Dlaczego Las jest lepszy od Drzewa?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Pojedyncze drzewo jest jak geniusz, który łatwo wpada w obsesję na punkcie szczegółów.\n",
+    "Pojedyncze drzewo jest jak geniusz, kt\u00f3ry \u0142atwo wpada w obsesj\u0119 na punkcie szczeg\u00f3\u0142\u00f3w.\n",
     "Las jest jak **Rada Starszych**.\n",
     "\n",
-    "W Lesie Losowym każde drzewo jest trochę \"głupsze\" (bo dostaje mniej danych i mniej kolumn do wyboru), ale jest ich dużo i są **różnorodne**.\n",
-    "*   Drzewo A mówi: \"To czerwone, bo jest na górze\".\n",
-    "*   Drzewo B mówi: \"To niebieskie, bo jest po lewej\".\n",
-    "*   Drzewo C mówi: \"To czerwone, bo...\"\n",
+    "W Lesie Losowym ka\u017cde drzewo jest troch\u0119 \"g\u0142upsze\" (bo dostaje mniej danych i mniej kolumn do wyboru), ale jest ich du\u017co i s\u0105 **r\u00f3\u017cnorodne**.\n",
+    "*   Drzewo A m\u00f3wi: \"To czerwone, bo jest na g\u00f3rze\".\n",
+    "*   Drzewo B m\u00f3wi: \"To niebieskie, bo jest po lewej\".\n",
+    "*   Drzewo C m\u00f3wi: \"To czerwone, bo...\"\n",
     "\n",
-    "Kiedy 100 drzew zagłosuje, błędy pojedynczych wariatów znikają. Zostaje czysta, statystyczna prawda. To dlatego Random Forest jest **najbezpieczniejszym wyborem** w większości projektów ML (bankowość, medycyna), gdzie nie możesz sobie pozwolić na głupie błędy."
+    "Kiedy 100 drzew zag\u0142osuje, b\u0142\u0119dy pojedynczych wariat\u00f3w znikaj\u0105. Zostaje czysta, statystyczna prawda. To dlatego Random Forest jest **najbezpieczniejszym wyborem** w wi\u0119kszo\u015bci projekt\u00f3w ML (bankowo\u015b\u0107, medycyna), gdzie nie mo\u017cesz sobie pozwoli\u0107 na g\u0142upie b\u0142\u0119dy."
    ]
   }
  ],
