--- a/15_Gradient_Descent.ipynb
+++ b/15_Gradient_Descent.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/15_Gradient_Descent.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "761d71ef",
    "metadata": {},
    "source": [
-    "# 📉 Gradient Descent: Jak maszyny się uczą?\n",
+    "# \ud83d\udcc9 Gradient Descent: Jak maszyny si\u0119 ucz\u0105?\n",
     "\n",
-    "Wyobraź sobie, że stoisz na szczycie wielkiej góry. Jest gęsta mgła. Nic nie widzisz.\n",
-    "Twoim celem jest zejście do najniższego punktu w dolinie (tam jest woda/dom/minimum błędu).\n",
+    "Wyobra\u017a sobie, \u017ce stoisz na szczycie wielkiej g\u00f3ry. Jest g\u0119sta mg\u0142a. Nic nie widzisz.\n",
+    "Twoim celem jest zej\u015bcie do najni\u017cszego punktu w dolinie (tam jest woda/dom/minimum b\u0142\u0119du).\n",
     "\n",
     "Jak to robisz?\n",
-    "1.  Badasz stopą grunt wokół siebie.\n",
-    "2.  Wyczuwasz, w którą stronę teren opada najmocniej.\n",
-    "3.  Robisz krok w tamtą stronę.\n",
-    "4.  Powtarzasz, aż teren przestanie opadać (jesteś na dnie).\n",
+    "1.  Badasz stop\u0105 grunt wok\u00f3\u0142 siebie.\n",
+    "2.  Wyczuwasz, w kt\u00f3r\u0105 stron\u0119 teren opada najmocniej.\n",
+    "3.  Robisz krok w tamt\u0105 stron\u0119.\n",
+    "4.  Powtarzasz, a\u017c teren przestanie opada\u0107 (jeste\u015b na dnie).\n",
     "\n",
-    "To jest właśnie **Gradient Descent**.\n",
+    "To jest w\u0142a\u015bnie **Gradient Descent**.\n",
     "\n",
-    "*   **Góra:** To \"Funkcja Kosztu\" (Błąd modelu). Im wyżej jesteś, tym model jest głupszy.\n",
-    "*   **Dolina:** To \"Minimum Globalne\". Tam model działa najlepiej.\n",
+    "*   **G\u00f3ra:** To \"Funkcja Kosztu\" (B\u0142\u0105d modelu). Im wy\u017cej jeste\u015b, tym model jest g\u0142upszy.\n",
+    "*   **Dolina:** To \"Minimum Globalne\". Tam model dzia\u0142a najlepiej.\n",
     "*   **Krok:** To \"Learning Rate\"."
    ]
   },
@@ -44,29 +51,29 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1. DEFINIUJEMY GÓRĘ (Funkcja matematyczna)\n",
-    "# Użyjemy prostej paraboli: y = x^2\n",
-    "# Naszym celem jest znalezienie x, dla którego y jest najmniejsze (oczywiście wiemy, że to 0, ale komputer nie wie).\n",
+    "# 1. DEFINIUJEMY G\u00d3R\u0118 (Funkcja matematyczna)\n",
+    "# U\u017cyjemy prostej paraboli: y = x^2\n",
+    "# Naszym celem jest znalezienie x, dla kt\u00f3rego y jest najmniejsze (oczywi\u015bcie wiemy, \u017ce to 0, ale komputer nie wie).\n",
     "\n",
     "def function(x):\n",
     "    return x**2\n",
     "\n",
     "def derivative(x):\n",
     "    # Pochodna z x^2 to 2x. \n",
-    "    # Pochodna mówi nam o NACHYLENIU zbocza.\n",
-    "    # Jeśli wynik jest dodatni -> zbocze rośnie (idź w lewo).\n",
-    "    # Jeśli wynik jest ujemny -> zbocze spada (idź w prawo).\n",
+    "    # Pochodna m\u00f3wi nam o NACHYLENIU zbocza.\n",
+    "    # Je\u015bli wynik jest dodatni -> zbocze ro\u015bnie (id\u017a w lewo).\n",
+    "    # Je\u015bli wynik jest ujemny -> zbocze spada (id\u017a w prawo).\n",
     "    return 2*x\n",
     "\n",
-    "# Rysujemy naszą \"dolinę\"\n",
+    "# Rysujemy nasz\u0105 \"dolin\u0119\"\n",
     "x = np.linspace(-10, 10, 100)\n",
     "y = function(x)\n",
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(x, y)\n",
-    "plt.title(\"Nasza dolina błędu (Cel: dotrzeć do 0)\")\n",
+    "plt.title(\"Nasza dolina b\u0142\u0119du (Cel: dotrze\u0107 do 0)\")\n",
     "plt.xlabel(\"Parametr modelu\")\n",
-    "plt.ylabel(\"Błąd (Koszt)\")\n",
+    "plt.ylabel(\"B\u0142\u0105d (Koszt)\")\n",
     "plt.show()"
    ]
   },
@@ -77,12 +84,12 @@
    "source": [
     "## Symulacja Schodzenia (Learning Rate)\n",
     "\n",
-    "Najważniejszym parametrem w AI jest **Learning Rate (Tempo Uczenia)**. Decyduje on o tym, jak wielki krok robimy.\n",
+    "Najwa\u017cniejszym parametrem w AI jest **Learning Rate (Tempo Uczenia)**. Decyduje on o tym, jak wielki krok robimy.\n",
     "\n",
     "Przetestujemy 3 scenariusze:\n",
-    "1.  **Mały Krok (Low LR):** Idziemy jak mrówka. Dojdziemy do celu, ale zajmie to wieki.\n",
+    "1.  **Ma\u0142y Krok (Low LR):** Idziemy jak mr\u00f3wka. Dojdziemy do celu, ale zajmie to wieki.\n",
     "2.  **Dobry Krok (Good LR):** Idziemy pewnie i szybko.\n",
-    "3.  **Wielki Krok (High LR):** Skaczemy jak szaleni. Możemy przeskoczyć dolinę i wylądować po drugiej stronie (eksplozja błędu)."
+    "3.  **Wielki Krok (High LR):** Skaczemy jak szaleni. Mo\u017cemy przeskoczy\u0107 dolin\u0119 i wyl\u0105dowa\u0107 po drugiej stronie (eksplozja b\u0142\u0119du)."
    ]
   },
   {
@@ -95,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symulacja zakończona.\n"
+      "Symulacja zako\u0144czona.\n"
      ]
     }
    ],
@@ -128,7 +135,7 @@
     "# Scenariusz 3: Za szybko (Overshooting)\n",
     "path_fast = gradient_descent(start_pos, learning_rate=0.95, n_steps=steps)\n",
     "\n",
-    "print(\"Symulacja zakończona.\")"
+    "print(\"Symulacja zako\u0144czona.\")"
    ]
   },
   {
@@ -149,13 +156,13 @@
     }
    ],
    "source": [
-    "# WIZUALIZACJA WYNIKÓW\n",
+    "# WIZUALIZACJA WYNIK\u00d3W\n",
     "fig, ax = plt.subplots(1, 3, figsize=(18, 5))\n",
     "titles = [\"Za wolno (LR=0.05)\", \"Idealnie (LR=0.2)\", \"Katastrofa (LR=0.95)\"]\n",
     "paths = [path_slow, path_good, path_fast]\n",
     "\n",
     "for i in range(3):\n",
-    "    # Rysujemy dolinę\n",
+    "    # Rysujemy dolin\u0119\n",
     "    ax[i].plot(x, y, color='gray', alpha=0.5)\n",
     "    \n",
     "    # Rysujemy kroki algorytmu\n",
@@ -175,18 +182,18 @@
    "id": "99b25eb1",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego to jest kluczowe?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego to jest kluczowe?\n",
     "\n",
-    "Spójrz na trzeci wykres (\"Katastrofa\").\n",
-    "Czerwone kropki skaczą od lewej do prawej ściany, zamiast schodzić w dół. Czasem nawet wspinają się wyżej!\n",
-    "To się nazywa **Divergence (Rozbieżność)**.\n",
+    "Sp\u00f3jrz na trzeci wykres (\"Katastrofa\").\n",
+    "Czerwone kropki skacz\u0105 od lewej do prawej \u015bciany, zamiast schodzi\u0107 w d\u00f3\u0142. Czasem nawet wspinaj\u0105 si\u0119 wy\u017cej!\n",
+    "To si\u0119 nazywa **Divergence (Rozbie\u017cno\u015b\u0107)**.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "W prawdziwym świecie, gdy trenujesz Sieć Neuronową (np. rozpoznawanie obrazów), trening trwa godziny lub dni.\n",
-    "*   Jeśli ustawisz **Learning Rate za nisko**: Model będzie się uczył miesiącami.\n",
-    "*   Jeśli ustawisz **Learning Rate za wysoko**: Model nigdy się nie nauczy, bo będzie \"przeskakiwał\" rozwiązanie.\n",
+    "W prawdziwym \u015bwiecie, gdy trenujesz Sie\u0107 Neuronow\u0105 (np. rozpoznawanie obraz\u00f3w), trening trwa godziny lub dni.\n",
+    "*   Je\u015bli ustawisz **Learning Rate za nisko**: Model b\u0119dzie si\u0119 uczy\u0142 miesi\u0105cami.\n",
+    "*   Je\u015bli ustawisz **Learning Rate za wysoko**: Model nigdy si\u0119 nie nauczy, bo b\u0119dzie \"przeskakiwa\u0142\" rozwi\u0105zanie.\n",
     "\n",
-    "To dlatego inżynierowie AI spędzają tyle czasu na dostrajaniu tego jednego parametru. To jak strojenie radia – musisz trafić idealnie w częstotliwość."
+    "To dlatego in\u017cynierowie AI sp\u0119dzaj\u0105 tyle czasu na dostrajaniu tego jednego parametru. To jak strojenie radia \u2013 musisz trafi\u0107 idealnie w cz\u0119stotliwo\u015b\u0107."
    ]
   }
  ],
