--- a/16_Neural_Network_Perceptron.ipynb
+++ b/16_Neural_Network_Perceptron.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/16_Neural_Network_Perceptron.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4357638e",
    "metadata": {},
    "source": [
-    "# 🧠 Perceptron: Pierwszy Neuron (Początki Deep Learning)\n",
+    "# \ud83e\udde0 Perceptron: Pierwszy Neuron (Pocz\u0105tki Deep Learning)\n",
     "\n",
-    "Każda, nawet najbardziej skomplikowana sieć neuronowa (jak GPT-4), składa się z milionów małych klocków zwanych **Neuronami**.\n",
+    "Ka\u017cda, nawet najbardziej skomplikowana sie\u0107 neuronowa (jak GPT-4), sk\u0142ada si\u0119 z milion\u00f3w ma\u0142ych klock\u00f3w zwanych **Neuronami**.\n",
     "\n",
-    "Jak działa biologiczny neuron?\n",
-    "1.  Odbiera sygnały od kolegów (Wejście).\n",
-    "2.  Jeśli sygnał jest wystarczająco silny, \"odpala\" impuls dalej (Aktywacja).\n",
+    "Jak dzia\u0142a biologiczny neuron?\n",
+    "1.  Odbiera sygna\u0142y od koleg\u00f3w (Wej\u015bcie).\n",
+    "2.  Je\u015bli sygna\u0142 jest wystarczaj\u0105co silny, \"odpala\" impuls dalej (Aktywacja).\n",
     "\n",
     "Matematyczny neuron (**Perceptron**) robi to samo:\n",
-    "$$ Wynik = (Wejście \\times Waga) + Bias $$\n",
+    "$$ Wynik = (Wej\u015bcie \\times Waga) + Bias $$\n",
     "\n",
-    "Jeśli wynik przekroczy próg -> Zwróć 1.\n",
-    "W przeciwnym razie -> Zwróć 0.\n",
+    "Je\u015bli wynik przekroczy pr\u00f3g -> Zwr\u00f3\u0107 1.\n",
+    "W przeciwnym razie -> Zwr\u00f3\u0107 0.\n",
     "\n",
-    "W tym notatniku nauczymy neuron logiki **AND** (czyli: \"Zwróć prawdę tylko wtedy, gdy oba wejścia są prawdziwe\")."
+    "W tym notatniku nauczymy neuron logiki **AND** (czyli: \"Zwr\u00f3\u0107 prawd\u0119 tylko wtedy, gdy oba wej\u015bcia s\u0105 prawdziwe\")."
    ]
   },
   {
@@ -33,10 +40,10 @@
      "output_type": "stream",
      "text": [
       "--- DANE TRENINGOWE (Bramka AND) ---\n",
-      "Wejście: [0 0] -> Oczekiwane: 0\n",
-      "Wejście: [0 1] -> Oczekiwane: 0\n",
-      "Wejście: [1 0] -> Oczekiwane: 0\n",
-      "Wejście: [1 1] -> Oczekiwane: 1\n"
+      "Wej\u015bcie: [0 0] -> Oczekiwane: 0\n",
+      "Wej\u015bcie: [0 1] -> Oczekiwane: 0\n",
+      "Wej\u015bcie: [1 0] -> Oczekiwane: 0\n",
+      "Wej\u015bcie: [1 1] -> Oczekiwane: 1\n"
      ]
     },
     {
@@ -55,7 +62,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 1. DANE (Logika AND)\n",
-    "# X = [Wejście 1, Wejście 2]\n",
+    "# X = [Wej\u015bcie 1, Wej\u015bcie 2]\n",
     "X = np.array([\n",
     "    [0, 0],\n",
     "    [0, 1],\n",
@@ -68,12 +75,12 @@
     "\n",
     "print(\"--- DANE TRENINGOWE (Bramka AND) ---\")\n",
     "for i in range(len(X)):\n",
-    "    print(f\"Wejście: {X[i]} -> Oczekiwane: {y[i]}\")\n",
+    "    print(f\"Wej\u015bcie: {X[i]} -> Oczekiwane: {y[i]}\")\n",
     "\n",
     "# Wizualizacja problemu\n",
     "plt.figure(figsize=(6, 5))\n",
     "plt.scatter(X[:,0], X[:,1], c=y, cmap='bwr', s=200, edgecolor='k')\n",
-    "plt.title(\"Czerwone=0, Niebieskie=1 (Musimy to rozdzielić kreską)\")\n",
+    "plt.title(\"Czerwone=0, Niebieskie=1 (Musimy to rozdzieli\u0107 kresk\u0105)\")\n",
     "plt.xlabel(\"X1\")\n",
     "plt.ylabel(\"X2\")\n",
     "plt.grid(True)\n",
@@ -85,14 +92,14 @@
    "id": "a0ced24f",
    "metadata": {},
    "source": [
-    "## Budujemy Mózg od Zera\n",
+    "## Budujemy M\u00f3zg od Zera\n",
     "\n",
-    "Napiszemy klasę `Perceptron`. Będzie miała dwie metody:\n",
-    "1.  `predict()`: Policz sumę ważoną i powiedz 0 lub 1.\n",
-    "2.  `train()`: Jeśli się pomyliłeś, popraw wagi (używając logiki Gradient Descent).\n",
+    "Napiszemy klas\u0119 `Perceptron`. B\u0119dzie mia\u0142a dwie metody:\n",
+    "1.  `predict()`: Policz sum\u0119 wa\u017con\u0105 i powiedz 0 lub 1.\n",
+    "2.  `train()`: Je\u015bli si\u0119 pomyli\u0142e\u015b, popraw wagi (u\u017cywaj\u0105c logiki Gradient Descent).\n",
     "\n",
-    "Wzór na aktualizację wagi:\n",
-    "$$ NowaWaga = StaraWaga + (LearningRate \\times Błąd \\times Wejście) $$"
+    "Wz\u00f3r na aktualizacj\u0119 wagi:\n",
+    "$$ NowaWaga = StaraWaga + (LearningRate \\times B\u0142\u0105d \\times Wej\u015bcie) $$"
    ]
   },
   {
@@ -105,14 +112,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start treningu (Wagi początkowe: [0. 0. 0.])\n",
-      "Epoka 1: Błędy = 1, Wagi = [0.1 0.1 0.1]\n",
-      "Epoka 2: Błędy = 3, Wagi = [0.  0.2 0.1]\n",
-      "Epoka 3: Błędy = 3, Wagi = [-0.1  0.2  0.1]\n",
-      "Epoka 4: Błędy = 2, Wagi = [-0.1  0.2  0.2]\n",
-      "Epoka 5: Błędy = 1, Wagi = [-0.2  0.2  0.1]\n",
-      "Epoka 6: Błędy = 0, Wagi = [-0.2  0.2  0.1]\n",
-      "--- Sukces! Nauczył się idealnie. ---\n"
+      "Start treningu (Wagi pocz\u0105tkowe: [0. 0. 0.])\n",
+      "Epoka 1: B\u0142\u0119dy = 1, Wagi = [0.1 0.1 0.1]\n",
+      "Epoka 2: B\u0142\u0119dy = 3, Wagi = [0.  0.2 0.1]\n",
+      "Epoka 3: B\u0142\u0119dy = 3, Wagi = [-0.1  0.2  0.1]\n",
+      "Epoka 4: B\u0142\u0119dy = 2, Wagi = [-0.1  0.2  0.2]\n",
+      "Epoka 5: B\u0142\u0119dy = 1, Wagi = [-0.2  0.2  0.1]\n",
+      "Epoka 6: B\u0142\u0119dy = 0, Wagi = [-0.2  0.2  0.1]\n",
+      "--- Sukces! Nauczy\u0142 si\u0119 idealnie. ---\n"
      ]
     }
    ],
@@ -126,36 +133,36 @@
     "        \n",
     "    def predict(self, x):\n",
     "        # Matematyka: (x1*w1 + x2*w2) + bias\n",
-    "        # Dodajemy 1 na początku wektora x dla biasu\n",
+    "        # Dodajemy 1 na pocz\u0105tku wektora x dla biasu\n",
     "        summation = np.dot(x, self.weights[1:]) + self.weights[0]\n",
     "        \n",
     "        # Funkcja aktywacji (Schodek / Step Function)\n",
     "        return 1 if summation > 0 else 0\n",
     "\n",
     "    def train(self, X, y):\n",
-    "        print(f\"Start treningu (Wagi początkowe: {self.weights})\")\n",
+    "        print(f\"Start treningu (Wagi pocz\u0105tkowe: {self.weights})\")\n",
     "        \n",
     "        for epoch in range(self.epochs):\n",
     "            errors = 0\n",
     "            for xi, target in zip(X, y):\n",
-    "                # 1. Co myśli neuron teraz?\n",
+    "                # 1. Co my\u015bli neuron teraz?\n",
     "                prediction = self.predict(xi)\n",
     "                \n",
-    "                # 2. Jaki był błąd? (np. Oczekiwano 1, wyszło 0 -> Błąd = 1)\n",
+    "                # 2. Jaki by\u0142 b\u0142\u0105d? (np. Oczekiwano 1, wysz\u0142o 0 -> B\u0142\u0105d = 1)\n",
     "                update = self.lr * (target - prediction)\n",
     "                \n",
-    "                # 3. Aktualizacja wag (Uczenie się)\n",
+    "                # 3. Aktualizacja wag (Uczenie si\u0119)\n",
     "                self.weights[1:] += update * xi\n",
     "                self.weights[0]  += update # Aktualizacja biasu\n",
     "                \n",
     "                errors += int(update != 0.0)\n",
     "            \n",
-    "            # Wypisz postęp co epokę\n",
-    "            print(f\"Epoka {epoch+1}: Błędy = {errors}, Wagi = {self.weights}\")\n",
+    "            # Wypisz post\u0119p co epok\u0119\n",
+    "            print(f\"Epoka {epoch+1}: B\u0142\u0119dy = {errors}, Wagi = {self.weights}\")\n",
     "            \n",
-    "            # Jeśli brak błędów, przerywamy wcześniej\n",
+    "            # Je\u015bli brak b\u0142\u0119d\u00f3w, przerywamy wcze\u015bniej\n",
     "            if errors == 0:\n",
-    "                print(\"--- Sukces! Nauczył się idealnie. ---\")\n",
+    "                print(\"--- Sukces! Nauczy\u0142 si\u0119 idealnie. ---\")\n",
     "                break\n",
     "\n",
     "# URUCHAMIAMY TRENING\n",
@@ -168,14 +175,14 @@
    "id": "f5778763",
    "metadata": {},
    "source": [
-    "## Co tu się wydarzyło?\n",
+    "## Co tu si\u0119 wydarzy\u0142o?\n",
     "\n",
-    "Neuron startował z wagami `[0, 0, 0]`. Był głupi.\n",
-    "W każdej pętli sprawdzał: \"Czy dobrze zgadłem?\".\n",
-    "Jeśli się pomylił, przesuwał wagi (zgodnie z wzorem).\n",
-    "Po kilku epokach znalazł liczby, które idealnie oddzielają zera od jedynek!\n",
+    "Neuron startowa\u0142 z wagami `[0, 0, 0]`. By\u0142 g\u0142upi.\n",
+    "W ka\u017cdej p\u0119tli sprawdza\u0142: \"Czy dobrze zgad\u0142em?\".\n",
+    "Je\u015bli si\u0119 pomyli\u0142, przesuwa\u0142 wagi (zgodnie z wzorem).\n",
+    "Po kilku epokach znalaz\u0142 liczby, kt\u00f3re idealnie oddzielaj\u0105 zera od jedynek!\n",
     "\n",
-    "Zobaczmy tę \"kreskę\", którą narysował neuron."
+    "Zobaczmy t\u0119 \"kresk\u0119\", kt\u00f3r\u0105 narysowa\u0142 neuron."
    ]
   },
   {
@@ -202,8 +209,8 @@
     "# Punkty danych\n",
     "plt.scatter(X[:,0], X[:,1], c=y, cmap='bwr', s=200, edgecolor='k')\n",
     "\n",
-    "# Rysujemy linię, którą wymyślił neuron\n",
-    "# Równanie prostej: w1*x1 + w2*x2 + b = 0  =>  x2 = -(w1*x1 + b) / w2\n",
+    "# Rysujemy lini\u0119, kt\u00f3r\u0105 wymy\u015bli\u0142 neuron\n",
+    "# R\u00f3wnanie prostej: w1*x1 + w2*x2 + b = 0  =>  x2 = -(w1*x1 + b) / w2\n",
     "x_vals = np.linspace(-0.5, 1.5, 100)\n",
     "slope = -(p.weights[1] / p.weights[2])\n",
     "intercept = -(p.weights[0] / p.weights[2])\n",
@@ -221,26 +228,26 @@
    "id": "92e15d06",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Śmierć i Odrodzenie AI\n",
+    "## \ud83e\udde0 Podsumowanie: \u015amier\u0107 i Odrodzenie AI\n",
     "\n",
-    "Mamy sukces! Neuron nauczył się logiki AND.\n",
+    "Mamy sukces! Neuron nauczy\u0142 si\u0119 logiki AND.\n",
     "Ale...\n",
     "\n",
     "**Tu jest haczyk (Problem XOR).**\n",
-    "Nasz neuron działa tak, że rysuje **prostą kreskę** na wykresie. Wszystko nad kreską to 1, pod kreską to 0.\n",
-    "A co, jeśli mamy problem **XOR** (Alternatywa wykluczająca)?\n",
+    "Nasz neuron dzia\u0142a tak, \u017ce rysuje **prost\u0105 kresk\u0119** na wykresie. Wszystko nad kresk\u0105 to 1, pod kresk\u0105 to 0.\n",
+    "A co, je\u015bli mamy problem **XOR** (Alternatywa wykluczaj\u0105ca)?\n",
     "*   (0,0) -> 0\n",
     "*   (1,1) -> 0\n",
     "*   (0,1) -> 1\n",
     "*   (1,0) -> 1\n",
     "\n",
-    "Spróbuj narysować te punkty na kartce. Nie da się ich rozdzielić jedną prostą linią!\n",
-    "W latach 60. naukowcy (Minsky i Papert) udowodnili to matematycznie. To doprowadziło do **\"Zimy AI\"** – finansowanie badań wstrzymano na lata, bo uznano, że sieci neuronowe są bezużyteczne.\n",
+    "Spr\u00f3buj narysowa\u0107 te punkty na kartce. Nie da si\u0119 ich rozdzieli\u0107 jedn\u0105 prost\u0105 lini\u0105!\n",
+    "W latach 60. naukowcy (Minsky i Papert) udowodnili to matematycznie. To doprowadzi\u0142o do **\"Zimy AI\"** \u2013 finansowanie bada\u0144 wstrzymano na lata, bo uznano, \u017ce sieci neuronowe s\u0105 bezu\u017cyteczne.\n",
     "\n",
-    "**Rozwiązanie:**\n",
-    "Okazało się, że wystarczy połączyć wiele neuronów warstwami.\n",
-    "Jeden neuron rysuje kreskę pionową, drugi poziomą, a trzeci łączy ich wyniki.\n",
-    "Tak powstały **Multi-Layer Perceptrons (MLP)**, czyli dzisiejsze **Deep Learning**."
+    "**Rozwi\u0105zanie:**\n",
+    "Okaza\u0142o si\u0119, \u017ce wystarczy po\u0142\u0105czy\u0107 wiele neuron\u00f3w warstwami.\n",
+    "Jeden neuron rysuje kresk\u0119 pionow\u0105, drugi poziom\u0105, a trzeci \u0142\u0105czy ich wyniki.\n",
+    "Tak powsta\u0142y **Multi-Layer Perceptrons (MLP)**, czyli dzisiejsze **Deep Learning**."
    ]
   }
  ],
