--- a/17_PCA_Dimensionality_Reduction.ipynb
+++ b/17_PCA_Dimensionality_Reduction.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/17_PCA_Dimensionality_Reduction.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d8a5821d",
    "metadata": {},
    "source": [
-    "# 📉 PCA: Jak zobaczyć niewidzialne? (Redukcja Wymiarów)\n",
+    "# \ud83d\udcc9 PCA: Jak zobaczy\u0107 niewidzialne? (Redukcja Wymiar\u00f3w)\n",
     "\n",
-    "Wyobraź sobie, że trzymasz w ręku kubek (obiekt 3D).\n",
-    "Rzucasz jego cień na ścianę (obraz 2D).\n",
+    "Wyobra\u017a sobie, \u017ce trzymasz w r\u0119ku kubek (obiekt 3D).\n",
+    "Rzucasz jego cie\u0144 na \u015bcian\u0119 (obraz 2D).\n",
     "\n",
-    "1.  Jeśli poświecisz latarką od spodu -> Cień będzie kołem.\n",
-    "2.  Jeśli poświecisz od boku -> Cień będzie prostokątem z uchem.\n",
+    "1.  Je\u015bli po\u015bwiecisz latark\u0105 od spodu -> Cie\u0144 b\u0119dzie ko\u0142em.\n",
+    "2.  Je\u015bli po\u015bwiecisz od boku -> Cie\u0144 b\u0119dzie prostok\u0105tem z uchem.\n",
     "\n",
-    "Który cień daje więcej informacji? Ten z uchem!\n",
-    "**PCA to algorytm, który szuka \"najlepszego kąta świecenia latarką\"**, żeby cień (dane 2D) zachował jak najwięcej szczegółów z oryginału (dane wielowymiarowe).\n",
+    "Kt\u00f3ry cie\u0144 daje wi\u0119cej informacji? Ten z uchem!\n",
+    "**PCA to algorytm, kt\u00f3ry szuka \"najlepszego k\u0105ta \u015bwiecenia latark\u0105\"**, \u017ceby cie\u0144 (dane 2D) zachowa\u0142 jak najwi\u0119cej szczeg\u00f3\u0142\u00f3w z orygina\u0142u (dane wielowymiarowe).\n",
     "\n",
-    "Użyjemy zbioru **Iris** (Kwiaty).\n",
-    "Mamy tam 4 wymiary (Długość/Szerokość Płatka i Działki).\n",
-    "Zredukujemy to do 2 wymiarów, żeby zobaczyć te kwiaty na ekranie."
+    "U\u017cyjemy zbioru **Iris** (Kwiaty).\n",
+    "Mamy tam 4 wymiary (D\u0142ugo\u015b\u0107/Szeroko\u015b\u0107 P\u0142atka i Dzia\u0142ki).\n",
+    "Zredukujemy to do 2 wymiar\u00f3w, \u017ceby zobaczy\u0107 te kwiaty na ekranie."
    ]
   },
   {
@@ -32,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "Rozmiar danych: (150, 4)\n",
-      "Mamy 4 kolumny. Nie da się narysować wykresu 4D.\n"
+      "Mamy 4 kolumny. Nie da si\u0119 narysowa\u0107 wykresu 4D.\n"
      ]
     },
     {
@@ -123,7 +130,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# 1. ŁADUJEMY DANE (4 Wymiary)\n",
+    "# 1. \u0141ADUJEMY DANE (4 Wymiary)\n",
     "iris = load_iris()\n",
     "X = iris.data\n",
     "y = iris.target\n",
@@ -133,7 +140,7 @@
     "df = pd.DataFrame(X, columns=iris.feature_names)\n",
     "\n",
     "print(f\"Rozmiar danych: {df.shape}\")\n",
-    "print(\"Mamy 4 kolumny. Nie da się narysować wykresu 4D.\")\n",
+    "print(\"Mamy 4 kolumny. Nie da si\u0119 narysowa\u0107 wykresu 4D.\")\n",
     "display(df.head())"
    ]
   },
@@ -142,11 +149,11 @@
    "id": "065762d9",
    "metadata": {},
    "source": [
-    "## Krok 1: Standaryzacja (Bardzo Ważne!)\n",
+    "## Krok 1: Standaryzacja (Bardzo Wa\u017cne!)\n",
     "\n",
-    "PCA jest bardzo wrażliwe na skalę (jak K-Means).\n",
-    "Jeśli jedna kolumna jest w milimetrach (małe liczby), a druga w metrach (duże liczby), PCA uzna, że ta w metrach jest ważniejsza.\n",
-    "Musimy sprowadzić wszystko do wspólnego mianownika (StandardScaler)."
+    "PCA jest bardzo wra\u017cliwe na skal\u0119 (jak K-Means).\n",
+    "Je\u015bli jedna kolumna jest w milimetrach (ma\u0142e liczby), a druga w metrach (du\u017ce liczby), PCA uzna, \u017ce ta w metrach jest wa\u017cniejsza.\n",
+    "Musimy sprowadzi\u0107 wszystko do wsp\u00f3lnego mianownika (StandardScaler)."
    ]
   },
   {
@@ -159,16 +166,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dane przeskalowane. Średnia każdej kolumny to teraz ~0.\n"
+      "Dane przeskalowane. \u015arednia ka\u017cdej kolumny to teraz ~0.\n"
      ]
     }
    ],
    "source": [
-    "# Skalujemy dane (średnia = 0, odchylenie = 1)\n",
+    "# Skalujemy dane (\u015brednia = 0, odchylenie = 1)\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "print(\"Dane przeskalowane. Średnia każdej kolumny to teraz ~0.\")"
+    "print(\"Dane przeskalowane. \u015arednia ka\u017cdej kolumny to teraz ~0.\")"
    ]
   },
   {
@@ -178,10 +185,10 @@
    "source": [
     "## Krok 2: PCA w akcji\n",
     "\n",
-    "Mówimy algorytmowi: *\"Znajdź mi 2 Główne Składniki (Principal Components), które najlepiej opisują te dane\"*.\n",
+    "M\u00f3wimy algorytmowi: *\"Znajd\u017a mi 2 G\u0142\u00f3wne Sk\u0142adniki (Principal Components), kt\u00f3re najlepiej opisuj\u0105 te dane\"*.\n",
     "\n",
-    "Te nowe kolumny (PC1 i PC2) to nie są już \"Długość płatka\".\n",
-    "To są **sztuczne, matematyczne hybrydy** wszystkich cech, wymieszane tak, żeby zmaksymalizować widoczność różnic."
+    "Te nowe kolumny (PC1 i PC2) to nie s\u0105 ju\u017c \"D\u0142ugo\u015b\u0107 p\u0142atka\".\n",
+    "To s\u0105 **sztuczne, matematyczne hybrydy** wszystkich cech, wymieszane tak, \u017ceby zmaksymalizowa\u0107 widoczno\u015b\u0107 r\u00f3\u017cnic."
    ]
   },
   {
@@ -218,8 +225,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PC1 (Główna Oś)</th>\n",
-       "      <th>PC2 (Druga Oś)</th>\n",
+       "      <th>PC1 (G\u0142\u00f3wna O\u015b)</th>\n",
+       "      <th>PC2 (Druga O\u015b)</th>\n",
        "      <th>Gatunek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -259,7 +266,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   PC1 (Główna Oś)  PC2 (Druga Oś) Gatunek\n",
+       "   PC1 (G\u0142\u00f3wna O\u015b)  PC2 (Druga O\u015b) Gatunek\n",
        "0        -2.264703        0.480027  setosa\n",
        "1        -2.080961       -0.674134  setosa\n",
        "2        -2.364229       -0.341908  setosa\n",
@@ -277,7 +284,7 @@
       "\n",
       "Ile informacji niesie PC1? 72.96%\n",
       "Ile informacji niesie PC2? 22.85%\n",
-      "SUMA: 95.81% informacji z oryginału zostało zachowane!\n"
+      "SUMA: 95.81% informacji z orygina\u0142u zosta\u0142o zachowane!\n"
      ]
     }
    ],
@@ -287,18 +294,18 @@
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
     "# Tworzymy nowy DataFrame z wynikami\n",
-    "df_pca = pd.DataFrame(data=X_pca, columns=['PC1 (Główna Oś)', 'PC2 (Druga Oś)'])\n",
+    "df_pca = pd.DataFrame(data=X_pca, columns=['PC1 (G\u0142\u00f3wna O\u015b)', 'PC2 (Druga O\u015b)'])\n",
     "df_pca['Gatunek'] = [target_names[i] for i in y]\n",
     "\n",
     "print(\"--- DANE PO KOMPRESJI ---\")\n",
     "display(df_pca.head())\n",
     "\n",
-    "# 2. ILE INFORMACJI ZACHOWALIŚMY? (Explained Variance)\n",
-    "# To mówi nam, jak dokładny jest nasz \"cień\".\n",
+    "# 2. ILE INFORMACJI ZACHOWALI\u015aMY? (Explained Variance)\n",
+    "# To m\u00f3wi nam, jak dok\u0142adny jest nasz \"cie\u0144\".\n",
     "variance = pca.explained_variance_ratio_\n",
     "print(f\"\\nIle informacji niesie PC1? {variance[0]*100:.2f}%\")\n",
     "print(f\"Ile informacji niesie PC2? {variance[1]*100:.2f}%\")\n",
-    "print(f\"SUMA: {sum(variance)*100:.2f}% informacji z oryginału zostało zachowane!\")"
+    "print(f\"SUMA: {sum(variance)*100:.2f}% informacji z orygina\u0142u zosta\u0142o zachowane!\")"
    ]
   },
   {
@@ -321,11 +328,11 @@
    "source": [
     "# 3. WIZUALIZACJA (Moment Prawdy)\n",
     "plt.figure(figsize=(10, 7))\n",
-    "sns.scatterplot(x='PC1 (Główna Oś)', y='PC2 (Druga Oś)', hue='Gatunek', data=df_pca, palette='viridis', s=100)\n",
+    "sns.scatterplot(x='PC1 (G\u0142\u00f3wna O\u015b)', y='PC2 (Druga O\u015b)', hue='Gatunek', data=df_pca, palette='viridis', s=100)\n",
     "\n",
     "plt.title(\"Irysy w 2D (Po PCA)\")\n",
-    "plt.xlabel(f\"PC1 ({variance[0]*100:.1f}% zmienności)\")\n",
-    "plt.ylabel(f\"PC2 ({variance[1]*100:.1f}% zmienności)\")\n",
+    "plt.xlabel(f\"PC1 ({variance[0]*100:.1f}% zmienno\u015bci)\")\n",
+    "plt.ylabel(f\"PC2 ({variance[1]*100:.1f}% zmienno\u015bci)\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()"
    ]
@@ -335,22 +342,22 @@
    "id": "4a6abe7b",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Stratna Kompresja\n",
+    "## \ud83e\udde0 Podsumowanie: Stratna Kompresja\n",
     "\n",
     "Co widzisz na wykresie?\n",
-    "Mimo że spłaszczyliśmy 4 wymiary do 2, **grupy są nadal idealnie rozdzielone**.\n",
-    "Gatunek *Setosa* jest daleko od pozostałych.\n",
-    "To znaczy, że PCA zadziałało – usunęło szum, a zostawiło istotę danych.\n",
+    "Mimo \u017ce sp\u0142aszczyli\u015bmy 4 wymiary do 2, **grupy s\u0105 nadal idealnie rozdzielone**.\n",
+    "Gatunek *Setosa* jest daleko od pozosta\u0142ych.\n",
+    "To znaczy, \u017ce PCA zadzia\u0142a\u0142o \u2013 usun\u0119\u0142o szum, a zostawi\u0142o istot\u0119 danych.\n",
     "\n",
     "**Tu jest haczyk.**\n",
     "PCA to **kompresja stratna** (jak JPG).\n",
-    "Straciliśmy około 4% informacji (bo suma wariancji to ~96%, a nie 100%).\n",
-    "Zawsze tracisz trochę niuansów, ale zyskujesz możliwość:\n",
+    "Stracili\u015bmy oko\u0142o 4% informacji (bo suma wariancji to ~96%, a nie 100%).\n",
+    "Zawsze tracisz troch\u0119 niuans\u00f3w, ale zyskujesz mo\u017cliwo\u015b\u0107:\n",
     "1.  Wizualizacji danych.\n",
     "2.  Szybszego trenowania modeli (mniej kolumn = szybciej).\n",
     "\n",
     "**Zastosowanie w AI (Embeddings):**\n",
-    "Gdy wgrasz do bazy wektorowej milion dokumentów, każdy ma 1536 wymiarów. Używa się technik podobnych do PCA (np. t-SNE lub UMAP), żeby narysować je na płaszczyźnie i zobaczyć: *\"O, tutaj zgrupowały się wszystkie dokumenty o finansach, a tam o sporcie\"*."
+    "Gdy wgrasz do bazy wektorowej milion dokument\u00f3w, ka\u017cdy ma 1536 wymiar\u00f3w. U\u017cywa si\u0119 technik podobnych do PCA (np. t-SNE lub UMAP), \u017ceby narysowa\u0107 je na p\u0142aszczy\u017anie i zobaczy\u0107: *\"O, tutaj zgrupowa\u0142y si\u0119 wszystkie dokumenty o finansach, a tam o sporcie\"*."
    ]
   }
  ],
