--- a/18_Cosine_Similarity_Search.ipynb
+++ b/18_Cosine_Similarity_Search.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/18_Cosine_Similarity_Search.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7b5a945",
    "metadata": {},
    "source": [
-    "# 📐 Cosine Similarity: Matematyka Wyszukiwania\n",
+    "# \ud83d\udcd0 Cosine Similarity: Matematyka Wyszukiwania\n",
     "\n",
-    "Kiedy wpisujesz w Google \"Jak naprawić pralkę?\", silnik nie szuka słów, które leżą \"blisko\" na osi liczbowej. On szuka słów, które \"zmierzają w tym samym kierunku\" tematycznym.\n",
+    "Kiedy wpisujesz w Google \"Jak naprawi\u0107 pralk\u0119?\", silnik nie szuka s\u0142\u00f3w, kt\u00f3re le\u017c\u0105 \"blisko\" na osi liczbowej. On szuka s\u0142\u00f3w, kt\u00f3re \"zmierzaj\u0105 w tym samym kierunku\" tematycznym.\n",
     "\n",
-    "Mamy dwie metody porównywania wektorów:\n",
-    "1.  **Odległość Euklidesowa (Linijka):** Mierzy dystans między punktami A i B.\n",
-    "2.  **Podobieństwo Kosinusowe (Kątomierz):** Mierzy kąt między wektorami.\n",
+    "Mamy dwie metody por\u00f3wnywania wektor\u00f3w:\n",
+    "1.  **Odleg\u0142o\u015b\u0107 Euklidesowa (Linijka):** Mierzy dystans mi\u0119dzy punktami A i B.\n",
+    "2.  **Podobie\u0144stwo Kosinusowe (K\u0105tomierz):** Mierzy k\u0105t mi\u0119dzy wektorami.\n",
     "\n",
     "**Dlaczego Kosinus?**\n",
-    "Wyobraź sobie dwa teksty o **ekonomii**:\n",
-    "*   Tekst A: Krótka notatka (100 słów).\n",
-    "*   Tekst B: Długa książka (100 000 słów).\n",
+    "Wyobra\u017a sobie dwa teksty o **ekonomii**:\n",
+    "*   Tekst A: Kr\u00f3tka notatka (100 s\u0142\u00f3w).\n",
+    "*   Tekst B: D\u0142uga ksi\u0105\u017cka (100 000 s\u0142\u00f3w).\n",
     "\n",
-    "Dla \"Linijki\" te teksty są bardzo daleko od siebie (bo jeden wektor jest krótki, a drugi gigantyczny).\n",
-    "Dla \"Kątomierza\" one wskazują **ten sam kierunek** (temat: ekonomia). Kąt między nimi wynosi zero.\n",
+    "Dla \"Linijki\" te teksty s\u0105 bardzo daleko od siebie (bo jeden wektor jest kr\u00f3tki, a drugi gigantyczny).\n",
+    "Dla \"K\u0105tomierza\" one wskazuj\u0105 **ten sam kierunek** (temat: ekonomia). K\u0105t mi\u0119dzy nimi wynosi zero.\n",
     "\n",
-    "Dlatego w AI (Semantic Search) używamy Kosinusa."
+    "Dlatego w AI (Semantic Search) u\u017cywamy Kosinusa."
    ]
   },
   {
@@ -34,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wektor A (Sport krótki): [[1.  0.2]]\n",
-      "Wektor B (Sport długi):  [[10  2]]\n",
+      "Wektor A (Sport kr\u00f3tki): [[1.  0.2]]\n",
+      "Wektor B (Sport d\u0142ugi):  [[10  2]]\n",
       "Wektor C (Polityka):     [[0.5 5. ]]\n"
      ]
     },
@@ -56,32 +63,32 @@
     "from sklearn.metrics.pairwise import cosine_similarity, euclidean_distances\n",
     "\n",
     "# 1. DEFINIUJEMY WEKTORY (Tematyka)\n",
-    "# Wyobraźmy sobie oś X = \"Sport\", oś Y = \"Polityka\"\n",
+    "# Wyobra\u017amy sobie o\u015b X = \"Sport\", o\u015b Y = \"Polityka\"\n",
     "\n",
-    "# Wektor A: Krótki artykuł o sporcie\n",
+    "# Wektor A: Kr\u00f3tki artyku\u0142 o sporcie\n",
     "vec_a = np.array([[1, 0.2]]) \n",
     "\n",
-    "# Wektor B: Bardzo długa książka o sporcie (Ten sam temat, ale większe liczby!)\n",
+    "# Wektor B: Bardzo d\u0142uga ksi\u0105\u017cka o sporcie (Ten sam temat, ale wi\u0119ksze liczby!)\n",
     "vec_b = np.array([[10, 2]])  \n",
     "\n",
-    "# Wektor C: Artykuł o polityce\n",
+    "# Wektor C: Artyku\u0142 o polityce\n",
     "vec_c = np.array([[0.5, 5]])\n",
     "\n",
-    "print(f\"Wektor A (Sport krótki): {vec_a}\")\n",
-    "print(f\"Wektor B (Sport długi):  {vec_b}\")\n",
+    "print(f\"Wektor A (Sport kr\u00f3tki): {vec_a}\")\n",
+    "print(f\"Wektor B (Sport d\u0142ugi):  {vec_b}\")\n",
     "print(f\"Wektor C (Polityka):     {vec_c}\")\n",
     "\n",
     "# Rysujemy to\n",
     "plt.figure(figsize=(6, 6))\n",
     "origin = [0], [0]\n",
-    "plt.quiver(*origin, vec_a[0,0], vec_a[0,1], color='r', scale=15, label='A (Sport krótki)')\n",
-    "plt.quiver(*origin, vec_b[0,0], vec_b[0,1], color='b', scale=15, label='B (Sport długi)')\n",
+    "plt.quiver(*origin, vec_a[0,0], vec_a[0,1], color='r', scale=15, label='A (Sport kr\u00f3tki)')\n",
+    "plt.quiver(*origin, vec_b[0,0], vec_b[0,1], color='b', scale=15, label='B (Sport d\u0142ugi)')\n",
     "plt.quiver(*origin, vec_c[0,0], vec_c[0,1], color='g', scale=15, label='C (Polityka)')\n",
     "plt.xlim(-1, 12)\n",
     "plt.ylim(-1, 12)\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.title(\"Kierunek (Temat) vs Długość (Ilość słów)\")\n",
+    "plt.title(\"Kierunek (Temat) vs D\u0142ugo\u015b\u0107 (Ilo\u015b\u0107 s\u0142\u00f3w)\")\n",
     "plt.show()"
    ]
   },
@@ -92,10 +99,10 @@
    "source": [
     "## Pojedynek: Euklides vs Kosinus\n",
     "\n",
-    "Teraz policzmy matematycznie, które dokumenty są do siebie podobne.\n",
+    "Teraz policzmy matematycznie, kt\u00f3re dokumenty s\u0105 do siebie podobne.\n",
     "\n",
-    "*   Jeśli użyjemy **Euklidesa** (odległość), komputer powie: *\"A jest bliżej C, niż B!\"*. (Bzdura, bo A i C to inne tematy).\n",
-    "*   Jeśli użyjemy **Kosinusa** (kąt), komputer powie: *\"A i B to prawie to samo\"*. (Prawda!)."
+    "*   Je\u015bli u\u017cyjemy **Euklidesa** (odleg\u0142o\u015b\u0107), komputer powie: *\"A jest bli\u017cej C, ni\u017c B!\"*. (Bzdura, bo A i C to inne tematy).\n",
+    "*   Je\u015bli u\u017cyjemy **Kosinusa** (k\u0105t), komputer powie: *\"A i B to prawie to samo\"*. (Prawda!)."
    ]
   },
   {
@@ -108,44 +115,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- ODLEGŁOŚĆ EUKLIDESOWA (Linijka) ---\n",
+      "--- ODLEG\u0141O\u015a\u0106 EUKLIDESOWA (Linijka) ---\n",
       "Dystans A <-> B (Sport vs Sport):    9.18\n",
       "Dystans A <-> C (Sport vs Polityka): 4.83\n",
-      "WERDYKT: Według Euklidesa tekst o sporcie jest bardziej podobny do polityki (5.02) niż do książki o sporcie (9.18)!\n",
-      "❌ BŁĄD LOGICZNY.\n",
+      "WERDYKT: Wed\u0142ug Euklidesa tekst o sporcie jest bardziej podobny do polityki (5.02) ni\u017c do ksi\u0105\u017cki o sporcie (9.18)!\n",
+      "\u274c B\u0141\u0104D LOGICZNY.\n",
       "\n",
-      "--- PODOBIEŃSTWO KOSINUSOWE (Kątomierz) ---\n",
-      "Podobieństwo A <-> B (Sport vs Sport):    1.0000\n",
-      "Podobieństwo A <-> C (Sport vs Polityka): 0.2927\n",
-      "WERDYKT: Według Kosinusa teksty o sporcie są identyczne tematycznie (1.0000).\n",
-      "✅ SUKCES.\n"
+      "--- PODOBIE\u0143STWO KOSINUSOWE (K\u0105tomierz) ---\n",
+      "Podobie\u0144stwo A <-> B (Sport vs Sport):    1.0000\n",
+      "Podobie\u0144stwo A <-> C (Sport vs Polityka): 0.2927\n",
+      "WERDYKT: Wed\u0142ug Kosinusa teksty o sporcie s\u0105 identyczne tematycznie (1.0000).\n",
+      "\u2705 SUKCES.\n"
      ]
     }
    ],
    "source": [
-    "# 1. Odległość Euklidesowa (Im mniej tym lepiej)\n",
+    "# 1. Odleg\u0142o\u015b\u0107 Euklidesowa (Im mniej tym lepiej)\n",
     "dist_ab = euclidean_distances(vec_a, vec_b)[0][0]\n",
     "dist_ac = euclidean_distances(vec_a, vec_c)[0][0]\n",
     "\n",
-    "print(\"--- ODLEGŁOŚĆ EUKLIDESOWA (Linijka) ---\")\n",
+    "print(\"--- ODLEG\u0141O\u015a\u0106 EUKLIDESOWA (Linijka) ---\")\n",
     "print(f\"Dystans A <-> B (Sport vs Sport):    {dist_ab:.2f}\")\n",
     "print(f\"Dystans A <-> C (Sport vs Polityka): {dist_ac:.2f}\")\n",
-    "print(\"WERDYKT: Według Euklidesa tekst o sporcie jest bardziej podobny do polityki (5.02) niż do książki o sporcie (9.18)!\")\n",
-    "print(\"❌ BŁĄD LOGICZNY.\\n\")\n",
+    "print(\"WERDYKT: Wed\u0142ug Euklidesa tekst o sporcie jest bardziej podobny do polityki (5.02) ni\u017c do ksi\u0105\u017cki o sporcie (9.18)!\")\n",
+    "print(\"\u274c B\u0141\u0104D LOGICZNY.\\n\")\n",
     "\n",
-    "# 2. Podobieństwo Kosinusowe (Im bliżej 1.0 tym lepiej)\n",
+    "# 2. Podobie\u0144stwo Kosinusowe (Im bli\u017cej 1.0 tym lepiej)\n",
     "# 1.0 = Identyczny kierunek\n",
-    "# 0.0 = Kąt prosty (brak związku)\n",
-    "# -1.0 = Przeciwieństwo\n",
+    "# 0.0 = K\u0105t prosty (brak zwi\u0105zku)\n",
+    "# -1.0 = Przeciwie\u0144stwo\n",
     "\n",
     "sim_ab = cosine_similarity(vec_a, vec_b)[0][0]\n",
     "sim_ac = cosine_similarity(vec_a, vec_c)[0][0]\n",
     "\n",
-    "print(\"--- PODOBIEŃSTWO KOSINUSOWE (Kątomierz) ---\")\n",
-    "print(f\"Podobieństwo A <-> B (Sport vs Sport):    {sim_ab:.4f}\")\n",
-    "print(f\"Podobieństwo A <-> C (Sport vs Polityka): {sim_ac:.4f}\")\n",
-    "print(\"WERDYKT: Według Kosinusa teksty o sporcie są identyczne tematycznie (1.0000).\")\n",
-    "print(\"✅ SUKCES.\")"
+    "print(\"--- PODOBIE\u0143STWO KOSINUSOWE (K\u0105tomierz) ---\")\n",
+    "print(f\"Podobie\u0144stwo A <-> B (Sport vs Sport):    {sim_ab:.4f}\")\n",
+    "print(f\"Podobie\u0144stwo A <-> C (Sport vs Polityka): {sim_ac:.4f}\")\n",
+    "print(\"WERDYKT: Wed\u0142ug Kosinusa teksty o sporcie s\u0105 identyczne tematycznie (1.0000).\")\n",
+    "print(\"\u2705 SUKCES.\")"
    ]
   },
   {
@@ -156,11 +163,11 @@
     "## Mini-Wyszukiwarka (RAG Engine)\n",
     "\n",
     "Zbudujmy prosty silnik wyszukiwania.\n",
-    "Mamy \"Bazę Wiedzy\" (kilka zdań).\n",
-    "Użytkownik zadaje pytanie.\n",
-    "Znajdziemy zdanie, które ma największe *Cosine Similarity* do pytania.\n",
+    "Mamy \"Baz\u0119 Wiedzy\" (kilka zda\u0144).\n",
+    "U\u017cytkownik zadaje pytanie.\n",
+    "Znajdziemy zdanie, kt\u00f3re ma najwi\u0119ksze *Cosine Similarity* do pytania.\n",
     "\n",
-    "*Uwaga: Użyjemy prostego `CountVectorizer` do zamiany słów na liczby, w prawdziwym RAG użylibyśmy OpenAI Embeddings, ale matematyka jest ta sama.*"
+    "*Uwaga: U\u017cyjemy prostego `CountVectorizer` do zamiany s\u0142\u00f3w na liczby, w prawdziwym RAG u\u017cyliby\u015bmy OpenAI Embeddings, ale matematyka jest ta sama.*"
    ]
   },
   {
@@ -173,19 +180,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pytanie: 'Chcę nauczyć się kodować w Pythonie'\n",
+      "Pytanie: 'Chc\u0119 nauczy\u0107 si\u0119 kodowa\u0107 w Pythonie'\n",
       "\n",
       "--- WYNIKI WYSZUKIWANIA ---\n",
-      "Zdanie 0: 'Python to wspaniały język programowania'\n",
-      " -> Podobieństwo: 0.0000\n",
-      "Zdanie 1: 'Jutro pójdę do sklepu kupić mleko'\n",
-      " -> Podobieństwo: 0.0000\n",
-      "Zdanie 2: 'Sztuczna inteligencja zmienia świat'\n",
-      " -> Podobieństwo: 0.0000\n",
-      "Zdanie 3: 'Lubię programować w Pythonie wieczorami'\n",
-      " -> Podobieństwo: 0.2236\n",
+      "Zdanie 0: 'Python to wspania\u0142y j\u0119zyk programowania'\n",
+      " -> Podobie\u0144stwo: 0.0000\n",
+      "Zdanie 1: 'Jutro p\u00f3jd\u0119 do sklepu kupi\u0107 mleko'\n",
+      " -> Podobie\u0144stwo: 0.0000\n",
+      "Zdanie 2: 'Sztuczna inteligencja zmienia \u015bwiat'\n",
+      " -> Podobie\u0144stwo: 0.0000\n",
+      "Zdanie 3: 'Lubi\u0119 programowa\u0107 w Pythonie wieczorami'\n",
+      " -> Podobie\u0144stwo: 0.2236\n",
       "------------------------------\n",
-      "🏆 ZWYCIĘZCA: 'Lubię programować w Pythonie wieczorami'\n"
+      "\ud83c\udfc6 ZWYCI\u0118ZCA: 'Lubi\u0119 programowa\u0107 w Pythonie wieczorami'\n"
      ]
     }
    ],
@@ -194,33 +201,33 @@
     "\n",
     "# BAZA WIEDZY\n",
     "baza_zdan = [\n",
-    "    \"Python to wspaniały język programowania\",   # ID 0\n",
-    "    \"Jutro pójdę do sklepu kupić mleko\",         # ID 1\n",
-    "    \"Sztuczna inteligencja zmienia świat\",       # ID 2\n",
-    "    \"Lubię programować w Pythonie wieczorami\"    # ID 3\n",
+    "    \"Python to wspania\u0142y j\u0119zyk programowania\",   # ID 0\n",
+    "    \"Jutro p\u00f3jd\u0119 do sklepu kupi\u0107 mleko\",         # ID 1\n",
+    "    \"Sztuczna inteligencja zmienia \u015bwiat\",       # ID 2\n",
+    "    \"Lubi\u0119 programowa\u0107 w Pythonie wieczorami\"    # ID 3\n",
     "]\n",
     "\n",
-    "# PYTANIE UŻYTKOWNIKA\n",
-    "pytanie = [\"Chcę nauczyć się kodować w Pythonie\"]\n",
+    "# PYTANIE U\u017bYTKOWNIKA\n",
+    "pytanie = [\"Chc\u0119 nauczy\u0107 si\u0119 kodowa\u0107 w Pythonie\"]\n",
     "\n",
     "# 1. Zamiana wszystkiego na liczby (Wektoryzacja)\n",
     "vectorizer = CountVectorizer()\n",
-    "# Uczymy się słów z bazy ORAZ pytania\n",
+    "# Uczymy si\u0119 s\u0142\u00f3w z bazy ORAZ pytania\n",
     "wszystkie_teksty = baza_zdan + pytanie\n",
     "matrix = vectorizer.fit_transform(wszystkie_teksty)\n",
     "\n",
     "# Rozdzielamy wektory bazy i pytania\n",
-    "vectors_baza = matrix[:-1] # Wszystko oprócz ostatniego\n",
+    "vectors_baza = matrix[:-1] # Wszystko opr\u00f3cz ostatniego\n",
     "vector_pytanie = matrix[-1] # Ostatni element (nasze pytanie)\n",
     "\n",
-    "# 2. Obliczamy podobieństwo pytania do KAŻDEGO zdania w bazie\n",
+    "# 2. Obliczamy podobie\u0144stwo pytania do KA\u017bDEGO zdania w bazie\n",
     "scores = cosine_similarity(vector_pytanie, vectors_baza)\n",
     "\n",
     "# 3. Wyniki\n",
     "print(f\"Pytanie: '{pytanie[0]}'\\n\")\n",
     "print(\"--- WYNIKI WYSZUKIWANIA ---\")\n",
     "\n",
-    "# Spłaszczamy wyniki do listy 1D\n",
+    "# Sp\u0142aszczamy wyniki do listy 1D\n",
     "scores_list = scores[0]\n",
     "\n",
     "# Sortujemy wyniki (trick z argsort)\n",
@@ -228,10 +235,10 @@
     "\n",
     "for i, score in enumerate(scores_list):\n",
     "    print(f\"Zdanie {i}: '{baza_zdan[i]}'\")\n",
-    "    print(f\" -> Podobieństwo: {score:.4f}\")\n",
+    "    print(f\" -> Podobie\u0144stwo: {score:.4f}\")\n",
     "    \n",
     "print(\"-\" * 30)\n",
-    "print(f\"🏆 ZWYCIĘZCA: '{baza_zdan[najlepsze_id]}'\")"
+    "print(f\"\ud83c\udfc6 ZWYCI\u0118ZCA: '{baza_zdan[najlepsze_id]}'\")"
    ]
   },
   {
@@ -239,19 +246,19 @@
    "id": "2a57f57f",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Sekret RAG\n",
+    "## \ud83e\udde0 Podsumowanie: Sekret RAG\n",
     "\n",
-    "Właśnie zbudowałeś serce systemu **RAG (Retrieval Augmented Generation)**.\n",
+    "W\u0142a\u015bnie zbudowa\u0142e\u015b serce systemu **RAG (Retrieval Augmented Generation)**.\n",
     "\n",
     "Kiedy rozmawiasz z botem o swojej firmie:\n",
-    "1.  Bot nie czyta wszystkich Twoich dokumentów naraz (nie zmieściłyby się w pamięci).\n",
+    "1.  Bot nie czyta wszystkich Twoich dokument\u00f3w naraz (nie zmie\u015bci\u0142yby si\u0119 w pami\u0119ci).\n",
     "2.  Bot zamienia Twoje pytanie na wektor.\n",
-    "3.  Używa **Cosine Similarity**, żeby znaleźć w bazie wektorowej (np. Pinecone) 3 fragmenty tekstu najbardziej pasujące tematycznie (najmniejszy kąt).\n",
-    "4.  Wkleja te 3 fragmenty do GPT-4 i mówi: *\"Na podstawie tych fragmentów odpowiedz na pytanie\"*.\n",
+    "3.  U\u017cywa **Cosine Similarity**, \u017ceby znale\u017a\u0107 w bazie wektorowej (np. Pinecone) 3 fragmenty tekstu najbardziej pasuj\u0105ce tematycznie (najmniejszy k\u0105t).\n",
+    "4.  Wkleja te 3 fragmenty do GPT-4 i m\u00f3wi: *\"Na podstawie tych fragment\u00f3w odpowiedz na pytanie\"*.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Jeśli Twoje wektory są słabe (np. używasz prostego liczenia słów jak my tutaj, zamiast OpenAI Embeddings), to Cosine Similarity też zadziała słabo (np. nie zrozumie synonimów \"auto\" i \"samochód\").\n",
-    "Ale sama matematyka porównywania pozostaje ta sama: **Szukamy Kąta, nie Odległości.**"
+    "Je\u015bli Twoje wektory s\u0105 s\u0142abe (np. u\u017cywasz prostego liczenia s\u0142\u00f3w jak my tutaj, zamiast OpenAI Embeddings), to Cosine Similarity te\u017c zadzia\u0142a s\u0142abo (np. nie zrozumie synonim\u00f3w \"auto\" i \"samoch\u00f3d\").\n",
+    "Ale sama matematyka por\u00f3wnywania pozostaje ta sama: **Szukamy K\u0105ta, nie Odleg\u0142o\u015bci.**"
    ]
   }
  ],
