--- a/21_MLP_Neural_Network_XOR.ipynb
+++ b/21_MLP_Neural_Network_XOR.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/21_MLP_Neural_Network_XOR.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a00d11b",
    "metadata": {},
    "source": [
-    "# 🧠 Sieć Neuronowa (MLP): Rozwiązanie problemu XOR\n",
+    "# \ud83e\udde0 Sie\u0107 Neuronowa (MLP): Rozwi\u0105zanie problemu XOR\n",
     "\n",
-    "W notatniku 16. udowodniliśmy, że jeden neuron to za mało, żeby rozwiązać problem XOR (alternatywa wykluczająca).\n",
-    "Jeden neuron działa jak linijka – rysuje prostą linię.\n",
+    "W notatniku 16. udowodnili\u015bmy, \u017ce jeden neuron to za ma\u0142o, \u017ceby rozwi\u0105za\u0107 problem XOR (alternatywa wykluczaj\u0105ca).\n",
+    "Jeden neuron dzia\u0142a jak linijka \u2013 rysuje prost\u0105 lini\u0119.\n",
     "\n",
-    "**Rozwiązanie: Praca Zespołowa.**\n",
-    "Zamiast jednego neurona, użyjemy architektury warstwowej:\n",
-    "1.  **Warstwa Wejściowa:** Odbiera dane (Liczba A, Liczba B).\n",
-    "2.  **Warstwa Ukryta (Hidden Layer):** To tutaj dzieje się magia. Kilka neuronów \"gada\" ze sobą i wymienia informacje. One potrafią wygiąć przestrzeń.\n",
-    "3.  **Warstwa Wyjściowa:** Podejmuje ostateczną decyzję (0 lub 1).\n",
+    "**Rozwi\u0105zanie: Praca Zespo\u0142owa.**\n",
+    "Zamiast jednego neurona, u\u017cyjemy architektury warstwowej:\n",
+    "1.  **Warstwa Wej\u015bciowa:** Odbiera dane (Liczba A, Liczba B).\n",
+    "2.  **Warstwa Ukryta (Hidden Layer):** To tutaj dzieje si\u0119 magia. Kilka neuron\u00f3w \"gada\" ze sob\u0105 i wymienia informacje. One potrafi\u0105 wygi\u0105\u0107 przestrze\u0144.\n",
+    "3.  **Warstwa Wyj\u015bciowa:** Podejmuje ostateczn\u0105 decyzj\u0119 (0 lub 1).\n",
     "\n",
-    "Użyjemy biblioteki `scikit-learn`, która ma wbudowaną obsługę prostych sieci neuronowych (`MLPClassifier`)."
+    "U\u017cyjemy biblioteki `scikit-learn`, kt\u00f3ra ma wbudowan\u0105 obs\u0142ug\u0119 prostych sieci neuronowych (`MLPClassifier`)."
    ]
   },
   {
@@ -70,7 +77,7 @@
     "# Wizualizacja problemu\n",
     "plt.figure(figsize=(5, 5))\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, s=200, cmap='bwr', edgecolor='k')\n",
-    "plt.title(\"Problem XOR (Nie da się przedzielić prostą kreską!)\")\n",
+    "plt.title(\"Problem XOR (Nie da si\u0119 przedzieli\u0107 prost\u0105 kresk\u0105!)\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -82,12 +89,12 @@
    "source": [
     "## Budowa Sieci (Architektura)\n",
     "\n",
-    "Stworzymy sieć o takiej budowie:\n",
-    "*   Wejście: 2 neurony (bo mamy dwie liczby: x1, x2).\n",
-    "*   **Warstwa Ukryta:** 4 neurony. (To nasz \"mózg\").\n",
-    "*   Wyjście: 1 neuron (Wynik).\n",
+    "Stworzymy sie\u0107 o takiej budowie:\n",
+    "*   Wej\u015bcie: 2 neurony (bo mamy dwie liczby: x1, x2).\n",
+    "*   **Warstwa Ukryta:** 4 neurony. (To nasz \"m\u00f3zg\").\n",
+    "*   Wyj\u015bcie: 1 neuron (Wynik).\n",
     "\n",
-    "Użyjemy funkcji aktywacji `relu` (o której powiemy więcej w następnym notatniku), bo ona pomaga sieci uczyć się nieliniowości."
+    "U\u017cyjemy funkcji aktywacji `relu` (o kt\u00f3rej powiemy wi\u0119cej w nast\u0119pnym notatniku), bo ona pomaga sieci uczy\u0107 si\u0119 nieliniowo\u015bci."
    ]
   },
   {
@@ -100,16 +107,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trening zakończony.\n",
+      "Trening zako\u0144czony.\n",
       "Liczba iteracji (epok): 578\n",
-      "Ostatnia strata (błąd): 0.70894\n"
+      "Ostatnia strata (b\u0142\u0105d): 0.70894\n"
      ]
     }
    ],
    "source": [
     "# Tworzymy Multi-Layer Perceptron\n",
-    "# hidden_layer_sizes=(4,) oznacza jedną warstwę ukrytą z 4 neuronami.\n",
-    "# max_iter=2000 oznacza, że dajemy mu dużo czasu na naukę (2000 pętli).\n",
+    "# hidden_layer_sizes=(4,) oznacza jedn\u0105 warstw\u0119 ukryt\u0105 z 4 neuronami.\n",
+    "# max_iter=2000 oznacza, \u017ce dajemy mu du\u017co czasu na nauk\u0119 (2000 p\u0119tli).\n",
     "\n",
     "mlp = MLPClassifier(hidden_layer_sizes=(4,), \n",
     "                    activation='relu', \n",
@@ -117,12 +124,12 @@
     "                    max_iter=2000, \n",
     "                    random_state=42)\n",
     "\n",
-    "# Trenujemy (To tutaj dzieje się Gradient Descent pod maską!)\n",
+    "# Trenujemy (To tutaj dzieje si\u0119 Gradient Descent pod mask\u0105!)\n",
     "mlp.fit(X, y)\n",
     "\n",
-    "print(\"Trening zakończony.\")\n",
+    "print(\"Trening zako\u0144czony.\")\n",
     "print(f\"Liczba iteracji (epok): {mlp.n_iter_}\")\n",
-    "print(f\"Ostatnia strata (błąd): {mlp.loss_:.5f}\")"
+    "print(f\"Ostatnia strata (b\u0142\u0105d): {mlp.loss_:.5f}\")"
    ]
   },
   {
@@ -130,11 +137,11 @@
    "id": "808ec0fb",
    "metadata": {},
    "source": [
-    "## Wizualizacja: Jak myśli sieć?\n",
+    "## Wizualizacja: Jak my\u015bli sie\u0107?\n",
     "\n",
-    "Teraz najważniejszy moment. Narysujemy \"Granicę Decyzyjną\".\n",
-    "Jeśli zobaczymy prostą kreskę -> Porażka.\n",
-    "Jeśli zobaczymy zakrzywiony obszar, który oddziela czerwone od niebieskich -> Sukces Deep Learningu."
+    "Teraz najwa\u017cniejszy moment. Narysujemy \"Granic\u0119 Decyzyjn\u0105\".\n",
+    "Je\u015bli zobaczymy prost\u0105 kresk\u0119 -> Pora\u017cka.\n",
+    "Je\u015bli zobaczymy zakrzywiony obszar, kt\u00f3ry oddziela czerwone od niebieskich -> Sukces Deep Learningu."
    ]
   },
   {
@@ -155,7 +162,7 @@
     }
    ],
    "source": [
-    "# Funkcja do rysowania tła (mapy decyzji)\n",
+    "# Funkcja do rysowania t\u0142a (mapy decyzji)\n",
     "def plot_decision_boundary(model, X, y):\n",
     "    x_min, x_max = -0.5, 1.5\n",
     "    y_min, y_max = -0.5, 1.5\n",
@@ -169,7 +176,7 @@
     "    \n",
     "    plt.contourf(xx, yy, Z, cmap='bwr', alpha=0.3)\n",
     "    plt.scatter(X[:, 0], X[:, 1], c=y, s=200, cmap='bwr', edgecolor='k')\n",
-    "    plt.title(\"Sieć Neuronowa rozwiązała XOR!\")\n",
+    "    plt.title(\"Sie\u0107 Neuronowa rozwi\u0105za\u0142a XOR!\")\n",
     "    plt.show()\n",
     "\n",
     "# Rysujemy\n",
@@ -186,22 +193,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- WYNIKI KOŃCOWE ---\n",
-      "Wejście: [0 0] -> Model: 0 (Prawda: 0) ✅\n",
-      "Wejście: [0 1] -> Model: 0 (Prawda: 1) ❌\n",
-      "Wejście: [1 0] -> Model: 0 (Prawda: 1) ❌\n",
-      "Wejście: [1 1] -> Model: 0 (Prawda: 0) ✅\n"
+      "--- WYNIKI KO\u0143COWE ---\n",
+      "Wej\u015bcie: [0 0] -> Model: 0 (Prawda: 0) \u2705\n",
+      "Wej\u015bcie: [0 1] -> Model: 0 (Prawda: 1) \u274c\n",
+      "Wej\u015bcie: [1 0] -> Model: 0 (Prawda: 1) \u274c\n",
+      "Wej\u015bcie: [1 1] -> Model: 0 (Prawda: 0) \u2705\n"
      ]
     }
    ],
    "source": [
-    "# Sprawdźmy ręcznie, czy wyniki są poprawne\n",
+    "# Sprawd\u017amy r\u0119cznie, czy wyniki s\u0105 poprawne\n",
     "predictions = mlp.predict(X)\n",
     "\n",
-    "print(\"--- WYNIKI KOŃCOWE ---\")\n",
+    "print(\"--- WYNIKI KO\u0143COWE ---\")\n",
     "for input_data, prediction, actual in zip(X, predictions, y):\n",
-    "    status = \"✅\" if prediction == actual else \"❌\"\n",
-    "    print(f\"Wejście: {input_data} -> Model: {prediction} (Prawda: {actual}) {status}\")"
+    "    status = \"\u2705\" if prediction == actual else \"\u274c\"\n",
+    "    print(f\"Wej\u015bcie: {input_data} -> Model: {prediction} (Prawda: {actual}) {status}\")"
    ]
   },
   {
@@ -209,21 +216,21 @@
    "id": "b64eb472",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Magia Warstwy Ukrytej\n",
+    "## \ud83e\udde0 Podsumowanie: Magia Warstwy Ukrytej\n",
     "\n",
-    "Co się stało na wykresie?\n",
-    "Sieć nie narysowała jednej linii. Narysowała **dwa obszary** połączone w skomplikowany kształt (może to wyglądać jak pas na środku albo dwie wyspy).\n",
+    "Co si\u0119 sta\u0142o na wykresie?\n",
+    "Sie\u0107 nie narysowa\u0142a jednej linii. Narysowa\u0142a **dwa obszary** po\u0142\u0105czone w skomplikowany kszta\u0142t (mo\u017ce to wygl\u0105da\u0107 jak pas na \u015brodku albo dwie wyspy).\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Warstwa ukryta (te 4 neurony w środku) działa jak **zaginacz przestrzeni**.\n",
-    "1.  Pierwszy neuron nauczył się linii pionowej.\n",
-    "2.  Drugi neuron nauczył się linii poziomej.\n",
-    "3.  Kolejne neurony nauczyły się łączyć te wyniki (logika: *\"Jeśli x1 i x2 są małe ORAZ jeśli x1 i x2 są duże -> to wynik 0\"*).\n",
+    "Warstwa ukryta (te 4 neurony w \u015brodku) dzia\u0142a jak **zaginacz przestrzeni**.\n",
+    "1.  Pierwszy neuron nauczy\u0142 si\u0119 linii pionowej.\n",
+    "2.  Drugi neuron nauczy\u0142 si\u0119 linii poziomej.\n",
+    "3.  Kolejne neurony nauczy\u0142y si\u0119 \u0142\u0105czy\u0107 te wyniki (logika: *\"Je\u015bli x1 i x2 s\u0105 ma\u0142e ORAZ je\u015bli x1 i x2 s\u0105 du\u017ce -> to wynik 0\"*).\n",
     "\n",
-    "To jest właśnie **Deep Learning**.\n",
-    "Głębokie sieci nie uczą się \"odpowiedzi\". One uczą się składać proste kształty w coraz bardziej skomplikowane struktury.\n",
+    "To jest w\u0142a\u015bnie **Deep Learning**.\n",
+    "G\u0142\u0119bokie sieci nie ucz\u0105 si\u0119 \"odpowiedzi\". One ucz\u0105 si\u0119 sk\u0142ada\u0107 proste kszta\u0142ty w coraz bardziej skomplikowane struktury.\n",
     "*   Warstwa 1: Widzi kreski.\n",
-    "*   Warstwa 2: Widzi kształty (oczy, uszy).\n",
+    "*   Warstwa 2: Widzi kszta\u0142ty (oczy, uszy).\n",
     "*   Warstwa 3: Widzi twarze."
    ]
   }
