--- a/22_Activation_Functions.ipynb
+++ b/22_Activation_Functions.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/22_Activation_Functions.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f629f52",
    "metadata": {},
    "source": [
-    "# ⚡ Funkcje Aktywacji: Iskra Inteligencji\n",
+    "# \u26a1 Funkcje Aktywacji: Iskra Inteligencji\n",
     "\n",
-    "Wyobraź sobie neuron jako pracownika biurowego.\n",
-    "Dostaje stos dokumentów (liczby na wejściu), sumuje je i... co dalej?\n",
+    "Wyobra\u017a sobie neuron jako pracownika biurowego.\n",
+    "Dostaje stos dokument\u00f3w (liczby na wej\u015bciu), sumuje je i... co dalej?\n",
     "\n",
-    "1.  **Bez Funkcji Aktywacji (Linear):** Pracownik po prostu podaje sumę dalej.\n",
-    "    *   Problem: Jeśli połączysz 100 takich pracowników, to nadal wykonują tylko dodawanie. Nie potrafią rozwiązać skomplikowanych problemów (jak XOR). Sieć jest płaska.\n",
+    "1.  **Bez Funkcji Aktywacji (Linear):** Pracownik po prostu podaje sum\u0119 dalej.\n",
+    "    *   Problem: Je\u015bli po\u0142\u0105czysz 100 takich pracownik\u00f3w, to nadal wykonuj\u0105 tylko dodawanie. Nie potrafi\u0105 rozwi\u0105za\u0107 skomplikowanych problem\u00f3w (jak XOR). Sie\u0107 jest p\u0142aska.\n",
     "    \n",
-    "2.  **Z Funkcją Aktywacji (Non-linear):** Pracownik patrzy na sumę i podejmuje decyzję.\n",
-    "    *   *\"Jeśli suma jest ujemna, wyrzucam do kosza (0). Jeśli dodatnia, wysyłam dalej.\"*\n",
-    "    *   To wprowadza **nieliniowość**. Dzięki temu sieć może wyginać przestrzeń i rozumieć kształty.\n",
+    "2.  **Z Funkcj\u0105 Aktywacji (Non-linear):** Pracownik patrzy na sum\u0119 i podejmuje decyzj\u0119.\n",
+    "    *   *\"Je\u015bli suma jest ujemna, wyrzucam do kosza (0). Je\u015bli dodatnia, wysy\u0142am dalej.\"*\n",
+    "    *   To wprowadza **nieliniowo\u015b\u0107**. Dzi\u0119ki temu sie\u0107 mo\u017ce wygina\u0107 przestrze\u0144 i rozumie\u0107 kszta\u0142ty.\n",
     "\n",
-    "Poznamy trzech króli aktywacji: **Sigmoid**, **ReLU** i **Softmax**."
+    "Poznamy trzech kr\u00f3li aktywacji: **Sigmoid**, **ReLU** i **Softmax**."
    ]
   },
   {
@@ -30,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funkcje zdefiniowane. Teraz zobaczmy ich kształt.\n"
+      "Funkcje zdefiniowane. Teraz zobaczmy ich kszta\u0142t.\n"
      ]
     }
    ],
@@ -48,10 +55,10 @@
     "def tanh(x):\n",
     "    return np.tanh(x)\n",
     "\n",
-    "# Generujemy dane do wykresu (oś X od -10 do 10)\n",
+    "# Generujemy dane do wykresu (o\u015b X od -10 do 10)\n",
     "x = np.linspace(-5, 5, 100)\n",
     "\n",
-    "print(\"Funkcje zdefiniowane. Teraz zobaczmy ich kształt.\")"
+    "print(\"Funkcje zdefiniowane. Teraz zobaczmy ich kszta\u0142t.\")"
    ]
   },
   {
@@ -61,11 +68,11 @@
    "source": [
     "## 1. Sigmoid (Staruszek)\n",
     "\n",
-    "Wzór: $\\frac{1}{1 + e^{-x}}$\n",
-    "Zmienia każdą liczbę w zakres **(0, 1)**.\n",
+    "Wz\u00f3r: $\\frac{1}{1 + e^{-x}}$\n",
+    "Zmienia ka\u017cd\u0105 liczb\u0119 w zakres **(0, 1)**.\n",
     "\n",
-    "*   **Zaleta:** Idealny do prawdopodobieństwa (np. \"Na 0.8 to jest kot\").\n",
-    "*   **Wada:** \"Zabija\" duże liczby. Czy wpiszesz 100, czy 1000000, wynik to prawie 1.0. To sprawia, że sieć przestaje się uczyć (problem *Vanishing Gradient*). Dziś używany głównie na samym końcu sieci."
+    "*   **Zaleta:** Idealny do prawdopodobie\u0144stwa (np. \"Na 0.8 to jest kot\").\n",
+    "*   **Wada:** \"Zabija\" du\u017ce liczby. Czy wpiszesz 100, czy 1000000, wynik to prawie 1.0. To sprawia, \u017ce sie\u0107 przestaje si\u0119 uczy\u0107 (problem *Vanishing Gradient*). Dzi\u015b u\u017cywany g\u0142\u00f3wnie na samym ko\u0144cu sieci."
    ]
   },
   {
@@ -91,7 +98,7 @@
     "# Wykres Sigmoid\n",
     "plt.subplot(1, 3, 1)\n",
     "plt.plot(x, sigmoid(x), 'b')\n",
-    "plt.title(\"Sigmoid (Gładka S-ka)\")\n",
+    "plt.title(\"Sigmoid (G\u0142adka S-ka)\")\n",
     "plt.grid(True)\n",
     "plt.axvline(0, color='k', alpha=0.3)\n",
     "plt.axhline(0, color='k', alpha=0.3)\n",
@@ -105,7 +112,7 @@
     "plt.axvline(0, color='k', alpha=0.3)\n",
     "plt.axhline(0, color='k', alpha=0.3)\n",
     "\n",
-    "# Wykres ReLU (Król Deep Learningu)\n",
+    "# Wykres ReLU (Kr\u00f3l Deep Learningu)\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.plot(x, relu(x), 'r')\n",
     "plt.title(\"ReLU (Kij hokejowy)\")\n",
@@ -123,20 +130,20 @@
    "source": [
     "## 2. ReLU (Rectified Linear Unit)\n",
     "\n",
-    "Wzór: `max(0, x)`\n",
-    "Zasada: \"Jeśli ujemne -> Zero. Jeśli dodatnie -> Bez zmian\".\n",
+    "Wz\u00f3r: `max(0, x)`\n",
+    "Zasada: \"Je\u015bli ujemne -> Zero. Je\u015bli dodatnie -> Bez zmian\".\n",
     "\n",
-    "*   **Dlaczego to Król?**\n",
+    "*   **Dlaczego to Kr\u00f3l?**\n",
     "    Jest banalnie prosty w obliczeniach (komputer kocha zera).\n",
-    "    Nie \"spłaszcza\" dużych liczb (jak Sigmoid). Jeśli sygnał jest silny (np. 1000), ReLU przekazuje 1000. Dzięki temu wielkie sieci (jak GPT) mogą się szybko uczyć.\n",
-    "    To właśnie `activation='relu'` uratowało nas w problemie XOR.\n",
+    "    Nie \"sp\u0142aszcza\" du\u017cych liczb (jak Sigmoid). Je\u015bli sygna\u0142 jest silny (np. 1000), ReLU przekazuje 1000. Dzi\u0119ki temu wielkie sieci (jak GPT) mog\u0105 si\u0119 szybko uczy\u0107.\n",
+    "    To w\u0142a\u015bnie `activation='relu'` uratowa\u0142o nas w problemie XOR.\n",
     "\n",
     "## 3. Softmax (Decydent)\n",
     "\n",
-    "Tego używamy **tylko w ostatniej warstwie**, gdy mamy wiele klas (np. Kot, Pies, Chomik).\n",
-    "Zamienia surowe punkty (Logity) na procenty, które sumują się do 100%.\n",
+    "Tego u\u017cywamy **tylko w ostatniej warstwie**, gdy mamy wiele klas (np. Kot, Pies, Chomik).\n",
+    "Zamienia surowe punkty (Logity) na procenty, kt\u00f3re sumuj\u0105 si\u0119 do 100%.\n",
     "\n",
-    "Pamiętasz notatnik o **Temperaturze**? Tam właśnie używaliśmy Softmax!"
+    "Pami\u0119tasz notatnik o **Temperaturze**? Tam w\u0142a\u015bnie u\u017cywali\u015bmy Softmax!"
    ]
   },
   {
@@ -151,7 +158,7 @@
      "text": [
       "--- SOFTMAX W AKCJI ---\n",
       "Surowe punkty (Logits): [2.  1.  0.1]\n",
-      "Prawdopodobieństwa:     [0.65900114 0.24243297 0.09856589]\n",
+      "Prawdopodobie\u0144stwa:     [0.65900114 0.24243297 0.09856589]\n",
       "Suma: 1.0 (czyli 100%)\n"
      ]
     },
@@ -167,25 +174,25 @@
     }
    ],
    "source": [
-    "# Symulacja: Sieć oceniła zdjęcie i wypluła surowe punkty (Logity)\n",
+    "# Symulacja: Sie\u0107 oceni\u0142a zdj\u0119cie i wyplu\u0142a surowe punkty (Logity)\n",
     "logits = np.array([2.0, 1.0, 0.1]) \n",
     "klasy = ['Kot', 'Pies', 'Chomik']\n",
     "\n",
     "def softmax(x):\n",
-    "    e_x = np.exp(x - np.max(x)) # Odejmujemy max dla stabilności\n",
+    "    e_x = np.exp(x - np.max(x)) # Odejmujemy max dla stabilno\u015bci\n",
     "    return e_x / e_x.sum()\n",
     "\n",
     "probs = softmax(logits)\n",
     "\n",
     "print(\"--- SOFTMAX W AKCJI ---\")\n",
     "print(f\"Surowe punkty (Logits): {logits}\")\n",
-    "print(f\"Prawdopodobieństwa:     {probs}\")\n",
+    "print(f\"Prawdopodobie\u0144stwa:     {probs}\")\n",
     "print(f\"Suma: {sum(probs):.1f} (czyli 100%)\")\n",
     "\n",
     "plt.figure(figsize=(6, 4))\n",
     "plt.bar(klasy, probs, color=['orange', 'blue', 'green'])\n",
     "plt.title(\"Decyzja Sieci (Softmax)\")\n",
-    "plt.ylabel(\"Pewność (0-1)\")\n",
+    "plt.ylabel(\"Pewno\u015b\u0107 (0-1)\")\n",
     "plt.show()"
    ]
   },
@@ -194,21 +201,21 @@
    "id": "52e2b767",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Której użyć?\n",
+    "## \ud83e\udde0 Podsumowanie: Kt\u00f3rej u\u017cy\u0107?\n",
     "\n",
-    "To jest prosta ściąga dla inżyniera AI:\n",
+    "To jest prosta \u015bci\u0105ga dla in\u017cyniera AI:\n",
     "\n",
-    "1.  **W środku sieci (Warstwy ukryte):**\n",
-    "    *   Używaj **ReLU** (lub jego nowszych wersji jak Leaky ReLU, GELU).\n",
-    "    *   Jest szybki i skuteczny. Sigmoida w środku używa się rzadko (tylko w specyficznych architekturach jak LSTM).\n",
+    "1.  **W \u015brodku sieci (Warstwy ukryte):**\n",
+    "    *   U\u017cywaj **ReLU** (lub jego nowszych wersji jak Leaky ReLU, GELU).\n",
+    "    *   Jest szybki i skuteczny. Sigmoida w \u015brodku u\u017cywa si\u0119 rzadko (tylko w specyficznych architekturach jak LSTM).\n",
     "\n",
-    "2.  **Na samym końcu (Warstwa wyjściowa):**\n",
-    "    *   Jeśli przewidujesz **Tak/Nie** (np. Spam/Ham): Użyj **Sigmoid** (wynik 0-1).\n",
-    "    *   Jeśli wybierasz **jedną z wielu opcji** (np. Kot/Pies/Ptak): Użyj **Softmax**.\n",
-    "    *   Jeśli przewidujesz **liczbę** (np. Cenę mieszkania): Nie używaj niczego (Linear).\n",
+    "2.  **Na samym ko\u0144cu (Warstwa wyj\u015bciowa):**\n",
+    "    *   Je\u015bli przewidujesz **Tak/Nie** (np. Spam/Ham): U\u017cyj **Sigmoid** (wynik 0-1).\n",
+    "    *   Je\u015bli wybierasz **jedn\u0105 z wielu opcji** (np. Kot/Pies/Ptak): U\u017cyj **Softmax**.\n",
+    "    *   Je\u015bli przewidujesz **liczb\u0119** (np. Cen\u0119 mieszkania): Nie u\u017cywaj niczego (Linear).\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "W GPT i Transformerach używa się często **GELU** lub **Swish**. To takie \"zaokrąglone ReLU\". Ale zasada jest ta sama – chodzi o to, żeby zerować słabe sygnały i przepuszczać silne."
+    "W GPT i Transformerach u\u017cywa si\u0119 cz\u0119sto **GELU** lub **Swish**. To takie \"zaokr\u0105glone ReLU\". Ale zasada jest ta sama \u2013 chodzi o to, \u017ceby zerowa\u0107 s\u0142abe sygna\u0142y i przepuszcza\u0107 silne."
    ]
   }
  ],
