--- a/24_Self_Attention_Mechanism.ipynb
+++ b/24_Self_Attention_Mechanism.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/24_Self_Attention_Mechanism.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "580c5de7",
    "metadata": {},
    "source": [
-    "# 👁️ Self-Attention: Jak AI rozumie kontekst? (Serce Transformera)\n",
+    "# \ud83d\udc41\ufe0f Self-Attention: Jak AI rozumie kontekst? (Serce Transformera)\n",
     "\n",
-    "Przed rokiem 2017 (przed erą Transformerów) modele czytały tekst słowo po słowie, od lewej do prawej.\n",
-    "Problem: Przy długim zdaniu zapominały, co było na początku.\n",
+    "Przed rokiem 2017 (przed er\u0105 Transformer\u00f3w) modele czyta\u0142y tekst s\u0142owo po s\u0142owie, od lewej do prawej.\n",
+    "Problem: Przy d\u0142ugim zdaniu zapomina\u0142y, co by\u0142o na pocz\u0105tku.\n",
     "\n",
-    "**Rozwiązanie: Attention Is All You Need.**\n",
-    "Mechanizm Uwagi pozwala każdemu słowu \"popatrzeć\" na wszystkie inne słowa w zdaniu NARAZ i zdecydować, które są dla niego ważne.\n",
+    "**Rozwi\u0105zanie: Attention Is All You Need.**\n",
+    "Mechanizm Uwagi pozwala ka\u017cdemu s\u0142owu \"popatrze\u0107\" na wszystkie inne s\u0142owa w zdaniu NARAZ i zdecydowa\u0107, kt\u00f3re s\u0105 dla niego wa\u017cne.\n",
     "\n",
-    "Działa to na zasadzie trzech wektorów dla każdego słowa:\n",
-    "1.  **Query (Q - Pytanie):** Czego szukam? (np. \"Szukam kogoś, kto wyjaśni moją płeć\").\n",
-    "2.  **Key (K - Klucz):** Co oferuję? (np. \"Jestem etykietą określającą osobę\").\n",
-    "3.  **Value (V - Wartość):** Jaka jest moja treść? (np. \"Jestem wektorem słowa\").\n",
+    "Dzia\u0142a to na zasadzie trzech wektor\u00f3w dla ka\u017cdego s\u0142owa:\n",
+    "1.  **Query (Q - Pytanie):** Czego szukam? (np. \"Szukam kogo\u015b, kto wyja\u015bni moj\u0105 p\u0142e\u0107\").\n",
+    "2.  **Key (K - Klucz):** Co oferuj\u0119? (np. \"Jestem etykiet\u0105 okre\u015blaj\u0105c\u0105 osob\u0119\").\n",
+    "3.  **Value (V - Warto\u015b\u0107):** Jaka jest moja tre\u015b\u0107? (np. \"Jestem wektorem s\u0142owa\").\n",
     "\n",
-    "To działa jak randka w ciemno. Każde słowo sprawdza dopasowanie (Q vs K) z każdym innym słowem."
+    "To dzia\u0142a jak randka w ciemno. Ka\u017cde s\u0142owo sprawdza dopasowanie (Q vs K) z ka\u017cdym innym s\u0142owem."
    ]
   },
   {
@@ -31,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- WEJŚCIE (Słowa jako liczby) ---\n",
+      "--- WEJ\u015aCIE (S\u0142owa jako liczby) ---\n",
       "[[1 0 0 1]\n",
       " [0 1 1 0]\n",
       " [0 1 0 1]]\n"
@@ -44,26 +51,26 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Funkcja Softmax (znasz ją z notatnika 22) - zamienia punkty na procenty\n",
+    "# Funkcja Softmax (znasz j\u0105 z notatnika 22) - zamienia punkty na procenty\n",
     "def softmax(x):\n",
     "    e_x = np.exp(x - np.max(x))\n",
     "    return e_x / e_x.sum(axis=0)\n",
     "\n",
-    "# 1. DANE WEJŚCIOWE (Embeddings)\n",
-    "# Wyobraźmy sobie zdanie z 3 słów: \"Bank dał kredyt\".\n",
-    "# Każde słowo to wektor 4-wymiarowy (uproszczenie).\n",
+    "# 1. DANE WEJ\u015aCIOWE (Embeddings)\n",
+    "# Wyobra\u017amy sobie zdanie z 3 s\u0142\u00f3w: \"Bank da\u0142 kredyt\".\n",
+    "# Ka\u017cde s\u0142owo to wektor 4-wymiarowy (uproszczenie).\n",
     "\n",
-    "words = [\"Bank\", \"Dał\", \"Kredyt\"]\n",
+    "words = [\"Bank\", \"Da\u0142\", \"Kredyt\"]\n",
     "\n",
     "# Symulujemy wektory (Embeddings)\n",
-    "# W prawdziwym życiu te liczby są wyuczone przez model.\n",
+    "# W prawdziwym \u017cyciu te liczby s\u0105 wyuczone przez model.\n",
     "inputs = np.array([\n",
     "    [1, 0, 0, 1],  # Bank (ma cechy finansowe)\n",
-    "    [0, 1, 1, 0],  # Dał (czasownik, akcja)\n",
+    "    [0, 1, 1, 0],  # Da\u0142 (czasownik, akcja)\n",
     "    [0, 1, 0, 1]   # Kredyt (finanse + akcja)\n",
     "])\n",
     "\n",
-    "print(\"--- WEJŚCIE (Słowa jako liczby) ---\")\n",
+    "print(\"--- WEJ\u015aCIE (S\u0142owa jako liczby) ---\")\n",
     "print(inputs)"
    ]
   },
@@ -72,14 +79,14 @@
    "id": "a445e43c",
    "metadata": {},
    "source": [
-    "## Krok 1: Obliczanie Punktów Uwagi (Attention Scores)\n",
+    "## Krok 1: Obliczanie Punkt\u00f3w Uwagi (Attention Scores)\n",
     "\n",
-    "Teraz każde słowo \"zapyta\" każde inne słowo: *\"Jak bardzo do siebie pasujemy?\"*.\n",
-    "Robimy to za pomocą **Iloczynu Skalarnego (Dot Product)**. To bardzo podobne do *Cosine Similarity*, które robiliśmy w RAG.\n",
+    "Teraz ka\u017cde s\u0142owo \"zapyta\" ka\u017cde inne s\u0142owo: *\"Jak bardzo do siebie pasujemy?\"*.\n",
+    "Robimy to za pomoc\u0105 **Iloczynu Skalarnego (Dot Product)**. To bardzo podobne do *Cosine Similarity*, kt\u00f3re robili\u015bmy w RAG.\n",
     "\n",
     "Obliczymy macierz $Q \\times K^T$.\n",
-    "*   Jeśli wynik jest wysoki -> Słowa są silnie powiązane.\n",
-    "*   Jeśli niski -> Ignoruj to słowo."
+    "*   Je\u015bli wynik jest wysoki -> S\u0142owa s\u0105 silnie powi\u0105zane.\n",
+    "*   Je\u015bli niski -> Ignoruj to s\u0142owo."
    ]
   },
   {
@@ -103,28 +110,28 @@
      "output_type": "stream",
      "text": [
       "Analiza:\n",
-      "Patrz na skrzyżowanie 'Bank' i 'Kredyt' (1). Jest powiązanie!\n",
-      "Ale 'Bank' i 'Dał' (0) mają słabe powiązanie w naszym modelu.\n"
+      "Patrz na skrzy\u017cowanie 'Bank' i 'Kredyt' (1). Jest powi\u0105zanie!\n",
+      "Ale 'Bank' i 'Da\u0142' (0) maj\u0105 s\u0142abe powi\u0105zanie w naszym modelu.\n"
      ]
     }
    ],
    "source": [
-    "# W uproszczeniu przyjmijmy, że Q = K = V = inputs (dla Self-Attention bez wag)\n",
-    "# W prawdziwym GPT są tu jeszcze macierze wag (Wq, Wk, Wv), ale matematyka jest ta sama.\n",
+    "# W uproszczeniu przyjmijmy, \u017ce Q = K = V = inputs (dla Self-Attention bez wag)\n",
+    "# W prawdziwym GPT s\u0105 tu jeszcze macierze wag (Wq, Wk, Wv), ale matematyka jest ta sama.\n",
     "\n",
-    "# Mnożymy macierze: Słowa x Słowa\n",
+    "# Mno\u017cymy macierze: S\u0142owa x S\u0142owa\n",
     "# To nam powie, jak bardzo \"Bank\" pasuje do \"Kredyt\".\n",
     "raw_scores = np.dot(inputs, inputs.T)\n",
     "\n",
-    "# Rysujemy mapę ciepła\n",
+    "# Rysujemy map\u0119 ciep\u0142a\n",
     "plt.figure(figsize=(6, 5))\n",
     "sns.heatmap(raw_scores, annot=True, xticklabels=words, yticklabels=words, cmap=\"Blues\")\n",
     "plt.title(\"Surowe Punkty Uwagi (Kto na kogo patrzy?)\")\n",
     "plt.show()\n",
     "\n",
     "print(\"Analiza:\")\n",
-    "print(\"Patrz na skrzyżowanie 'Bank' i 'Kredyt' (1). Jest powiązanie!\")\n",
-    "print(\"Ale 'Bank' i 'Dał' (0) mają słabe powiązanie w naszym modelu.\")"
+    "print(\"Patrz na skrzy\u017cowanie 'Bank' i 'Kredyt' (1). Jest powi\u0105zanie!\")\n",
+    "print(\"Ale 'Bank' i 'Da\u0142' (0) maj\u0105 s\u0142abe powi\u0105zanie w naszym modelu.\")"
    ]
   },
   {
@@ -134,11 +141,11 @@
    "source": [
     "## Krok 2: Normalizacja (Softmax)\n",
     "\n",
-    "Surowe punkty mogą być dowolne (np. 100, 500, -20).\n",
-    "Musimy je zamienić na **prawdopodobieństwo (Wagi)**, które sumuje się do 1 (100%).\n",
-    "Dzięki temu model wie: *\"Skup 80% uwagi na słowie 'Kredyt', a 20% na słowie 'Dał'\"*.\n",
+    "Surowe punkty mog\u0105 by\u0107 dowolne (np. 100, 500, -20).\n",
+    "Musimy je zamieni\u0107 na **prawdopodobie\u0144stwo (Wagi)**, kt\u00f3re sumuje si\u0119 do 1 (100%).\n",
+    "Dzi\u0119ki temu model wie: *\"Skup 80% uwagi na s\u0142owie 'Kredyt', a 20% na s\u0142owie 'Da\u0142'\"*.\n",
     "\n",
-    "Przy okazji dzielimy wyniki przez pierwiastek z wymiaru ($\\sqrt{d_k}$), żeby ustabilizować liczby (tzw. Scaled Dot-Product Attention)."
+    "Przy okazji dzielimy wyniki przez pierwiastek z wymiaru ($\\sqrt{d_k}$), \u017ceby ustabilizowa\u0107 liczby (tzw. Scaled Dot-Product Attention)."
    ]
   },
   {
@@ -162,8 +169,8 @@
      "output_type": "stream",
      "text": [
       "To jest serce Transformera.\n",
-      "Każdy wiersz sumuje się do 1.0.\n",
-      "Widzimy, ile 'uwagi' słowo poświęca innym.\n"
+      "Ka\u017cdy wiersz sumuje si\u0119 do 1.0.\n",
+      "Widzimy, ile 'uwagi' s\u0142owo po\u015bwi\u0119ca innym.\n"
      ]
     }
    ],
@@ -173,8 +180,8 @@
     "# Skalowanie\n",
     "scaled_scores = raw_scores / np.sqrt(d_k)\n",
     "\n",
-    "# Softmax (wierszami - dla każdego słowa osobno)\n",
-    "# apply_along_axis pozwala zrobić softmax dla każdego wiersza\n",
+    "# Softmax (wierszami - dla ka\u017cdego s\u0142owa osobno)\n",
+    "# apply_along_axis pozwala zrobi\u0107 softmax dla ka\u017cdego wiersza\n",
     "attention_weights = np.apply_along_axis(softmax, 1, scaled_scores)\n",
     "\n",
     "plt.figure(figsize=(6, 5))\n",
@@ -183,8 +190,8 @@
     "plt.show()\n",
     "\n",
     "print(\"To jest serce Transformera.\")\n",
-    "print(\"Każdy wiersz sumuje się do 1.0.\")\n",
-    "print(\"Widzimy, ile 'uwagi' słowo poświęca innym.\")"
+    "print(\"Ka\u017cdy wiersz sumuje si\u0119 do 1.0.\")\n",
+    "print(\"Widzimy, ile 'uwagi' s\u0142owo po\u015bwi\u0119ca innym.\")"
    ]
   },
   {
@@ -194,12 +201,12 @@
    "source": [
     "## Krok 3: Kontekstualizacja (Nowe Wektory)\n",
     "\n",
-    "Ostatni krok. Mamy wagi. Teraz tworzymy **nowe wektory słów**.\n",
-    "Stary wektor słowa \"Bank\" był statyczny.\n",
-    "Nowy wektor słowa \"Bank\" będzie mieszanką:\n",
-    "$$ NowyBank = (Waga_{Bank} \\times Bank) + (Waga_{Dał} \\times Dał) + (Waga_{Kredyt} \\times Kredyt) $$\n",
+    "Ostatni krok. Mamy wagi. Teraz tworzymy **nowe wektory s\u0142\u00f3w**.\n",
+    "Stary wektor s\u0142owa \"Bank\" by\u0142 statyczny.\n",
+    "Nowy wektor s\u0142owa \"Bank\" b\u0119dzie mieszank\u0105:\n",
+    "$$ NowyBank = (Waga_{Bank} \\times Bank) + (Waga_{Da\u0142} \\times Da\u0142) + (Waga_{Kredyt} \\times Kredyt) $$\n",
     "\n",
-    "Dzięki temu słowo \"Bank\" \"wchłania\" trochę znaczenia ze słowa \"Kredyt\". Staje się \"Bankiem finansowym\", a nie \"Bankiem rzecznym\"."
+    "Dzi\u0119ki temu s\u0142owo \"Bank\" \"wch\u0142ania\" troch\u0119 znaczenia ze s\u0142owa \"Kredyt\". Staje si\u0119 \"Bankiem finansowym\", a nie \"Bankiem rzecznym\"."
    ]
   },
   {
@@ -222,16 +229,16 @@
       " [0.18632372 0.81367628 0.50648039 0.49351961]\n",
       " [0.27406862 0.72593138 0.27406862 0.72593138]]\n",
       "------------------------------\n",
-      "Co się zmieniło?\n",
-      "Spójrz na pierwszy wiersz (Bank).\n",
-      "Oryginał: [1, 0, 0, 1]\n",
+      "Co si\u0119 zmieni\u0142o?\n",
+      "Sp\u00f3jrz na pierwszy wiersz (Bank).\n",
+      "Orygina\u0142: [1, 0, 0, 1]\n",
       "Nowy:     [0.50648039 0.49351961 0.18632372 0.81367628]\n",
-      "Nowy wektor nie jest już pusty w środku! Został 'zabarwiony' przez sąsiadów.\n"
+      "Nowy wektor nie jest ju\u017c pusty w \u015brodku! Zosta\u0142 'zabarwiony' przez s\u0105siad\u00f3w.\n"
      ]
     }
    ],
    "source": [
-    "# Mnożenie wag przez wartości (V)\n",
+    "# Mno\u017cenie wag przez warto\u015bci (V)\n",
     "output = np.dot(attention_weights, inputs)\n",
     "\n",
     "print(\"--- ORYGINALNE WEKTORY ---\")\n",
@@ -240,11 +247,11 @@
     "print(output)\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(\"Co się zmieniło?\")\n",
-    "print(\"Spójrz na pierwszy wiersz (Bank).\")\n",
-    "print(\"Oryginał: [1, 0, 0, 1]\")\n",
+    "print(\"Co si\u0119 zmieni\u0142o?\")\n",
+    "print(\"Sp\u00f3jrz na pierwszy wiersz (Bank).\")\n",
+    "print(\"Orygina\u0142: [1, 0, 0, 1]\")\n",
     "print(f\"Nowy:     {output[0]}\")\n",
-    "print(\"Nowy wektor nie jest już pusty w środku! Został 'zabarwiony' przez sąsiadów.\")"
+    "print(\"Nowy wektor nie jest ju\u017c pusty w \u015brodku! Zosta\u0142 'zabarwiony' przez s\u0105siad\u00f3w.\")"
    ]
   },
   {
@@ -252,20 +259,20 @@
    "id": "c51c30c0",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego to jest rewolucja?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego to jest rewolucja?\n",
     "\n",
-    "To, co właśnie policzyliśmy, to **pojedyncza głowica uwagi (Single Attention Head)**.\n",
+    "To, co w\u0142a\u015bnie policzyli\u015bmy, to **pojedyncza g\u0142owica uwagi (Single Attention Head)**.\n",
     "\n",
-    "GPT-4 ma takich głowic tysiące.\n",
-    "*   Jedna głowica uczy się gramatyki (kto co zrobił?).\n",
-    "*   Druga głowica uczy się rymów.\n",
-    "*   Trzecia uczy się kodu HTML.\n",
+    "GPT-4 ma takich g\u0142owic tysi\u0105ce.\n",
+    "*   Jedna g\u0142owica uczy si\u0119 gramatyki (kto co zrobi\u0142?).\n",
+    "*   Druga g\u0142owica uczy si\u0119 rym\u00f3w.\n",
+    "*   Trzecia uczy si\u0119 kodu HTML.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Największą zaletą tego mechanizmu jest **Równoległość**.\n",
-    "W starych sieciach (RNN) musiałeś przeczytać słowo nr 1, żeby zrozumieć nr 2.\n",
-    "W Transformerach (dzięki macierzom, które tu widziałeś) możemy policzyć uwagę dla WSZYSTKICH słów w książce **jednocześnie**.\n",
-    "Dlatego możemy trenować GPT na całym internecie w rozsądnym czasie, używając tysięcy kart graficznych GPU."
+    "Najwi\u0119ksz\u0105 zalet\u0105 tego mechanizmu jest **R\u00f3wnoleg\u0142o\u015b\u0107**.\n",
+    "W starych sieciach (RNN) musia\u0142e\u015b przeczyta\u0107 s\u0142owo nr 1, \u017ceby zrozumie\u0107 nr 2.\n",
+    "W Transformerach (dzi\u0119ki macierzom, kt\u00f3re tu widzia\u0142e\u015b) mo\u017cemy policzy\u0107 uwag\u0119 dla WSZYSTKICH s\u0142\u00f3w w ksi\u0105\u017cce **jednocze\u015bnie**.\n",
+    "Dlatego mo\u017cemy trenowa\u0107 GPT na ca\u0142ym internecie w rozs\u0105dnym czasie, u\u017cywaj\u0105c tysi\u0119cy kart graficznych GPU."
    ]
   }
  ],
