--- a/25_Model_Persistence_Pickle_Joblib.ipynb
+++ b/25_Model_Persistence_Pickle_Joblib.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/25_Model_Persistence_Pickle_Joblib.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b3f00451",
    "metadata": {},
    "source": [
-    "# 💾 Zapisywanie Modeli (Pickle & Joblib)\n",
+    "# \ud83d\udcbe Zapisywanie Modeli (Pickle & Joblib)\n",
     "\n",
-    "Modele Machine Learning to tak naprawdę obiekty w pamięci RAM (zbiory macierzy, wag i reguł if-else).\n",
-    "Kiedy wyłączasz Pythona, one znikają.\n",
+    "Modele Machine Learning to tak naprawd\u0119 obiekty w pami\u0119ci RAM (zbiory macierzy, wag i regu\u0142 if-else).\n",
+    "Kiedy wy\u0142\u0105czasz Pythona, one znikaj\u0105.\n",
     "\n",
-    "Aby użyć modelu na stronie internetowej (np. w Django, Flask, Streamlit), musimy go:\n",
-    "1.  **Wytrenować** (raz).\n",
-    "2.  **Zapisać do pliku** (zserializować).\n",
-    "3.  **Wczytać z pliku** na serwerze.\n",
+    "Aby u\u017cy\u0107 modelu na stronie internetowej (np. w Django, Flask, Streamlit), musimy go:\n",
+    "1.  **Wytrenowa\u0107** (raz).\n",
+    "2.  **Zapisa\u0107 do pliku** (zserializowa\u0107).\n",
+    "3.  **Wczyta\u0107 z pliku** na serwerze.\n",
     "\n",
-    "Mamy do tego dwa główne narzędzia:\n",
-    "*   **Pickle:** Standardowy moduł Pythona.\n",
-    "*   **Joblib:** Działa jak Pickle, ale jest zoptymalizowany dla dużych tablic NumPy (czyli idealny dla Scikit-Learn)."
+    "Mamy do tego dwa g\u0142\u00f3wne narz\u0119dzia:\n",
+    "*   **Pickle:** Standardowy modu\u0142 Pythona.\n",
+    "*   **Joblib:** Dzia\u0142a jak Pickle, ale jest zoptymalizowany dla du\u017cych tablic NumPy (czyli idealny dla Scikit-Learn)."
    ]
   },
   {
@@ -30,9 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Model wytrenowany.\n",
-      "Skuteczność: 100.00%\n",
-      "Przykładowa predykcja dla [array([6.1, 2.8, 4.7, 1.2])]: Klasa 1\n"
+      "\u2705 Model wytrenowany.\n",
+      "Skuteczno\u015b\u0107: 100.00%\n",
+      "Przyk\u0142adowa predykcja dla [array([6.1, 2.8, 4.7, 1.2])]: Klasa 1\n"
      ]
     }
    ],
@@ -52,12 +59,12 @@
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "print(\"✅ Model wytrenowany.\")\n",
-    "print(f\"Skuteczność: {model.score(X_test, y_test)*100:.2f}%\")\n",
+    "print(\"\u2705 Model wytrenowany.\")\n",
+    "print(f\"Skuteczno\u015b\u0107: {model.score(X_test, y_test)*100:.2f}%\")\n",
     "\n",
-    "# Sprawdźmy przykładową predykcję dla pierwszego kwiatka z testu\n",
+    "# Sprawd\u017amy przyk\u0142adow\u0105 predykcj\u0119 dla pierwszego kwiatka z testu\n",
     "sample_flower = [X_test[0]]\n",
-    "print(f\"Przykładowa predykcja dla {sample_flower}: Klasa {model.predict(sample_flower)[0]}\")"
+    "print(f\"Przyk\u0142adowa predykcja dla {sample_flower}: Klasa {model.predict(sample_flower)[0]}\")"
    ]
   },
   {
@@ -67,7 +74,7 @@
    "source": [
     "## Metoda 1: Pickle (Standard)\n",
     "\n",
-    "`pickle` zamienia dowolny obiekt Pythona w strumień bajtów (zer i jedynek), który można zapisać na dysku."
+    "`pickle` zamienia dowolny obiekt Pythona w strumie\u0144 bajt\u00f3w (zer i jedynek), kt\u00f3ry mo\u017cna zapisa\u0107 na dysku."
    ]
   },
   {
@@ -80,12 +87,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Model zapisany do pliku: moj_model_iris.pkl\n",
-      "Możesz teraz usunąć zmienną 'model' z pamięci, a plik zostanie na dysku.\n",
-      "❌ Błąd! Zmienna 'model' nie istnieje. Pamięć wyczyszczona.\n",
+      "\ud83d\udcbe Model zapisany do pliku: moj_model_iris.pkl\n",
+      "Mo\u017cesz teraz usun\u0105\u0107 zmienn\u0105 'model' z pami\u0119ci, a plik zostanie na dysku.\n",
+      "\u274c B\u0142\u0105d! Zmienna 'model' nie istnieje. Pami\u0119\u0107 wyczyszczona.\n",
       "\n",
-      "♻️ Model wczytany z pliku!\n",
-      "Czy działa? Sprawdźmy tego samego kwiatka: [array([6.1, 2.8, 4.7, 1.2])]\n",
+      "\u267b\ufe0f Model wczytany z pliku!\n",
+      "Czy dzia\u0142a? Sprawd\u017amy tego samego kwiatka: [array([6.1, 2.8, 4.7, 1.2])]\n",
       "Predykcja: Klasa 1\n"
      ]
     }
@@ -100,23 +107,23 @@
     "with open(filename, 'wb') as file:\n",
     "    pickle.dump(model, file)\n",
     "\n",
-    "print(f\"💾 Model zapisany do pliku: {filename}\")\n",
-    "print(\"Możesz teraz usunąć zmienną 'model' z pamięci, a plik zostanie na dysku.\")\n",
+    "print(f\"\ud83d\udcbe Model zapisany do pliku: {filename}\")\n",
+    "print(\"Mo\u017cesz teraz usun\u0105\u0107 zmienn\u0105 'model' z pami\u0119ci, a plik zostanie na dysku.\")\n",
     "\n",
     "# --- SYMULACJA AWARII (Usuwamy model) ---\n",
     "del model\n",
     "try:\n",
     "    print(model)\n",
     "except NameError:\n",
-    "    print(\"❌ Błąd! Zmienna 'model' nie istnieje. Pamięć wyczyszczona.\")\n",
+    "    print(\"\u274c B\u0142\u0105d! Zmienna 'model' nie istnieje. Pami\u0119\u0107 wyczyszczona.\")\n",
     "\n",
     "# --- WCZYTYWANIE (LOAD) ---\n",
     "# 'rb' oznacza Read Binary\n",
     "with open(filename, 'rb') as file:\n",
     "    loaded_model = pickle.load(file)\n",
     "\n",
-    "print(\"\\n♻️ Model wczytany z pliku!\")\n",
-    "print(f\"Czy działa? Sprawdźmy tego samego kwiatka: {sample_flower}\")\n",
+    "print(\"\\n\u267b\ufe0f Model wczytany z pliku!\")\n",
+    "print(f\"Czy dzia\u0142a? Sprawd\u017amy tego samego kwiatka: {sample_flower}\")\n",
     "print(f\"Predykcja: Klasa {loaded_model.predict(sample_flower)[0]}\")"
    ]
   },
@@ -127,8 +134,8 @@
    "source": [
     "## Metoda 2: Joblib (Zalecane dla ML)\n",
     "\n",
-    "Jeśli Twój model waży 500 MB (bo ma tysiące drzew albo wielkie macierze), `pickle` może być wolny.\n",
-    "`joblib` radzi sobie z tym znacznie szybciej dzięki kompresji i optymalizacji pamięci."
+    "Je\u015bli Tw\u00f3j model wa\u017cy 500 MB (bo ma tysi\u0105ce drzew albo wielkie macierze), `pickle` mo\u017ce by\u0107 wolny.\n",
+    "`joblib` radzi sobie z tym znacznie szybciej dzi\u0119ki kompresji i optymalizacji pami\u0119ci."
    ]
   },
   {
@@ -141,9 +148,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Model zapisany przy użyciu Joblib: moj_model_iris.joblib\n",
-      "♻️ Model wczytany (Joblib)!\n",
-      "Weryfikacja skuteczności: 100.00%\n"
+      "\ud83d\udcbe Model zapisany przy u\u017cyciu Joblib: moj_model_iris.joblib\n",
+      "\u267b\ufe0f Model wczytany (Joblib)!\n",
+      "Weryfikacja skuteczno\u015bci: 100.00%\n"
      ]
     }
    ],
@@ -154,13 +161,13 @@
     "joblib_file = \"moj_model_iris.joblib\"\n",
     "joblib.dump(loaded_model, joblib_file)\n",
     "\n",
-    "print(f\"💾 Model zapisany przy użyciu Joblib: {joblib_file}\")\n",
+    "print(f\"\ud83d\udcbe Model zapisany przy u\u017cyciu Joblib: {joblib_file}\")\n",
     "\n",
     "# --- WCZYTYWANIE ---\n",
     "model_v2 = joblib.load(joblib_file)\n",
     "\n",
-    "print(\"♻️ Model wczytany (Joblib)!\")\n",
-    "print(f\"Weryfikacja skuteczności: {model_v2.score(X_test, y_test)*100:.2f}%\")"
+    "print(\"\u267b\ufe0f Model wczytany (Joblib)!\")\n",
+    "print(f\"Weryfikacja skuteczno\u015bci: {model_v2.score(X_test, y_test)*100:.2f}%\")"
    ]
   },
   {
@@ -170,9 +177,9 @@
    "source": [
     "## Symulacja Produkcji (API)\n",
     "\n",
-    "Wyobraź sobie, że piszesz kod dla backendu (np. FastAPI).\n",
+    "Wyobra\u017a sobie, \u017ce piszesz kod dla backendu (np. FastAPI).\n",
     "Nie trenujesz modelu w kodzie serwera!\n",
-    "Twój kod serwera wyglądałby mniej więcej tak:"
+    "Tw\u00f3j kod serwera wygl\u0105da\u0142by mniej wi\u0119cej tak:"
    ]
   },
   {
@@ -185,15 +192,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🤖 AI mówi: To jest Setosa!\n"
+      "\ud83e\udd16 AI m\u00f3wi: To jest Setosa!\n"
      ]
     }
    ],
    "source": [
-    "# To jest symulacja małej aplikacji\n",
+    "# To jest symulacja ma\u0142ej aplikacji\n",
     "def predict_flower_type(sepal_len, sepal_wid, petal_len, petal_wid):\n",
-    "    # 1. Ładowanie modelu (normalnie robimy to raz przy starcie serwera)\n",
-    "    # Zauważ: Nie ma tu kodu treningowego! Tylko gotowy plik.\n",
+    "    # 1. \u0141adowanie modelu (normalnie robimy to raz przy starcie serwera)\n",
+    "    # Zauwa\u017c: Nie ma tu kodu treningowego! Tylko gotowy plik.\n",
     "    ai_brain = joblib.load(\"moj_model_iris.joblib\")\n",
     "    \n",
     "    # 2. Przygotowanie danych\n",
@@ -202,13 +209,13 @@
     "    # 3. Predykcja\n",
     "    prediction = ai_brain.predict(data)[0]\n",
     "    \n",
-    "    # 4. Tłumaczenie na ludzki\n",
+    "    # 4. T\u0142umaczenie na ludzki\n",
     "    names = {0: 'Setosa', 1: 'Versicolor', 2: 'Virginica'}\n",
     "    return names[prediction]\n",
     "\n",
-    "# KLIENT WCHODZI NA STRONĘ I WPISUJE DANE:\n",
+    "# KLIENT WCHODZI NA STRON\u0118 I WPISUJE DANE:\n",
     "wynik = predict_flower_type(5.1, 3.5, 1.4, 0.2)\n",
-    "print(f\"🤖 AI mówi: To jest {wynik}!\")"
+    "print(f\"\ud83e\udd16 AI m\u00f3wi: To jest {wynik}!\")"
    ]
   },
   {
@@ -216,20 +223,20 @@
    "id": "2172f0c6",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Nie bierz cukierków od nieznajomych\n",
+    "## \ud83e\udde0 Podsumowanie: Nie bierz cukierk\u00f3w od nieznajomych\n",
     "\n",
     "Zapisywanie modeli jest super, ale ma jeden mroczny sekret.\n",
     "\n",
-    "**Tu jest haczyk (Bezpieczeństwo).**\n",
-    "Pliki `pickle` i `joblib` mogą zawierać **dowolny kod Python**.\n",
-    "Jeśli ściągniesz z internetu plik `super_model.pkl` od nieznanego autora i zrobisz `pickle.load()`, ten plik może w trakcie ładowania:\n",
-    "1.  Skasować Twój dysk.\n",
-    "2.  Ukraść hasła.\n",
-    "3.  Zainstalować wirusa.\n",
+    "**Tu jest haczyk (Bezpiecze\u0144stwo).**\n",
+    "Pliki `pickle` i `joblib` mog\u0105 zawiera\u0107 **dowolny kod Python**.\n",
+    "Je\u015bli \u015bci\u0105gniesz z internetu plik `super_model.pkl` od nieznanego autora i zrobisz `pickle.load()`, ten plik mo\u017ce w trakcie \u0142adowania:\n",
+    "1.  Skasowa\u0107 Tw\u00f3j dysk.\n",
+    "2.  Ukra\u015b\u0107 has\u0142a.\n",
+    "3.  Zainstalowa\u0107 wirusa.\n",
     "\n",
     "**Zasada AI Engineera:**\n",
-    "Nigdy nie ładuj modeli (`.pkl`, `.joblib`) z niezaufanych źródeł.\n",
-    "W bezpiecznym środowisku produkcyjnym coraz częściej używa się formatu **ONNX** (Open Neural Network Exchange), który zapisuje samą matematykę (wagi), a nie kod wykonywalny. Ale na początek Joblib wystarczy."
+    "Nigdy nie \u0142aduj modeli (`.pkl`, `.joblib`) z niezaufanych \u017ar\u00f3de\u0142.\n",
+    "W bezpiecznym \u015brodowisku produkcyjnym coraz cz\u0119\u015bciej u\u017cywa si\u0119 formatu **ONNX** (Open Neural Network Exchange), kt\u00f3ry zapisuje sam\u0105 matematyk\u0119 (wagi), a nie kod wykonywalny. Ale na pocz\u0105tek Joblib wystarczy."
    ]
   }
  ],
