--- a/27_Hyperparameter_Tuning_GridSearch.ipynb
+++ b/27_Hyperparameter_Tuning_GridSearch.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/27_Hyperparameter_Tuning_GridSearch.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29231519",
    "metadata": {},
    "source": [
-    "# 🎛️ Hyperparameter Tuning: Koniec ze zgadywaniem (Grid Search)\n",
+    "# \ud83c\udf9b\ufe0f Hyperparameter Tuning: Koniec ze zgadywaniem (Grid Search)\n",
     "\n",
-    "W Machine Learningu mamy dwa rodzaje parametrów:\n",
-    "1.  **Parametry modelu:** To te, których model uczy się sam z danych (np. wagi w sieci neuronowej, gdzie ciąć w drzewie). Tego nie dotykamy.\n",
-    "2.  **Hiperparametry:** To te, które my ustawiamy PRZED treningiem (np. ile drzew w lesie, jak szybko się uczyć).\n",
+    "W Machine Learningu mamy dwa rodzaje parametr\u00f3w:\n",
+    "1.  **Parametry modelu:** To te, kt\u00f3rych model uczy si\u0119 sam z danych (np. wagi w sieci neuronowej, gdzie ci\u0105\u0107 w drzewie). Tego nie dotykamy.\n",
+    "2.  **Hiperparametry:** To te, kt\u00f3re my ustawiamy PRZED treningiem (np. ile drzew w lesie, jak szybko si\u0119 uczy\u0107).\n",
     "\n",
-    "Ręczne sprawdzanie (\"A może zmienię to na 5... a teraz na 10...\") jest stratą czasu.\n",
+    "R\u0119czne sprawdzanie (\"A mo\u017ce zmieni\u0119 to na 5... a teraz na 10...\") jest strat\u0105 czasu.\n",
     "\n",
-    "**Grid Search** działa tak:\n",
-    "1.  Dajesz mu listę opcji (np. Drzewa: [10, 50, 100], Głębokość: [3, 5, 10]).\n",
-    "2.  On tworzy **siatkę** wszystkich kombinacji ($3 \\times 3 = 9$ modeli).\n",
-    "3.  Trenuje każdy z nich (używając Cross-Validation!).\n",
-    "4.  Zwraca zwycięzcę."
+    "**Grid Search** dzia\u0142a tak:\n",
+    "1.  Dajesz mu list\u0119 opcji (np. Drzewa: [10, 50, 100], G\u0142\u0119boko\u015b\u0107: [3, 5, 10]).\n",
+    "2.  On tworzy **siatk\u0119** wszystkich kombinacji ($3 \\times 3 = 9$ modeli).\n",
+    "3.  Trenuje ka\u017cdy z nich (u\u017cywaj\u0105c Cross-Validation!).\n",
+    "4.  Zwraca zwyci\u0119zc\u0119."
    ]
   },
   {
@@ -41,12 +48,12 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# 1. DANE (Wina)\n",
-    "# Zbiór trudniejszy niż Iris (więcej klas, więcej cech)\n",
+    "# Zbi\u00f3r trudniejszy ni\u017c Iris (wi\u0119cej klas, wi\u0119cej cech)\n",
     "wine = load_wine()\n",
     "X = wine.data\n",
     "y = wine.target\n",
     "\n",
-    "# Podział na trening i test (Testu nie dotykamy aż do samego końca!)\n",
+    "# Podzia\u0142 na trening i test (Testu nie dotykamy a\u017c do samego ko\u0144ca!)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(f\"Dane gotowe. Trening: {X_train.shape}, Test: {X_test.shape}\")"
@@ -59,7 +66,7 @@
    "source": [
     "## Krok 1: Model Bazowy (Na czuja)\n",
     "\n",
-    "Najpierw wytrenujmy model z domyślnymi ustawieniami, żeby mieć punkt odniesienia."
+    "Najpierw wytrenujmy model z domy\u015blnymi ustawieniami, \u017ceby mie\u0107 punkt odniesienia."
    ]
   },
   {
@@ -72,17 +79,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wynik bazowy (domyślny): 100.00%\n"
+      "Wynik bazowy (domy\u015blny): 100.00%\n"
      ]
     }
    ],
    "source": [
-    "# Domyślny las losowy\n",
+    "# Domy\u015blny las losowy\n",
     "baseline_model = RandomForestClassifier(random_state=42)\n",
     "baseline_model.fit(X_train, y_train)\n",
     "\n",
     "score = baseline_model.score(X_test, y_test)\n",
-    "print(f\"Wynik bazowy (domyślny): {score*100:.2f}%\")"
+    "print(f\"Wynik bazowy (domy\u015blny): {score*100:.2f}%\")"
    ]
   },
   {
@@ -90,14 +97,14 @@
    "id": "39c49b13",
    "metadata": {},
    "source": [
-    "## Krok 2: Definiujemy Siatkę (The Grid)\n",
+    "## Krok 2: Definiujemy Siatk\u0119 (The Grid)\n",
     "\n",
-    "Teraz definiujemy, co chcemy przetestować.\n",
-    "Wybierzemy 3 najważniejsze parametry Lasu Losowego:\n",
+    "Teraz definiujemy, co chcemy przetestowa\u0107.\n",
+    "Wybierzemy 3 najwa\u017cniejsze parametry Lasu Losowego:\n",
     "\n",
-    "1.  `n_estimators`: Ile drzew? (Za mało = słabo, za dużo = wolno).\n",
-    "2.  `max_depth`: Jak głębokie drzewa? (Za płytkie = underfitting, za głębokie = overfitting).\n",
-    "3.  `min_samples_split`: Ile próbek potrzeba, żeby podzielić gałąź? (Im więcej, tym model bardziej konserwatywny)."
+    "1.  `n_estimators`: Ile drzew? (Za ma\u0142o = s\u0142abo, za du\u017co = wolno).\n",
+    "2.  `max_depth`: Jak g\u0142\u0119bokie drzewa? (Za p\u0142ytkie = underfitting, za g\u0142\u0119bokie = overfitting).\n",
+    "3.  `min_samples_split`: Ile pr\u00f3bek potrzeba, \u017ceby podzieli\u0107 ga\u0142\u0105\u017a? (Im wi\u0119cej, tym model bardziej konserwatywny)."
    ]
   },
   {
@@ -115,7 +122,7 @@
     }
    ],
    "source": [
-    "# Słownik parametrów do przetestowania\n",
+    "# S\u0142ownik parametr\u00f3w do przetestowania\n",
     "param_grid = {\n",
     "    'n_estimators': [50, 100, 200],      # 3 opcje\n",
     "    'max_depth': [None, 10, 20],         # 3 opcje (None = bez limitu)\n",
@@ -123,8 +130,8 @@
     "}\n",
     "\n",
     "# Ile modeli powstanie? 3 * 3 * 3 = 27 kombinacji.\n",
-    "# Każdy będzie sprawdzony 5 razy (Cross-Validation).\n",
-    "# Razem: 27 * 5 = 135 treningów!\n",
+    "# Ka\u017cdy b\u0119dzie sprawdzony 5 razy (Cross-Validation).\n",
+    "# Razem: 27 * 5 = 135 trening\u00f3w!\n",
     "print(\"Siatka zdefiniowana. Zaczynamy szukanie...\")"
    ]
   },
@@ -140,7 +147,7 @@
      "text": [
       "Fitting 5 folds for each of 27 candidates, totalling 135 fits\n",
       "\n",
-      "✅ Zakończono!\n"
+      "\u2705 Zako\u0144czono!\n"
      ]
     }
    ],
@@ -148,8 +155,8 @@
     "# Tworzymy Grid Search\n",
     "# estimator = nasz model\n",
     "# param_grid = nasza siatka\n",
-    "# cv=5 = Walidacja Krzyżowa (5-krotna)\n",
-    "# n_jobs=-1 = Użyj wszystkich rdzeni procesora (żeby było szybciej)\n",
+    "# cv=5 = Walidacja Krzy\u017cowa (5-krotna)\n",
+    "# n_jobs=-1 = U\u017cyj wszystkich rdzeni procesora (\u017ceby by\u0142o szybciej)\n",
     "# verbose=2 = Pisz co robisz\n",
     "\n",
     "grid_search = GridSearchCV(estimator=RandomForestClassifier(random_state=42),\n",
@@ -158,10 +165,10 @@
     "                           n_jobs=-1,\n",
     "                           verbose=1)\n",
     "\n",
-    "# Uruchamiamy (To może chwilę potrwać)\n",
+    "# Uruchamiamy (To mo\u017ce chwil\u0119 potrwa\u0107)\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "print(\"\\n✅ Zakończono!\")"
+    "print(\"\\n\u2705 Zako\u0144czono!\")"
    ]
   },
   {
@@ -171,7 +178,7 @@
    "source": [
     "## Wyniki: And the winner is...\n",
     "\n",
-    "Zobaczmy, jaka kombinacja wygrała i czy udało się pobić wynik bazowy."
+    "Zobaczmy, jaka kombinacja wygra\u0142a i czy uda\u0142o si\u0119 pobi\u0107 wynik bazowy."
    ]
   },
   {
@@ -184,24 +191,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏆 NAJLEPSZE PARAMETRY:\n",
+      "\ud83c\udfc6 NAJLEPSZE PARAMETRY:\n",
       "{'max_depth': None, 'min_samples_split': 2, 'n_estimators': 100}\n",
       "------------------------------\n",
       "Wynik bazowy:     100.00%\n",
       "Wynik po tuningu: 100.00%\n",
-      "😐 Brak zmiany. Domyślne parametry były już bardzo dobre (to się zdarza).\n"
+      "\ud83d\ude10 Brak zmiany. Domy\u015blne parametry by\u0142y ju\u017c bardzo dobre (to si\u0119 zdarza).\n"
      ]
     }
    ],
    "source": [
     "# Najlepsze parametry\n",
-    "print(\"🏆 NAJLEPSZE PARAMETRY:\")\n",
+    "print(\"\ud83c\udfc6 NAJLEPSZE PARAMETRY:\")\n",
     "print(grid_search.best_params_)\n",
     "\n",
-    "# Najlepszy model (automatycznie wytrenowany na całych danych treningowych)\n",
+    "# Najlepszy model (automatycznie wytrenowany na ca\u0142ych danych treningowych)\n",
     "best_model = grid_search.best_estimator_\n",
     "\n",
-    "# Sprawdźmy wynik na zbiorze testowym\n",
+    "# Sprawd\u017amy wynik na zbiorze testowym\n",
     "final_score = best_model.score(X_test, y_test)\n",
     "\n",
     "print(\"-\" * 30)\n",
@@ -209,11 +216,11 @@
     "print(f\"Wynik po tuningu: {final_score*100:.2f}%\")\n",
     "\n",
     "if final_score > score:\n",
-    "    print(\"🚀 Poprawa! Warto było czekać.\")\n",
+    "    print(\"\ud83d\ude80 Poprawa! Warto by\u0142o czeka\u0107.\")\n",
     "elif final_score == score:\n",
-    "    print(\"😐 Brak zmiany. Domyślne parametry były już bardzo dobre (to się zdarza).\")\n",
+    "    print(\"\ud83d\ude10 Brak zmiany. Domy\u015blne parametry by\u0142y ju\u017c bardzo dobre (to si\u0119 zdarza).\")\n",
     "else:\n",
-    "    print(\"📉 Spadek? To niemożliwe na zbiorze treningowym, ale na testowym może się zdarzyć (overfitting).\")"
+    "    print(\"\ud83d\udcc9 Spadek? To niemo\u017cliwe na zbiorze treningowym, ale na testowym mo\u017ce si\u0119 zdarzy\u0107 (overfitting).\")"
    ]
   },
   {
@@ -221,9 +228,9 @@
    "id": "a8011f3e",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Przekleństwo Wymiarowości\n",
+    "## \ud83e\udde0 Podsumowanie: Przekle\u0144stwo Wymiarowo\u015bci\n",
     "\n",
-    "Skoro Grid Search jest taki super, dlaczego nie wrzucimy tam 10 parametrów po 10 opcji każdy?\n",
+    "Skoro Grid Search jest taki super, dlaczego nie wrzucimy tam 10 parametr\u00f3w po 10 opcji ka\u017cdy?\n",
     "\n",
     "**Tu jest haczyk (Eksplozja Kombinatoryczna).**\n",
     "Policzmy:\n",
@@ -233,11 +240,11 @@
     "*   Parametr D: 10 opcji\n",
     "\n",
     "Liczba modeli: $10 \\times 10 \\times 10 \\times 10 = 10 000$.\n",
-    "Jeśli jeden model uczy się 1 minutę -> **Czekasz 7 dni.**\n",
+    "Je\u015bli jeden model uczy si\u0119 1 minut\u0119 -> **Czekasz 7 dni.**\n",
     "\n",
-    "**Rozwiązanie:**\n",
-    "Gdy nie wiesz, gdzie szukać, zamiast `GridSearchCV` używa się **`RandomizedSearchCV`**.\n",
-    "Zamiast sprawdzać wszystko, losuje on np. 100 kombinacji z puli. Statystyka mówi, że z dużym prawdopodobieństwem trafisz w coś \"wystarczająco dobrego\", oszczędzając 99% czasu."
+    "**Rozwi\u0105zanie:**\n",
+    "Gdy nie wiesz, gdzie szuka\u0107, zamiast `GridSearchCV` u\u017cywa si\u0119 **`RandomizedSearchCV`**.\n",
+    "Zamiast sprawdza\u0107 wszystko, losuje on np. 100 kombinacji z puli. Statystyka m\u00f3wi, \u017ce z du\u017cym prawdopodobie\u0144stwem trafisz w co\u015b \"wystarczaj\u0105co dobrego\", oszcz\u0119dzaj\u0105c 99% czasu."
    ]
   }
  ],
