--- a/28_Python_Dataclasses_for_ML.ipynb
+++ b/28_Python_Dataclasses_for_ML.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/28_Python_Dataclasses_for_ML.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d36c88f",
    "metadata": {},
    "source": [
-    "# 📦 Python Dataclasses: Koniec z bałaganem w konfiguracji\n",
+    "# \ud83d\udce6 Python Dataclasses: Koniec z ba\u0142aganem w konfiguracji\n",
     "\n",
-    "Jako Data Scientist często musisz zarządzać dziesiątkami parametrów:\n",
+    "Jako Data Scientist cz\u0119sto musisz zarz\u0105dza\u0107 dziesi\u0105tkami parametr\u00f3w:\n",
     "*   Learning Rate\n",
     "*   Liczba drzew\n",
-    "*   Ścieżka do danych\n",
+    "*   \u015acie\u017cka do danych\n",
     "*   Wymiar warstwy ukrytej\n",
     "\n",
-    "**Sposób amatorski (Słownik):**\n",
-    "Trudno się pisze, brak podpowiadania kodu (IntelliSense), łatwo o literówkę.\n",
+    "**Spos\u00f3b amatorski (S\u0142ownik):**\n",
+    "Trudno si\u0119 pisze, brak podpowiadania kodu (IntelliSense), \u0142atwo o liter\u00f3wk\u0119.\n",
     "\n",
-    "**Sposób profesjonalny (Dataclass):**\n",
-    "Klasa, która generuje się \"sama\" (nie trzeba pisać nudnego `__init__`). Wymusza typy danych i blokuje przypadkowe zmiany.\n",
+    "**Spos\u00f3b profesjonalny (Dataclass):**\n",
+    "Klasa, kt\u00f3ra generuje si\u0119 \"sama\" (nie trzeba pisa\u0107 nudnego `__init__`). Wymusza typy danych i blokuje przypadkowe zmiany.\n",
     "\n",
-    "W tym notatniku stworzymy profesjonalną konfigurację treningu."
+    "W tym notatniku stworzymy profesjonaln\u0105 konfiguracj\u0119 treningu."
    ]
   },
   {
@@ -32,13 +39,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trenuję ResNet50 z LR=0.001\n",
-      "Działa, ale jest ryzykowne (brak podpowiadania kodu).\n"
+      "Trenuj\u0119 ResNet50 z LR=0.001\n",
+      "Dzia\u0142a, ale jest ryzykowne (brak podpowiadania kodu).\n"
      ]
     }
    ],
    "source": [
-    "# Sposób STARY (Słownik)\n",
+    "# Spos\u00f3b STARY (S\u0142ownik)\n",
     "config_dict = {\n",
     "    \"learning_rate\": 0.001,\n",
     "    \"batch_size\": 32,\n",
@@ -46,12 +53,12 @@
     "}\n",
     "\n",
     "def train_model_old(cfg):\n",
-    "    # Ryzyko: Musisz pamiętać dokładne nazwy kluczy\n",
-    "    # Jeśli wpiszesz cfg['batch_sz'], kod wywali się dopiero tutaj\n",
-    "    print(f\"Trenuję {cfg['architecture']} z LR={cfg['learning_rate']}\")\n",
+    "    # Ryzyko: Musisz pami\u0119ta\u0107 dok\u0142adne nazwy kluczy\n",
+    "    # Je\u015bli wpiszesz cfg['batch_sz'], kod wywali si\u0119 dopiero tutaj\n",
+    "    print(f\"Trenuj\u0119 {cfg['architecture']} z LR={cfg['learning_rate']}\")\n",
     "\n",
     "train_model_old(config_dict)\n",
-    "print(\"Działa, ale jest ryzykowne (brak podpowiadania kodu).\")"
+    "print(\"Dzia\u0142a, ale jest ryzykowne (brak podpowiadania kodu).\")"
    ]
   },
   {
@@ -59,11 +66,11 @@
    "id": "7791159d",
    "metadata": {},
    "source": [
-    "## Sposób Nowy: @dataclass\n",
+    "## Spos\u00f3b Nowy: @dataclass\n",
     "\n",
-    "Użyjemy dekoratora `@dataclass`.\n",
-    "Zauważ, że definiujemy zmienne jak w C++ czy Java (z typami).\n",
-    "Dzięki temu, gdy napiszesz `config.`, edytor kodu od razu podpowie Ci dostępne opcje!"
+    "U\u017cyjemy dekoratora `@dataclass`.\n",
+    "Zauwa\u017c, \u017ce definiujemy zmienne jak w C++ czy Java (z typami).\n",
+    "Dzi\u0119ki temu, gdy napiszesz `config.`, edytor kodu od razu podpowie Ci dost\u0119pne opcje!"
    ]
   },
   {
@@ -80,7 +87,7 @@
       "TrainingConfig(model_name='GPT-Mini', learning_rate=0.0005, batch_size=64, epochs=10, use_gpu=True)\n",
       "\n",
       "Model: GPT-Mini\n",
-      "Epoki (domyślnie): 10\n"
+      "Epoki (domy\u015blnie): 10\n"
      ]
     }
    ],
@@ -92,11 +99,11 @@
     "    model_name: str\n",
     "    learning_rate: float\n",
     "    batch_size: int\n",
-    "    # Możemy ustawić wartości domyślne\n",
+    "    # Mo\u017cemy ustawi\u0107 warto\u015bci domy\u015blne\n",
     "    epochs: int = 10\n",
     "    use_gpu: bool = True\n",
     "\n",
-    "# Tworzenie instancji (Wygląda jak zwykła klasa)\n",
+    "# Tworzenie instancji (Wygl\u0105da jak zwyk\u0142a klasa)\n",
     "config = TrainingConfig(\n",
     "    model_name=\"GPT-Mini\",\n",
     "    learning_rate=0.0005,\n",
@@ -106,9 +113,9 @@
     "print(\"--- NASZA KONFIGURACJA ---\")\n",
     "print(config)\n",
     "\n",
-    "# Dostęp przez kropkę (To jest to, co kochają programiści)\n",
+    "# Dost\u0119p przez kropk\u0119 (To jest to, co kochaj\u0105 programi\u015bci)\n",
     "print(f\"\\nModel: {config.model_name}\")\n",
-    "print(f\"Epoki (domyślnie): {config.epochs}\")"
+    "print(f\"Epoki (domy\u015blnie): {config.epochs}\")"
    ]
   },
   {
@@ -116,13 +123,13 @@
    "id": "a4dd7b5e",
    "metadata": {},
    "source": [
-    "## Bezpieczeństwo: Frozen (Zamrożenie)\n",
+    "## Bezpiecze\u0144stwo: Frozen (Zamro\u017cenie)\n",
     "\n",
-    "W ML często zdarza się głupi błąd: przypadkiem nadpisujesz parametr w trakcie treningu.\n",
-    "`config.learning_rate = 0` (przez pomyłkę).\n",
+    "W ML cz\u0119sto zdarza si\u0119 g\u0142upi b\u0142\u0105d: przypadkiem nadpisujesz parametr w trakcie treningu.\n",
+    "`config.learning_rate = 0` (przez pomy\u0142k\u0119).\n",
     "\n",
-    "Możemy temu zapobiec, dodając `frozen=True`.\n",
-    "Wtedy obiekt staje się **niemodyfikowalny** (read-only)."
+    "Mo\u017cemy temu zapobiec, dodaj\u0105c `frozen=True`.\n",
+    "Wtedy obiekt staje si\u0119 **niemodyfikowalny** (read-only)."
    ]
   },
   {
@@ -135,9 +142,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR przed zmianą: 0.01\n",
+      "LR przed zmian\u0105: 0.01\n",
       "\n",
-      "🚫 BŁĄD! Nie można zmienić wartości (I BARDZO DOBRZE):\n",
+      "\ud83d\udeab B\u0141\u0104D! Nie mo\u017cna zmieni\u0107 warto\u015bci (I BARDZO DOBRZE):\n",
       "cannot assign to field 'lr'\n"
      ]
     }
@@ -148,16 +155,16 @@
     "    lr: float\n",
     "    steps: int\n",
     "\n",
-    "# Tworzymy bezpieczną konfigurację\n",
+    "# Tworzymy bezpieczn\u0105 konfiguracj\u0119\n",
     "safe_conf = SafeConfig(lr=0.01, steps=1000)\n",
     "\n",
-    "print(f\"LR przed zmianą: {safe_conf.lr}\")\n",
+    "print(f\"LR przed zmian\u0105: {safe_conf.lr}\")\n",
     "\n",
-    "# Próba zmiany (To powinno wywołać błąd!)\n",
+    "# Pr\u00f3ba zmiany (To powinno wywo\u0142a\u0107 b\u0142\u0105d!)\n",
     "try:\n",
     "    safe_conf.lr = 0.5\n",
     "except Exception as e:\n",
-    "    print(\"\\n🚫 BŁĄD! Nie można zmienić wartości (I BARDZO DOBRZE):\")\n",
+    "    print(\"\\n\ud83d\udeab B\u0141\u0104D! Nie mo\u017cna zmieni\u0107 warto\u015bci (I BARDZO DOBRZE):\")\n",
     "    print(e)"
    ]
   },
@@ -168,9 +175,9 @@
    "source": [
     "## Praktyczne zastosowanie w funkcji\n",
     "\n",
-    "Zobacz, jak czytelna staje się funkcja treningowa, gdy używamy `dataclass`.\n",
-    "W definicji funkcji używamy **Type Hinting** (`cfg: TrainingConfig`).\n",
-    "Dzięki temu każdy, kto używa Twojej funkcji, wie dokładnie, co ma tam wrzucić."
+    "Zobacz, jak czytelna staje si\u0119 funkcja treningowa, gdy u\u017cywamy `dataclass`.\n",
+    "W definicji funkcji u\u017cywamy **Type Hinting** (`cfg: TrainingConfig`).\n",
+    "Dzi\u0119ki temu ka\u017cdy, kto u\u017cywa Twojej funkcji, wie dok\u0142adnie, co ma tam wrzuci\u0107."
    ]
   },
   {
@@ -184,9 +191,9 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "🚀 Start treningu: RandomForest\n",
+      "\ud83d\ude80 Start treningu: RandomForest\n",
       "Parametry: Batch=128, LR=0.01\n",
-      "✅ Koniec.\n"
+      "\u2705 Koniec.\n"
      ]
     }
    ],
@@ -194,20 +201,20 @@
     "# Funkcja przyjmuje TYLKO obiekt typu TrainingConfig\n",
     "def train_model_pro(cfg: TrainingConfig):\n",
     "    if not cfg.use_gpu:\n",
-    "        print(\"⚠️ Ostrzeżenie: Trenujesz na CPU. Będzie wolno.\")\n",
+    "        print(\"\u26a0\ufe0f Ostrze\u017cenie: Trenujesz na CPU. B\u0119dzie wolno.\")\n",
     "    \n",
     "    print(\"-\" * 30)\n",
-    "    print(f\"🚀 Start treningu: {cfg.model_name}\")\n",
+    "    print(f\"\ud83d\ude80 Start treningu: {cfg.model_name}\")\n",
     "    print(f\"Parametry: Batch={cfg.batch_size}, LR={cfg.learning_rate}\")\n",
     "    \n",
-    "    # Symulacja pętli treningowej\n",
+    "    # Symulacja p\u0119tli treningowej\n",
     "    for i in range(cfg.epochs):\n",
-    "        # Tu byłaby logika treningu...\n",
+    "        # Tu by\u0142aby logika treningu...\n",
     "        pass\n",
     "    \n",
-    "    print(\"✅ Koniec.\")\n",
+    "    print(\"\u2705 Koniec.\")\n",
     "\n",
-    "# Użycie\n",
+    "# U\u017cycie\n",
     "my_conf = TrainingConfig(model_name=\"RandomForest\", learning_rate=0.01, batch_size=128, epochs=3)\n",
     "train_model_pro(my_conf)"
    ]
@@ -217,20 +224,20 @@
    "id": "b3704200",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Kodowanie dla Ludzi\n",
+    "## \ud83e\udde0 Podsumowanie: Kodowanie dla Ludzi\n",
     "\n",
-    "Komputer zrozumie wszystko, nawet bałagan w słowniku.\n",
-    "Ale kod piszesz dla **ludzi** (i dla siebie z przyszłości).\n",
+    "Komputer zrozumie wszystko, nawet ba\u0142agan w s\u0142owniku.\n",
+    "Ale kod piszesz dla **ludzi** (i dla siebie z przysz\u0142o\u015bci).\n",
     "\n",
     "**Zalety Dataclasses w ML:**\n",
-    "1.  **Autouzupełnianie:** Piszesz `cfg.` i widzisz listę parametrów. Nie musisz pamiętać nazw.\n",
-    "2.  **Typy:** Wiesz, że `batch_size` to `int`, a nie `str`.\n",
-    "3.  **Immutability (frozen):** Masz pewność, że nikt nie zepsuł konfiguracji w połowie skryptu.\n",
+    "1.  **Autouzupe\u0142nianie:** Piszesz `cfg.` i widzisz list\u0119 parametr\u00f3w. Nie musisz pami\u0119ta\u0107 nazw.\n",
+    "2.  **Typy:** Wiesz, \u017ce `batch_size` to `int`, a nie `str`.\n",
+    "3.  **Immutability (frozen):** Masz pewno\u015b\u0107, \u017ce nikt nie zepsu\u0142 konfiguracji w po\u0142owie skryptu.\n",
     "\n",
     "**Co dalej?**\n",
-    "Mamy fajną klasę `TrainingConfig`.\n",
-    "Ale co, jeśli chcemy wczytać tę konfigurację z pliku JSON albo YAML? Albo stworzyć konfigurację na podstawie nazwy pliku?\n",
-    "Tutaj wchodzą **@classmethod** i **@staticmethod**, którymi zajmiemy się w następnym notatniku."
+    "Mamy fajn\u0105 klas\u0119 `TrainingConfig`.\n",
+    "Ale co, je\u015bli chcemy wczyta\u0107 t\u0119 konfiguracj\u0119 z pliku JSON albo YAML? Albo stworzy\u0107 konfiguracj\u0119 na podstawie nazwy pliku?\n",
+    "Tutaj wchodz\u0105 **@classmethod** i **@staticmethod**, kt\u00f3rymi zajmiemy si\u0119 w nast\u0119pnym notatniku."
    ]
   }
  ],
