--- a/29_OOP_Classmethod_Staticmethod.ipynb
+++ b/29_OOP_Classmethod_Staticmethod.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/29_OOP_Classmethod_Staticmethod.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fcabba0e",
    "metadata": {},
    "source": [
-    "# 🏭 OOP w ML: Fabryki i Narzędzia (Classmethod & Staticmethod)\n",
+    "# \ud83c\udfed OOP w ML: Fabryki i Narz\u0119dzia (Classmethod & Staticmethod)\n",
     "\n",
-    "Kiedy budujesz system ML, Twoje klasy (np. `ModelHandler` czy `DataLoader`) robią się skomplikowane.\n",
-    "Python daje nam dwa potężne dekoratory, żeby utrzymać czystość kodu:\n",
+    "Kiedy budujesz system ML, Twoje klasy (np. `ModelHandler` czy `DataLoader`) robi\u0105 si\u0119 skomplikowane.\n",
+    "Python daje nam dwa pot\u0119\u017cne dekoratory, \u017ceby utrzyma\u0107 czysto\u015b\u0107 kodu:\n",
     "\n",
-    "1.  **`@staticmethod` (Narzędzie):**\n",
-    "    *   To funkcja, która siedzi wewnątrz klasy, ale **nie używa `self`**.\n",
-    "    *   Nie ma dostępu do danych obiektu.\n",
-    "    *   Służy jako funkcja pomocnicza (np. `clean_text`, `normalize_data`), którą trzymamy w klasie dla porządku.\n",
+    "1.  **`@staticmethod` (Narz\u0119dzie):**\n",
+    "    *   To funkcja, kt\u00f3ra siedzi wewn\u0105trz klasy, ale **nie u\u017cywa `self`**.\n",
+    "    *   Nie ma dost\u0119pu do danych obiektu.\n",
+    "    *   S\u0142u\u017cy jako funkcja pomocnicza (np. `clean_text`, `normalize_data`), kt\u00f3r\u0105 trzymamy w klasie dla porz\u0105dku.\n",
     "\n",
     "2.  **`@classmethod` (Fabryka / Alternatywny Konstruktor):**\n",
-    "    *   Zamiast `self`, przyjmuje `cls` (klasę).\n",
-    "    *   Służy do tworzenia obiektów w nietypowy sposób (np. wczytanie z pliku, z bazy danych).\n",
-    "    *   To standardowy sposób na robienie `from_json`, `from_csv` itp.\n",
+    "    *   Zamiast `self`, przyjmuje `cls` (klas\u0119).\n",
+    "    *   S\u0142u\u017cy do tworzenia obiekt\u00f3w w nietypowy spos\u00f3b (np. wczytanie z pliku, z bazy danych).\n",
+    "    *   To standardowy spos\u00f3b na robienie `from_json`, `from_csv` itp.\n",
     "\n",
-    "W tym notatniku zbudujemy klasę `TextClassifier`, która używa obu tych mechanizmów."
+    "W tym notatniku zbudujemy klas\u0119 `TextClassifier`, kt\u00f3ra u\u017cywa obu tych mechanizm\u00f3w."
    ]
   },
   {
@@ -40,7 +47,7 @@
    "source": [
     "import json\n",
     "\n",
-    "# Wyobraźmy sobie prostą klasę do obsługi modelu\n",
+    "# Wyobra\u017amy sobie prost\u0105 klas\u0119 do obs\u0142ugi modelu\n",
     "class TextClassifier:\n",
     "    \n",
     "    # 1. Standardowy Konstruktor (__init__)\n",
@@ -48,12 +55,12 @@
     "        self.model_name = model_name\n",
     "        self.vocabulary = vocabulary\n",
     "        self.version = version\n",
-    "        print(f\"🔧 Zainicjowano {self.model_name} (v{self.version})\")\n",
+    "        print(f\"\ud83d\udd27 Zainicjowano {self.model_name} (v{self.version})\")\n",
     "\n",
-    "    # 2. ZWYKŁA METODA (Używa 'self')\n",
-    "    # Musi mieć dostęp do 'self.vocabulary', żeby działać\n",
+    "    # 2. ZWYK\u0141A METODA (U\u017cywa 'self')\n",
+    "    # Musi mie\u0107 dost\u0119p do 'self.vocabulary', \u017ceby dzia\u0142a\u0107\n",
     "    def predict(self, text):\n",
-    "        # Najpierw używamy metody statycznej do czyszczenia\n",
+    "        # Najpierw u\u017cywamy metody statycznej do czyszczenia\n",
     "        clean_txt = TextClassifier.clean_input(text)\n",
     "        \n",
     "        # Symulacja predykcji\n",
@@ -62,24 +69,24 @@
     "\n",
     "    # 3. METODA STATYCZNA (@staticmethod)\n",
     "    # Nie potrzebuje 'self'. Nie obchodzi jej, jaki to model.\n",
-    "    # Robi prostą robotę: string -> string.\n",
+    "    # Robi prost\u0105 robot\u0119: string -> string.\n",
     "    @staticmethod\n",
     "    def clean_input(text):\n",
     "        return text.lower().strip().replace(\"!\", \"\")\n",
     "\n",
     "    # 4. METODA KLASOWA (@classmethod) - FABRYKA\n",
-    "    # Służy do stworzenia obiektu na podstawie pliku JSON (słownika)\n",
-    "    # Zamiast 'self', dostaje 'cls' (czyli klasę TextClassifier)\n",
+    "    # S\u0142u\u017cy do stworzenia obiektu na podstawie pliku JSON (s\u0142ownika)\n",
+    "    # Zamiast 'self', dostaje 'cls' (czyli klas\u0119 TextClassifier)\n",
     "    @classmethod\n",
     "    def from_config(cls, config_dict):\n",
-    "        # Wyciągamy dane ze słownika\n",
+    "        # Wyci\u0105gamy dane ze s\u0142ownika\n",
     "        name = config_dict.get('name', 'Unknown')\n",
     "        vocab = config_dict.get('vocab', [])\n",
     "        \n",
     "        # Tworzymy i zwracamy obiekt (to samo co: return TextClassifier(...))\n",
     "        return cls(model_name=name, vocabulary=vocab)\n",
     "    \n",
-    "    # Druga fabryka - Wersja Produkcyjna (Domyślna)\n",
+    "    # Druga fabryka - Wersja Produkcyjna (Domy\u015blna)\n",
     "    @classmethod\n",
     "    def create_production(cls):\n",
     "        return cls(model_name=\"Prod_BERT_v2\", vocabulary=[\"tak\", \"nie\"], version=99)\n",
@@ -92,11 +99,11 @@
    "id": "54c52eb1",
    "metadata": {},
    "source": [
-    "## Test 1: Static Method (Narzędzie)\n",
+    "## Test 1: Static Method (Narz\u0119dzie)\n",
     "\n",
-    "Zauważ, że możemy użyć `clean_input` na dwa sposoby:\n",
+    "Zauwa\u017c, \u017ce mo\u017cemy u\u017cy\u0107 `clean_input` na dwa sposoby:\n",
     "1.  Z poziomu obiektu.\n",
-    "2.  Z poziomu samej klasy (nawet nie tworząc obiektu!). To bardzo wygodne."
+    "2.  Z poziomu samej klasy (nawet nie tworz\u0105c obiektu!). To bardzo wygodne."
    ]
   },
   {
@@ -109,18 +116,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oryginał: '  Hura! To działa!  '\n",
-      "Po czyszczeniu: 'hura to działa'\n"
+      "Orygina\u0142: '  Hura! To dzia\u0142a!  '\n",
+      "Po czyszczeniu: 'hura to dzia\u0142a'\n"
      ]
     }
    ],
    "source": [
-    "raw_text = \"  Hura! To działa!  \"\n",
+    "raw_text = \"  Hura! To dzia\u0142a!  \"\n",
     "\n",
-    "# Użycie bez tworzenia obiektu (Jak zwykła funkcja z biblioteki)\n",
+    "# U\u017cycie bez tworzenia obiektu (Jak zwyk\u0142a funkcja z biblioteki)\n",
     "cleaned = TextClassifier.clean_input(raw_text)\n",
     "\n",
-    "print(f\"Oryginał: '{raw_text}'\")\n",
+    "print(f\"Orygina\u0142: '{raw_text}'\")\n",
     "print(f\"Po czyszczeniu: '{cleaned}'\")"
    ]
   },
@@ -131,8 +138,8 @@
    "source": [
     "## Test 2: Class Method (Alternatywne Konstruktory)\n",
     "\n",
-    "To jest ten moment, gdzie Twój kod staje się \"Pro\".\n",
-    "Zamiast kazać użytkownikowi ręcznie wpisywać parametry do `__init__`, dajesz mu wygodne metody `from_...`."
+    "To jest ten moment, gdzie Tw\u00f3j kod staje si\u0119 \"Pro\".\n",
+    "Zamiast kaza\u0107 u\u017cytkownikowi r\u0119cznie wpisywa\u0107 parametry do `__init__`, dajesz mu wygodne metody `from_...`."
    ]
   },
   {
@@ -145,19 +152,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔧 Zainicjowano Mój_Model (v1)\n",
-      "🔧 Zainicjowano GPT-Mini (v1)\n",
-      "🔧 Zainicjowano Prod_BERT_v2 (v99)\n",
+      "\ud83d\udd27 Zainicjowano M\u00f3j_Model (v1)\n",
+      "\ud83d\udd27 Zainicjowano GPT-Mini (v1)\n",
+      "\ud83d\udd27 Zainicjowano Prod_BERT_v2 (v99)\n",
       "------------------------------\n",
-      "Model 1: Mój_Model\n",
+      "Model 1: M\u00f3j_Model\n",
       "Model 2: GPT-Mini\n",
       "Model 3: Prod_BERT_v2 (Wersja 99)\n"
      ]
     }
    ],
    "source": [
-    "# SCENARIUSZ A: Ręczne tworzenie (Standard)\n",
-    "model_1 = TextClassifier(\"Mój_Model\", [\"a\", \"b\"])\n",
+    "# SCENARIUSZ A: R\u0119czne tworzenie (Standard)\n",
+    "model_1 = TextClassifier(\"M\u00f3j_Model\", [\"a\", \"b\"])\n",
     "\n",
     "# SCENARIUSZ B: Tworzenie z konfiguracji (np. pobranej z API)\n",
     "config_from_api = {\n",
@@ -166,7 +173,7 @@
     "    \"ignore_this\": 123\n",
     "}\n",
     "\n",
-    "# Używamy naszej fabryki\n",
+    "# U\u017cywamy naszej fabryki\n",
     "model_2 = TextClassifier.from_config(config_from_api)\n",
     "\n",
     "# SCENARIUSZ C: Szybki model produkcyjny (Defaults)\n",
@@ -183,20 +190,20 @@
    "id": "248ba9e9",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Kiedy czego używać?\n",
+    "## \ud83e\udde0 Podsumowanie: Kiedy czego u\u017cywa\u0107?\n",
     "\n",
-    "Jako AI Engineer będziesz tego używać non-stop:\n",
+    "Jako AI Engineer b\u0119dziesz tego u\u017cywa\u0107 non-stop:\n",
     "\n",
-    "1.  **Zwykła metoda (`def predict(self)`):**\n",
-    "    *   Gdy funkcja musi znać stan obiektu (np. użyć wag modelu `self.weights`).\n",
+    "1.  **Zwyk\u0142a metoda (`def predict(self)`):**\n",
+    "    *   Gdy funkcja musi zna\u0107 stan obiektu (np. u\u017cy\u0107 wag modelu `self.weights`).\n",
     "\n",
     "2.  **`@staticmethod`:**\n",
-    "    *   Gdy funkcja jest logicznie związana z klasą, ale jest niezależna od danych (np. `preprocess_image`, `remove_stopwords`).\n",
-    "    *   *Zasada:* Jeśli w metodzie ani razu nie używasz słowa `self`, to zrób ją statyczną. Będzie szybsza.\n",
+    "    *   Gdy funkcja jest logicznie zwi\u0105zana z klas\u0105, ale jest niezale\u017cna od danych (np. `preprocess_image`, `remove_stopwords`).\n",
+    "    *   *Zasada:* Je\u015bli w metodzie ani razu nie u\u017cywasz s\u0142owa `self`, to zr\u00f3b j\u0105 statyczn\u0105. B\u0119dzie szybsza.\n",
     "\n",
     "3.  **`@classmethod`:**\n",
-    "    *   Gdy chcesz stworzyć obiekt w nowy sposób (Konstruktor).\n",
-    "    *   Najczęstsze nazwy: `from_json`, `from_checkpoint`, `from_pretrained` (znasz to z HuggingFace? `BertModel.from_pretrained('bert-base')` to właśnie `@classmethod`!)."
+    "    *   Gdy chcesz stworzy\u0107 obiekt w nowy spos\u00f3b (Konstruktor).\n",
+    "    *   Najcz\u0119stsze nazwy: `from_json`, `from_checkpoint`, `from_pretrained` (znasz to z HuggingFace? `BertModel.from_pretrained('bert-base')` to w\u0142a\u015bnie `@classmethod`!)."
    ]
   }
  ],
