--- a/30_Sklearn_Pipelines.ipynb
+++ b/30_Sklearn_Pipelines.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/30_Sklearn_Pipelines.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d4d08ae",
    "metadata": {},
    "source": [
-    "# ⛓️ Sklearn Pipelines: Budowa Fabryki AI\n",
+    "# \u26d3\ufe0f Sklearn Pipelines: Budowa Fabryki AI\n",
     "\n",
-    "Do tej pory traktowaliśmy każdy krok (czyszczenie, skalowanie, trening) jako osobną operację.\n",
-    "To proszenie się o kłopoty (błędy, wyciek danych).\n",
+    "Do tej pory traktowali\u015bmy ka\u017cdy krok (czyszczenie, skalowanie, trening) jako osobn\u0105 operacj\u0119.\n",
+    "To proszenie si\u0119 o k\u0142opoty (b\u0142\u0119dy, wyciek danych).\n",
     "\n",
-    "**Pipeline (Rurociąg)** to obiekt, który łączy te kroki w łańcuch.\n",
-    "Działa jak taśma produkcyjna w fabryce Toyoty:\n",
-    "*   Wejście: Brudne dane.\n",
-    "*   Krok 1: Wypełnij braki (Imputer).\n",
+    "**Pipeline (Ruroci\u0105g)** to obiekt, kt\u00f3ry \u0142\u0105czy te kroki w \u0142a\u0144cuch.\n",
+    "Dzia\u0142a jak ta\u015bma produkcyjna w fabryce Toyoty:\n",
+    "*   Wej\u015bcie: Brudne dane.\n",
+    "*   Krok 1: Wype\u0142nij braki (Imputer).\n",
     "*   Krok 2: Przeskaluj liczby (Scaler).\n",
-    "*   Krok 3: Wybierz ważne cechy (Selector).\n",
+    "*   Krok 3: Wybierz wa\u017cne cechy (Selector).\n",
     "*   Krok 4: Wytrenuj model (Classifier).\n",
-    "*   Wyjście: Gotowa predykcja.\n",
+    "*   Wyj\u015bcie: Gotowa predykcja.\n",
     "\n",
-    "Dzięki temu, gdy wywołujesz `pipeline.fit()`, dzieje się to wszystko naraz."
+    "Dzi\u0119ki temu, gdy wywo\u0142ujesz `pipeline.fit()`, dzieje si\u0119 to wszystko naraz."
    ]
   },
   {
@@ -32,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- DANE SUROWE (Zauważ NaN i różne rzędy wielkości) ---\n"
+      "--- DANE SUROWE (Zauwa\u017c NaN i r\u00f3\u017cne rz\u0119dy wielko\u015bci) ---\n"
      ]
     },
     {
@@ -132,23 +139,23 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# 1. TWORZYMY TRUDNE DANE (Z brakami i różną skalą)\n",
+    "# 1. TWORZYMY TRUDNE DANE (Z brakami i r\u00f3\u017cn\u0105 skal\u0105)\n",
     "data = pd.DataFrame({\n",
     "    'Wiek': [25, 30, np.nan, 40, 50, 22, np.nan, 45],     # Braki!\n",
-    "    'Zarobki': [50000, 70000, 60000, 120000, np.nan, 45000, 80000, 95000], # Duże liczby!\n",
-    "    'Liczba_Dzieci': [0, 1, 2, 3, 0, 0, 1, 2],            # Małe liczby\n",
-    "    'Szum_1': np.random.rand(8),                          # Śmieci\n",
-    "    'Szum_2': np.random.rand(8),                          # Śmieci\n",
+    "    'Zarobki': [50000, 70000, 60000, 120000, np.nan, 45000, 80000, 95000], # Du\u017ce liczby!\n",
+    "    'Liczba_Dzieci': [0, 1, 2, 3, 0, 0, 1, 2],            # Ma\u0142e liczby\n",
+    "    'Szum_1': np.random.rand(8),                          # \u015amieci\n",
+    "    'Szum_2': np.random.rand(8),                          # \u015amieci\n",
     "    'Kupil': [0, 0, 1, 1, 1, 0, 1, 1]                     # Target\n",
     "})\n",
     "\n",
     "X = data.drop('Kupil', axis=1)\n",
     "y = data['Kupil']\n",
     "\n",
-    "# Podział (standardowy)\n",
+    "# Podzia\u0142 (standardowy)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
     "\n",
-    "print(\"--- DANE SUROWE (Zauważ NaN i różne rzędy wielkości) ---\")\n",
+    "print(\"--- DANE SUROWE (Zauwa\u017c NaN i r\u00f3\u017cne rz\u0119dy wielko\u015bci) ---\")\n",
     "display(X_train.head())"
    ]
   },
@@ -157,12 +164,12 @@
    "id": "938d7990",
    "metadata": {},
    "source": [
-    "## Budujemy Rurociąg\n",
+    "## Budujemy Ruroci\u0105g\n",
     "\n",
-    "Zdefiniujemy listę kroków.\n",
-    "Każdy krok to krotka: `('nazwa', Obiekt)`.\n",
+    "Zdefiniujemy list\u0119 krok\u00f3w.\n",
+    "Ka\u017cdy krok to krotka: `('nazwa', Obiekt)`.\n",
     "\n",
-    "Zauważ, że **nie musimy** teraz robić `fit_transform` ręcznie dla każdego etapu. Pipeline zrobi to sam."
+    "Zauwa\u017c, \u017ce **nie musimy** teraz robi\u0107 `fit_transform` r\u0119cznie dla ka\u017cdego etapu. Pipeline zrobi to sam."
    ]
   },
   {
@@ -175,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Pipeline zdefiniowany. Jeszcze nie wytrenowany.\n"
+      "\u2705 Pipeline zdefiniowany. Jeszcze nie wytrenowany.\n"
      ]
     },
     {
@@ -348,7 +355,7 @@
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
-       "  content: \"▸\";\n",
+       "  content: \"\u25b8\";\n",
        "  float: left;\n",
        "  margin-right: 0.25em;\n",
        "  color: var(--sklearn-color-icon);\n",
@@ -393,7 +400,7 @@
        "}\n",
        "\n",
        "#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
-       "  content: \"▾\";\n",
+       "  content: \"\u25be\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
@@ -1107,21 +1114,21 @@
    "source": [
     "# Definicja Pipeline'a\n",
     "moj_pipeline = Pipeline([\n",
-    "    # Krok 1: Łatanie dziur (Wiek i Zarobki dostaną średnią)\n",
+    "    # Krok 1: \u0141atanie dziur (Wiek i Zarobki dostan\u0105 \u015bredni\u0105)\n",
     "    ('imputer', SimpleImputer(strategy='mean')),\n",
     "    \n",
-    "    # Krok 2: Skalowanie (Żeby Zarobki nie zdominowały Wieku)\n",
+    "    # Krok 2: Skalowanie (\u017beby Zarobki nie zdominowa\u0142y Wieku)\n",
     "    ('scaler', StandardScaler()),\n",
     "    \n",
-    "    # Krok 3: Wybór cech (Chcemy 3 najlepsze kolumny, wyrzucamy szum)\n",
+    "    # Krok 3: Wyb\u00f3r cech (Chcemy 3 najlepsze kolumny, wyrzucamy szum)\n",
     "    ('selector', SelectKBest(score_func=f_classif, k=3)),\n",
     "    \n",
-    "    # Krok 4: Model (Mózg operacji)\n",
+    "    # Krok 4: Model (M\u00f3zg operacji)\n",
     "    ('model', RandomForestClassifier(random_state=42))\n",
     "])\n",
     "\n",
-    "print(\"✅ Pipeline zdefiniowany. Jeszcze nie wytrenowany.\")\n",
-    "# Możemy go nawet wyświetlić graficznie w Colabie!\n",
+    "print(\"\u2705 Pipeline zdefiniowany. Jeszcze nie wytrenowany.\")\n",
+    "# Mo\u017cemy go nawet wy\u015bwietli\u0107 graficznie w Colabie!\n",
     "from sklearn import set_config\n",
     "set_config(display='diagram')\n",
     "display(moj_pipeline)"
@@ -1134,11 +1141,11 @@
    "source": [
     "## Trening i Predykcja (Jedna linijka!)\n",
     "\n",
-    "Teraz dzieje się magia.\n",
-    "Wpisujemy `fit` tylko raz. Pipeline automatycznie przesyła dane przez rury.\n",
+    "Teraz dzieje si\u0119 magia.\n",
+    "Wpisujemy `fit` tylko raz. Pipeline automatycznie przesy\u0142a dane przez rury.\n",
     "\n",
-    "Co ważniejsze: przy `predict` (na danych testowych), Pipeline pamięta średnie i odchylenia z treningu!\n",
-    "Nie popełni błędu **Data Leakage** (nie będzie podglądał danych testowych, żeby policzyć średnią)."
+    "Co wa\u017cniejsze: przy `predict` (na danych testowych), Pipeline pami\u0119ta \u015brednie i odchylenia z treningu!\n",
+    "Nie pope\u0142ni b\u0142\u0119du **Data Leakage** (nie b\u0119dzie podgl\u0105da\u0142 danych testowych, \u017ceby policzy\u0107 \u015bredni\u0105)."
    ]
   },
   {
@@ -1153,7 +1160,7 @@
      "text": [
       "Predykcje: [1 0]\n",
       "Prawdziwe: [0 0]\n",
-      "Dokładność: 50%\n"
+      "Dok\u0142adno\u015b\u0107: 50%\n"
      ]
     }
    ],
@@ -1162,12 +1169,12 @@
     "moj_pipeline.fit(X_train, y_train)\n",
     "\n",
     "# 2. PREDYKCJA\n",
-    "# Pipeline sam uzupełni braki w X_test, przeskaluje je itd.\n",
+    "# Pipeline sam uzupe\u0142ni braki w X_test, przeskaluje je itd.\n",
     "y_pred = moj_pipeline.predict(X_test)\n",
     "\n",
     "print(f\"Predykcje: {y_pred}\")\n",
     "print(f\"Prawdziwe: {y_test.values}\")\n",
-    "print(f\"Dokładność: {accuracy_score(y_test, y_pred)*100:.0f}%\")"
+    "print(f\"Dok\u0142adno\u015b\u0107: {accuracy_score(y_test, y_pred)*100:.0f}%\")"
    ]
   },
   {
@@ -1175,10 +1182,10 @@
    "id": "46b749b6",
    "metadata": {},
    "source": [
-    "## Dostęp do wnętrza Pipeline'a\n",
+    "## Dost\u0119p do wn\u0119trza Pipeline'a\n",
     "\n",
-    "A co jeśli chcemy zobaczyć, jakie cechy wybrał `SelectKBest` w 3. kroku?\n",
-    "Możemy dostać się do każdego elementu rurociągu po nazwie."
+    "A co je\u015bli chcemy zobaczy\u0107, jakie cechy wybra\u0142 `SelectKBest` w 3. kroku?\n",
+    "Mo\u017cemy dosta\u0107 si\u0119 do ka\u017cdego elementu ruroci\u0105gu po nazwie."
    ]
   },
   {
@@ -1191,25 +1198,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- CO DZIAŁO SIĘ W ŚRODKU? ---\n",
-      "Selector odrzucił 2 kolumny (szum).\n",
+      "--- CO DZIA\u0141O SI\u0118 W \u015aRODKU? ---\n",
+      "Selector odrzuci\u0142 2 kolumny (szum).\n",
       "Wybrane cechy: ['Wiek', 'Zarobki', 'Liczba_Dzieci']\n"
      ]
     }
    ],
    "source": [
-    "# Wyciągamy krok o nazwie 'selector'\n",
+    "# Wyci\u0105gamy krok o nazwie 'selector'\n",
     "selector_step = moj_pipeline.named_steps['selector']\n",
     "\n",
-    "# Sprawdzamy, które kolumny wybrał (zwraca maskę True/False)\n",
+    "# Sprawdzamy, kt\u00f3re kolumny wybra\u0142 (zwraca mask\u0119 True/False)\n",
     "wybrane_maska = selector_step.get_support()\n",
     "\n",
-    "# Nazwy kolumn (musimy je wyciągnąć, bo Imputer usuwa nagłówki, ale my wiemy jaka była kolejność)\n",
+    "# Nazwy kolumn (musimy je wyci\u0105gn\u0105\u0107, bo Imputer usuwa nag\u0142\u00f3wki, ale my wiemy jaka by\u0142a kolejno\u015b\u0107)\n",
     "wszystkie_cechy = X.columns\n",
     "wybrane_cechy = wszystkie_cechy[wybrane_maska]\n",
     "\n",
-    "print(\"--- CO DZIAŁO SIĘ W ŚRODKU? ---\")\n",
-    "print(f\"Selector odrzucił 2 kolumny (szum).\")\n",
+    "print(\"--- CO DZIA\u0141O SI\u0118 W \u015aRODKU? ---\")\n",
+    "print(f\"Selector odrzuci\u0142 2 kolumny (szum).\")\n",
     "print(f\"Wybrane cechy: {list(wybrane_cechy)}\")"
    ]
   },
@@ -1218,15 +1225,15 @@
    "id": "fa206a72",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego Profesjonaliści używają Pipeline?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego Profesjonali\u015bci u\u017cywaj\u0105 Pipeline?\n",
     "\n",
-    "1.  **Czystość kodu:** Zamiast 50 linii kodu z `fit_transform`, masz jedną definicję.\n",
-    "2.  **Bezpieczeństwo:** Nie ma ryzyka, że zapomnisz przeskalować danych testowych. Pipeline robi to automatcznie.\n",
-    "3.  **Łatwy GridSearch:** Możesz optymalizować parametry całego rurociągu naraz!\n",
-    "    *   Możesz sprawdzić: *\"Czy lepiej użyć `strategy='mean'` czy `'median'` w Imputerze?\"*\n",
-    "    *   Możesz sprawdzić: *\"Czy lepiej wybrać `k=2` czy `k=4` cechy?\"*\n",
+    "1.  **Czysto\u015b\u0107 kodu:** Zamiast 50 linii kodu z `fit_transform`, masz jedn\u0105 definicj\u0119.\n",
+    "2.  **Bezpiecze\u0144stwo:** Nie ma ryzyka, \u017ce zapomnisz przeskalowa\u0107 danych testowych. Pipeline robi to automatcznie.\n",
+    "3.  **\u0141atwy GridSearch:** Mo\u017cesz optymalizowa\u0107 parametry ca\u0142ego ruroci\u0105gu naraz!\n",
+    "    *   Mo\u017cesz sprawdzi\u0107: *\"Czy lepiej u\u017cy\u0107 `strategy='mean'` czy `'median'` w Imputerze?\"*\n",
+    "    *   Mo\u017cesz sprawdzi\u0107: *\"Czy lepiej wybra\u0107 `k=2` czy `k=4` cechy?\"*\n",
     "\n",
-    "Pipeline to fundament **ML Ops**. Takie obiekty zapisuje się do pliku (`joblib`) i wysyła na produkcję."
+    "Pipeline to fundament **ML Ops**. Takie obiekty zapisuje si\u0119 do pliku (`joblib`) i wysy\u0142a na produkcj\u0119."
    ]
   }
  ],
