--- a/31_Custom_Transformers.ipynb
+++ b/31_Custom_Transformers.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/31_Custom_Transformers.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "984e5a8a",
    "metadata": {},
    "source": [
-    "# 🛠️ Custom Transformers: Twoje własne klocki w Pipeline\n",
+    "# \ud83d\udee0\ufe0f Custom Transformers: Twoje w\u0142asne klocki w Pipeline\n",
     "\n",
-    "Scikit-Learn pozwala Ci budować własne klasy, które zachowują się dokładnie tak jak `StandardScaler` czy `PCA`.\n",
-    "Dzięki temu możesz wrzucić swoją unikalną logikę biznesową (np. czyszczenie walut, wyciąganie danych z daty) prosto do Pipeline'a.\n",
+    "Scikit-Learn pozwala Ci budowa\u0107 w\u0142asne klasy, kt\u00f3re zachowuj\u0105 si\u0119 dok\u0142adnie tak jak `StandardScaler` czy `PCA`.\n",
+    "Dzi\u0119ki temu mo\u017cesz wrzuci\u0107 swoj\u0105 unikaln\u0105 logik\u0119 biznesow\u0105 (np. czyszczenie walut, wyci\u0105ganie danych z daty) prosto do Pipeline'a.\n",
     "\n",
-    "Aby to zrobić, musimy stworzyć klasę, która dziedziczy po:\n",
-    "1.  **`BaseEstimator`**: Pozwala używać naszej klasy w GridSearchu (automatycznie obsługuje parametry).\n",
-    "2.  **`TransformerMixin`**: Daje nam darmową metodę `.fit_transform()`.\n",
+    "Aby to zrobi\u0107, musimy stworzy\u0107 klas\u0119, kt\u00f3ra dziedziczy po:\n",
+    "1.  **`BaseEstimator`**: Pozwala u\u017cywa\u0107 naszej klasy w GridSearchu (automatycznie obs\u0142uguje parametry).\n",
+    "2.  **`TransformerMixin`**: Daje nam darmow\u0105 metod\u0119 `.fit_transform()`.\n",
     "\n",
-    "Musimy napisać tylko dwie metody:\n",
-    "*   `fit(self, X, y=None)`: Czego model ma się nauczyć z danych? (Np. średniej). Jeśli niczego (bo tylko czyścimy tekst) -> zwracamy `self`.\n",
-    "*   `transform(self, X)`: Tu dzieje się właściwa robota (zmiana danych)."
+    "Musimy napisa\u0107 tylko dwie metody:\n",
+    "*   `fit(self, X, y=None)`: Czego model ma si\u0119 nauczy\u0107 z danych? (Np. \u015bredniej). Je\u015bli niczego (bo tylko czy\u015bcimy tekst) -> zwracamy `self`.\n",
+    "*   `transform(self, X)`: Tu dzieje si\u0119 w\u0142a\u015bciwa robota (zmiana danych)."
    ]
   },
   {
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- DANE WEJŚCIOWE (Napisy zamiast liczb!) ---\n"
+      "--- DANE WEJ\u015aCIOWE (Napisy zamiast liczb!) ---\n"
      ]
     },
     {
@@ -78,14 +85,14 @@
        "      <th>2</th>\n",
        "      <td>Klawiatura</td>\n",
        "      <td>$150.99</td>\n",
-       "      <td>Średni (0.8kg)</td>\n",
+       "      <td>\u015aredni (0.8kg)</td>\n",
        "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Monitor</td>\n",
        "      <td>$300.00</td>\n",
-       "      <td>Ciężki (5.0kg)</td>\n",
+       "      <td>Ci\u0119\u017cki (5.0kg)</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -96,8 +103,8 @@
        "      Produkt Cena_Brudna             Waga_Opis  Sprzedaz\n",
        "0      Laptop   $1,200.50         Lekki (1.5kg)       100\n",
        "1      Myszka      $50.00  Bardzo lekki (0.1kg)       500\n",
-       "2  Klawiatura     $150.99        Średni (0.8kg)       200\n",
-       "3     Monitor     $300.00        Ciężki (5.0kg)        50"
+       "2  Klawiatura     $150.99        \u015aredni (0.8kg)       200\n",
+       "3     Monitor     $300.00        Ci\u0119\u017cki (5.0kg)        50"
       ]
      },
      "metadata": {},
@@ -123,15 +130,15 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# 1. BRUDNE DANE\n",
-    "# Wyobraź sobie dane prosto ze sklepu internetowego (scraping).\n",
+    "# Wyobra\u017a sobie dane prosto ze sklepu internetowego (scraping).\n",
     "data = pd.DataFrame({\n",
     "    'Produkt': ['Laptop', 'Myszka', 'Klawiatura', 'Monitor'],\n",
-    "    'Cena_Brudna': ['$1,200.50', '$50.00', '$150.99', '$300.00'], # To są napisy!\n",
-    "    'Waga_Opis': ['Lekki (1.5kg)', 'Bardzo lekki (0.1kg)', 'Średni (0.8kg)', 'Ciężki (5.0kg)'],\n",
-    "    'Sprzedaz': [100, 500, 200, 50] # To chcemy przewidzieć\n",
+    "    'Cena_Brudna': ['$1,200.50', '$50.00', '$150.99', '$300.00'], # To s\u0105 napisy!\n",
+    "    'Waga_Opis': ['Lekki (1.5kg)', 'Bardzo lekki (0.1kg)', '\u015aredni (0.8kg)', 'Ci\u0119\u017cki (5.0kg)'],\n",
+    "    'Sprzedaz': [100, 500, 200, 50] # To chcemy przewidzie\u0107\n",
     "})\n",
     "\n",
-    "print(\"--- DANE WEJŚCIOWE (Napisy zamiast liczb!) ---\")\n",
+    "print(\"--- DANE WEJ\u015aCIOWE (Napisy zamiast liczb!) ---\")\n",
     "display(data)\n",
     "print(data.dtypes)"
    ]
@@ -143,12 +150,12 @@
    "source": [
     "## Transformator 1: CurrencyCleaner\n",
     "\n",
-    "Napiszemy klasę, która:\n",
-    "1.  Bierze kolumnę tekstową.\n",
+    "Napiszemy klas\u0119, kt\u00f3ra:\n",
+    "1.  Bierze kolumn\u0119 tekstow\u0105.\n",
     "2.  Usuwa znaki `$` i `,`.\n",
-    "3.  Zamienia resztę na `float`.\n",
+    "3.  Zamienia reszt\u0119 na `float`.\n",
     "\n",
-    "Zauważ, że w metodzie `fit` nic nie robimy (`return self`), bo czyszczenie dolara nie wymaga \"uczenia się\" od danych. To operacja bezstanowa."
+    "Zauwa\u017c, \u017ce w metodzie `fit` nic nie robimy (`return self`), bo czyszczenie dolara nie wymaga \"uczenia si\u0119\" od danych. To operacja bezstanowa."
    ]
   },
   {
@@ -210,14 +217,14 @@
        "      <th>2</th>\n",
        "      <td>Klawiatura</td>\n",
        "      <td>150.99</td>\n",
-       "      <td>Średni (0.8kg)</td>\n",
+       "      <td>\u015aredni (0.8kg)</td>\n",
        "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Monitor</td>\n",
        "      <td>300.00</td>\n",
-       "      <td>Ciężki (5.0kg)</td>\n",
+       "      <td>Ci\u0119\u017cki (5.0kg)</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -228,8 +235,8 @@
        "      Produkt  Cena_Brudna             Waga_Opis  Sprzedaz\n",
        "0      Laptop      1200.50         Lekki (1.5kg)       100\n",
        "1      Myszka        50.00  Bardzo lekki (0.1kg)       500\n",
-       "2  Klawiatura       150.99        Średni (0.8kg)       200\n",
-       "3     Monitor       300.00        Ciężki (5.0kg)        50"
+       "2  Klawiatura       150.99        \u015aredni (0.8kg)       200\n",
+       "3     Monitor       300.00        Ci\u0119\u017cki (5.0kg)        50"
       ]
      },
      "metadata": {},
@@ -253,23 +260,23 @@
     "        self.column_name = column_name\n",
     "    \n",
     "    def fit(self, X, y=None):\n",
-    "        # Nic do nauczenia. Nie liczymy średniej ani nic.\n",
-    "        # Po prostu zwracamy obiekt, żeby Pipeline się nie zaciął.\n",
+    "        # Nic do nauczenia. Nie liczymy \u015bredniej ani nic.\n",
+    "        # Po prostu zwracamy obiekt, \u017ceby Pipeline si\u0119 nie zaci\u0105\u0142.\n",
     "        return self\n",
     "    \n",
     "    def transform(self, X):\n",
-    "        # Kopiujemy dane, żeby nie psuć oryginału (Dobra praktyka!)\n",
+    "        # Kopiujemy dane, \u017ceby nie psu\u0107 orygina\u0142u (Dobra praktyka!)\n",
     "        X_copy = X.copy()\n",
     "        \n",
     "        # Logika czyszczenia\n",
-    "        # 1. Usuń '$'\n",
-    "        # 2. Usuń ',' (dla tysięcy)\n",
-    "        # 3. Zamień na float\n",
+    "        # 1. Usu\u0144 '$'\n",
+    "        # 2. Usu\u0144 ',' (dla tysi\u0119cy)\n",
+    "        # 3. Zamie\u0144 na float\n",
     "        X_copy[self.column_name] = X_copy[self.column_name].astype(str).str.replace('$', '').str.replace(',', '').astype(float)\n",
     "        \n",
     "        return X_copy\n",
     "\n",
-    "# Przetestujmy to ręcznie\n",
+    "# Przetestujmy to r\u0119cznie\n",
     "cleaner = CurrencyCleaner(column_name='Cena_Brudna')\n",
     "data_clean = cleaner.fit_transform(data)\n",
     "\n",
@@ -285,10 +292,10 @@
    "source": [
     "## Transformator 2: WeightExtractor (Regex)\n",
     "\n",
-    "Teraz trudniejsze zadanie. Mamy kolumnę `Waga_Opis`: \"Lekki (1.5kg)\".\n",
-    "Chcemy wyciągnąć samą liczbę `1.5` z nawiasu.\n",
+    "Teraz trudniejsze zadanie. Mamy kolumn\u0119 `Waga_Opis`: \"Lekki (1.5kg)\".\n",
+    "Chcemy wyci\u0105gn\u0105\u0107 sam\u0105 liczb\u0119 `1.5` z nawiasu.\n",
     "\n",
-    "Użyjemy wyrażeń regularnych (Regex)."
+    "U\u017cyjemy wyra\u017ce\u0144 regularnych (Regex)."
    ]
   },
   {
@@ -376,12 +383,12 @@
     "    def transform(self, X, y=None):\n",
     "        X_copy = X.copy()\n",
     "        \n",
-    "        # Regex: Szukamy cyfr, kropki, cyfr wewnątrz nawiasu\n",
-    "        # '(\\d+\\.?\\d*)kg' oznacza: znajdź liczbę przed 'kg'\n",
+    "        # Regex: Szukamy cyfr, kropki, cyfr wewn\u0105trz nawiasu\n",
+    "        # '(\\d+\\.?\\d*)kg' oznacza: znajd\u017a liczb\u0119 przed 'kg'\n",
     "        X_copy['Waga_Liczbowa'] = X_copy['Waga_Opis'].str.extract(r'(\\d+\\.?\\d*)').astype(float)\n",
     "        \n",
-    "        # Usuwamy starą kolumnę tekstową (bo model jej nie zrozumie)\n",
-    "        return X_copy.drop(columns=['Waga_Opis', 'Produkt']) # Usuwamy też Produkt bo to tekst\n",
+    "        # Usuwamy star\u0105 kolumn\u0119 tekstow\u0105 (bo model jej nie zrozumie)\n",
+    "        return X_copy.drop(columns=['Waga_Opis', 'Produkt']) # Usuwamy te\u017c Produkt bo to tekst\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
@@ -399,10 +406,10 @@
    "id": "b9b3c215",
    "metadata": {},
    "source": [
-    "## Wielki Finał: Pipeline\n",
+    "## Wielki Fina\u0142: Pipeline\n",
     "\n",
-    "Złóżmy to w całość.\n",
-    "Nasz Pipeline weźmie te brudne dane, wyczyści dolary, wyciągnie wagę z nawiasów i na końcu wytrenuje Regresję."
+    "Z\u0142\u00f3\u017cmy to w ca\u0142o\u015b\u0107.\n",
+    "Nasz Pipeline we\u017amie te brudne dane, wyczy\u015bci dolary, wyci\u0105gnie wag\u0119 z nawias\u00f3w i na ko\u0144cu wytrenuje Regresj\u0119."
    ]
   },
   {
@@ -415,20 +422,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Pipeline wytrenowany na brudnych danych!\n",
+      "\u2705 Pipeline wytrenowany na brudnych danych!\n",
       "\n",
       "Nowy produkt: ['Tablet' '$450.00' 'Super (0.4kg)']\n",
-      "Przewidywana sprzedaż: 300.93 sztuk\n"
+      "Przewidywana sprzeda\u017c: 300.93 sztuk\n"
      ]
     }
    ],
    "source": [
-    "# Definiujemy pełny proces\n",
+    "# Definiujemy pe\u0142ny proces\n",
     "moj_pipeline = Pipeline([\n",
-    "    # Krok 1: Wyczyść cenę\n",
+    "    # Krok 1: Wyczy\u015b\u0107 cen\u0119\n",
     "    ('cleaner', CurrencyCleaner(column_name='Cena_Brudna')),\n",
     "    \n",
-    "    # Krok 2: Wyciągnij wagę i usuń zbędny tekst\n",
+    "    # Krok 2: Wyci\u0105gnij wag\u0119 i usu\u0144 zb\u0119dny tekst\n",
     "    ('extractor', WeightExtractor()),\n",
     "    \n",
     "    # Krok 3: Model\n",
@@ -436,17 +443,17 @@
     "])\n",
     "\n",
     "# Dzielimy na X i y\n",
-    "X = data[['Produkt', 'Cena_Brudna', 'Waga_Opis']] # Brudne wejście\n",
+    "X = data[['Produkt', 'Cena_Brudna', 'Waga_Opis']] # Brudne wej\u015bcie\n",
     "y = data['Sprzedaz']\n",
     "\n",
     "# TRENING (Magia!)\n",
     "# Pipeline sam uruchomi fit() i transform() po kolei\n",
     "moj_pipeline.fit(X, y)\n",
     "\n",
-    "print(\"✅ Pipeline wytrenowany na brudnych danych!\")\n",
+    "print(\"\u2705 Pipeline wytrenowany na brudnych danych!\")\n",
     "\n",
     "# PREDYKCJA\n",
-    "# Wyobraź sobie, że to nowe dane z API\n",
+    "# Wyobra\u017a sobie, \u017ce to nowe dane z API\n",
     "nowe_dane = pd.DataFrame({\n",
     "    'Produkt': ['Tablet'],\n",
     "    'Cena_Brudna': ['$450.00'],\n",
@@ -455,7 +462,7 @@
     "\n",
     "predykcja = moj_pipeline.predict(nowe_dane)\n",
     "print(f\"\\nNowy produkt: {nowe_dane.iloc[0].values}\")\n",
-    "print(f\"Przewidywana sprzedaż: {predykcja[0]:.2f} sztuk\")"
+    "print(f\"Przewidywana sprzeda\u017c: {predykcja[0]:.2f} sztuk\")"
    ]
   },
   {
@@ -463,18 +470,18 @@
    "id": "3730e9e3",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego warto pisać klasy?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego warto pisa\u0107 klasy?\n",
     "\n",
-    "Mogliśmy to zrobić funkcją `lambda` w Pandas, prawda?\n",
+    "Mogli\u015bmy to zrobi\u0107 funkcj\u0105 `lambda` w Pandas, prawda?\n",
     "Tak, ale...\n",
     "\n",
     "**Tu jest haczyk (Produkcja i Serializacja).**\n",
-    "1.  Gdybyś użył funkcji lambda, musiałbyś kopiować ten kod do pliku `api.py` na serwerze.\n",
-    "2.  Używając klasy `CurrencyCleaner`, możesz zapisać cały `moj_pipeline` do pliku `.pkl` (Pickle).\n",
-    "3.  Kiedy wczytasz ten plik na serwerze, **cała logika czyszczenia jest w środku modelu**.\n",
+    "1.  Gdyby\u015b u\u017cy\u0142 funkcji lambda, musia\u0142by\u015b kopiowa\u0107 ten kod do pliku `api.py` na serwerze.\n",
+    "2.  U\u017cywaj\u0105c klasy `CurrencyCleaner`, mo\u017cesz zapisa\u0107 ca\u0142y `moj_pipeline` do pliku `.pkl` (Pickle).\n",
+    "3.  Kiedy wczytasz ten plik na serwerze, **ca\u0142a logika czyszczenia jest w \u015brodku modelu**.\n",
     "\n",
     "Wrzucasz brudne dane -> Wychodzi wynik.\n",
-    "To jest definicja **Robust ML System**. Twój model jest \"samowystarczalny\"."
+    "To jest definicja **Robust ML System**. Tw\u00f3j model jest \"samowystarczalny\"."
    ]
   }
  ],
