--- a/33_PyTorch_Neural_Network_Class.ipynb
+++ b/33_PyTorch_Neural_Network_Class.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/33_PyTorch_Neural_Network_Class.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a4f9494d",
    "metadata": {},
    "source": [
-    "# 🧠 PyTorch: Budujemy Mózg (nn.Module)\n",
+    "# \ud83e\udde0 PyTorch: Budujemy M\u00f3zg (nn.Module)\n",
     "\n",
-    "W PyTorch każda sieć neuronowa jest **Klasą**, która dziedziczy po `nn.Module`.\n",
-    "To standard, którego używa się w Tesli, OpenAI i Meta.\n",
+    "W PyTorch ka\u017cda sie\u0107 neuronowa jest **Klas\u0105**, kt\u00f3ra dziedziczy po `nn.Module`.\n",
+    "To standard, kt\u00f3rego u\u017cywa si\u0119 w Tesli, OpenAI i Meta.\n",
     "\n",
-    "Szablon zawsze wygląda tak samo:\n",
-    "1.  **`__init__` (Konstruktor):** Tutaj kupujemy klocki (definiujemy warstwy: \"Poproszę 2 warstwy liniowe\").\n",
-    "2.  **`forward` (Przepływ):** Tutaj układamy klocki (definiujemy, jak dane płyną: \"Wejdź do warstwy 1 -> zrób ReLU -> wejdź do warstwy 2\").\n",
+    "Szablon zawsze wygl\u0105da tak samo:\n",
+    "1.  **`__init__` (Konstruktor):** Tutaj kupujemy klocki (definiujemy warstwy: \"Poprosz\u0119 2 warstwy liniowe\").\n",
+    "2.  **`forward` (Przep\u0142yw):** Tutaj uk\u0142adamy klocki (definiujemy, jak dane p\u0142yn\u0105: \"Wejd\u017a do warstwy 1 -> zr\u00f3b ReLU -> wejd\u017a do warstwy 2\").\n",
     "\n",
-    "Rozwiążemy problem klasyfikacji (zbiór `make_circles`), którego nie da się rozwiązać prostą kreską."
+    "Rozwi\u0105\u017cemy problem klasyfikacji (zbi\u00f3r `make_circles`), kt\u00f3rego nie da si\u0119 rozwi\u0105za\u0107 prost\u0105 kresk\u0105."
    ]
   },
   {
@@ -44,22 +51,22 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# 1. PRZYGOTOWANIE DANYCH\n",
-    "# Tworzymy dwa okręgi (mniejszy wewnątrz większego)\n",
+    "# Tworzymy dwa okr\u0119gi (mniejszy wewn\u0105trz wi\u0119kszego)\n",
     "# To problem nieliniowy!\n",
     "X_np, y_np = make_circles(n_samples=1000, noise=0.03, random_state=42)\n",
     "\n",
     "# Zamiana na Tensory PyTorch\n",
-    "# .float() jest ważne, bo PyTorch domyślnie woli float32\n",
+    "# .float() jest wa\u017cne, bo PyTorch domy\u015blnie woli float32\n",
     "X = torch.from_numpy(X_np).type(torch.float)\n",
     "y = torch.from_numpy(y_np).type(torch.float)\n",
     "\n",
-    "# Podział Train/Test\n",
+    "# Podzia\u0142 Train/Test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Wizualizacja\n",
     "plt.figure(figsize=(6, 5))\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdBu)\n",
-    "plt.title(\"Problem: Oddzielić czerwone od niebieskiego\")\n",
+    "plt.title(\"Problem: Oddzieli\u0107 czerwone od niebieskiego\")\n",
     "plt.show()"
    ]
   },
@@ -70,13 +77,13 @@
    "source": [
     "## Definiowanie Klasy Modelu\n",
     "\n",
-    "Stworzymy klasę `CircleModelV1`.\n",
-    "Zauważ użycie `super().__init__()` – to obowiązkowe, żeby PyTorch mógł robić swoją magię pod spodem.\n",
+    "Stworzymy klas\u0119 `CircleModelV1`.\n",
+    "Zauwa\u017c u\u017cycie `super().__init__()` \u2013 to obowi\u0105zkowe, \u017ceby PyTorch m\u00f3g\u0142 robi\u0107 swoj\u0105 magi\u0119 pod spodem.\n",
     "\n",
     "Nasza architektura:\n",
-    "*   Wejście: 2 cechy (współrzędne X, Y).\n",
-    "*   Ukryta warstwa: 10 neuronów (żeby wygiąć przestrzeń).\n",
-    "*   Wyjście: 1 neuron (0 lub 1)."
+    "*   Wej\u015bcie: 2 cechy (wsp\u00f3\u0142rz\u0119dne X, Y).\n",
+    "*   Ukryta warstwa: 10 neuron\u00f3w (\u017ceby wygi\u0105\u0107 przestrze\u0144).\n",
+    "*   Wyj\u015bcie: 1 neuron (0 lub 1)."
    ]
   },
   {
@@ -89,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model stworzony i wysłany na: cuda\n",
+      "Model stworzony i wys\u0142any na: cuda\n",
       "CircleModel(\n",
       "  (layer_1): Linear(in_features=2, out_features=10, bias=True)\n",
       "  (layer_2): Linear(in_features=10, out_features=10, bias=True)\n",
@@ -110,17 +117,17 @@
     "        # Warstwa 1: Bierze 2 liczby (x,y), wypluwa 10 liczb (ukryte cechy)\n",
     "        self.layer_1 = nn.Linear(in_features=2, out_features=10)\n",
     "        \n",
-    "        # Warstwa 2: Bierze 10 liczb, wypluwa 10 liczb (pogłębianie sieci)\n",
+    "        # Warstwa 2: Bierze 10 liczb, wypluwa 10 liczb (pog\u0142\u0119bianie sieci)\n",
     "        self.layer_2 = nn.Linear(in_features=10, out_features=10)\n",
     "        \n",
-    "        # Warstwa 3 (Wyjście): Bierze 10 liczb, wypluwa 1 (Decyzja)\n",
+    "        # Warstwa 3 (Wyj\u015bcie): Bierze 10 liczb, wypluwa 1 (Decyzja)\n",
     "        self.layer_3 = nn.Linear(in_features=10, out_features=1)\n",
     "        \n",
     "        # Funkcja aktywacji (ReLU - nasza \"iskra\")\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # DEFINIUJEMY PRZEPŁYW DANYCH (Logika)\n",
+    "        # DEFINIUJEMY PRZEP\u0141YW DANYCH (Logika)\n",
     "        # x -> Warstwa 1 -> ReLU -> Warstwa 2 -> ReLU -> Warstwa 3 -> Wynik\n",
     "        \n",
     "        z = self.layer_1(x)\n",
@@ -129,13 +136,13 @@
     "        z = self.relu(z)\n",
     "        z = self.layer_3(z)\n",
     "        \n",
-    "        return z # Zwracamy surowe logity (bez Sigmoida na końcu, o tym zaraz)\n",
+    "        return z # Zwracamy surowe logity (bez Sigmoida na ko\u0144cu, o tym zaraz)\n",
     "\n",
-    "# Tworzymy instancję modelu\n",
+    "# Tworzymy instancj\u0119 modelu\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "model = CircleModel().to(device)\n",
     "\n",
-    "print(f\"Model stworzony i wysłany na: {device}\")\n",
+    "print(f\"Model stworzony i wys\u0142any na: {device}\")\n",
     "print(model)"
    ]
   },
@@ -144,15 +151,15 @@
    "id": "2162ec0e",
    "metadata": {},
    "source": [
-    "## Pętla Treningowa (Training Loop)\n",
+    "## P\u0119tla Treningowa (Training Loop)\n",
     "\n",
-    "W Scikit-Learn pisaliśmy `model.fit()`. Tutaj musimy napisać to ręcznie.\n",
-    "To daje nam pełną kontrolę nad procesem.\n",
+    "W Scikit-Learn pisali\u015bmy `model.fit()`. Tutaj musimy napisa\u0107 to r\u0119cznie.\n",
+    "To daje nam pe\u0142n\u0105 kontrol\u0119 nad procesem.\n",
     "\n",
-    "Standardowa pętla PyTorch składa się z 5 kroków w każdej epoce:\n",
-    "1.  **Forward Pass:** Model robi predykcję.\n",
-    "2.  **Calculate Loss:** Sprawdzamy, jak bardzo się pomylił.\n",
-    "3.  **Zero Grad:** Czyścimy stare gradienty (żeby się nie sumowały).\n",
+    "Standardowa p\u0119tla PyTorch sk\u0142ada si\u0119 z 5 krok\u00f3w w ka\u017cdej epoce:\n",
+    "1.  **Forward Pass:** Model robi predykcj\u0119.\n",
+    "2.  **Calculate Loss:** Sprawdzamy, jak bardzo si\u0119 pomyli\u0142.\n",
+    "3.  **Zero Grad:** Czy\u015bcimy stare gradienty (\u017ceby si\u0119 nie sumowa\u0142y).\n",
     "4.  **Backward Pass:** Liczymy nowe gradienty (Autograd!).\n",
     "5.  **Optimizer Step:** Aktualizujemy wagi."
    ]
@@ -167,16 +174,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoka: 0 | Strata (Loss): 0.6959 | Dokładność Testowa: 51.0%\n",
-      "Epoka: 100 | Strata (Loss): 0.6923 | Dokładność Testowa: 51.0%\n",
-      "Epoka: 200 | Strata (Loss): 0.6907 | Dokładność Testowa: 52.0%\n",
-      "Epoka: 300 | Strata (Loss): 0.6893 | Dokładność Testowa: 54.0%\n",
-      "Epoka: 400 | Strata (Loss): 0.6878 | Dokładność Testowa: 56.0%\n",
-      "Epoka: 500 | Strata (Loss): 0.6859 | Dokładność Testowa: 56.5%\n",
-      "Epoka: 600 | Strata (Loss): 0.6836 | Dokładność Testowa: 57.5%\n",
-      "Epoka: 700 | Strata (Loss): 0.6802 | Dokładność Testowa: 57.0%\n",
-      "Epoka: 800 | Strata (Loss): 0.6758 | Dokładność Testowa: 64.0%\n",
-      "Epoka: 900 | Strata (Loss): 0.6700 | Dokładność Testowa: 63.5%\n"
+      "Epoka: 0 | Strata (Loss): 0.6959 | Dok\u0142adno\u015b\u0107 Testowa: 51.0%\n",
+      "Epoka: 100 | Strata (Loss): 0.6923 | Dok\u0142adno\u015b\u0107 Testowa: 51.0%\n",
+      "Epoka: 200 | Strata (Loss): 0.6907 | Dok\u0142adno\u015b\u0107 Testowa: 52.0%\n",
+      "Epoka: 300 | Strata (Loss): 0.6893 | Dok\u0142adno\u015b\u0107 Testowa: 54.0%\n",
+      "Epoka: 400 | Strata (Loss): 0.6878 | Dok\u0142adno\u015b\u0107 Testowa: 56.0%\n",
+      "Epoka: 500 | Strata (Loss): 0.6859 | Dok\u0142adno\u015b\u0107 Testowa: 56.5%\n",
+      "Epoka: 600 | Strata (Loss): 0.6836 | Dok\u0142adno\u015b\u0107 Testowa: 57.5%\n",
+      "Epoka: 700 | Strata (Loss): 0.6802 | Dok\u0142adno\u015b\u0107 Testowa: 57.0%\n",
+      "Epoka: 800 | Strata (Loss): 0.6758 | Dok\u0142adno\u015b\u0107 Testowa: 64.0%\n",
+      "Epoka: 900 | Strata (Loss): 0.6700 | Dok\u0142adno\u015b\u0107 Testowa: 63.5%\n"
      ]
     }
    ],
@@ -186,23 +193,23 @@
     "# To standard dla klasyfikacji binarnej (jest stabilniejsze matematycznie).\n",
     "loss_fn = nn.BCEWithLogitsLoss()\n",
     "\n",
-    "# 2. Optymalizator (To on robi kroki w dół góry)\n",
+    "# 2. Optymalizator (To on robi kroki w d\u00f3\u0142 g\u00f3ry)\n",
     "# SGD = Stochastic Gradient Descent\n",
     "optimizer = optim.SGD(params=model.parameters(), lr=0.1)\n",
     "\n",
-    "# Przenosimy dane na GPU (jeśli dostępne)\n",
+    "# Przenosimy dane na GPU (je\u015bli dost\u0119pne)\n",
     "X_train, y_train = X_train.to(device), y_train.to(device)\n",
     "X_test, y_test = X_test.to(device), y_test.to(device)\n",
     "\n",
-    "# 3. PĘTLA TRENINGOWA\n",
+    "# 3. P\u0118TLA TRENINGOWA\n",
     "epochs = 1000\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    ### TRENING ###\n",
-    "    model.train() # Przełączamy w tryb treningu\n",
+    "    model.train() # Prze\u0142\u0105czamy w tryb treningu\n",
     "    \n",
     "    # 1. Forward\n",
-    "    y_logits = model(X_train).squeeze() # squeeze usuwa zbędny wymiar [[1], [0]] -> [1, 0]\n",
+    "    y_logits = model(X_train).squeeze() # squeeze usuwa zb\u0119dny wymiar [[1], [0]] -> [1, 0]\n",
     "    \n",
     "    # 2. Loss\n",
     "    loss = loss_fn(y_logits, y_train)\n",
@@ -218,16 +225,16 @@
     "    \n",
     "    ### TESTOWANIE (Co 100 epok) ###\n",
     "    if epoch % 100 == 0:\n",
-    "        model.eval() # Tryb ewaluacji (wyłącza np. Dropout)\n",
-    "        with torch.inference_mode(): # Wyłącza śledzenie gradientów (oszczędza pamięć)\n",
+    "        model.eval() # Tryb ewaluacji (wy\u0142\u0105cza np. Dropout)\n",
+    "        with torch.inference_mode(): # Wy\u0142\u0105cza \u015bledzenie gradient\u00f3w (oszcz\u0119dza pami\u0119\u0107)\n",
     "            test_logits = model(X_test).squeeze()\n",
     "            test_loss = loss_fn(test_logits, y_test)\n",
     "            \n",
-    "            # Zamiana logitów na predykcję (Sigmoid -> Zaokrąglenie)\n",
+    "            # Zamiana logit\u00f3w na predykcj\u0119 (Sigmoid -> Zaokr\u0105glenie)\n",
     "            test_pred = torch.round(torch.sigmoid(test_logits))\n",
     "            acc = (test_pred == y_test).sum().item() / len(y_test)\n",
     "            \n",
-    "        print(f\"Epoka: {epoch} | Strata (Loss): {loss:.4f} | Dokładność Testowa: {acc*100:.1f}%\")"
+    "        print(f\"Epoka: {epoch} | Strata (Loss): {loss:.4f} | Dok\u0142adno\u015b\u0107 Testowa: {acc*100:.1f}%\")"
    ]
   },
   {
@@ -240,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- CO WIDZI SIEĆ? ---\n"
+      "--- CO WIDZI SIE\u0106? ---\n"
      ]
     },
     {
@@ -256,7 +263,7 @@
    ],
    "source": [
     "# WIZUALIZACJA GRANICY DECYZJI\n",
-    "# (Funkcja pomocnicza ściągnięta z dokumentacji, uproszczona)\n",
+    "# (Funkcja pomocnicza \u015bci\u0105gni\u0119ta z dokumentacji, uproszczona)\n",
     "\n",
     "def plot_decision_boundary(model, X, y):\n",
     "    model.to(\"cpu\")\n",
@@ -278,7 +285,7 @@
     "    plt.ylim(yy.min(), yy.max())\n",
     "    plt.show()\n",
     "\n",
-    "print(\"--- CO WIDZI SIEĆ? ---\")\n",
+    "print(\"--- CO WIDZI SIE\u0106? ---\")\n",
     "plot_decision_boundary(model, X, y)"
    ]
   },
@@ -287,19 +294,19 @@
    "id": "5147db7e",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Wolność kosztuje\n",
+    "## \ud83e\udde0 Podsumowanie: Wolno\u015b\u0107 kosztuje\n",
     "\n",
-    "W Scikit-Learn napisalibyśmy 3 linie kodu. Tutaj napisaliśmy 50.\n",
+    "W Scikit-Learn napisaliby\u015bmy 3 linie kodu. Tutaj napisali\u015bmy 50.\n",
     "Po co?\n",
     "\n",
-    "**Tu jest haczyk (Elastyczność).**\n",
-    "W `model.fit()` jesteś skazany na to, co wymyślił autor biblioteki.\n",
-    "W PyTorch pętla treningowa jest Twoja:\n",
-    "*   Możesz zmienić Learning Rate w połowie treningu.\n",
-    "*   Możesz mieć dwa różne Wejścia i trzy Wyjścia.\n",
-    "*   Możesz robić rzeczy, których nikt wcześniej nie robił (np. własna funkcja kosztu).\n",
+    "**Tu jest haczyk (Elastyczno\u015b\u0107).**\n",
+    "W `model.fit()` jeste\u015b skazany na to, co wymy\u015bli\u0142 autor biblioteki.\n",
+    "W PyTorch p\u0119tla treningowa jest Twoja:\n",
+    "*   Mo\u017cesz zmieni\u0107 Learning Rate w po\u0142owie treningu.\n",
+    "*   Mo\u017cesz mie\u0107 dwa r\u00f3\u017cne Wej\u015bcia i trzy Wyj\u015bcia.\n",
+    "*   Mo\u017cesz robi\u0107 rzeczy, kt\u00f3rych nikt wcze\u015bniej nie robi\u0142 (np. w\u0142asna funkcja kosztu).\n",
     "\n",
-    "Teraz, gdy masz działającą klasę modelu i pętlę treningową, masz fundament do budowania **każdego** rodzaju sieci neuronowej – od rozpoznawania kotów po klony GPT."
+    "Teraz, gdy masz dzia\u0142aj\u0105c\u0105 klas\u0119 modelu i p\u0119tl\u0119 treningow\u0105, masz fundament do budowania **ka\u017cdego** rodzaju sieci neuronowej \u2013 od rozpoznawania kot\u00f3w po klony GPT."
    ]
   }
  ],
