--- a/34_Regularization_Lasso_Ridge.ipynb
+++ b/34_Regularization_Lasso_Ridge.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/34_Regularization_Lasso_Ridge.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bf227f2",
    "metadata": {},
    "source": [
-    "# 🛡️ Regularyzacja: Lasso, Ridge i ElasticNet (Bat na Overfitting)\n",
+    "# \ud83d\udee1\ufe0f Regularyzacja: Lasso, Ridge i ElasticNet (Bat na Overfitting)\n",
     "\n",
-    "W Regresji Liniowej model szuka wag ($w$), które minimalizują błąd:\n",
+    "W Regresji Liniowej model szuka wag ($w$), kt\u00f3re minimalizuj\u0105 b\u0142\u0105d:\n",
     "$$ Loss = (y - \\hat{y})^2 $$\n",
     "\n",
-    "Problem: Model może ustawić wagi na kosmiczne wartości (np. $w = 1000000$), żeby idealnie dopasować się do szumu w danych treningowych.\n",
+    "Problem: Model mo\u017ce ustawi\u0107 wagi na kosmiczne warto\u015bci (np. $w = 1000000$), \u017ceby idealnie dopasowa\u0107 si\u0119 do szumu w danych treningowych.\n",
     "\n",
-    "**Rozwiązanie:** Dodajemy karę (Penalty) za wielkość wag.\n",
+    "**Rozwi\u0105zanie:** Dodajemy kar\u0119 (Penalty) za wielko\u015b\u0107 wag.\n",
     "\n",
     "1.  **Ridge (L2):** Kara za **kwadrat** wag ($w^2$).\n",
-    "    *   Efekt: Wagi robią się malutkie (bliskie zera), ale nigdy nie znikają całkowicie. Dobre, gdy wszystkie cechy są trochę ważne.\n",
-    "2.  **Lasso (L1):** Kara za **wartość bezwzględną** wag ($|w|$).\n",
-    "    *   Efekt: Wagi słabych cech są zerowane **do zera**.\n",
-    "    *   **Magia:** Lasso automatycznie wyrzuca śmieciowe kolumny!\n",
-    "3.  **ElasticNet:** Miesza oba podejścia.\n",
+    "    *   Efekt: Wagi robi\u0105 si\u0119 malutkie (bliskie zera), ale nigdy nie znikaj\u0105 ca\u0142kowicie. Dobre, gdy wszystkie cechy s\u0105 troch\u0119 wa\u017cne.\n",
+    "2.  **Lasso (L1):** Kara za **warto\u015b\u0107 bezwzgl\u0119dn\u0105** wag ($|w|$).\n",
+    "    *   Efekt: Wagi s\u0142abych cech s\u0105 zerowane **do zera**.\n",
+    "    *   **Magia:** Lasso automatycznie wyrzuca \u015bmieciowe kolumny!\n",
+    "3.  **ElasticNet:** Miesza oba podej\u015bcia.\n",
     "\n",
-    "Stworzymy zbiór danych, który ma **więcej kolumn niż wierszy** (koszmar statystyka), żeby wymusić Overfitting."
+    "Stworzymy zbi\u00f3r danych, kt\u00f3ry ma **wi\u0119cej kolumn ni\u017c wierszy** (koszmar statystyka), \u017ceby wymusi\u0107 Overfitting."
    ]
   },
   {
@@ -47,20 +54,20 @@
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# 1. TWORZYMY TRUDNE DANE (Mało wierszy, dużo kolumn)\n",
+    "# 1. TWORZYMY TRUDNE DANE (Ma\u0142o wierszy, du\u017co kolumn)\n",
     "np.random.seed(42)\n",
     "n_samples = 50\n",
-    "n_features = 100 # Więcej cech niż próbek! Model zwariuje.\n",
+    "n_features = 100 # Wi\u0119cej cech ni\u017c pr\u00f3bek! Model zwariuje.\n",
     "\n",
     "# Tylko 10 pierwszych cech ma sens. Reszta (90) to szum.\n",
     "X = np.random.randn(n_samples, n_features)\n",
     "\n",
-    "# Prawdziwy wzór: y zależy tylko od pierwszych 10 kolumn\n",
+    "# Prawdziwy wz\u00f3r: y zale\u017cy tylko od pierwszych 10 kolumn\n",
     "true_weights = np.zeros(n_features)\n",
     "true_weights[:10] = 1.5 # Prawdziwe wagi to 1.5\n",
-    "y = np.dot(X, true_weights) + np.random.normal(0, 0.5, n_samples) # Dodajemy trochę szumu\n",
+    "y = np.dot(X, true_weights) + np.random.normal(0, 0.5, n_samples) # Dodajemy troch\u0119 szumu\n",
     "\n",
-    "# Podział\n",
+    "# Podzia\u0142\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "print(f\"Dane: {X.shape}. Mamy 100 kolumn, a tylko 50 wierszy.\")\n",
@@ -72,9 +79,9 @@
    "id": "83efdfb6",
    "metadata": {},
    "source": [
-    "## 1. Linear Regression (Bez hamulców)\n",
+    "## 1. Linear Regression (Bez hamulc\u00f3w)\n",
     "\n",
-    "Zobaczmy, co zrobi zwykła regresja. Prawdopodobnie oszaleje i zacznie przypisywać ogromne wagi do losowych kolumn szumu."
+    "Zobaczmy, co zrobi zwyk\u0142a regresja. Prawdopodobnie oszaleje i zacznie przypisywa\u0107 ogromne wagi do losowych kolumn szumu."
    ]
   },
   {
@@ -88,8 +95,8 @@
      "output_type": "stream",
      "text": [
       "--- LINEAR REGRESSION ---\n",
-      "Błąd Treningowy: 0.0000 (Podejrzanie mały!)\n",
-      "Błąd Testowy:    9.5339 (Ogromny! Overfitting!)\n"
+      "B\u0142\u0105d Treningowy: 0.0000 (Podejrzanie ma\u0142y!)\n",
+      "B\u0142\u0105d Testowy:    9.5339 (Ogromny! Overfitting!)\n"
      ]
     },
     {
@@ -106,33 +113,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wniosek: Spójrz na wykres. Wagi latają od -10 do 10, nawet dla cech-śmieci (powyżej indeksu 10).\n"
+      "Wniosek: Sp\u00f3jrz na wykres. Wagi lataj\u0105 od -10 do 10, nawet dla cech-\u015bmieci (powy\u017cej indeksu 10).\n"
      ]
     }
    ],
    "source": [
-    "# Trenujemy zwykłą regresję\n",
+    "# Trenujemy zwyk\u0142\u0105 regresj\u0119\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
     "\n",
-    "# Sprawdzamy błędy\n",
+    "# Sprawdzamy b\u0142\u0119dy\n",
     "train_err = mean_squared_error(y_train, lr.predict(X_train))\n",
     "test_err = mean_squared_error(y_test, lr.predict(X_test))\n",
     "\n",
     "print(\"--- LINEAR REGRESSION ---\")\n",
-    "print(f\"Błąd Treningowy: {train_err:.4f} (Podejrzanie mały!)\")\n",
-    "print(f\"Błąd Testowy:    {test_err:.4f} (Ogromny! Overfitting!)\")\n",
+    "print(f\"B\u0142\u0105d Treningowy: {train_err:.4f} (Podejrzanie ma\u0142y!)\")\n",
+    "print(f\"B\u0142\u0105d Testowy:    {test_err:.4f} (Ogromny! Overfitting!)\")\n",
     "\n",
     "# Wykres wag\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(lr.coef_, marker='o', label='Linear Regression')\n",
-    "plt.title(\"Wagi modelu Liniowego (Szaleństwo)\")\n",
+    "plt.title(\"Wagi modelu Liniowego (Szale\u0144stwo)\")\n",
     "plt.xlabel(\"Numer cechy (0-9 to prawda, 10-99 to szum)\")\n",
-    "plt.ylabel(\"Wartość wagi\")\n",
+    "plt.ylabel(\"Warto\u015b\u0107 wagi\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "print(\"Wniosek: Spójrz na wykres. Wagi latają od -10 do 10, nawet dla cech-śmieci (powyżej indeksu 10).\")"
+    "print(\"Wniosek: Sp\u00f3jrz na wykres. Wagi lataj\u0105 od -10 do 10, nawet dla cech-\u015bmieci (powy\u017cej indeksu 10).\")"
    ]
   },
   {
@@ -142,8 +149,8 @@
    "source": [
     "## 2. Ridge (L2) - Uspokajacz\n",
     "\n",
-    "Dodajemy parametr `alpha` (siła kary).\n",
-    "Ridge zmniejszy wagi, ale ich nie wyzeruje. Wykres powinien być bardziej \"płaski\"."
+    "Dodajemy parametr `alpha` (si\u0142a kary).\n",
+    "Ridge zmniejszy wagi, ale ich nie wyzeruje. Wykres powinien by\u0107 bardziej \"p\u0142aski\"."
    ]
   },
   {
@@ -157,8 +164,8 @@
      "output_type": "stream",
      "text": [
       "--- RIDGE (L2) ---\n",
-      "Błąd Treningowy: 0.0027\n",
-      "Błąd Testowy:    9.5418\n"
+      "B\u0142\u0105d Treningowy: 0.0027\n",
+      "B\u0142\u0105d Testowy:    9.5418\n"
      ]
     },
     {
@@ -175,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wniosek: Wagi są mniejsze, bliżej zera, ale nadal szumią.\n"
+      "Wniosek: Wagi s\u0105 mniejsze, bli\u017cej zera, ale nadal szumi\u0105.\n"
      ]
     }
    ],
@@ -185,18 +192,18 @@
     "ridge.fit(X_train, y_train)\n",
     "\n",
     "print(\"--- RIDGE (L2) ---\")\n",
-    "print(f\"Błąd Treningowy: {mean_squared_error(y_train, ridge.predict(X_train)):.4f}\")\n",
-    "print(f\"Błąd Testowy:    {mean_squared_error(y_test, ridge.predict(X_test)):.4f}\")\n",
+    "print(f\"B\u0142\u0105d Treningowy: {mean_squared_error(y_train, ridge.predict(X_train)):.4f}\")\n",
+    "print(f\"B\u0142\u0105d Testowy:    {mean_squared_error(y_test, ridge.predict(X_test)):.4f}\")\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(ridge.coef_, color='green', marker='o', label='Ridge')\n",
-    "# Rysujemy prawdziwe wagi (ideał) dla porównania\n",
+    "# Rysujemy prawdziwe wagi (idea\u0142) dla por\u00f3wnania\n",
     "plt.plot(true_weights, 'r--', label='Prawda', alpha=0.5)\n",
     "plt.title(\"Wagi Ridge (Uspokojone)\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "print(\"Wniosek: Wagi są mniejsze, bliżej zera, ale nadal szumią.\")"
+    "print(\"Wniosek: Wagi s\u0105 mniejsze, bli\u017cej zera, ale nadal szumi\u0105.\")"
    ]
   },
   {
@@ -206,8 +213,8 @@
    "source": [
     "## 3. Lasso (L1) - Snajper\n",
     "\n",
-    "Lasso ma unikalną cechę matematyczną: jego kształt \"pola kary\" (romb) sprawia, że rozwiązanie często ląduje idealnie na osiach układu współrzędnych.\n",
-    "W języku ludzi: **Lasso zeruje niepotrzebne wagi.**"
+    "Lasso ma unikaln\u0105 cech\u0119 matematyczn\u0105: jego kszta\u0142t \"pola kary\" (romb) sprawia, \u017ce rozwi\u0105zanie cz\u0119sto l\u0105duje idealnie na osiach uk\u0142adu wsp\u00f3\u0142rz\u0119dnych.\n",
+    "W j\u0119zyku ludzi: **Lasso zeruje niepotrzebne wagi.**"
    ]
   },
   {
@@ -221,10 +228,10 @@
      "output_type": "stream",
      "text": [
       "--- LASSO (L1) ---\n",
-      "Błąd Treningowy: 0.1911\n",
-      "Błąd Testowy:    1.6192\n",
+      "B\u0142\u0105d Treningowy: 0.1911\n",
+      "B\u0142\u0105d Testowy:    1.6192\n",
       "\n",
-      "Lasso wyzerowało 76 z 100 cech!\n"
+      "Lasso wyzerowa\u0142o 76 z 100 cech!\n"
      ]
     },
     {
@@ -240,17 +247,17 @@
    ],
    "source": [
     "# Trenujemy Lasso (alpha=0.1)\n",
-    "# Uwaga: Lasso wymaga trochę czasu na zbieżność, czasem trzeba zwiększyć max_iter\n",
+    "# Uwaga: Lasso wymaga troch\u0119 czasu na zbie\u017cno\u015b\u0107, czasem trzeba zwi\u0119kszy\u0107 max_iter\n",
     "lasso = Lasso(alpha=0.1, max_iter=2000)\n",
     "lasso.fit(X_train, y_train)\n",
     "\n",
     "print(\"--- LASSO (L1) ---\")\n",
-    "print(f\"Błąd Treningowy: {mean_squared_error(y_train, lasso.predict(X_train)):.4f}\")\n",
-    "print(f\"Błąd Testowy:    {mean_squared_error(y_test, lasso.predict(X_test)):.4f}\")\n",
+    "print(f\"B\u0142\u0105d Treningowy: {mean_squared_error(y_train, lasso.predict(X_train)):.4f}\")\n",
+    "print(f\"B\u0142\u0105d Testowy:    {mean_squared_error(y_test, lasso.predict(X_test)):.4f}\")\n",
     "\n",
-    "# Ile cech zostało wyzerowanych?\n",
+    "# Ile cech zosta\u0142o wyzerowanych?\n",
     "zeros = np.sum(lasso.coef_ == 0)\n",
-    "print(f\"\\nLasso wyzerowało {zeros} z {n_features} cech!\")\n",
+    "print(f\"\\nLasso wyzerowa\u0142o {zeros} z {n_features} cech!\")\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(lasso.coef_, color='orange', marker='o', label='Lasso')\n",
@@ -265,29 +272,29 @@
    "id": "fa53c025",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: L1 czy L2?\n",
+    "## \ud83e\udde0 Podsumowanie: L1 czy L2?\n",
     "\n",
-    "Spójrz na ostatni wykres.\n",
+    "Sp\u00f3jrz na ostatni wykres.\n",
     "*   **Linear:** Chaos.\n",
     "*   **Ridge:** Uspokojony chaos.\n",
-    "*   **Lasso:** Prawie idealnie odtworzyło \"Prawdę\"! (Pierwsze 10 wag wysokich, reszta płasko na zerze).\n",
+    "*   **Lasso:** Prawie idealnie odtworzy\u0142o \"Prawd\u0119\"! (Pierwsze 10 wag wysokich, reszta p\u0142asko na zerze).\n",
     "\n",
-    "**Kiedy czego używać?**\n",
+    "**Kiedy czego u\u017cywa\u0107?**\n",
     "\n",
     "1.  **Ridge (L2):**\n",
-    "    *   To domyślny wybór w większości przypadków.\n",
-    "    *   Kiedy masz **współliniowość** (np. cechy \"Wzrost w cm\" i \"Wzrost w stopach\"). Ridge rozdzieli wagę po równo między nie, co stabilizuje model.\n",
-    "    *   Lasso w takiej sytuacji losowo wybierze jedną, a drugą wyzeruje (co może być ryzykowne).\n",
+    "    *   To domy\u015blny wyb\u00f3r w wi\u0119kszo\u015bci przypadk\u00f3w.\n",
+    "    *   Kiedy masz **wsp\u00f3\u0142liniowo\u015b\u0107** (np. cechy \"Wzrost w cm\" i \"Wzrost w stopach\"). Ridge rozdzieli wag\u0119 po r\u00f3wno mi\u0119dzy nie, co stabilizuje model.\n",
+    "    *   Lasso w takiej sytuacji losowo wybierze jedn\u0105, a drug\u0105 wyzeruje (co mo\u017ce by\u0107 ryzykowne).\n",
     "\n",
     "2.  **Lasso (L1):**\n",
-    "    *   Kiedy podejrzewasz, że **większość Twoich kolumn to śmieci**.\n",
-    "    *   Chcesz dostać prosty, czytelny model (Sparse Model).\n",
+    "    *   Kiedy podejrzewasz, \u017ce **wi\u0119kszo\u015b\u0107 Twoich kolumn to \u015bmieci**.\n",
+    "    *   Chcesz dosta\u0107 prosty, czytelny model (Sparse Model).\n",
     "\n",
     "3.  **ElasticNet:**\n",
-    "    *   Kiedy nie wiesz co wybrać. Ma dwa suwaki (jeden od L1, drugi od L2). Jest najbezpieczniejszy.\n",
+    "    *   Kiedy nie wiesz co wybra\u0107. Ma dwa suwaki (jeden od L1, drugi od L2). Jest najbezpieczniejszy.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "W sieciach neuronowych (Deep Learning) domyślnie używa się **L2** (nazywa się to tam *Weight Decay*)."
+    "W sieciach neuronowych (Deep Learning) domy\u015blnie u\u017cywa si\u0119 **L2** (nazywa si\u0119 to tam *Weight Decay*)."
    ]
   }
  ],
