--- a/36_Market_Basket_Apriori.ipynb
+++ b/36_Market_Basket_Apriori.ipynb
@@ -2,27 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/36_Market_Basket_Apriori.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2031b1e5",
    "metadata": {},
    "source": [
-    "# 🛒 Analiza Koszykowa: Reguły Asocjacyjne (Apriori)\n",
+    "# \ud83d\uded2 Analiza Koszykowa: Regu\u0142y Asocjacyjne (Apriori)\n",
     "\n",
-    "To technika używana przez każdy supermarket i sklep e-commerce (np. \"Często kupowane razem\" na Amazonie).\n",
+    "To technika u\u017cywana przez ka\u017cdy supermarket i sklep e-commerce (np. \"Cz\u0119sto kupowane razem\" na Amazonie).\n",
     "\n",
-    "Musimy zrozumieć 3 metryki:\n",
+    "Musimy zrozumie\u0107 3 metryki:\n",
     "\n",
     "1.  **Support (Wsparcie):** Jak popularny jest zestaw?\n",
     "    *   $Support(A) = \\frac{\\text{Transakcje z A}}{\\text{Wszystkie transakcje}}$\n",
     "    *   Niskie wsparcie = towar niszowy.\n",
-    "2.  **Confidence (Ufność):** Jeśli kupiłem A, to na ile % kupię B?\n",
+    "2.  **Confidence (Ufno\u015b\u0107):** Je\u015bli kupi\u0142em A, to na ile % kupi\u0119 B?\n",
     "    *   $Confidence(A \\to B) = \\frac{\\text{Transakcje z A i B}}{\\text{Transakcje z A}}$\n",
-    "    *   To nasza \"siła reguły\".\n",
-    "3.  **Lift (Przyrost):** Czy ta zależność jest prawdziwa, czy to przypadek?\n",
-    "    *   $Lift = 1$: Brak związku (Niezależne).\n",
-    "    *   $Lift > 1$: A przyciąga B (Super!).\n",
+    "    *   To nasza \"si\u0142a regu\u0142y\".\n",
+    "3.  **Lift (Przyrost):** Czy ta zale\u017cno\u015b\u0107 jest prawdziwa, czy to przypadek?\n",
+    "    *   $Lift = 1$: Brak zwi\u0105zku (Niezale\u017cne).\n",
+    "    *   $Lift > 1$: A przyci\u0105ga B (Super!).\n",
     "    *   $Lift < 1$: A odpycha B (Kto kupuje A, ten rzadziej kupuje B).\n",
     "\n",
-    "Algorytm **Apriori** przeszukuje bazę transakcji i wypluwa reguły typu: `{Chleb} -> {Masło}`."
+    "Algorytm **Apriori** przeszukuje baz\u0119 transakcji i wypluwa regu\u0142y typu: `{Chleb} -> {Mas\u0142o}`."
    ]
   },
   {
@@ -35,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- PRZYKŁADOWY PARAGON ---\n",
-      "['Mleko', 'Cebula', 'Gałka muszkatołowa', 'Jajka', 'Jogurt']\n"
+      "--- PRZYK\u0141ADOWY PARAGON ---\n",
+      "['Mleko', 'Cebula', 'Ga\u0142ka muszkato\u0142owa', 'Jajka', 'Jogurt']\n"
      ]
     }
    ],
@@ -46,16 +53,16 @@
     "from mlxtend.frequent_patterns import apriori, association_rules\n",
     "\n",
     "# 1. DANE TRANSAKCYJNE (Lista list)\n",
-    "# Każdy wiersz to jeden paragon.\n",
+    "# Ka\u017cdy wiersz to jeden paragon.\n",
     "dataset = [\n",
-    "    ['Mleko', 'Cebula', 'Gałka muszkatołowa', 'Jajka', 'Jogurt'],\n",
-    "    ['Koper', 'Cebula', 'Gałka muszkatołowa', 'Jajka', 'Jogurt'],\n",
-    "    ['Mleko', 'Jabłko', 'Jajka'],\n",
-    "    ['Mleko', 'Jednorożec', 'Kukurydza', 'Jajka', 'Jogurt'],\n",
+    "    ['Mleko', 'Cebula', 'Ga\u0142ka muszkato\u0142owa', 'Jajka', 'Jogurt'],\n",
+    "    ['Koper', 'Cebula', 'Ga\u0142ka muszkato\u0142owa', 'Jajka', 'Jogurt'],\n",
+    "    ['Mleko', 'Jab\u0142ko', 'Jajka'],\n",
+    "    ['Mleko', 'Jednoro\u017cec', 'Kukurydza', 'Jajka', 'Jogurt'],\n",
     "    ['Kukurydza', 'Cebula', 'Cebula', 'Jajka', 'Lody', 'Jajka']\n",
     "]\n",
     "\n",
-    "print(\"--- PRZYKŁADOWY PARAGON ---\")\n",
+    "print(\"--- PRZYK\u0141ADOWY PARAGON ---\")\n",
     "print(dataset[0])"
    ]
   },
@@ -66,13 +73,13 @@
    "source": [
     "## Krok 1: One-Hot Encoding (Format 0/1)\n",
     "\n",
-    "Algorytm Apriori nie rozumie napisów. Rozumie tabelę prawdy.\n",
-    "Musimy zamienić naszą listę zakupów na wielką tabelę, gdzie:\n",
-    "*   Kolumny = Wszystkie możliwe produkty w sklepie.\n",
+    "Algorytm Apriori nie rozumie napis\u00f3w. Rozumie tabel\u0119 prawdy.\n",
+    "Musimy zamieni\u0107 nasz\u0105 list\u0119 zakup\u00f3w na wielk\u0105 tabel\u0119, gdzie:\n",
+    "*   Kolumny = Wszystkie mo\u017cliwe produkty w sklepie.\n",
     "*   Wiersze = Paragony.\n",
-    "*   Wartość = True (kupił) / False (nie kupił).\n",
+    "*   Warto\u015b\u0107 = True (kupi\u0142) / False (nie kupi\u0142).\n",
     "\n",
-    "Użyjemy do tego `TransactionEncoder`."
+    "U\u017cyjemy do tego `TransactionEncoder`."
    ]
   },
   {
@@ -85,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- TABELA PRAWDA/FAŁSZ (One-Hot) ---\n"
+      "--- TABELA PRAWDA/FA\u0141SZ (One-Hot) ---\n"
      ]
     },
     {
@@ -110,10 +117,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Cebula</th>\n",
-       "      <th>Gałka muszkatołowa</th>\n",
-       "      <th>Jabłko</th>\n",
+       "      <th>Ga\u0142ka muszkato\u0142owa</th>\n",
+       "      <th>Jab\u0142ko</th>\n",
        "      <th>Jajka</th>\n",
-       "      <th>Jednorożec</th>\n",
+       "      <th>Jednoro\u017cec</th>\n",
        "      <th>Jogurt</th>\n",
        "      <th>Koper</th>\n",
        "      <th>Kukurydza</th>\n",
@@ -192,7 +199,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Cebula  Gałka muszkatołowa  Jabłko  Jajka  Jednorożec  Jogurt  Koper  \\\n",
+       "   Cebula  Ga\u0142ka muszkato\u0142owa  Jab\u0142ko  Jajka  Jednoro\u017cec  Jogurt  Koper  \\\n",
        "0    True                True   False   True       False    True  False   \n",
        "1    True                True   False   True       False    True   True   \n",
        "2   False               False    True   True       False   False  False   \n",
@@ -214,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mamy 5 transakcji i 10 unikalnych produktów.\n"
+      "Mamy 5 transakcji i 10 unikalnych produkt\u00f3w.\n"
      ]
     }
    ],
@@ -223,12 +230,12 @@
     "te = TransactionEncoder()\n",
     "te_ary = te.fit(dataset).transform(dataset)\n",
     "\n",
-    "# Zamiana na DataFrame (żeby było ładnie widać)\n",
+    "# Zamiana na DataFrame (\u017ceby by\u0142o \u0142adnie wida\u0107)\n",
     "df = pd.DataFrame(te_ary, columns=te.columns_)\n",
     "\n",
-    "print(\"--- TABELA PRAWDA/FAŁSZ (One-Hot) ---\")\n",
+    "print(\"--- TABELA PRAWDA/FA\u0141SZ (One-Hot) ---\")\n",
     "display(df)\n",
-    "print(f\"Mamy {df.shape[0]} transakcji i {df.shape[1]} unikalnych produktów.\")"
+    "print(f\"Mamy {df.shape[0]} transakcji i {df.shape[1]} unikalnych produkt\u00f3w.\")"
    ]
   },
   {
@@ -236,12 +243,12 @@
    "id": "d73cde22",
    "metadata": {},
    "source": [
-    "## Krok 2: Szukanie \"Częstych Zbiorów\" (Frequent Itemsets)\n",
+    "## Krok 2: Szukanie \"Cz\u0119stych Zbior\u00f3w\" (Frequent Itemsets)\n",
     "\n",
     "Teraz uruchamiamy **Apriori**.\n",
-    "Mówimy mu: *\"Pokaż mi tylko te zestawy produktów, które występują w przynajmniej 60% paragonów (`min_support=0.6`)\"*.\n",
+    "M\u00f3wimy mu: *\"Poka\u017c mi tylko te zestawy produkt\u00f3w, kt\u00f3re wyst\u0119puj\u0105 w przynajmniej 60% paragon\u00f3w (`min_support=0.6`)\"*.\n",
     "\n",
-    "To odsieje rzadkie produkty (jak \"Jednorożec\" czy \"Lody\"), a zostawi bestsellery."
+    "To odsieje rzadkie produkty (jak \"Jednoro\u017cec\" czy \"Lody\"), a zostawi bestsellery."
    ]
   },
   {
@@ -254,7 +261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- NAJCZĘSTSZE ZESTAWY (Support > 60%) ---\n",
+      "--- NAJCZ\u0118STSZE ZESTAWY (Support > 60%) ---\n",
       "   support         itemsets\n",
       "1      1.0          (Jajka)\n",
       "0      0.6         (Cebula)\n",
@@ -264,21 +271,21 @@
       "5      0.6  (Jogurt, Jajka)\n",
       "6      0.6   (Mleko, Jajka)\n",
       "\n",
-      "Wniosek: Jajka są w 100% koszyków (Support=1.0). Królowie sprzedaży.\n"
+      "Wniosek: Jajka s\u0105 w 100% koszyk\u00f3w (Support=1.0). Kr\u00f3lowie sprzeda\u017cy.\n"
      ]
     }
    ],
    "source": [
-    "# use_colnames=True sprawia, że widzimy nazwy produktów, a nie numery kolumn\n",
+    "# use_colnames=True sprawia, \u017ce widzimy nazwy produkt\u00f3w, a nie numery kolumn\n",
     "frequent_itemsets = apriori(df, min_support=0.6, use_colnames=True)\n",
     "\n",
-    "# Sortujemy od najczęstszych\n",
+    "# Sortujemy od najcz\u0119stszych\n",
     "frequent_itemsets = frequent_itemsets.sort_values(by=\"support\", ascending=False)\n",
     "\n",
-    "print(\"--- NAJCZĘSTSZE ZESTAWY (Support > 60%) ---\")\n",
+    "print(\"--- NAJCZ\u0118STSZE ZESTAWY (Support > 60%) ---\")\n",
     "print(frequent_itemsets)\n",
     "\n",
-    "print(\"\\nWniosek: Jajka są w 100% koszyków (Support=1.0). Królowie sprzedaży.\")"
+    "print(\"\\nWniosek: Jajka s\u0105 w 100% koszyk\u00f3w (Support=1.0). Kr\u00f3lowie sprzeda\u017cy.\")"
    ]
   },
   {
@@ -286,14 +293,14 @@
    "id": "a4971d31",
    "metadata": {},
    "source": [
-    "## Krok 3: Generowanie Reguł (Association Rules)\n",
+    "## Krok 3: Generowanie Regu\u0142 (Association Rules)\n",
     "\n",
     "Mamy popularne zestawy (np. Jajka i Cebula).\n",
-    "Ale czy to znaczy, że **Jajka powodują kupno Cebuli**? Czy na odwrót?\n",
-    "A może po prostu wszyscy kupują jajka, więc siłą rzeczy lądują one z cebulą?\n",
+    "Ale czy to znaczy, \u017ce **Jajka powoduj\u0105 kupno Cebuli**? Czy na odwr\u00f3t?\n",
+    "A mo\u017ce po prostu wszyscy kupuj\u0105 jajka, wi\u0119c si\u0142\u0105 rzeczy l\u0105duj\u0105 one z cebul\u0105?\n",
     "\n",
     "Tu wchodzi metryka **Lift**.\n",
-    "Generujemy reguły, które mają np. minimum 70% ufności (`min_threshold=0.7`)."
+    "Generujemy regu\u0142y, kt\u00f3re maj\u0105 np. minimum 70% ufno\u015bci (`min_threshold=0.7`)."
    ]
   },
   {
@@ -306,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- WYKRYTE REGUŁY ASOCJACYJNE ---\n"
+      "--- WYKRYTE REGU\u0141Y ASOCJACYJNE ---\n"
      ]
     },
     {
@@ -386,15 +393,15 @@
     }
    ],
    "source": [
-    "# Tworzymy reguły na podstawie zbiorów z kroku 2\n",
+    "# Tworzymy regu\u0142y na podstawie zbior\u00f3w z kroku 2\n",
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.7)\n",
     "\n",
-    "# Wybieramy tylko interesujące kolumny\n",
+    "# Wybieramy tylko interesuj\u0105ce kolumny\n",
     "cols = ['antecedents', 'consequents', 'support', 'confidence', 'lift']\n",
     "rules_clean = rules[cols].sort_values(by='lift', ascending=False)\n",
     "\n",
-    "print(\"--- WYKRYTE REGUŁY ASOCJACYJNE ---\")\n",
-    "# antecedents = Jeśli kupiłeś TO...\n",
+    "print(\"--- WYKRYTE REGU\u0141Y ASOCJACYJNE ---\")\n",
+    "# antecedents = Je\u015bli kupi\u0142e\u015b TO...\n",
     "# consequents = ...to kupisz TAMTO\n",
     "display(rules_clean)"
    ]
@@ -404,22 +411,22 @@
    "id": "8e2bc5a2",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego Lift jest najważniejszy?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego Lift jest najwa\u017cniejszy?\n",
     "\n",
-    "Spójrz na wyniki.\n",
+    "Sp\u00f3jrz na wyniki.\n",
     "\n",
-    "1.  **Reguła:** `{Cebula} -> {Jajka}`\n",
-    "    *   **Confidence:** 1.0 (100%). Każdy kto kupił cebulę, kupił jajka.\n",
+    "1.  **Regu\u0142a:** `{Cebula} -> {Jajka}`\n",
+    "    *   **Confidence:** 1.0 (100%). Ka\u017cdy kto kupi\u0142 cebul\u0119, kupi\u0142 jajka.\n",
     "    *   **Lift:** 1.0.\n",
-    "    *   **Interpretacja:** Lift = 1 oznacza NUDA. Jajka są tak popularne (są wszędzie), że kupno cebuli nie zwiększa szansy na kupno jajek. One i tak by tam były. To nie jest \"zależność\", to statystyka.\n",
+    "    *   **Interpretacja:** Lift = 1 oznacza NUDA. Jajka s\u0105 tak popularne (s\u0105 wsz\u0119dzie), \u017ce kupno cebuli nie zwi\u0119ksza szansy na kupno jajek. One i tak by tam by\u0142y. To nie jest \"zale\u017cno\u015b\u0107\", to statystyka.\n",
     "\n",
-    "2.  **Gdybyś miał regułę:** `{Piwo} -> {Chipsy}`\n",
-    "    *   Gdyby **Lift** wynosił **2.5**, oznaczałoby to, że klient z piwem jest **2.5 raza bardziej skłonny** kupić chipsy niż losowy klient.\n",
-    "    *   **To jest Złoto.** To tutaj sklep stawia stojak z chipsami obok lodówki z piwem.\n",
+    "2.  **Gdyby\u015b mia\u0142 regu\u0142\u0119:** `{Piwo} -> {Chipsy}`\n",
+    "    *   Gdyby **Lift** wynosi\u0142 **2.5**, oznacza\u0142oby to, \u017ce klient z piwem jest **2.5 raza bardziej sk\u0142onny** kupi\u0107 chipsy ni\u017c losowy klient.\n",
+    "    *   **To jest Z\u0142oto.** To tutaj sklep stawia stojak z chipsami obok lod\u00f3wki z piwem.\n",
     "\n",
     "**Wniosek:**\n",
-    "W analizie koszykowej nie patrz ślepo na Confidence (Ufność). Patrz na **Lift**.\n",
-    "Lift > 1 to pieniądz.\n",
+    "W analizie koszykowej nie patrz \u015blepo na Confidence (Ufno\u015b\u0107). Patrz na **Lift**.\n",
+    "Lift > 1 to pieni\u0105dz.\n",
     "Lift = 1 to przypadek."
    ]
   },
