--- a/37_Gradient_Boosting_XGBoost.ipynb
+++ b/37_Gradient_Boosting_XGBoost.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/37_Gradient_Boosting_XGBoost.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c4c8084",
    "metadata": {},
    "source": [
-    "# 🚀 Gradient Boosting (XGBoost): Król Danych Tabelarycznych\n",
+    "# \ud83d\ude80 Gradient Boosting (XGBoost): Kr\u00f3l Danych Tabelarycznych\n",
     "\n",
-    "Wyobraź sobie, że grasz w golfa.\n",
-    "1.  **Random Forest:** 100 graczy uderza piłkę niezależnie. Liczymy średnią pozycję piłek.\n",
+    "Wyobra\u017a sobie, \u017ce grasz w golfa.\n",
+    "1.  **Random Forest:** 100 graczy uderza pi\u0142k\u0119 niezale\u017cnie. Liczymy \u015bredni\u0105 pozycj\u0119 pi\u0142ek.\n",
     "2.  **Gradient Boosting:**\n",
-    "    *   Gracz 1 uderza piłkę. Ląduje ona 20 metrów od dołka.\n",
-    "    *   Gracz 2 nie celuje do dołka. Celuje tak, żeby przesunąć piłkę o te brakujące 20 metrów (naprawia błąd).\n",
-    "    *   Gracz 3 poprawia drobny błąd Gracza 2.\n",
+    "    *   Gracz 1 uderza pi\u0142k\u0119. L\u0105duje ona 20 metr\u00f3w od do\u0142ka.\n",
+    "    *   Gracz 2 nie celuje do do\u0142ka. Celuje tak, \u017ceby przesun\u0105\u0107 pi\u0142k\u0119 o te brakuj\u0105ce 20 metr\u00f3w (naprawia b\u0142\u0105d).\n",
+    "    *   Gracz 3 poprawia drobny b\u0142\u0105d Gracza 2.\n",
     "\n",
-    "To jest **Boosting**. Model uczy się na **Resztach (Residuals)**, czyli błędach poprzedników.\n",
+    "To jest **Boosting**. Model uczy si\u0119 na **Resztach (Residuals)**, czyli b\u0142\u0119dach poprzednik\u00f3w.\n",
     "\n",
-    "Użyjemy **XGBoost** (eXtreme Gradient Boosting) - biblioteki, która zoptymalizowała ten proces do granic możliwości."
+    "U\u017cyjemy **XGBoost** (eXtreme Gradient Boosting) - biblioteki, kt\u00f3ra zoptymalizowa\u0142a ten proces do granic mo\u017cliwo\u015bci."
    ]
   },
   {
@@ -153,13 +160,13 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "# 1. DANE (Ceny domów w Kalifornii)\n",
-    "# To duży zbiór z lat 90. ok 20k wierszy.\n",
+    "# 1. DANE (Ceny dom\u00f3w w Kalifornii)\n",
+    "# To du\u017cy zbi\u00f3r z lat 90. ok 20k wierszy.\n",
     "data = fetch_california_housing()\n",
     "X = pd.DataFrame(data.data, columns=data.feature_names)\n",
     "y = data.target\n",
     "\n",
-    "# Podział\n",
+    "# Podzia\u0142\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(f\"Dane gotowe. Trening: {X_train.shape}\")\n",
@@ -173,7 +180,7 @@
    "source": [
     "## Runda 1: Random Forest (Punkt odniesienia)\n",
     "\n",
-    "Najpierw sprawdźmy, jak poradzi sobie klasyczny Las Losowy. To będzie nasza poprzeczka do przeskoczenia."
+    "Najpierw sprawd\u017amy, jak poradzi sobie klasyczny Las Losowy. To b\u0119dzie nasza poprzeczka do przeskoczenia."
    ]
   },
   {
@@ -186,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🌲 Random Forest RMSE: 0.5053\n",
-      "(Im mniej, tym lepiej. RMSE to średni błąd w tysiącach dolarów).\n"
+      "\ud83c\udf32 Random Forest RMSE: 0.5053\n",
+      "(Im mniej, tym lepiej. RMSE to \u015bredni b\u0142\u0105d w tysi\u0105cach dolar\u00f3w).\n"
      ]
     }
    ],
@@ -200,12 +207,12 @@
     "rf_pred = rf_model.predict(X_test)\n",
     "\n",
     "# --- POPRAWKA ---\n",
-    "# Zamiast squared=False, liczymy zwykłe MSE i pierwiastkujemy\n",
+    "# Zamiast squared=False, liczymy zwyk\u0142e MSE i pierwiastkujemy\n",
     "mse_rf = mean_squared_error(y_test, rf_pred)\n",
     "rf_error = np.sqrt(mse_rf) # RMSE (Root Mean Squared Error)\n",
     "\n",
-    "print(f\"🌲 Random Forest RMSE: {rf_error:.4f}\")\n",
-    "print(\"(Im mniej, tym lepiej. RMSE to średni błąd w tysiącach dolarów).\")"
+    "print(f\"\ud83c\udf32 Random Forest RMSE: {rf_error:.4f}\")\n",
+    "print(\"(Im mniej, tym lepiej. RMSE to \u015bredni b\u0142\u0105d w tysi\u0105cach dolar\u00f3w).\")"
    ]
   },
   {
@@ -215,11 +222,11 @@
    "source": [
     "## Runda 2: XGBoost (eXtreme Gradient Boosting)\n",
     "\n",
-    "Teraz wchodzi waga ciężka.\n",
-    "XGBoost ma setki parametrów, ale najważniejsze to:\n",
+    "Teraz wchodzi waga ci\u0119\u017cka.\n",
+    "XGBoost ma setki parametr\u00f3w, ale najwa\u017cniejsze to:\n",
     "*   `n_estimators`: Ile drzew naprawczych? (np. 1000).\n",
-    "*   `learning_rate` (eta): Jak ostrożnie poprawiamy błędy? (Małe kroki = lepiej, ale wolniej).\n",
-    "*   `early_stopping_rounds`: **Super ważna funkcja.** Mówimy: *\"Jeśli przez 10 drzew wynik się nie poprawia, przestań trenować\"*. To chroni przed Overfittingiem."
+    "*   `learning_rate` (eta): Jak ostro\u017cnie poprawiamy b\u0142\u0119dy? (Ma\u0142e kroki = lepiej, ale wolniej).\n",
+    "*   `early_stopping_rounds`: **Super wa\u017cna funkcja.** M\u00f3wimy: *\"Je\u015bli przez 10 drzew wynik si\u0119 nie poprawia, przesta\u0144 trenowa\u0107\"*. To chroni przed Overfittingiem."
    ]
   },
   {
@@ -233,8 +240,8 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "🌲 Random Forest RMSE: 0.5053\n",
-      "🚀 XGBoost RMSE:      0.4550\n",
+      "\ud83c\udf32 Random Forest RMSE: 0.5053\n",
+      "\ud83d\ude80 XGBoost RMSE:      0.4550\n",
       "\n",
       "Poprawa o 9.96%!\n"
      ]
@@ -242,7 +249,7 @@
    ],
    "source": [
     "# Konfiguracja modelu\n",
-    "# objective='reg:squarederror' oznacza, że robimy regresję\n",
+    "# objective='reg:squarederror' oznacza, \u017ce robimy regresj\u0119\n",
     "xgb_model = xgb.XGBRegressor(\n",
     "    n_estimators=1000,\n",
     "    learning_rate=0.05,\n",
@@ -252,7 +259,7 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "# TRENING Z WALIDACJĄ\n",
+    "# TRENING Z WALIDACJ\u0104\n",
     "xgb_model.fit(\n",
     "    X_train, y_train,\n",
     "    eval_set=[(X_test, y_test)],\n",
@@ -267,8 +274,8 @@
     "xgb_error = np.sqrt(mse_xgb)\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"🌲 Random Forest RMSE: {rf_error:.4f}\")\n",
-    "print(f\"🚀 XGBoost RMSE:      {xgb_error:.4f}\")\n",
+    "print(f\"\ud83c\udf32 Random Forest RMSE: {rf_error:.4f}\")\n",
+    "print(f\"\ud83d\ude80 XGBoost RMSE:      {xgb_error:.4f}\")\n",
     "\n",
     "diff = (rf_error - xgb_error) / rf_error * 100\n",
     "print(f\"\\nPoprawa o {diff:.2f}%!\")"
@@ -279,9 +286,9 @@
    "id": "8361f9c3",
    "metadata": {},
    "source": [
-    "## Co jest ważne dla modelu? (Feature Importance)\n",
+    "## Co jest wa\u017cne dla modelu? (Feature Importance)\n",
     "\n",
-    "XGBoost ma wbudowaną funkcję do sprawdzania, które cechy były najczęściej używane do podejmowania decyzji."
+    "XGBoost ma wbudowan\u0105 funkcj\u0119 do sprawdzania, kt\u00f3re cechy by\u0142y najcz\u0119\u015bciej u\u017cywane do podejmowania decyzji."
    ]
   },
   {
@@ -314,21 +321,21 @@
      "output_type": "stream",
      "text": [
       "Analiza:\n",
-      "- MedInc (Median Income / Średni dochód): Zazwyczaj najważniejszy.\n",
-      "- OceanProximity: W tym zbiorze go nie ma (został zakodowany), ale lokalizacja to klucz.\n"
+      "- MedInc (Median Income / \u015aredni doch\u00f3d): Zazwyczaj najwa\u017cniejszy.\n",
+      "- OceanProximity: W tym zbiorze go nie ma (zosta\u0142 zakodowany), ale lokalizacja to klucz.\n"
      ]
     }
    ],
    "source": [
-    "# Rysujemy ważność cech\n",
+    "# Rysujemy wa\u017cno\u015b\u0107 cech\n",
     "plt.figure(figsize=(10, 6))\n",
     "xgb.plot_importance(xgb_model, max_num_features=10, height=0.5)\n",
-    "plt.title(\"Co wpływa na cenę domu w Kalifornii?\")\n",
+    "plt.title(\"Co wp\u0142ywa na cen\u0119 domu w Kalifornii?\")\n",
     "plt.show()\n",
     "\n",
     "print(\"Analiza:\")\n",
-    "print(\"- MedInc (Median Income / Średni dochód): Zazwyczaj najważniejszy.\")\n",
-    "print(\"- OceanProximity: W tym zbiorze go nie ma (został zakodowany), ale lokalizacja to klucz.\")"
+    "print(\"- MedInc (Median Income / \u015aredni doch\u00f3d): Zazwyczaj najwa\u017cniejszy.\")\n",
+    "print(\"- OceanProximity: W tym zbiorze go nie ma (zosta\u0142 zakodowany), ale lokalizacja to klucz.\")"
    ]
   },
   {
@@ -336,23 +343,23 @@
    "id": "80cf02f8",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Bagging vs Boosting\n",
+    "## \ud83e\udde0 Podsumowanie: Bagging vs Boosting\n",
     "\n",
-    "Dlaczego XGBoost wygrał?\n",
+    "Dlaczego XGBoost wygra\u0142?\n",
     "\n",
     "1.  **Random Forest (Bagging):**\n",
-    "    *   Buduje **duże, głębokie drzewa**. Każde drzewo uczy się mocno (i trochę overfittinguje), a na koniec uśredniamy wyniki, żeby zmniejszyć wariancję.\n",
-    "    *   *Zaleta:* Trudno go zepsuć, działa dobrze na domyślnych ustawieniach.\n",
+    "    *   Buduje **du\u017ce, g\u0142\u0119bokie drzewa**. Ka\u017cde drzewo uczy si\u0119 mocno (i troch\u0119 overfittinguje), a na koniec u\u015bredniamy wyniki, \u017ceby zmniejszy\u0107 wariancj\u0119.\n",
+    "    *   *Zaleta:* Trudno go zepsu\u0107, dzia\u0142a dobrze na domy\u015blnych ustawieniach.\n",
     "\n",
     "2.  **XGBoost (Boosting):**\n",
-    "    *   Buduje **małe, płytkie drzewka**.\n",
-    "    *   Każde drzewo skupia się **tylko na tych przypadkach, które poprzednie drzewa źle oceniły**.\n",
-    "    *   To tak, jakbyś uczył się do egzaminu, powtarzając tylko te pytania, na które źle odpowiedziałeś.\n",
-    "    *   *Zaleta:* Wyciąga z danych ostatnie soki.\n",
-    "    *   *Wada:* Łatwo o Overfitting, jeśli nie użyjesz `early_stopping` lub dasz za duże `learning_rate`.\n",
+    "    *   Buduje **ma\u0142e, p\u0142ytkie drzewka**.\n",
+    "    *   Ka\u017cde drzewo skupia si\u0119 **tylko na tych przypadkach, kt\u00f3re poprzednie drzewa \u017ale oceni\u0142y**.\n",
+    "    *   To tak, jakby\u015b uczy\u0142 si\u0119 do egzaminu, powtarzaj\u0105c tylko te pytania, na kt\u00f3re \u017ale odpowiedzia\u0142e\u015b.\n",
+    "    *   *Zaleta:* Wyci\u0105ga z danych ostatnie soki.\n",
+    "    *   *Wada:* \u0141atwo o Overfitting, je\u015bli nie u\u017cyjesz `early_stopping` lub dasz za du\u017ce `learning_rate`.\n",
     "\n",
     "**Wniosek:**\n",
-    "Masz tabelę Excela/CSV? Zacznij od XGBoost (lub jego braci: LightGBM, CatBoost). To obecnie state-of-the-art."
+    "Masz tabel\u0119 Excela/CSV? Zacznij od XGBoost (lub jego braci: LightGBM, CatBoost). To obecnie state-of-the-art."
    ]
   }
  ],
