--- a/38_CNN_Computer_Vision.ipynb
+++ b/38_CNN_Computer_Vision.ipynb
@@ -2,20 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/38_CNN_Computer_Vision.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d770b44f",
    "metadata": {},
    "source": [
-    "# 👁️ CNN: Jak komputer \"widzi\"? (Sploty)\n",
+    "# \ud83d\udc41\ufe0f CNN: Jak komputer \"widzi\"? (Sploty)\n",
     "\n",
-    "Zwykła sieć (MLP) niszczy zdjęcia.\n",
-    "Sieć Splotowa (CNN) szanuje ich strukturę (wysokość, szerokość).\n",
+    "Zwyk\u0142a sie\u0107 (MLP) niszczy zdj\u0119cia.\n",
+    "Sie\u0107 Splotowa (CNN) szanuje ich struktur\u0119 (wysoko\u015b\u0107, szeroko\u015b\u0107).\n",
     "\n",
-    "CNN składa się z trzech głównych elementów:\n",
-    "1.  **Convolution (Splot/Conv2d):** Filtr (np. 3x3 piksele), który przesuwa się po zdjęciu. Uczy się wykrywać cechy (np. linie pionowe).\n",
-    "2.  **ReLU:** Iskra nieliniowości (usuwa ujemne wartości).\n",
-    "3.  **Pooling (MaxPool2d):** Zmniejszanie obrazka. Wybiera najważniejszy (najjaśniejszy) piksel z obszaru 2x2. Dzięki temu sieć widzi coraz \"szerszy\" kontekst.\n",
+    "CNN sk\u0142ada si\u0119 z trzech g\u0142\u00f3wnych element\u00f3w:\n",
+    "1.  **Convolution (Splot/Conv2d):** Filtr (np. 3x3 piksele), kt\u00f3ry przesuwa si\u0119 po zdj\u0119ciu. Uczy si\u0119 wykrywa\u0107 cechy (np. linie pionowe).\n",
+    "2.  **ReLU:** Iskra nieliniowo\u015bci (usuwa ujemne warto\u015bci).\n",
+    "3.  **Pooling (MaxPool2d):** Zmniejszanie obrazka. Wybiera najwa\u017cniejszy (najja\u015bniejszy) piksel z obszaru 2x2. Dzi\u0119ki temu sie\u0107 widzi coraz \"szerszy\" kontekst.\n",
     "\n",
-    "Użyjemy zbioru **FashionMNIST**. To 60,000 zdjęć ubrań (koszulki, buty, torebki). Jest trudniejszy niż cyfry (MNIST), ale nadal czarno-biały (1 kanał koloru)."
+    "U\u017cyjemy zbioru **FashionMNIST**. To 60,000 zdj\u0119\u0107 ubra\u0144 (koszulki, buty, torebki). Jest trudniejszy ni\u017c cyfry (MNIST), ale nadal czarno-bia\u0142y (1 kana\u0142 koloru)."
    ]
   },
   {
@@ -28,10 +35,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26.4M/26.4M [00:14<00:00, 1.88MB/s]\n",
-      "100%|██████████| 29.5k/29.5k [00:00<00:00, 539kB/s]\n",
-      "100%|██████████| 4.42M/4.42M [00:01<00:00, 3.23MB/s]\n",
-      "100%|██████████| 5.15k/5.15k [00:00<00:00, 14.2MB/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 26.4M/26.4M [00:14<00:00, 1.88MB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 29.5k/29.5k [00:00<00:00, 539kB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4.42M/4.42M [00:01<00:00, 3.23MB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 5.15k/5.15k [00:00<00:00, 14.2MB/s]"
      ]
     },
     {
@@ -39,8 +46,8 @@
      "output_type": "stream",
      "text": [
       "Klasy: ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
-      "Liczba zdjęć treningowych: 60000\n",
-      "Wymiar jednego zdjęcia: torch.Size([1, 28, 28]) -> [Kanały, Wysokość, Szerokość]\n"
+      "Liczba zdj\u0119\u0107 treningowych: 60000\n",
+      "Wymiar jednego zdj\u0119cia: torch.Size([1, 28, 28]) -> [Kana\u0142y, Wysoko\u015b\u0107, Szeroko\u015b\u0107]\n"
      ]
     },
     {
@@ -76,11 +83,11 @@
     "    transform=ToTensor()\n",
     ")\n",
     "\n",
-    "# Sprawdźmy co mamy\n",
+    "# Sprawd\u017amy co mamy\n",
     "class_names = train_data.classes\n",
     "print(f\"Klasy: {class_names}\")\n",
-    "print(f\"Liczba zdjęć treningowych: {len(train_data)}\")\n",
-    "print(f\"Wymiar jednego zdjęcia: {train_data[0][0].shape} -> [Kanały, Wysokość, Szerokość]\")"
+    "print(f\"Liczba zdj\u0119\u0107 treningowych: {len(train_data)}\")\n",
+    "print(f\"Wymiar jednego zdj\u0119cia: {train_data[0][0].shape} -> [Kana\u0142y, Wysoko\u015b\u0107, Szeroko\u015b\u0107]\")"
    ]
   },
   {
@@ -90,8 +97,8 @@
    "source": [
     "## Wizualizacja Danych\n",
     "\n",
-    "Zanim nakarmimy sieć, musimy zobaczyć, co to za zdjęcia.\n",
-    "To małe obrazki 28x28 pikseli w skali szarości."
+    "Zanim nakarmimy sie\u0107, musimy zobaczy\u0107, co to za zdj\u0119cia.\n",
+    "To ma\u0142e obrazki 28x28 pikseli w skali szaro\u015bci."
    ]
   },
   {
@@ -133,10 +140,10 @@
    "source": [
     "## DataLoaders (Wsady)\n",
     "\n",
-    "Nie możemy wrzucić 60,000 zdjęć naraz do RAM-u (chyba że masz superkomputer).\n",
-    "Użyjemy **DataLoader**, który dzieli dane na małe paczki (**Batches**).\n",
+    "Nie mo\u017cemy wrzuci\u0107 60,000 zdj\u0119\u0107 naraz do RAM-u (chyba \u017ce masz superkomputer).\n",
+    "U\u017cyjemy **DataLoader**, kt\u00f3ry dzieli dane na ma\u0142e paczki (**Batches**).\n",
     "Typowy Batch Size to 32.\n",
-    "Model uczy się na 32 zdjęciach, poprawia wagi, bierze kolejne 32..."
+    "Model uczy si\u0119 na 32 zdj\u0119ciach, poprawia wagi, bierze kolejne 32..."
    ]
   },
   {
@@ -149,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataloadery gotowe. Jeden batch to 32 zdjęć.\n"
+      "Dataloadery gotowe. Jeden batch to 32 zdj\u0119\u0107.\n"
      ]
     }
    ],
@@ -159,7 +166,7 @@
     "train_dataloader = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True)\n",
     "test_dataloader = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=False)\n",
     "\n",
-    "print(f\"Dataloadery gotowe. Jeden batch to {BATCH_SIZE} zdjęć.\")"
+    "print(f\"Dataloadery gotowe. Jeden batch to {BATCH_SIZE} zdj\u0119\u0107.\")"
    ]
   },
   {
@@ -169,12 +176,12 @@
    "source": [
     "## Budujemy CNN (Architektura TinyVGG)\n",
     "\n",
-    "Stworzymy sieć, która naśladuje słynną architekturę VGG (tylko mniejszą).\n",
-    "Blok składa się z: `Conv -> ReLU -> Conv -> ReLU -> MaxPool`.\n",
+    "Stworzymy sie\u0107, kt\u00f3ra na\u015bladuje s\u0142ynn\u0105 architektur\u0119 VGG (tylko mniejsz\u0105).\n",
+    "Blok sk\u0142ada si\u0119 z: `Conv -> ReLU -> Conv -> ReLU -> MaxPool`.\n",
     "\n",
-    "1.  **Conv2d:** `in_channels=1` (bo czarno-białe), `kernel_size=3` (filtr 3x3).\n",
-    "2.  **MaxPool2d:** Zmniejsza obrazek o połowę (28x28 -> 14x14).\n",
-    "3.  **Flatten:** Na końcu musimy spłaszczyć wynik, żeby podjąć decyzję (Linear)."
+    "1.  **Conv2d:** `in_channels=1` (bo czarno-bia\u0142e), `kernel_size=3` (filtr 3x3).\n",
+    "2.  **MaxPool2d:** Zmniejsza obrazek o po\u0142ow\u0119 (28x28 -> 14x14).\n",
+    "3.  **Flatten:** Na ko\u0144cu musimy sp\u0142aszczy\u0107 wynik, \u017ceby podj\u0105\u0107 decyzj\u0119 (Linear)."
    ]
   },
   {
@@ -215,31 +222,31 @@
     "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int):\n",
     "        super().__init__()\n",
     "        \n",
-    "        # BLOK 1: Wykrywanie prostych cech (krawędzie)\n",
+    "        # BLOK 1: Wykrywanie prostych cech (kraw\u0119dzie)\n",
     "        self.block_1 = nn.Sequential(\n",
     "            nn.Conv2d(in_channels=input_shape, \n",
     "                      out_channels=hidden_units, \n",
     "                      kernel_size=3, # Filtr 3x3\n",
     "                      stride=1,      # Przesuwaj o 1 piksel\n",
-    "                      padding=1),    # Dodaj ramkę zer (żeby nie zmniejszać obrazka)\n",
+    "                      padding=1),    # Dodaj ramk\u0119 zer (\u017ceby nie zmniejsza\u0107 obrazka)\n",
     "            nn.ReLU(),\n",
     "            nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=3, padding=1),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2) # Zmniejsz obrazek o połowę (28->14)\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2) # Zmniejsz obrazek o po\u0142ow\u0119 (28->14)\n",
     "        )\n",
     "        \n",
-    "        # BLOK 2: Wykrywanie złożonych cech (kształty)\n",
+    "        # BLOK 2: Wykrywanie z\u0142o\u017conych cech (kszta\u0142ty)\n",
     "        self.block_2 = nn.Sequential(\n",
     "            nn.Conv2d(hidden_units, hidden_units, 3, padding=1),\n",
     "            nn.ReLU(),\n",
     "            nn.Conv2d(hidden_units, hidden_units, 3, padding=1),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2) # Zmniejsz obrazek o połowę (14->7)\n",
+    "            nn.MaxPool2d(2) # Zmniejsz obrazek o po\u0142ow\u0119 (14->7)\n",
     "        )\n",
     "        \n",
     "        # KLASYFIKATOR: Decyzja\n",
     "        self.classifier = nn.Sequential(\n",
-    "            nn.Flatten(), # Spłaszcz [10, 7, 7] -> [490]\n",
+    "            nn.Flatten(), # Sp\u0142aszcz [10, 7, 7] -> [490]\n",
     "            nn.Linear(in_features=hidden_units * 7 * 7, out_features=output_shape)\n",
     "        )\n",
     "    \n",
@@ -262,9 +269,9 @@
    "source": [
     "## Trening (Na Batches)\n",
     "\n",
-    "Pętla jest podobna do poprzedniej, ale teraz mamy **pętlę w pętli**.\n",
-    "1.  Pętla zewnętrzna: Epoki (przejścia przez cały zbiór).\n",
-    "2.  Pętla wewnętrzna: Batche (paczki po 32 zdjęcia)."
+    "P\u0119tla jest podobna do poprzedniej, ale teraz mamy **p\u0119tl\u0119 w p\u0119tli**.\n",
+    "1.  P\u0119tla zewn\u0119trzna: Epoki (przej\u015bcia przez ca\u0142y zbi\u00f3r).\n",
+    "2.  P\u0119tla wewn\u0119trzna: Batche (paczki po 32 zdj\u0119cia)."
    ]
   },
   {
@@ -278,27 +285,27 @@
      "output_type": "stream",
      "text": [
       "--- Epoka 1 ---\n",
-      "Przetworzono 0 / 60000 zdjęć\n",
-      "Przetworzono 12800 / 60000 zdjęć\n",
-      "Przetworzono 25600 / 60000 zdjęć\n",
-      "Przetworzono 38400 / 60000 zdjęć\n",
-      "Przetworzono 51200 / 60000 zdjęć\n",
-      "Średni błąd treningowy: 0.6443\n",
+      "Przetworzono 0 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 12800 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 25600 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 38400 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 51200 / 60000 zdj\u0119\u0107\n",
+      "\u015aredni b\u0142\u0105d treningowy: 0.6443\n",
       "--- Epoka 2 ---\n",
-      "Przetworzono 0 / 60000 zdjęć\n",
-      "Przetworzono 12800 / 60000 zdjęć\n",
-      "Przetworzono 25600 / 60000 zdjęć\n",
-      "Przetworzono 38400 / 60000 zdjęć\n",
-      "Przetworzono 51200 / 60000 zdjęć\n",
-      "Średni błąd treningowy: 0.3823\n",
+      "Przetworzono 0 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 12800 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 25600 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 38400 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 51200 / 60000 zdj\u0119\u0107\n",
+      "\u015aredni b\u0142\u0105d treningowy: 0.3823\n",
       "--- Epoka 3 ---\n",
-      "Przetworzono 0 / 60000 zdjęć\n",
-      "Przetworzono 12800 / 60000 zdjęć\n",
-      "Przetworzono 25600 / 60000 zdjęć\n",
-      "Przetworzono 38400 / 60000 zdjęć\n",
-      "Przetworzono 51200 / 60000 zdjęć\n",
-      "Średni błąd treningowy: 0.3430\n",
-      "✅ Trening zakończony!\n"
+      "Przetworzono 0 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 12800 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 25600 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 38400 / 60000 zdj\u0119\u0107\n",
+      "Przetworzono 51200 / 60000 zdj\u0119\u0107\n",
+      "\u015aredni b\u0142\u0105d treningowy: 0.3430\n",
+      "\u2705 Trening zako\u0144czony!\n"
      ]
     }
    ],
@@ -324,7 +331,7 @@
     "        \n",
     "        # 2. Loss\n",
     "        loss = loss_fn(y_pred, y)\n",
-    "        train_loss += loss # Sumujemy błędy\n",
+    "        train_loss += loss # Sumujemy b\u0142\u0119dy\n",
     "        \n",
     "        # 3. Optimizer step\n",
     "        optimizer.zero_grad()\n",
@@ -332,13 +339,13 @@
     "        optimizer.step()\n",
     "        \n",
     "        if batch % 400 == 0:\n",
-    "            print(f\"Przetworzono {batch * len(X)} / {len(train_dataloader.dataset)} zdjęć\")\n",
+    "            print(f\"Przetworzono {batch * len(X)} / {len(train_dataloader.dataset)} zdj\u0119\u0107\")\n",
     "            \n",
     "    # Podsumowanie epoki\n",
     "    train_loss /= len(train_dataloader)\n",
-    "    print(f\"Średni błąd treningowy: {train_loss:.4f}\")\n",
+    "    print(f\"\u015aredni b\u0142\u0105d treningowy: {train_loss:.4f}\")\n",
     "\n",
-    "print(\"✅ Trening zakończony!\")"
+    "print(\"\u2705 Trening zako\u0144czony!\")"
    ]
   },
   {
@@ -352,7 +359,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Skuteczność na nowych zdjęciach: 88.19%\n"
+      "Skuteczno\u015b\u0107 na nowych zdj\u0119ciach: 88.19%\n"
      ]
     }
    ],
@@ -366,12 +373,12 @@
     "        X, y = X.to(device), y.to(device)\n",
     "        test_pred = model(X)\n",
     "        \n",
-    "        # Zamieniamy logity na konkretną klasę (argmax wybiera najwyższy słupek)\n",
+    "        # Zamieniamy logity na konkretn\u0105 klas\u0119 (argmax wybiera najwy\u017cszy s\u0142upek)\n",
     "        predicted_labels = test_pred.argmax(dim=1)\n",
     "        correct += (predicted_labels == y).sum().item()\n",
     "\n",
     "acc = correct / len(test_dataloader.dataset)\n",
-    "print(f\"\\nSkuteczność na nowych zdjęciach: {acc*100:.2f}%\")"
+    "print(f\"\\nSkuteczno\u015b\u0107 na nowych zdj\u0119ciach: {acc*100:.2f}%\")"
    ]
   },
   {
@@ -379,18 +386,18 @@
    "id": "3acbbcaf",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Dlaczego CNN widzi?\n",
+    "## \ud83e\udde0 Podsumowanie: Dlaczego CNN widzi?\n",
     "\n",
-    "Jeśli Twój model osiągnął około **85-90%**, to świetny wynik jak na tak prostą sieć i 3 epoki.\n",
+    "Je\u015bli Tw\u00f3j model osi\u0105gn\u0105\u0142 oko\u0142o **85-90%**, to \u015bwietny wynik jak na tak prost\u0105 sie\u0107 i 3 epoki.\n",
     "\n",
-    "Co się stało w środku?\n",
-    "1.  **Block 1:** Nauczył się wykrywać proste linie (pionowe, poziome).\n",
-    "2.  **Block 2:** Połączył linie w kształty (kąty, łuki, pętle).\n",
-    "3.  **Classifier:** Zobaczył zestaw kształtów (np. \"długa pętla + podeszwa\") i uznał: \"To musi być but!\".\n",
+    "Co si\u0119 sta\u0142o w \u015brodku?\n",
+    "1.  **Block 1:** Nauczy\u0142 si\u0119 wykrywa\u0107 proste linie (pionowe, poziome).\n",
+    "2.  **Block 2:** Po\u0142\u0105czy\u0142 linie w kszta\u0142ty (k\u0105ty, \u0142uki, p\u0119tle).\n",
+    "3.  **Classifier:** Zobaczy\u0142 zestaw kszta\u0142t\u00f3w (np. \"d\u0142uga p\u0119tla + podeszwa\") i uzna\u0142: \"To musi by\u0107 but!\".\n",
     "\n",
-    "**Tu jest haczyk (Wydajność).**\n",
+    "**Tu jest haczyk (Wydajno\u015b\u0107).**\n",
     "Uczenie na obrazkach jest wolne.\n",
-    "Dlatego w pracy zawodowej rzadko budujemy CNN od zera (chyba że do bardzo specyficznych zadań medycznych/kosmicznych). Zazwyczaj bierzemy gotowe modele (jak ResNet), które Google trenował miesiącami, i tylko je \"douczamy\" (Transfer Learning). Ale żeby to zrobić, musisz rozumieć, czym jest Conv2d i MaxPool. Teraz już wiesz."
+    "Dlatego w pracy zawodowej rzadko budujemy CNN od zera (chyba \u017ce do bardzo specyficznych zada\u0144 medycznych/kosmicznych). Zazwyczaj bierzemy gotowe modele (jak ResNet), kt\u00f3re Google trenowa\u0142 miesi\u0105cami, i tylko je \"douczamy\" (Transfer Learning). Ale \u017ceby to zrobi\u0107, musisz rozumie\u0107, czym jest Conv2d i MaxPool. Teraz ju\u017c wiesz."
    ]
   }
  ],
