--- a/40_Autoencoder_Anomaly_Detection.ipynb
+++ b/40_Autoencoder_Anomaly_Detection.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/40_Autoencoder_Anomaly_Detection.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f33befbe",
    "metadata": {},
    "source": [
-    "# 🕵️ Autoenkoder: Wykrywanie Anomalii (Unsupervised Learning)\n",
+    "# \ud83d\udd75\ufe0f Autoenkoder: Wykrywanie Anomalii (Unsupervised Learning)\n",
     "\n",
-    "Większość AI to \"Uczenie Nadzorowane\" (pokazujemy: to jest kot, to jest pies).\n",
+    "Wi\u0119kszo\u015b\u0107 AI to \"Uczenie Nadzorowane\" (pokazujemy: to jest kot, to jest pies).\n",
     "Wykrywanie anomalii to \"Uczenie Nienadzorowane\". Mamy tylko poprawne dane (\"Normalne zachowanie\").\n",
     "\n",
-    "Budujemy sieć typu **Autoencoder**:\n",
-    "1.  **Encoder:** Kompresuje dane wejściowe do małego wektora (tzw. Latent Space).\n",
-    "2.  **Bottleneck:** Wąskie gardło. Zmusza sieć do zapamiętania tylko najważniejszych cech (wzorca), a odrzucenia szumu.\n",
-    "3.  **Decoder:** Próbuje odtworzyć oryginał z tego małego wektora.\n",
+    "Budujemy sie\u0107 typu **Autoencoder**:\n",
+    "1.  **Encoder:** Kompresuje dane wej\u015bciowe do ma\u0142ego wektora (tzw. Latent Space).\n",
+    "2.  **Bottleneck:** W\u0105skie gard\u0142o. Zmusza sie\u0107 do zapami\u0119tania tylko najwa\u017cniejszych cech (wzorca), a odrzucenia szumu.\n",
+    "3.  **Decoder:** Pr\u00f3buje odtworzy\u0107 orygina\u0142 z tego ma\u0142ego wektora.\n",
     "\n",
-    "**Zasada działania:**\n",
-    "Trenujemy sieć TYLKO na normalnych danych (np. poprawny rytm serca).\n",
-    "*   Gdy przyjdzie poprawny rytm -> Błąd rekonstrukcji będzie niski.\n",
-    "*   Gdy przyjdzie arytmia (anomalia) -> Sieć zgłupieje, błąd będzie wysoki. **Alarm!**"
+    "**Zasada dzia\u0142ania:**\n",
+    "Trenujemy sie\u0107 TYLKO na normalnych danych (np. poprawny rytm serca).\n",
+    "*   Gdy przyjdzie poprawny rytm -> B\u0142\u0105d rekonstrukcji b\u0119dzie niski.\n",
+    "*   Gdy przyjdzie arytmia (anomalia) -> Sie\u0107 zg\u0142upieje, b\u0142\u0105d b\u0119dzie wysoki. **Alarm!**"
    ]
   },
   {
@@ -55,13 +62,13 @@
     "\n",
     "# 1. GENERUJEMY DANE (Symulacja EKG)\n",
     "# Normalne dane: Sinusoida (Rytm serca)\n",
-    "# Anomalie: Szum / Zakłócenia\n",
+    "# Anomalie: Szum / Zak\u0142\u00f3cenia\n",
     "\n",
     "t = np.linspace(0, 50, 1000)\n",
     "x_normal = np.sin(t)\n",
     "x_anomaly = np.random.uniform(-1, 1, 1000) # Kompletny chaos\n",
     "\n",
-    "# Tniemy na kawałki po 10 punktów (Input Size = 10)\n",
+    "# Tniemy na kawa\u0142ki po 10 punkt\u00f3w (Input Size = 10)\n",
     "def create_sequences(data, seq_len=10):\n",
     "    seqs = []\n",
     "    for i in range(len(data) - seq_len):\n",
@@ -99,12 +106,12 @@
    "source": [
     "## Budowa Autoenkodera\n",
     "\n",
-    "Nasza sieć będzie miała kształt klepsydry:\n",
-    "*   Wejście: 10\n",
+    "Nasza sie\u0107 b\u0119dzie mia\u0142a kszta\u0142t klepsydry:\n",
+    "*   Wej\u015bcie: 10\n",
     "*   Ukryta: 5 (Encoder - kompresja)\n",
     "*   Bottleneck: 2 (Maksymalna kompresja - sedno danych)\n",
     "*   Ukryta: 5 (Decoder - dekompresja)\n",
-    "*   Wyjście: 10"
+    "*   Wyj\u015bcie: 10"
    ]
   },
   {
@@ -152,7 +159,7 @@
     "            nn.Linear(2, 5),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(5, 10),\n",
-    "            # Na wyjściu Tanh, bo nasze dane są od -1 do 1 (jak sinus)\n",
+    "            # Na wyj\u015bciu Tanh, bo nasze dane s\u0105 od -1 do 1 (jak sinus)\n",
     "            nn.Tanh() \n",
     "        )\n",
     "\n",
@@ -174,9 +181,9 @@
     "## Trening (Tylko na Normalnych!)\n",
     "\n",
     "To jest kluczowe. Nie pokazujemy modelowi ani jednej anomalii.\n",
-    "Chcemy, żeby stał się ekspertem od \"normalności\".\n",
+    "Chcemy, \u017ceby sta\u0142 si\u0119 ekspertem od \"normalno\u015bci\".\n",
     "\n",
-    "Jako funkcję błędu użyjemy **MSE (Mean Squared Error)** - bo chcemy, żeby wejście i wyjście były identyczne."
+    "Jako funkcj\u0119 b\u0142\u0119du u\u017cyjemy **MSE (Mean Squared Error)** - bo chcemy, \u017ceby wej\u015bcie i wyj\u015bcie by\u0142y identyczne."
    ]
   },
   {
@@ -189,16 +196,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoka 0 | Błąd rekonstrukcji: 0.577251\n",
-      "Epoka 50 | Błąd rekonstrukcji: 0.069887\n",
-      "Epoka 100 | Błąd rekonstrukcji: 0.016341\n",
-      "Epoka 150 | Błąd rekonstrukcji: 0.013303\n",
-      "Epoka 200 | Błąd rekonstrukcji: 0.013076\n",
-      "Epoka 250 | Błąd rekonstrukcji: 0.012925\n",
-      "Epoka 300 | Błąd rekonstrukcji: 0.012765\n",
-      "Epoka 350 | Błąd rekonstrukcji: 0.012592\n",
-      "Epoka 400 | Błąd rekonstrukcji: 0.012422\n",
-      "Epoka 450 | Błąd rekonstrukcji: 0.012251\n"
+      "Epoka 0 | B\u0142\u0105d rekonstrukcji: 0.577251\n",
+      "Epoka 50 | B\u0142\u0105d rekonstrukcji: 0.069887\n",
+      "Epoka 100 | B\u0142\u0105d rekonstrukcji: 0.016341\n",
+      "Epoka 150 | B\u0142\u0105d rekonstrukcji: 0.013303\n",
+      "Epoka 200 | B\u0142\u0105d rekonstrukcji: 0.013076\n",
+      "Epoka 250 | B\u0142\u0105d rekonstrukcji: 0.012925\n",
+      "Epoka 300 | B\u0142\u0105d rekonstrukcji: 0.012765\n",
+      "Epoka 350 | B\u0142\u0105d rekonstrukcji: 0.012592\n",
+      "Epoka 400 | B\u0142\u0105d rekonstrukcji: 0.012422\n",
+      "Epoka 450 | B\u0142\u0105d rekonstrukcji: 0.012251\n"
      ]
     },
     {
@@ -216,7 +223,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
-    "# Używamy 80% normalnych danych do treningu\n",
+    "# U\u017cywamy 80% normalnych danych do treningu\n",
     "train_size = int(0.8 * len(X_normal_torch))\n",
     "train_data = X_normal_torch[:train_size].to(device)\n",
     "test_data = X_normal_torch[train_size:].to(device) # Reszta normalnych do testu\n",
@@ -227,10 +234,10 @@
     "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    \n",
-    "    # 1. Forward (Autoenkoder próbuje odtworzyć wejście)\n",
+    "    # 1. Forward (Autoenkoder pr\u00f3buje odtworzy\u0107 wej\u015bcie)\n",
     "    output = model(train_data)\n",
     "    \n",
-    "    # 2. Loss (Porównujemy wyjście z wejściem!)\n",
+    "    # 2. Loss (Por\u00f3wnujemy wyj\u015bcie z wej\u015bciem!)\n",
     "    loss = loss_fn(output, train_data)\n",
     "    \n",
     "    # 3. Backward\n",
@@ -241,10 +248,10 @@
     "    losses.append(loss.item())\n",
     "    \n",
     "    if epoch % 50 == 0:\n",
-    "        print(f\"Epoka {epoch} | Błąd rekonstrukcji: {loss.item():.6f}\")\n",
+    "        print(f\"Epoka {epoch} | B\u0142\u0105d rekonstrukcji: {loss.item():.6f}\")\n",
     "\n",
     "plt.plot(losses)\n",
-    "plt.title(\"Krzywa uczenia (Spadek błędu)\")\n",
+    "plt.title(\"Krzywa uczenia (Spadek b\u0142\u0119du)\")\n",
     "plt.show()"
    ]
   },
@@ -255,11 +262,11 @@
    "source": [
     "## Detekcja: Moment Prawdy\n",
     "\n",
-    "Teraz wrzucimy do sieci dwa rodzaje danych, których nigdy nie widziała podczas treningu:\n",
-    "1.  **Testowe Normalne** (powinna je ładnie odtworzyć).\n",
-    "2.  **Anomalie** (powinna się wyłożyć).\n",
+    "Teraz wrzucimy do sieci dwa rodzaje danych, kt\u00f3rych nigdy nie widzia\u0142a podczas treningu:\n",
+    "1.  **Testowe Normalne** (powinna je \u0142adnie odtworzy\u0107).\n",
+    "2.  **Anomalie** (powinna si\u0119 wy\u0142o\u017cy\u0107).\n",
     "\n",
-    "Policzymy **Błąd Rekonstrukcji** dla każdego przypadku."
+    "Policzymy **B\u0142\u0105d Rekonstrukcji** dla ka\u017cdego przypadku."
    ]
   },
   {
@@ -272,8 +279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średni błąd dla Normalnych: 0.0123\n",
-      "Średni błąd dla Anomalii:   0.3264\n"
+      "\u015aredni b\u0142\u0105d dla Normalnych: 0.0123\n",
+      "\u015aredni b\u0142\u0105d dla Anomalii:   0.3264\n"
      ]
     },
     {
@@ -294,24 +301,24 @@
     "with torch.no_grad():\n",
     "    # 1. Sprawdzamy normalne dane\n",
     "    pred_normal = model(test_data)\n",
-    "    # Liczymy błąd dla każdego przykładu osobno (reduce=False)\n",
+    "    # Liczymy b\u0142\u0105d dla ka\u017cdego przyk\u0142adu osobno (reduce=False)\n",
     "    loss_normal = torch.mean((pred_normal - test_data)**2, dim=1).cpu().numpy()\n",
     "    \n",
     "    # 2. Sprawdzamy anomalie\n",
     "    pred_anomaly = model(X_anomaly_torch)\n",
     "    loss_anomaly = torch.mean((pred_anomaly - X_anomaly_torch)**2, dim=1).cpu().numpy()\n",
     "\n",
-    "print(f\"Średni błąd dla Normalnych: {np.mean(loss_normal):.4f}\")\n",
-    "print(f\"Średni błąd dla Anomalii:   {np.mean(loss_anomaly):.4f}\")\n",
+    "print(f\"\u015aredni b\u0142\u0105d dla Normalnych: {np.mean(loss_normal):.4f}\")\n",
+    "print(f\"\u015aredni b\u0142\u0105d dla Anomalii:   {np.mean(loss_anomaly):.4f}\")\n",
     "\n",
-    "# WIZUALIZACJA HISTOGRAMU BŁĘDÓW\n",
+    "# WIZUALIZACJA HISTOGRAMU B\u0141\u0118D\u00d3W\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(loss_normal, bins=50, alpha=0.7, label='Normalne (Mały błąd)', color='green')\n",
-    "plt.hist(loss_anomaly, bins=50, alpha=0.7, label='Anomalie (Duży błąd)', color='red')\n",
-    "plt.xlabel(\"Błąd Rekonstrukcji (MSE)\")\n",
-    "plt.ylabel(\"Liczba próbek\")\n",
+    "plt.hist(loss_normal, bins=50, alpha=0.7, label='Normalne (Ma\u0142y b\u0142\u0105d)', color='green')\n",
+    "plt.hist(loss_anomaly, bins=50, alpha=0.7, label='Anomalie (Du\u017cy b\u0142\u0105d)', color='red')\n",
+    "plt.xlabel(\"B\u0142\u0105d Rekonstrukcji (MSE)\")\n",
+    "plt.ylabel(\"Liczba pr\u00f3bek\")\n",
     "plt.legend()\n",
-    "plt.title(\"Jak łatwo oddzielić dobre od złego?\")\n",
+    "plt.title(\"Jak \u0142atwo oddzieli\u0107 dobre od z\u0142ego?\")\n",
     "plt.show()"
    ]
   },
@@ -322,11 +329,11 @@
    "source": [
     "## Ustalanie Progu (Threshold)\n",
     "\n",
-    "Patrząc na wykres, widzimy wyraźną granicę.\n",
-    "*   Normalne dane mają błąd bliski 0.\n",
-    "*   Anomalie mają błąd > 0.1 (na przykład).\n",
+    "Patrz\u0105c na wykres, widzimy wyra\u017an\u0105 granic\u0119.\n",
+    "*   Normalne dane maj\u0105 b\u0142\u0105d bliski 0.\n",
+    "*   Anomalie maj\u0105 b\u0142\u0105d > 0.1 (na przyk\u0142ad).\n",
     "\n",
-    "Możemy ustawić **Threshold** (próg alarmowy). Wszystko, co ma błąd powyżej progu, oznaczamy jako atak/awarię."
+    "Mo\u017cemy ustawi\u0107 **Threshold** (pr\u00f3g alarmowy). Wszystko, co ma b\u0142\u0105d powy\u017cej progu, oznaczamy jako atak/awari\u0119."
    ]
   },
   {
@@ -339,25 +346,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ustalony próg alarmowy: 0.0354\n",
+      "Ustalony pr\u00f3g alarmowy: 0.0354\n",
       "Wykryto 990 z 990 anomalii.\n",
-      "✅ System działa wyśmienicie!\n"
+      "\u2705 System dzia\u0142a wy\u015bmienicie!\n"
      ]
     }
    ],
    "source": [
-    "# Ustalamy próg (np. średnia normalnych + 3 odchylenia standardowe)\n",
+    "# Ustalamy pr\u00f3g (np. \u015brednia normalnych + 3 odchylenia standardowe)\n",
     "threshold = np.mean(loss_normal) + 3 * np.std(loss_normal)\n",
-    "print(f\"Ustalony próg alarmowy: {threshold:.4f}\")\n",
+    "print(f\"Ustalony pr\u00f3g alarmowy: {threshold:.4f}\")\n",
     "\n",
-    "# Sprawdźmy skuteczność\n",
+    "# Sprawd\u017amy skuteczno\u015b\u0107\n",
     "n_detected = np.sum(loss_anomaly > threshold)\n",
     "print(f\"Wykryto {n_detected} z {len(loss_anomaly)} anomalii.\")\n",
     "\n",
     "if n_detected > len(loss_anomaly) * 0.9:\n",
-    "    print(\"✅ System działa wyśmienicie!\")\n",
+    "    print(\"\u2705 System dzia\u0142a wy\u015bmienicie!\")\n",
     "else:\n",
-    "    print(\"⚠️ Trzeba dostroić model.\")"
+    "    print(\"\u26a0\ufe0f Trzeba dostroi\u0107 model.\")"
    ]
   },
   {
@@ -365,20 +372,20 @@
    "id": "3dc3a420",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Inteligencja przez Kompresję\n",
+    "## \ud83e\udde0 Podsumowanie: Inteligencja przez Kompresj\u0119\n",
     "\n",
-    "Dlaczego to zadziałało?\n",
+    "Dlaczego to zadzia\u0142a\u0142o?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Wąskie gardło (Bottleneck) o rozmiarze 2 nie jest w stanie pomieścić informacji o losowym szumie (chaosie). Jest w stanie pomieścić tylko prostą regułę: \"To jest sinusoida\".\n",
+    "W\u0105skie gard\u0142o (Bottleneck) o rozmiarze 2 nie jest w stanie pomie\u015bci\u0107 informacji o losowym szumie (chaosie). Jest w stanie pomie\u015bci\u0107 tylko prost\u0105 regu\u0142\u0119: \"To jest sinusoida\".\n",
     "\n",
-    "Dlatego sieć:\n",
-    "1.  Widząc sinusoidę -> Kompresuje ją do wzoru, a potem rozpakowuje. (Sukces).\n",
-    "2.  Widząc szum -> Próbuje go dopasować do wzoru sinusoidy, co się nie udaje. (Wysoki błąd).\n",
+    "Dlatego sie\u0107:\n",
+    "1.  Widz\u0105c sinusoid\u0119 -> Kompresuje j\u0105 do wzoru, a potem rozpakowuje. (Sukces).\n",
+    "2.  Widz\u0105c szum -> Pr\u00f3buje go dopasowa\u0107 do wzoru sinusoidy, co si\u0119 nie udaje. (Wysoki b\u0142\u0105d).\n",
     "\n",
-    "To podejście stosuje się wszędzie, gdzie brakuje danych o awariach:\n",
-    "*   Monitorowanie serwerów.\n",
-    "*   Wykrywanie wad produktów na taśmie produkcyjnej (wizualne).\n",
+    "To podej\u015bcie stosuje si\u0119 wsz\u0119dzie, gdzie brakuje danych o awariach:\n",
+    "*   Monitorowanie serwer\u00f3w.\n",
+    "*   Wykrywanie wad produkt\u00f3w na ta\u015bmie produkcyjnej (wizualne).\n",
     "*   Analiza EKG w medycynie."
    ]
   }
