--- a/43_VAE_Variational_Autoencoder.ipynb
+++ b/43_VAE_Variational_Autoencoder.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/43_VAE_Variational_Autoencoder.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df670852",
    "metadata": {},
    "source": [
-    "# 🧬 VAE: Generowanie przez Morfing\n",
+    "# \ud83e\uddec VAE: Generowanie przez Morfing\n",
     "\n",
-    "Zwykły Autoenkoder mapuje wejście na sztywny punkt w przestrzeni.\n",
-    "VAE mapuje wejście na **rozkład normalny (Gaussa)**.\n",
+    "Zwyk\u0142y Autoenkoder mapuje wej\u015bcie na sztywny punkt w przestrzeni.\n",
+    "VAE mapuje wej\u015bcie na **rozk\u0142ad normalny (Gaussa)**.\n",
     "\n",
     "**Dlaczego to genialne?**\n",
-    "Dzięki temu przestrzeń ukryta (Latent Space) nie ma \"dziur\". Każdy punkt w tej przestrzeni, nawet wylosowany, reprezentuje coś sensownego (np. cyfrę, która wygląda jak hybryda 1 i 7).\n",
+    "Dzi\u0119ki temu przestrze\u0144 ukryta (Latent Space) nie ma \"dziur\". Ka\u017cdy punkt w tej przestrzeni, nawet wylosowany, reprezentuje co\u015b sensownego (np. cyfr\u0119, kt\u00f3ra wygl\u0105da jak hybryda 1 i 7).\n",
     "\n",
     "**Architektura:**\n",
     "1.  **Encoder:** Zwraca dwa wektory:\n",
-    "    *   $\\mu$ (Mu): Średnia (gdzie jest centrum chmury?).\n",
+    "    *   $\\mu$ (Mu): \u015arednia (gdzie jest centrum chmury?).\n",
     "    *   $\\sigma$ (Sigma/LogVar): Rozrzut (jak szeroka jest chmura?).\n",
     "2.  **Sampling (Reparameterization Trick):** Losujemy punkt z tej chmury.\n",
-    "    *   Ten krok jest trudny, bo nie da się policzyć pochodnej z \"losowania\".\n",
-    "    *   Trik: $z = \\mu + \\sigma \\cdot \\epsilon$ (gdzie $\\epsilon$ to losowy szum). Przesuwamy losowość na zewnątrz, żeby Autograd działał.\n",
+    "    *   Ten krok jest trudny, bo nie da si\u0119 policzy\u0107 pochodnej z \"losowania\".\n",
+    "    *   Trik: $z = \\mu + \\sigma \\cdot \\epsilon$ (gdzie $\\epsilon$ to losowy szum). Przesuwamy losowo\u015b\u0107 na zewn\u0105trz, \u017ceby Autograd dzia\u0142a\u0142.\n",
     "3.  **Decoder:** Odtwarza obrazek z wylosowanego punktu."
    ]
   },
@@ -33,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gotowe. Latent Space będzie miał wymiar 2 (płaska mapa).\n"
+      "Gotowe. Latent Space b\u0119dzie mia\u0142 wymiar 2 (p\u0142aska mapa).\n"
      ]
     }
    ],
@@ -51,14 +58,14 @@
     "BATCH_SIZE = 128\n",
     "LR = 1e-3\n",
     "EPOCHS = 20\n",
-    "latent_dim = 2 # Zrobimy przestrzeń 2D, żeby móc ją narysować na wykresie!\n",
+    "latent_dim = 2 # Zrobimy przestrze\u0144 2D, \u017ceby m\u00f3c j\u0105 narysowa\u0107 na wykresie!\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# Dane (MNIST)\n",
     "dataset = datasets.MNIST(root=\"data\", train=True, transform=transforms.ToTensor(), download=True)\n",
     "loader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "print(f\"Gotowe. Latent Space będzie miał wymiar {latent_dim} (płaska mapa).\")"
+    "print(f\"Gotowe. Latent Space b\u0119dzie mia\u0142 wymiar {latent_dim} (p\u0142aska mapa).\")"
    ]
   },
   {
@@ -68,8 +75,8 @@
    "source": [
     "## Klasa VAE\n",
     "\n",
-    "To jest serce algorytmu. Zwróć uwagę na metodę `reparameterize`.\n",
-    "To ona pozwala sieci \"uczyć się losowości\"."
+    "To jest serce algorytmu. Zwr\u00f3\u0107 uwag\u0119 na metod\u0119 `reparameterize`.\n",
+    "To ona pozwala sieci \"uczy\u0107 si\u0119 losowo\u015bci\"."
    ]
   },
   {
@@ -98,9 +105,9 @@
     "        super().__init__()\n",
     "        \n",
     "        # --- ENCODER ---\n",
-    "        # Spłaszczamy obrazek 28x28 -> 784\n",
+    "        # Sp\u0142aszczamy obrazek 28x28 -> 784\n",
     "        self.fc1 = nn.Linear(784, 400)\n",
-    "        self.fc2_mu = nn.Linear(400, latent_dim)      # Wektor średnich\n",
+    "        self.fc2_mu = nn.Linear(400, latent_dim)      # Wektor \u015brednich\n",
     "        self.fc2_logvar = nn.Linear(400, latent_dim)  # Wektor wariancji (log)\n",
     "\n",
     "        # --- DECODER ---\n",
@@ -113,7 +120,7 @@
     "\n",
     "    def reparameterize(self, mu, logvar):\n",
     "        # Trik Reparametryzacji:\n",
-    "        # Nie losujemy z rozkładu N(mu, std).\n",
+    "        # Nie losujemy z rozk\u0142adu N(mu, std).\n",
     "        # Losujemy eps z N(0, 1) i przesuwamy go o mu i skalujemy przez std.\n",
     "        std = torch.exp(0.5 * logvar)\n",
     "        eps = torch.randn_like(std)\n",
@@ -121,13 +128,13 @@
     "\n",
     "    def decode(self, z):\n",
     "        h3 = F.relu(self.fc3(z))\n",
-    "        return torch.sigmoid(self.fc4(h3)) # Sigmoid, bo piksele są 0-1\n",
+    "        return torch.sigmoid(self.fc4(h3)) # Sigmoid, bo piksele s\u0105 0-1\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # 1. Kodowanie do parametrów rozkładu\n",
+    "        # 1. Kodowanie do parametr\u00f3w rozk\u0142adu\n",
     "        mu, logvar = self.encode(x.view(-1, 784))\n",
     "        \n",
-    "        # 2. Losowanie punktu (z zachowaniem możliwości backprop)\n",
+    "        # 2. Losowanie punktu (z zachowaniem mo\u017cliwo\u015bci backprop)\n",
     "        z = self.reparameterize(mu, logvar)\n",
     "        \n",
     "        # 3. Odtwarzanie\n",
@@ -145,11 +152,11 @@
    "source": [
     "## Funkcja Kosztu (Loss Function)\n",
     "\n",
-    "W VAE funkcja kosztu składa się z dwóch sprzecznych celów:\n",
-    "1.  **Reconstruction Loss (BCE):** \"Odtwórz obrazek idealnie\". (Ciągnie punkty w różne strony, żeby były dokładne).\n",
-    "2.  **KL Divergence (KLD):** \"Utrzymuj przestrzeń ukrytą jako zbitą kulę (rozkład normalny)\". (Ściska punkty do środka).\n",
+    "W VAE funkcja kosztu sk\u0142ada si\u0119 z dw\u00f3ch sprzecznych cel\u00f3w:\n",
+    "1.  **Reconstruction Loss (BCE):** \"Odtw\u00f3rz obrazek idealnie\". (Ci\u0105gnie punkty w r\u00f3\u017cne strony, \u017ceby by\u0142y dok\u0142adne).\n",
+    "2.  **KL Divergence (KLD):** \"Utrzymuj przestrze\u0144 ukryt\u0105 jako zbit\u0105 kul\u0119 (rozk\u0142ad normalny)\". (\u015aciska punkty do \u015brodka).\n",
     "\n",
-    "Ta walka sprawia, że przestrzeń jest uporządkowana."
+    "Ta walka sprawia, \u017ce przestrze\u0144 jest uporz\u0105dkowana."
    ]
   },
   {
@@ -162,42 +169,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoka 1: Średni Loss: 191.6478\n",
-      "Epoka 2: Średni Loss: 168.9242\n",
-      "Epoka 3: Średni Loss: 164.2105\n",
-      "Epoka 4: Średni Loss: 161.4136\n",
-      "Epoka 5: Średni Loss: 159.4933\n",
-      "Epoka 6: Średni Loss: 158.1203\n",
-      "Epoka 7: Średni Loss: 157.0526\n",
-      "Epoka 8: Średni Loss: 156.0788\n",
-      "Epoka 9: Średni Loss: 155.2489\n",
-      "Epoka 10: Średni Loss: 154.5744\n",
-      "Epoka 11: Średni Loss: 153.9064\n",
-      "Epoka 12: Średni Loss: 153.3639\n",
-      "Epoka 13: Średni Loss: 152.8281\n",
-      "Epoka 14: Średni Loss: 152.3906\n",
-      "Epoka 15: Średni Loss: 151.9826\n",
-      "Epoka 16: Średni Loss: 151.5370\n",
-      "Epoka 17: Średni Loss: 151.1811\n",
-      "Epoka 18: Średni Loss: 150.8498\n",
-      "Epoka 19: Średni Loss: 150.5205\n",
-      "Epoka 20: Średni Loss: 150.1990\n"
+      "Epoka 1: \u015aredni Loss: 191.6478\n",
+      "Epoka 2: \u015aredni Loss: 168.9242\n",
+      "Epoka 3: \u015aredni Loss: 164.2105\n",
+      "Epoka 4: \u015aredni Loss: 161.4136\n",
+      "Epoka 5: \u015aredni Loss: 159.4933\n",
+      "Epoka 6: \u015aredni Loss: 158.1203\n",
+      "Epoka 7: \u015aredni Loss: 157.0526\n",
+      "Epoka 8: \u015aredni Loss: 156.0788\n",
+      "Epoka 9: \u015aredni Loss: 155.2489\n",
+      "Epoka 10: \u015aredni Loss: 154.5744\n",
+      "Epoka 11: \u015aredni Loss: 153.9064\n",
+      "Epoka 12: \u015aredni Loss: 153.3639\n",
+      "Epoka 13: \u015aredni Loss: 152.8281\n",
+      "Epoka 14: \u015aredni Loss: 152.3906\n",
+      "Epoka 15: \u015aredni Loss: 151.9826\n",
+      "Epoka 16: \u015aredni Loss: 151.5370\n",
+      "Epoka 17: \u015aredni Loss: 151.1811\n",
+      "Epoka 18: \u015aredni Loss: 150.8498\n",
+      "Epoka 19: \u015aredni Loss: 150.5205\n",
+      "Epoka 20: \u015aredni Loss: 150.1990\n"
      ]
     }
    ],
    "source": [
     "# Specyficzna funkcja kosztu dla VAE\n",
     "def loss_function(recon_x, x, mu, logvar):\n",
-    "    # 1. Jak bardzo obrazek różni się od oryginału?\n",
+    "    # 1. Jak bardzo obrazek r\u00f3\u017cni si\u0119 od orygina\u0142u?\n",
     "    BCE = F.binary_cross_entropy(recon_x, x.view(-1, 784), reduction='sum')\n",
     "\n",
-    "    # 2. Jak bardzo rozkład różni się od normalnego? (Wzór matematyczny na KLD)\n",
+    "    # 2. Jak bardzo rozk\u0142ad r\u00f3\u017cni si\u0119 od normalnego? (Wz\u00f3r matematyczny na KLD)\n",
     "    # 0.5 * sum(1 + log(sigma^2) - mu^2 - sigma^2)\n",
     "    KLD = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
     "\n",
     "    return BCE + KLD\n",
     "\n",
-    "# Pętla treningowa\n",
+    "# P\u0119tla treningowa\n",
     "model.train()\n",
     "for epoch in range(EPOCHS):\n",
     "    train_loss = 0\n",
@@ -217,7 +224,7 @@
     "        train_loss += loss.item()\n",
     "        optimizer.step()\n",
     "        \n",
-    "    print(f\"Epoka {epoch+1}: Średni Loss: {train_loss / len(loader.dataset):.4f}\")"
+    "    print(f\"Epoka {epoch+1}: \u015aredni Loss: {train_loss / len(loader.dataset):.4f}\")"
    ]
   },
   {
@@ -227,8 +234,8 @@
    "source": [
     "## Wizualizacja 1: Mapa Latent Space (2D)\n",
     "\n",
-    "Ponieważ ustawiliśmy `latent_dim=2`, możemy narysować mapę wszystkich cyfr.\n",
-    "Zobaczysz, że cyfry tego samego typu (np. jedynki) grupują się w klastry, a klastry płynnie przechodzą jeden w drugi."
+    "Poniewa\u017c ustawili\u015bmy `latent_dim=2`, mo\u017cemy narysowa\u0107 map\u0119 wszystkich cyfr.\n",
+    "Zobaczysz, \u017ce cyfry tego samego typu (np. jedynki) grupuj\u0105 si\u0119 w klastry, a klastry p\u0142ynnie przechodz\u0105 jeden w drugi."
    ]
   },
   {
@@ -250,7 +257,7 @@
    ],
    "source": [
     "model.eval()\n",
-    "test_loader = DataLoader(dataset, batch_size=1000, shuffle=False) # Bierzemy 1000 próbek\n",
+    "test_loader = DataLoader(dataset, batch_size=1000, shuffle=False) # Bierzemy 1000 pr\u00f3bek\n",
     "\n",
     "all_z = []\n",
     "all_labels = []\n",
@@ -259,10 +266,10 @@
     "    for data, label in test_loader:\n",
     "        data = data.to(DEVICE)\n",
     "        mu, logvar = model.encode(data.view(-1, 784))\n",
-    "        # Bierzemy same średnie (centra chmur) do wizualizacji\n",
+    "        # Bierzemy same \u015brednie (centra chmur) do wizualizacji\n",
     "        all_z.append(mu.cpu().numpy())\n",
     "        all_labels.append(label.numpy())\n",
-    "        break # Wystarczy jeden duży batch\n",
+    "        break # Wystarczy jeden du\u017cy batch\n",
     "\n",
     "all_z = np.concatenate(all_z)\n",
     "all_labels = np.concatenate(all_labels)\n",
@@ -270,7 +277,7 @@
     "plt.figure(figsize=(10, 8))\n",
     "plt.scatter(all_z[:, 0], all_z[:, 1], c=all_labels, cmap='tab10', alpha=0.7)\n",
     "plt.colorbar()\n",
-    "plt.title(\"Latent Space VAE (Mapa myśli sieci)\")\n",
+    "plt.title(\"Latent Space VAE (Mapa my\u015bli sieci)\")\n",
     "plt.xlabel(\"Wymiar ukryty 1\")\n",
     "plt.ylabel(\"Wymiar ukryty 2\")\n",
     "plt.grid(True, alpha=0.3)\n",
@@ -296,13 +303,13 @@
    ],
    "source": [
     "# WIZUALIZACJA 2: Generowanie z niczego (Sampling)\n",
-    "# Losujemy punkty z układu współrzędnych i patrzymy, co \"śni\" sieć.\n",
+    "# Losujemy punkty z uk\u0142adu wsp\u00f3\u0142rz\u0119dnych i patrzymy, co \"\u015bni\" sie\u0107.\n",
     "\n",
     "n = 15  # Siatka 15x15\n",
     "digit_size = 28\n",
     "figure = np.zeros((digit_size * n, digit_size * n))\n",
     "\n",
-    "# Tworzymy siatkę punktów od -3 do 3 (zgodnie z rozkładem normalnym)\n",
+    "# Tworzymy siatk\u0119 punkt\u00f3w od -3 do 3 (zgodnie z rozk\u0142adem normalnym)\n",
     "grid_x = np.linspace(-3, 3, n)\n",
     "grid_y = np.linspace(-3, 3, n)\n",
     "\n",
@@ -323,7 +330,7 @@
     "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(figure, cmap='Greys_r')\n",
-    "plt.title(\"Płynne przejścia między cyframi (Manifold)\")\n",
+    "plt.title(\"P\u0142ynne przej\u015bcia mi\u0119dzy cyframi (Manifold)\")\n",
     "plt.axis('off')\n",
     "plt.show()"
    ]
@@ -333,19 +340,19 @@
    "id": "87fff75f",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Ciągłość to klucz\n",
+    "## \ud83e\udde0 Podsumowanie: Ci\u0105g\u0142o\u015b\u0107 to klucz\n",
     "\n",
-    "Spójrz na ostatni obrazek (kwadrat).\n",
-    "To nie są losowe cyfry. To jest **mapa**.\n",
-    "*   W jednym rogu są zera.\n",
-    "*   Idąc w prawo, zero powoli zmienia się w szóstkę.\n",
-    "*   Idąc w dół, szóstka zmienia się w ósemkę.\n",
+    "Sp\u00f3jrz na ostatni obrazek (kwadrat).\n",
+    "To nie s\u0105 losowe cyfry. To jest **mapa**.\n",
+    "*   W jednym rogu s\u0105 zera.\n",
+    "*   Id\u0105c w prawo, zero powoli zmienia si\u0119 w sz\u00f3stk\u0119.\n",
+    "*   Id\u0105c w d\u00f3\u0142, sz\u00f3stka zmienia si\u0119 w \u00f3semk\u0119.\n",
     "\n",
-    "To jest siła VAE. W przeciwieństwie do GAN (który generuje ostre, ale \"skaczące\" obrazy), VAE rozumie **strukturę** danych.\n",
-    "Dlatego VAE (i jego następcy) są używane w:\n",
+    "To jest si\u0142a VAE. W przeciwie\u0144stwie do GAN (kt\u00f3ry generuje ostre, ale \"skacz\u0105ce\" obrazy), VAE rozumie **struktur\u0119** danych.\n",
+    "Dlatego VAE (i jego nast\u0119pcy) s\u0105 u\u017cywane w:\n",
     "*   Kompresji wideo.\n",
-    "*   Wykrywaniu anomalii (jeszcze lepsze niż zwykły AE).\n",
-    "*   Generowaniu nowych cząsteczek leków (interpolacja między znanymi lekami)."
+    "*   Wykrywaniu anomalii (jeszcze lepsze ni\u017c zwyk\u0142y AE).\n",
+    "*   Generowaniu nowych cz\u0105steczek lek\u00f3w (interpolacja mi\u0119dzy znanymi lekami)."
    ]
   }
  ],
