--- a/44_RL_Q_Learning_FrozenLake.ipynb
+++ b/44_RL_Q_Learning_FrozenLake.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/44_RL_Q_Learning_FrozenLake.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9970424",
    "metadata": {},
    "source": [
-    "# 🤖 Q-Learning: Jak nauczyć robota chodzić po lodzie?\n",
+    "# \ud83e\udd16 Q-Learning: Jak nauczy\u0107 robota chodzi\u0107 po lodzie?\n",
     "\n",
-    "Reinforcement Learning (RL) to nauka metodą prób i błędów.\n",
+    "Reinforcement Learning (RL) to nauka metod\u0105 pr\u00f3b i b\u0142\u0119d\u00f3w.\n",
     "Mamy:\n",
     "1.  **Agenta:** Nasz robot.\n",
-    "2.  **Środowisko:** Gra (np. FrozenLake - śliskie jezioro z dziurami).\n",
-    "3.  **Akcje:** Góra, Dół, Lewo, Prawo.\n",
-    "4.  **Nagrody:** +1 za dotarcie do prezentu, 0 za resztę (i śmierć w dziurze).\n",
+    "2.  **\u015arodowisko:** Gra (np. FrozenLake - \u015bliskie jezioro z dziurami).\n",
+    "3.  **Akcje:** G\u00f3ra, D\u00f3\u0142, Lewo, Prawo.\n",
+    "4.  **Nagrody:** +1 za dotarcie do prezentu, 0 za reszt\u0119 (i \u015bmier\u0107 w dziurze).\n",
     "\n",
-    "**Q-Table (Tabela Jakości):**\n",
-    "Agent nie ma mózgu (sieci neuronowej). Ma **ściągę** (Tabelę Excela).\n",
+    "**Q-Table (Tabela Jako\u015bci):**\n",
+    "Agent nie ma m\u00f3zgu (sieci neuronowej). Ma **\u015bci\u0105g\u0119** (Tabel\u0119 Excela).\n",
     "*   Wiersze = Gdzie jestem? (Stan).\n",
-    "*   Kolumny = Co zrobić? (Akcja).\n",
-    "*   Wartość = Jak bardzo to się opłaca? (Q-Value).\n",
+    "*   Kolumny = Co zrobi\u0107? (Akcja).\n",
+    "*   Warto\u015b\u0107 = Jak bardzo to si\u0119 op\u0142aca? (Q-Value).\n",
     "\n",
-    "Na początku tabela jest pusta. Agent chodzi losowo. Gdy wpadnie do dziury -> zapisuje \"To było głupie\". Gdy znajdzie prezent -> zapisuje \"To było super\"."
+    "Na pocz\u0105tku tabela jest pusta. Agent chodzi losowo. Gdy wpadnie do dziury -> zapisuje \"To by\u0142o g\u0142upie\". Gdy znajdzie prezent -> zapisuje \"To by\u0142o super\"."
    ]
   },
   {
@@ -33,8 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Środowisko gotowe.\n",
-      "Liczba stanów (pól na planszy): 16\n",
+      "\u015arodowisko gotowe.\n",
+      "Liczba stan\u00f3w (p\u00f3l na planszy): 16\n",
       "Liczba akcji (ruchy): 4\n"
      ]
     },
@@ -52,7 +59,7 @@
     }
    ],
    "source": [
-    "# Instalacja środowiska Gym (standard w RL)\n",
+    "# Instalacja \u015brodowiska Gym (standard w RL)\n",
     "!uv pip install gymnasium\n",
     "\n",
     "import numpy as np\n",
@@ -61,13 +68,13 @@
     "import time\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "# Tworzymy środowisko FrozenLake\n",
-    "# is_slippery=False ułatwia sprawę (lód nie jest śliski, robot idzie tam gdzie chce)\n",
-    "# render_mode=\"rgb_array\" pozwala nam podglądać, co się dzieje\n",
+    "# Tworzymy \u015brodowisko FrozenLake\n",
+    "# is_slippery=False u\u0142atwia spraw\u0119 (l\u00f3d nie jest \u015bliski, robot idzie tam gdzie chce)\n",
+    "# render_mode=\"rgb_array\" pozwala nam podgl\u0105da\u0107, co si\u0119 dzieje\n",
     "env = gym.make(\"FrozenLake-v1\", map_name=\"4x4\", is_slippery=False, render_mode=\"rgb_array\")\n",
     "\n",
-    "print(\"Środowisko gotowe.\")\n",
-    "print(f\"Liczba stanów (pól na planszy): {env.observation_space.n}\")\n",
+    "print(\"\u015arodowisko gotowe.\")\n",
+    "print(f\"Liczba stan\u00f3w (p\u00f3l na planszy): {env.observation_space.n}\")\n",
     "print(f\"Liczba akcji (ruchy): {env.action_space.n}\")"
    ]
   },
@@ -78,8 +85,8 @@
    "source": [
     "## Inicjalizacja Q-Table\n",
     "\n",
-    "Tworzymy tabelę rozmiaru `16 x 4` (16 pól na planszy, 4 możliwe ruchy).\n",
-    "Wypełniamy ją zerami."
+    "Tworzymy tabel\u0119 rozmiaru `16 x 4` (16 p\u00f3l na planszy, 4 mo\u017cliwe ruchy).\n",
+    "Wype\u0142niamy j\u0105 zerami."
    ]
   },
   {
@@ -128,19 +135,19 @@
    "id": "2caa46d3",
    "metadata": {},
    "source": [
-    "## Algorytm Q-Learning (Równanie Bellmana)\n",
+    "## Algorytm Q-Learning (R\u00f3wnanie Bellmana)\n",
     "\n",
-    "To jest serce RL. Wzór na aktualizację wiedzy:\n",
+    "To jest serce RL. Wz\u00f3r na aktualizacj\u0119 wiedzy:\n",
     "\n",
     "$$ Q(s, a) = Q(s, a) + \\alpha [R + \\gamma \\max Q(s', a') - Q(s, a)] $$\n",
     "\n",
     "Po ludzku:\n",
-    "Nowa Wiedza = Stara Wiedza + Nauka * (Nagroda + Przewidywana Przyszłość - Stara Wiedza).\n",
+    "Nowa Wiedza = Stara Wiedza + Nauka * (Nagroda + Przewidywana Przysz\u0142o\u015b\u0107 - Stara Wiedza).\n",
     "\n",
     "Parametry:\n",
-    "*   **Alpha ($\\alpha$):** Szybkość uczenia (0.1 - 0.9).\n",
-    "*   **Gamma ($\\gamma$):** Jak bardzo dbamy o przyszłość? (0.9 = bardzo, 0.1 = żyjemy chwilą).\n",
-    "*   **Epsilon ($\\epsilon$):** Chęć eksploracji. Na początku (1.0) robimy losowe ruchy, żeby poznać świat. Z czasem zmniejszamy epsilon, żeby wykorzystywać wiedzę."
+    "*   **Alpha ($\\alpha$):** Szybko\u015b\u0107 uczenia (0.1 - 0.9).\n",
+    "*   **Gamma ($\\gamma$):** Jak bardzo dbamy o przysz\u0142o\u015b\u0107? (0.9 = bardzo, 0.1 = \u017cyjemy chwil\u0105).\n",
+    "*   **Epsilon ($\\epsilon$):** Ch\u0119\u0107 eksploracji. Na pocz\u0105tku (1.0) robimy losowe ruchy, \u017ceby pozna\u0107 \u015bwiat. Z czasem zmniejszamy epsilon, \u017ceby wykorzystywa\u0107 wiedz\u0119."
    ]
   },
   {
@@ -153,26 +160,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Trening zakończony!\n"
+      "\u2705 Trening zako\u0144czony!\n"
      ]
     }
    ],
    "source": [
     "# Hiperparametry\n",
     "num_episodes = 2000       # Ile razy gramy?\n",
-    "max_steps = 100           # Maksymalna liczba kroków w jednej grze\n",
+    "max_steps = 100           # Maksymalna liczba krok\u00f3w w jednej grze\n",
     "learning_rate = 0.8       # Alpha\n",
-    "gamma = 0.95              # Discount factor (przyszłość jest ważna)\n",
+    "gamma = 0.95              # Discount factor (przysz\u0142o\u015b\u0107 jest wa\u017cna)\n",
     "\n",
     "# Parametry Eksploracji (Epsilon Greedy)\n",
-    "epsilon = 1.0             # Na początku 100% losowości\n",
+    "epsilon = 1.0             # Na pocz\u0105tku 100% losowo\u015bci\n",
     "max_epsilon = 1.0\n",
     "min_epsilon = 0.01\n",
-    "decay_rate = 0.005        # Jak szybko przestajemy losować\n",
+    "decay_rate = 0.005        # Jak szybko przestajemy losowa\u0107\n",
     "\n",
     "rewards_all_episodes = []\n",
     "\n",
-    "# --- GŁÓWNA PĘTLA TRENINGOWA ---\n",
+    "# --- G\u0141\u00d3WNA P\u0118TLA TRENINGOWA ---\n",
     "for episode in range(num_episodes):\n",
     "    state, info = env.reset()\n",
     "    done = False\n",
@@ -191,7 +198,7 @@
     "        new_state, reward, terminated, truncated, info = env.step(action)\n",
     "        done = terminated or truncated\n",
     "        \n",
-    "        # 3. Aktualizacja Q-Table (Równanie Bellmana)\n",
+    "        # 3. Aktualizacja Q-Table (R\u00f3wnanie Bellmana)\n",
     "        # Q(s,a) = Q(s,a) + lr * [R + gamma * max(Q(s',a')) - Q(s,a)]\n",
     "        q_table[state, action] = q_table[state, action] + learning_rate * (\n",
     "            reward + gamma * np.max(q_table[new_state, :]) - q_table[state, action]\n",
@@ -203,11 +210,11 @@
     "        if done:\n",
     "            break\n",
     "            \n",
-    "    # Zmniejszamy Epsilon (coraz mniej losowości)\n",
+    "    # Zmniejszamy Epsilon (coraz mniej losowo\u015bci)\n",
     "    epsilon = min_epsilon + (max_epsilon - min_epsilon) * np.exp(-decay_rate * episode)\n",
     "    rewards_all_episodes.append(rewards_current_episode)\n",
     "\n",
-    "print(\"✅ Trening zakończony!\")"
+    "print(\"\u2705 Trening zako\u0144czony!\")"
    ]
   },
   {
@@ -220,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Średnia nagroda na 100 gier ---\n",
+      "--- \u015arednia nagroda na 100 gier ---\n",
       "100: 0.00\n",
       "200: 0.00\n",
       "300: 0.00\n",
@@ -259,24 +266,24 @@
       " [0. 0. 0. 0.]\n",
       " [0. 0. 0. 0.]\n",
       " [0. 0. 0. 0.]]\n",
-      "(Widzisz liczby inne niż zero? To ścieżka do nagrody!)\n"
+      "(Widzisz liczby inne ni\u017c zero? To \u015bcie\u017cka do nagrody!)\n"
      ]
     }
    ],
    "source": [
-    "# Sprawdźmy wyniki\n",
-    "# Dzielimy trening na paczki po 100 gier i liczymy średnią nagrodę\n",
+    "# Sprawd\u017amy wyniki\n",
+    "# Dzielimy trening na paczki po 100 gier i liczymy \u015bredni\u0105 nagrod\u0119\n",
     "rewards_per_thousand_episodes = np.split(np.array(rewards_all_episodes), num_episodes/100)\n",
     "count = 100\n",
     "\n",
-    "print(\"--- Średnia nagroda na 100 gier ---\")\n",
+    "print(\"--- \u015arednia nagroda na 100 gier ---\")\n",
     "for r in rewards_per_thousand_episodes:\n",
     "    print(f\"{count}: {sum(r)/100 :.2f}\")\n",
     "    count += 100\n",
     "\n",
     "print(\"\\n--- NAUCZONA Q-TABLE ---\")\n",
     "print(q_table)\n",
-    "print(\"(Widzisz liczby inne niż zero? To ścieżka do nagrody!)\")"
+    "print(\"(Widzisz liczby inne ni\u017c zero? To \u015bcie\u017cka do nagrody!)\")"
    ]
   },
   {
@@ -286,8 +293,8 @@
    "source": [
     "## Gra w Czasie Rzeczywistym\n",
     "\n",
-    "Teraz, gdy agent ma wypełnioną tabelę, puścimy go na planszę bez losowości (`epsilon=0`).\n",
-    "Powinien iść prosto do celu."
+    "Teraz, gdy agent ma wype\u0142nion\u0105 tabel\u0119, pu\u015bcimy go na plansz\u0119 bez losowo\u015bci (`epsilon=0`).\n",
+    "Powinien i\u015b\u0107 prosto do celu."
    ]
   },
   {
@@ -301,7 +308,7 @@
      "output_type": "stream",
      "text": [
       "Start gry!\n",
-      "Liczba kroków: 20\n"
+      "Liczba krok\u00f3w: 20\n"
      ]
     }
    ],
@@ -326,12 +333,12 @@
     "        \n",
     "        if done:\n",
     "            if reward == 1:\n",
-    "                print(\"🏆 SUKCES! Agent dotarł do prezentu.\")\n",
+    "                print(\"\ud83c\udfc6 SUKCES! Agent dotar\u0142 do prezentu.\")\n",
     "            else:\n",
-    "                print(\"☠️ PORAŻKA! Agent wpadł do dziury.\")\n",
+    "                print(\"\u2620\ufe0f PORA\u017bKA! Agent wpad\u0142 do dziury.\")\n",
     "            break\n",
     "            \n",
-    "    print(f\"Liczba kroków: {step+1}\")\n",
+    "    print(f\"Liczba krok\u00f3w: {step+1}\")\n",
     "\n",
     "# Zagrajmy!\n",
     "play_game(env, q_table)"
@@ -342,18 +349,18 @@
    "id": "f38b4864",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Gdzie jest haczyk?\n",
+    "## \ud83e\udde0 Podsumowanie: Gdzie jest haczyk?\n",
     "\n",
-    "To zadziałało świetnie, bo plansza ma 16 pól.\n",
-    "Tabela Q ma rozmiar $16 \\times 4 = 64$ komórki. To mało.\n",
+    "To zadzia\u0142a\u0142o \u015bwietnie, bo plansza ma 16 p\u00f3l.\n",
+    "Tabela Q ma rozmiar $16 \\times 4 = 64$ kom\u00f3rki. To ma\u0142o.\n",
     "\n",
     "**Problem:**\n",
-    "Wyobraź sobie grę w szachy albo StarCrafta. Liczba stanów jest większa niż liczba atomów we wszechświecie.\n",
-    "Nie da się stworzyć Q-Tabeli dla szachów. Zjadłaby całą pamięć RAM świata.\n",
+    "Wyobra\u017a sobie gr\u0119 w szachy albo StarCrafta. Liczba stan\u00f3w jest wi\u0119ksza ni\u017c liczba atom\u00f3w we wszech\u015bwiecie.\n",
+    "Nie da si\u0119 stworzy\u0107 Q-Tabeli dla szach\u00f3w. Zjad\u0142aby ca\u0142\u0105 pami\u0119\u0107 RAM \u015bwiata.\n",
     "\n",
-    "**Rozwiązanie:**\n",
-    "Zamiast Tabeli (Excela), użyjemy **Sieci Neuronowej** (Funkcji), która będzie *zgadywać* wartości Q dla każdego stanu.\n",
-    "To się nazywa **Deep Q-Network (DQN)** i tym zajmiemy się w następnym notatniku."
+    "**Rozwi\u0105zanie:**\n",
+    "Zamiast Tabeli (Excela), u\u017cyjemy **Sieci Neuronowej** (Funkcji), kt\u00f3ra b\u0119dzie *zgadywa\u0107* warto\u015bci Q dla ka\u017cdego stanu.\n",
+    "To si\u0119 nazywa **Deep Q-Network (DQN)** i tym zajmiemy si\u0119 w nast\u0119pnym notatniku."
    ]
   }
  ],
