--- a/45_RL_Deep_Q_Learning_DQN.ipynb
+++ b/45_RL_Deep_Q_Learning_DQN.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/45_RL_Deep_Q_Learning_DQN.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ef8414e8",
    "metadata": {},
    "source": [
-    "# 🕹️ Deep Q-Network (DQN): Gdy Tabela to za mało\n",
+    "# \ud83d\udd79\ufe0f Deep Q-Network (DQN): Gdy Tabela to za ma\u0142o\n",
     "\n",
-    "Gdy gra jest skomplikowana (np. CartPole, Mario, Doom), nie możemy zapisać wszystkich stanów w tabeli.\n",
-    "Musimy użyć **aproksymatora funkcji** – czyli Sieci Neuronowej.\n",
+    "Gdy gra jest skomplikowana (np. CartPole, Mario, Doom), nie mo\u017cemy zapisa\u0107 wszystkich stan\u00f3w w tabeli.\n",
+    "Musimy u\u017cy\u0107 **aproksymatora funkcji** \u2013 czyli Sieci Neuronowej.\n",
     "\n",
-    "**Jak to działa?**\n",
-    "1.  **Wejście sieci:** Stan gry (np. 4 liczby w CartPole).\n",
-    "2.  **Wyjście sieci:** Wartości Q dla każdej akcji (np. Lewo: 10 pkt, Prawo: 2 pkt).\n",
-    "3.  Agent wybiera akcję z najwyższym Q.\n",
+    "**Jak to dzia\u0142a?**\n",
+    "1.  **Wej\u015bcie sieci:** Stan gry (np. 4 liczby w CartPole).\n",
+    "2.  **Wyj\u015bcie sieci:** Warto\u015bci Q dla ka\u017cdej akcji (np. Lewo: 10 pkt, Prawo: 2 pkt).\n",
+    "3.  Agent wybiera akcj\u0119 z najwy\u017cszym Q.\n",
     "\n",
     "**Dwa kluczowe triki DQN:**\n",
-    "1.  **Experience Replay (Bufor Pamięci):** Zamiast uczyć się \"na bieżąco\", agent zapisuje wspomnienia do worka. Potem losuje z niego garść wspomnień i na nich się uczy. To zapobiega zapominaniu starych trików.\n",
-    "2.  **Target Network:** Mamy dwie sieci. Jedna \"gra\" (Policy Net), druga \"ocenia\" (Target Net). Co jakiś czas kopiujemy jedną do drugiej. To stabilizuje naukę."
+    "1.  **Experience Replay (Bufor Pami\u0119ci):** Zamiast uczy\u0107 si\u0119 \"na bie\u017c\u0105co\", agent zapisuje wspomnienia do worka. Potem losuje z niego gar\u015b\u0107 wspomnie\u0144 i na nich si\u0119 uczy. To zapobiega zapominaniu starych trik\u00f3w.\n",
+    "2.  **Target Network:** Mamy dwie sieci. Jedna \"gra\" (Policy Net), druga \"ocenia\" (Target Net). Co jaki\u015b czas kopiujemy jedn\u0105 do drugiej. To stabilizuje nauk\u0119."
    ]
   },
   {
@@ -30,14 +37,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obserwacje (Wejście): 4 (Pozycja, Prędkość, Kąt, Prędkość Kątowa)\n",
-      "Akcje (Wyjście): 2 (Lewo, Prawo)\n",
-      "Urządzenie: cuda\n"
+      "Obserwacje (Wej\u015bcie): 4 (Pozycja, Pr\u0119dko\u015b\u0107, K\u0105t, Pr\u0119dko\u015b\u0107 K\u0105towa)\n",
+      "Akcje (Wyj\u015bcie): 2 (Lewo, Prawo)\n",
+      "Urz\u0105dzenie: cuda\n"
      ]
     }
    ],
    "source": [
-    "# Instalacja środowiska (jeśli nie masz)\n",
+    "# Instalacja \u015brodowiska (je\u015bli nie masz)\n",
     "# !uv pip install \"gymnasium[classic_control]\"\n",
     "\n",
     "import gymnasium as gym\n",
@@ -49,16 +56,16 @@
     "import torch.optim as optim\n",
     "from collections import deque\n",
     "\n",
-    "# Tworzymy środowisko CartPole-v1\n",
-    "# Cel: Utrzymać tyczkę w pionie jak najdłużej.\n",
+    "# Tworzymy \u015brodowisko CartPole-v1\n",
+    "# Cel: Utrzyma\u0107 tyczk\u0119 w pionie jak najd\u0142u\u017cej.\n",
     "env = gym.make(\"CartPole-v1\")\n",
     "\n",
     "# GPU\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "print(f\"Obserwacje (Wejście): {env.observation_space.shape[0]} (Pozycja, Prędkość, Kąt, Prędkość Kątowa)\")\n",
-    "print(f\"Akcje (Wyjście): {env.action_space.n} (Lewo, Prawo)\")\n",
-    "print(f\"Urządzenie: {device}\")"
+    "print(f\"Obserwacje (Wej\u015bcie): {env.observation_space.shape[0]} (Pozycja, Pr\u0119dko\u015b\u0107, K\u0105t, Pr\u0119dko\u015b\u0107 K\u0105towa)\")\n",
+    "print(f\"Akcje (Wyj\u015bcie): {env.action_space.n} (Lewo, Prawo)\")\n",
+    "print(f\"Urz\u0105dzenie: {device}\")"
    ]
   },
   {
@@ -66,12 +73,12 @@
    "id": "e68c367d",
    "metadata": {},
    "source": [
-    "## Krok 1: Mózg Agenta (Sieć Neuronowa)\n",
+    "## Krok 1: M\u00f3zg Agenta (Sie\u0107 Neuronowa)\n",
     "\n",
-    "Prosta sieć MLP (Multi-Layer Perceptron).\n",
-    "*   Wejście: 4 liczby (Stan).\n",
-    "*   Ukryte: 128 neuronów.\n",
-    "*   Wyjście: 2 liczby (Q-wartość dla Lewo, Q-wartość dla Prawo)."
+    "Prosta sie\u0107 MLP (Multi-Layer Perceptron).\n",
+    "*   Wej\u015bcie: 4 liczby (Stan).\n",
+    "*   Ukryte: 128 neuron\u00f3w.\n",
+    "*   Wyj\u015bcie: 2 liczby (Q-warto\u015b\u0107 dla Lewo, Q-warto\u015b\u0107 dla Prawo)."
    ]
   },
   {
@@ -112,11 +119,11 @@
    "source": [
     "## Krok 2: Replay Memory (Wspomnienia)\n",
     "\n",
-    "Agent nie uczy się od razu po wykonaniu ruchu.\n",
-    "Zapisuje sytuację: `(Stan, Akcja, Nagroda, NowyStan, CzyKoniec)` do listy.\n",
-    "Potem, gdy uzbiera trochę danych, losujemy z listy np. 128 sytuacji i robimy trening (Batch).\n",
+    "Agent nie uczy si\u0119 od razu po wykonaniu ruchu.\n",
+    "Zapisuje sytuacj\u0119: `(Stan, Akcja, Nagroda, NowyStan, CzyKoniec)` do listy.\n",
+    "Potem, gdy uzbiera troch\u0119 danych, losujemy z listy np. 128 sytuacji i robimy trening (Batch).\n",
     "\n",
-    "To rozbija korelację między kolejnymi klatkami gry (Data Decorrelation)."
+    "To rozbija korelacj\u0119 mi\u0119dzy kolejnymi klatkami gry (Data Decorrelation)."
    ]
   },
   {
@@ -129,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pamięć gotowa.\n"
+      "Pami\u0119\u0107 gotowa.\n"
      ]
     }
    ],
@@ -139,17 +146,17 @@
     "        self.memory = deque([], maxlen=capacity) # deque automatycznie usuwa stare elementy\n",
     "\n",
     "    def push(self, state, action, next_state, reward, done):\n",
-    "        # Zapisujemy krotkę\n",
+    "        # Zapisujemy krotk\u0119\n",
     "        self.memory.append((state, action, next_state, reward, done))\n",
     "\n",
     "    def sample(self, batch_size):\n",
-    "        # Losujemy próbkę\n",
+    "        # Losujemy pr\u00f3bk\u0119\n",
     "        return random.sample(self.memory, batch_size)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.memory)\n",
     "\n",
-    "print(\"Pamięć gotowa.\")"
+    "print(\"Pami\u0119\u0107 gotowa.\")"
    ]
   },
   {
@@ -157,16 +164,16 @@
    "id": "c6d96917",
    "metadata": {},
    "source": [
-    "## Krok 3: Trening (Pętla Gry)\n",
+    "## Krok 3: Trening (P\u0119tla Gry)\n",
     "\n",
-    "Tutaj dzieje się magia.\n",
-    "1.  **Epsilon-Greedy:** Losujemy ruch (eksploracja) lub pytamy sieć (eksploatacja).\n",
-    "2.  Zapisujemy wynik do pamięci.\n",
+    "Tutaj dzieje si\u0119 magia.\n",
+    "1.  **Epsilon-Greedy:** Losujemy ruch (eksploracja) lub pytamy sie\u0107 (eksploatacja).\n",
+    "2.  Zapisujemy wynik do pami\u0119ci.\n",
     "3.  **Optimize Model:**\n",
-    "    *   Bierzemy batcha z pamięci.\n",
+    "    *   Bierzemy batcha z pami\u0119ci.\n",
     "    *   Liczymy $Q_{expected}$ (z nagrody + Target Network).\n",
-    "    *   Liczymy $Q_{current}$ (co przewidziała nasza sieć).\n",
-    "    *   Liczymy Loss (błąd) i robimy `backward()`."
+    "    *   Liczymy $Q_{current}$ (co przewidzia\u0142a nasza sie\u0107).\n",
+    "    *   Liczymy Loss (b\u0142\u0105d) i robimy `backward()`."
    ]
   },
   {
@@ -178,18 +185,18 @@
    "source": [
     "# Hiperparametry\n",
     "BATCH_SIZE = 128\n",
-    "GAMMA = 0.99        # Jak ważna jest przyszłość\n",
-    "EPS_START = 0.9     # Początkowa losowość\n",
-    "EPS_END = 0.05      # Końcowa losowość\n",
-    "EPS_DECAY = 1000    # Jak szybko spada losowość\n",
+    "GAMMA = 0.99        # Jak wa\u017cna jest przysz\u0142o\u015b\u0107\n",
+    "EPS_START = 0.9     # Pocz\u0105tkowa losowo\u015b\u0107\n",
+    "EPS_END = 0.05      # Ko\u0144cowa losowo\u015b\u0107\n",
+    "EPS_DECAY = 1000    # Jak szybko spada losowo\u015b\u0107\n",
     "LR = 1e-4           # Learning Rate\n",
     "\n",
     "# Inicjalizacja\n",
     "n_actions = env.action_space.n\n",
     "n_observations = env.observation_space.shape[0]\n",
     "\n",
-    "policy_net = DQN(n_observations, n_actions).to(device) # Sieć \"grająca\"\n",
-    "target_net = DQN(n_observations, n_actions).to(device) # Sieć \"oceniająca\" (stabilna)\n",
+    "policy_net = DQN(n_observations, n_actions).to(device) # Sie\u0107 \"graj\u0105ca\"\n",
+    "target_net = DQN(n_observations, n_actions).to(device) # Sie\u0107 \"oceniaj\u0105ca\" (stabilna)\n",
     "target_net.load_state_dict(policy_net.state_dict()) # Kopiujemy wagi na start\n",
     "\n",
     "optimizer = optim.AdamW(policy_net.parameters(), lr=LR, amsgrad=True)\n",
@@ -200,13 +207,13 @@
     "def select_action(state):\n",
     "    global steps_done\n",
     "    sample = random.random()\n",
-    "    # Wzór na wygaszanie epsilona\n",
+    "    # Wz\u00f3r na wygaszanie epsilona\n",
     "    eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)\n",
     "    steps_done += 1\n",
     "    \n",
     "    if sample > eps_threshold:\n",
     "        with torch.no_grad():\n",
-    "            # Sieć wybiera najlepszą akcję (argmax)\n",
+    "            # Sie\u0107 wybiera najlepsz\u0105 akcj\u0119 (argmax)\n",
     "            return policy_net(state).max(1).indices.view(1, 1)\n",
     "    else:\n",
     "        # Losowa akcja\n",
@@ -228,18 +235,18 @@
     "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None, batch_next_state)), device=device, dtype=torch.bool)\n",
     "    non_final_next_states = torch.cat([s for s in batch_next_state if s is not None])\n",
     "\n",
-    "    # 1. Co przewidziała sieć dla tych stanów i akcji?\n",
+    "    # 1. Co przewidzia\u0142a sie\u0107 dla tych stan\u00f3w i akcji?\n",
     "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
     "\n",
-    "    # 2. Jaka powinna być wartość? (R + gamma * max_Q_z_przyszłości)\n",
+    "    # 2. Jaka powinna by\u0107 warto\u015b\u0107? (R + gamma * max_Q_z_przysz\u0142o\u015bci)\n",
     "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
     "    with torch.no_grad():\n",
-    "        # Tu używamy Target Network dla stabilności!\n",
+    "        # Tu u\u017cywamy Target Network dla stabilno\u015bci!\n",
     "        next_state_values[non_final_mask] = target_net(non_final_next_states).max(1).values\n",
     "        \n",
     "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
     "\n",
-    "    # 3. Obliczamy błąd (Huber Loss - odporny na outliery)\n",
+    "    # 3. Obliczamy b\u0142\u0105d (Huber Loss - odporny na outliery)\n",
     "    criterion = nn.SmoothL1Loss()\n",
     "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
     "\n",
@@ -261,28 +268,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 Start treningu...\n",
-      "Epizod 0 | Wynik: 18 kroków\n",
-      "Epizod 10 | Wynik: 11 kroków\n",
-      "Epizod 20 | Wynik: 19 kroków\n",
-      "Epizod 30 | Wynik: 10 kroków\n",
-      "Epizod 40 | Wynik: 13 kroków\n",
-      "Epizod 50 | Wynik: 14 kroków\n",
-      "Epizod 60 | Wynik: 10 kroków\n",
-      "Epizod 70 | Wynik: 12 kroków\n",
-      "Epizod 80 | Wynik: 9 kroków\n",
-      "Epizod 90 | Wynik: 10 kroków\n",
-      "Epizod 100 | Wynik: 8 kroków\n",
-      "Epizod 110 | Wynik: 12 kroków\n",
-      "Epizod 120 | Wynik: 17 kroków\n",
-      "Epizod 130 | Wynik: 14 kroków\n",
-      "Epizod 140 | Wynik: 13 kroków\n",
-      "Epizod 150 | Wynik: 15 kroków\n",
-      "Epizod 160 | Wynik: 17 kroków\n",
-      "Epizod 170 | Wynik: 98 kroków\n",
-      "Epizod 180 | Wynik: 96 kroków\n",
-      "Epizod 190 | Wynik: 122 kroków\n",
-      "✅ Koniec.\n"
+      "\ud83d\ude80 Start treningu...\n",
+      "Epizod 0 | Wynik: 18 krok\u00f3w\n",
+      "Epizod 10 | Wynik: 11 krok\u00f3w\n",
+      "Epizod 20 | Wynik: 19 krok\u00f3w\n",
+      "Epizod 30 | Wynik: 10 krok\u00f3w\n",
+      "Epizod 40 | Wynik: 13 krok\u00f3w\n",
+      "Epizod 50 | Wynik: 14 krok\u00f3w\n",
+      "Epizod 60 | Wynik: 10 krok\u00f3w\n",
+      "Epizod 70 | Wynik: 12 krok\u00f3w\n",
+      "Epizod 80 | Wynik: 9 krok\u00f3w\n",
+      "Epizod 90 | Wynik: 10 krok\u00f3w\n",
+      "Epizod 100 | Wynik: 8 krok\u00f3w\n",
+      "Epizod 110 | Wynik: 12 krok\u00f3w\n",
+      "Epizod 120 | Wynik: 17 krok\u00f3w\n",
+      "Epizod 130 | Wynik: 14 krok\u00f3w\n",
+      "Epizod 140 | Wynik: 13 krok\u00f3w\n",
+      "Epizod 150 | Wynik: 15 krok\u00f3w\n",
+      "Epizod 160 | Wynik: 17 krok\u00f3w\n",
+      "Epizod 170 | Wynik: 98 krok\u00f3w\n",
+      "Epizod 180 | Wynik: 96 krok\u00f3w\n",
+      "Epizod 190 | Wynik: 122 krok\u00f3w\n",
+      "\u2705 Koniec.\n"
      ]
     },
     {
@@ -297,19 +304,19 @@
     }
    ],
    "source": [
-    "# GŁÓWNA PĘTLA TRENINGOWA\n",
-    "num_episodes = 200 # W CartPole 200-300 epok powinno wystarczyć\n",
+    "# G\u0141\u00d3WNA P\u0118TLA TRENINGOWA\n",
+    "num_episodes = 200 # W CartPole 200-300 epok powinno wystarczy\u0107\n",
     "episode_durations = []\n",
     "\n",
-    "print(\"🚀 Start treningu...\")\n",
+    "print(\"\ud83d\ude80 Start treningu...\")\n",
     "\n",
     "for i_episode in range(num_episodes):\n",
-    "    # Reset środowiska\n",
+    "    # Reset \u015brodowiska\n",
     "    state, info = env.reset()\n",
     "    state = torch.tensor(state, dtype=torch.float32, device=device).unsqueeze(0)\n",
     "    \n",
-    "    for t in range(1000): # Maksymalnie 1000 klatek na grę\n",
-    "        # 1. Wybierz akcję\n",
+    "    for t in range(1000): # Maksymalnie 1000 klatek na gr\u0119\n",
+    "        # 1. Wybierz akcj\u0119\n",
     "        action = select_action(state)\n",
     "        \n",
     "        # 2. Wykonaj krok\n",
@@ -322,29 +329,29 @@
     "        else:\n",
     "            next_state = torch.tensor(observation, dtype=torch.float32, device=device).unsqueeze(0)\n",
     "\n",
-    "        # 3. Zapisz do pamięci\n",
+    "        # 3. Zapisz do pami\u0119ci\n",
     "        memory.push(state, action, next_state, reward, done)\n",
     "        state = next_state\n",
     "\n",
     "        # 4. Trenuj model (jeden krok optymalizacji)\n",
     "        optimize_model()\n",
     "\n",
-    "        # 5. Soft Update sieci Target (lub Hard Update co X kroków)\n",
-    "        # Tutaj robimy Hard Update co 100 epok w uproszczeniu, ale standardowo robi się to częściej.\n",
-    "        # W tym kodzie uprościmy: Aktualizujemy target_net co 10 epizodów.\n",
+    "        # 5. Soft Update sieci Target (lub Hard Update co X krok\u00f3w)\n",
+    "        # Tutaj robimy Hard Update co 100 epok w uproszczeniu, ale standardowo robi si\u0119 to cz\u0119\u015bciej.\n",
+    "        # W tym kodzie upro\u015bcimy: Aktualizujemy target_net co 10 epizod\u00f3w.\n",
     "        \n",
     "        if done:\n",
     "            episode_durations.append(t + 1)\n",
     "            break\n",
     "\n",
-    "    # Aktualizacja sieci Target (kopiujemy wiedzę z Policy do Target)\n",
+    "    # Aktualizacja sieci Target (kopiujemy wiedz\u0119 z Policy do Target)\n",
     "    if i_episode % 10 == 0:\n",
     "        target_net.load_state_dict(policy_net.state_dict())\n",
-    "        print(f\"Epizod {i_episode} | Wynik: {t+1} kroków\")\n",
+    "        print(f\"Epizod {i_episode} | Wynik: {t+1} krok\u00f3w\")\n",
     "\n",
-    "print(\"✅ Koniec.\")\n",
+    "print(\"\u2705 Koniec.\")\n",
     "\n",
-    "# Wykres wyników\n",
+    "# Wykres wynik\u00f3w\n",
     "plt.plot(episode_durations)\n",
     "plt.title(\"DQN na CartPole\")\n",
     "plt.xlabel(\"Epizod\")\n",
@@ -357,17 +364,17 @@
    "id": "e05604d5",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Stabilność\n",
+    "## \ud83e\udde0 Podsumowanie: Stabilno\u015b\u0107\n",
     "\n",
-    "Spójrz na wykres.\n",
-    "Na początku (Epsilon bliski 1.0) wynik jest losowy i niski (ok. 10-20 kroków).\n",
-    "W miarę jak Epsilon spada, a sieć się uczy, wynik powinien rosnąć do 200+ (a nawet 500, jeśli pozwolisz).\n",
+    "Sp\u00f3jrz na wykres.\n",
+    "Na pocz\u0105tku (Epsilon bliski 1.0) wynik jest losowy i niski (ok. 10-20 krok\u00f3w).\n",
+    "W miar\u0119 jak Epsilon spada, a sie\u0107 si\u0119 uczy, wynik powinien rosn\u0105\u0107 do 200+ (a nawet 500, je\u015bli pozwolisz).\n",
     "\n",
     "**Kluczowe wnioski:**\n",
-    "1.  **Replay Buffer** sprawia, że sieć nie \"zapomina\" starych sytuacji.\n",
-    "2.  **Target Network** sprawia, że cel, do którego dążymy, nie ucieka nam sprzed nosa w trakcie jednej iteracji.\n",
+    "1.  **Replay Buffer** sprawia, \u017ce sie\u0107 nie \"zapomina\" starych sytuacji.\n",
+    "2.  **Target Network** sprawia, \u017ce cel, do kt\u00f3rego d\u0105\u017cymy, nie ucieka nam sprzed nosa w trakcie jednej iteracji.\n",
     "\n",
-    "To jest fundament nowoczesnego RL. Na tej zasadzie (plus kilka ulepszeń) działają algorytmy grające w Dota 2 czy StarCrafta."
+    "To jest fundament nowoczesnego RL. Na tej zasadzie (plus kilka ulepsze\u0144) dzia\u0142aj\u0105 algorytmy graj\u0105ce w Dota 2 czy StarCrafta."
    ]
   }
  ],
