--- a/46_Transformer_Block_From_Scratch.ipynb
+++ b/46_Transformer_Block_From_Scratch.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/46_Transformer_Block_From_Scratch.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "caf7090a",
    "metadata": {},
    "source": [
-    "# 🏗️ Transformer Block: Budujemy klocki GPT\n",
+    "# \ud83c\udfd7\ufe0f Transformer Block: Budujemy klocki GPT\n",
     "\n",
-    "W notatniku 24 zrozumieliśmy matematykę *Attention*.\n",
-    "Teraz zbudujemy pełnoprawny **Blok Transformera**.\n",
+    "W notatniku 24 zrozumieli\u015bmy matematyk\u0119 *Attention*.\n",
+    "Teraz zbudujemy pe\u0142noprawny **Blok Transformera**.\n",
     "\n",
-    "Struktura pojedynczego bloku wygląda tak:\n",
+    "Struktura pojedynczego bloku wygl\u0105da tak:\n",
     "$$ x_{new} = x + Attention(Norm(x)) $$\n",
     "$$ x_{final} = x_{new} + MLP(Norm(x_{new})) $$\n",
     "\n",
-    "Kluczowe są tu **Połączenia Rezydualne (Residual Connections)**, czyli to `x + ...`.\n",
-    "Działają jak autostrada dla gradientów. Dzięki nim sieć może mieć 100 warstw i nadal się uczyć (sygnał nie zanika).\n",
+    "Kluczowe s\u0105 tu **Po\u0142\u0105czenia Rezydualne (Residual Connections)**, czyli to `x + ...`.\n",
+    "Dzia\u0142aj\u0105 jak autostrada dla gradient\u00f3w. Dzi\u0119ki nim sie\u0107 mo\u017ce mie\u0107 100 warstw i nadal si\u0119 uczy\u0107 (sygna\u0142 nie zanika).\n",
     "\n",
-    "Złożymy to z 3 klas:\n",
+    "Z\u0142o\u017cymy to z 3 klas:\n",
     "1.  `SelfAttention` (Oczy).\n",
-    "2.  `FeedForward` (Mózg).\n",
-    "3.  `TransformerBlock` (Całość)."
+    "2.  `FeedForward` (M\u00f3zg).\n",
+    "3.  `TransformerBlock` (Ca\u0142o\u015b\u0107)."
    ]
   },
   {
@@ -33,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście: torch.Size([1, 10, 256])\n"
+      "Wej\u015bcie: torch.Size([1, 10, 256])\n"
      ]
     }
    ],
@@ -44,15 +51,15 @@
     "import math\n",
     "\n",
     "# Konfiguracja\n",
-    "EMBED_DIM = 256   # Rozmiar wektora słowa (d_model)\n",
-    "HEAD_DIM = 64     # Rozmiar jednej głowicy\n",
-    "NUM_HEADS = 4     # Ile głowic? (4 * 64 = 256, musi się zgadzać)\n",
-    "SEQ_LEN = 10      # Długość zdania\n",
+    "EMBED_DIM = 256   # Rozmiar wektora s\u0142owa (d_model)\n",
+    "HEAD_DIM = 64     # Rozmiar jednej g\u0142owicy\n",
+    "NUM_HEADS = 4     # Ile g\u0142owic? (4 * 64 = 256, musi si\u0119 zgadza\u0107)\n",
+    "SEQ_LEN = 10      # D\u0142ugo\u015b\u0107 zdania\n",
     "\n",
-    "# Dane wejściowe (Batch=1, Słów=10, Cech=256)\n",
+    "# Dane wej\u015bciowe (Batch=1, S\u0142\u00f3w=10, Cech=256)\n",
     "x = torch.randn(1, SEQ_LEN, EMBED_DIM)\n",
     "\n",
-    "print(f\"Wejście: {x.shape}\")"
+    "print(f\"Wej\u015bcie: {x.shape}\")"
    ]
   },
   {
@@ -60,12 +67,12 @@
    "id": "13c0229f",
    "metadata": {},
    "source": [
-    "## 1. Moduł Attention (Oczy)\n",
+    "## 1. Modu\u0142 Attention (Oczy)\n",
     "\n",
-    "Tu dzieje się magia z Query, Key, Value.\n",
-    "W PyTorch używamy `nn.Linear` do stworzenia wag $W_q, W_k, W_v$.\n",
+    "Tu dzieje si\u0119 magia z Query, Key, Value.\n",
+    "W PyTorch u\u017cywamy `nn.Linear` do stworzenia wag $W_q, W_k, W_v$.\n",
     "\n",
-    "Dla uproszczenia zrobimy jedną dużą głowicę (Single Head), żeby kod był czytelny, ale w prawdziwym GPT dzieli się to na wiele mniejszych."
+    "Dla uproszczenia zrobimy jedn\u0105 du\u017c\u0105 g\u0142owic\u0119 (Single Head), \u017ceby kod by\u0142 czytelny, ale w prawdziwym GPT dzieli si\u0119 to na wiele mniejszych."
    ]
   },
   {
@@ -78,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wyjście z Attention: torch.Size([1, 10, 256]) (Kształt zachowany!)\n"
+      "Wyj\u015bcie z Attention: torch.Size([1, 10, 256]) (Kszta\u0142t zachowany!)\n"
      ]
     }
    ],
@@ -88,12 +95,12 @@
     "        super().__init__()\n",
     "        self.embed_dim = embed_dim\n",
     "        \n",
-    "        # Warstwy generujące Q, K, V\n",
+    "        # Warstwy generuj\u0105ce Q, K, V\n",
     "        self.q_linear = nn.Linear(embed_dim, embed_dim)\n",
     "        self.k_linear = nn.Linear(embed_dim, embed_dim)\n",
     "        self.v_linear = nn.Linear(embed_dim, embed_dim)\n",
     "        \n",
-    "        # Warstwa wyjściowa (łączenie wyników)\n",
+    "        # Warstwa wyj\u015bciowa (\u0142\u0105czenie wynik\u00f3w)\n",
     "        self.out_linear = nn.Linear(embed_dim, embed_dim)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -111,13 +118,13 @@
     "        # 3. Skalowanie (dzielimy przez pierwiastek z wymiaru)\n",
     "        scores = scores / math.sqrt(self.embed_dim)\n",
     "        \n",
-    "        # 4. Softmax (zamiana na prawdopodobieństwo)\n",
+    "        # 4. Softmax (zamiana na prawdopodobie\u0144stwo)\n",
     "        attention_weights = F.softmax(scores, dim=-1)\n",
     "        \n",
-    "        # 5. Mnożymy przez V\n",
+    "        # 5. Mno\u017cymy przez V\n",
     "        context = torch.matmul(attention_weights, V)\n",
     "        \n",
-    "        # 6. Ostatnie liniowe przekształcenie\n",
+    "        # 6. Ostatnie liniowe przekszta\u0142cenie\n",
     "        output = self.out_linear(context)\n",
     "        \n",
     "        return output\n",
@@ -125,7 +132,7 @@
     "# Test\n",
     "attn = SelfAttention(EMBED_DIM)\n",
     "out = attn(x)\n",
-    "print(f\"Wyjście z Attention: {out.shape} (Kształt zachowany!)\")"
+    "print(f\"Wyj\u015bcie z Attention: {out.shape} (Kszta\u0142t zachowany!)\")"
    ]
   },
   {
@@ -133,11 +140,11 @@
    "id": "39778b46",
    "metadata": {},
    "source": [
-    "## 2. Moduł Feed Forward (Mózg)\n",
+    "## 2. Modu\u0142 Feed Forward (M\u00f3zg)\n",
     "\n",
-    "To jest zwykła sieć MLP włożona do środka.\n",
-    "Zazwyczaj rozszerza wymiar 4-krotnie (np. 256 -> 1024), a potem go zwęża z powrotem.\n",
-    "To tutaj model \"przemyśliwuje\" to, co zobaczył w Attention."
+    "To jest zwyk\u0142a sie\u0107 MLP w\u0142o\u017cona do \u015brodka.\n",
+    "Zazwyczaj rozszerza wymiar 4-krotnie (np. 256 -> 1024), a potem go zw\u0119\u017ca z powrotem.\n",
+    "To tutaj model \"przemy\u015bliwuje\" to, co zobaczy\u0142 w Attention."
    ]
   },
   {
@@ -150,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wyjście z FeedForward: torch.Size([1, 10, 256])\n"
+      "Wyj\u015bcie z FeedForward: torch.Size([1, 10, 256])\n"
      ]
     }
    ],
@@ -160,8 +167,8 @@
     "        super().__init__()\n",
     "        self.net = nn.Sequential(\n",
     "            nn.Linear(embed_dim, embed_dim * expansion), # Rozszerzamy\n",
-    "            nn.ReLU(),                                   # Nieliniowość\n",
-    "            nn.Linear(embed_dim * expansion, embed_dim)  # Zwężamy\n",
+    "            nn.ReLU(),                                   # Nieliniowo\u015b\u0107\n",
+    "            nn.Linear(embed_dim * expansion, embed_dim)  # Zw\u0119\u017camy\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -170,7 +177,7 @@
     "# Test\n",
     "ff = FeedForward(EMBED_DIM)\n",
     "out_ff = ff(x)\n",
-    "print(f\"Wyjście z FeedForward: {out_ff.shape}\")"
+    "print(f\"Wyj\u015bcie z FeedForward: {out_ff.shape}\")"
    ]
   },
   {
@@ -178,14 +185,14 @@
    "id": "0a49611e",
    "metadata": {},
    "source": [
-    "## 3. The Transformer Block (Całość)\n",
+    "## 3. The Transformer Block (Ca\u0142o\u015b\u0107)\n",
     "\n",
-    "Teraz składamy klocki.\n",
+    "Teraz sk\u0142adamy klocki.\n",
     "Dodajemy dwa kluczowe elementy:\n",
-    "1.  **LayerNorm:** Normalizacja (żeby liczby nie uciekły w nieskończoność).\n",
-    "2.  **Add (Residual Connection):** Dodajemy oryginał do wyniku.\n",
+    "1.  **LayerNorm:** Normalizacja (\u017ceby liczby nie uciek\u0142y w niesko\u0144czono\u015b\u0107).\n",
+    "2.  **Add (Residual Connection):** Dodajemy orygina\u0142 do wyniku.\n",
     "\n",
-    "Wzór: `x = x + Layer(Norm(x))` (tzw. Pre-Norm architecture, używana w GPT-3)."
+    "Wz\u00f3r: `x = x + Layer(Norm(x))` (tzw. Pre-Norm architecture, u\u017cywana w GPT-3)."
    ]
   },
   {
@@ -199,11 +206,11 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "Wejście: torch.Size([1, 10, 256])\n",
-      "Wyjście: torch.Size([1, 10, 256])\n",
+      "Wej\u015bcie: torch.Size([1, 10, 256])\n",
+      "Wyj\u015bcie: torch.Size([1, 10, 256])\n",
       "------------------------------\n",
-      "Sukces! Wymiary się zgadzają.\n",
-      "Możemy teraz postawić 96 takich bloków jeden na drugim i mamy architekturę GPT-3.\n"
+      "Sukces! Wymiary si\u0119 zgadzaj\u0105.\n",
+      "Mo\u017cemy teraz postawi\u0107 96 takich blok\u00f3w jeden na drugim i mamy architektur\u0119 GPT-3.\n"
      ]
     }
    ],
@@ -219,19 +226,19 @@
     "\n",
     "    def forward(self, x):\n",
     "        # KROK 1: Attention z Residualem\n",
-    "        # Zapisujemy kopię x (residual)\n",
+    "        # Zapisujemy kopi\u0119 x (residual)\n",
     "        residual = x\n",
     "        # Najpierw normalizacja (Pre-Norm), potem uwaga\n",
     "        x = self.norm1(x)\n",
     "        x = self.attention(x)\n",
-    "        # Dodajemy oryginał (Add)\n",
+    "        # Dodajemy orygina\u0142 (Add)\n",
     "        x = x + residual\n",
     "        \n",
     "        # KROK 2: Feed Forward z Residualem\n",
     "        residual = x\n",
     "        x = self.norm2(x)\n",
     "        x = self.feed_forward(x)\n",
-    "        # Dodajemy oryginał (Add)\n",
+    "        # Dodajemy orygina\u0142 (Add)\n",
     "        x = x + residual\n",
     "        \n",
     "        return x\n",
@@ -241,11 +248,11 @@
     "final_output = block(x)\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Wejście: {x.shape}\")\n",
-    "print(f\"Wyjście: {final_output.shape}\")\n",
+    "print(f\"Wej\u015bcie: {x.shape}\")\n",
+    "print(f\"Wyj\u015bcie: {final_output.shape}\")\n",
     "print(\"-\" * 30)\n",
-    "print(\"Sukces! Wymiary się zgadzają.\")\n",
-    "print(\"Możemy teraz postawić 96 takich bloków jeden na drugim i mamy architekturę GPT-3.\")"
+    "print(\"Sukces! Wymiary si\u0119 zgadzaj\u0105.\")\n",
+    "print(\"Mo\u017cemy teraz postawi\u0107 96 takich blok\u00f3w jeden na drugim i mamy architektur\u0119 GPT-3.\")"
    ]
   },
   {
@@ -253,19 +260,19 @@
    "id": "65958dff",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Autostrada dla Gradientu\n",
+    "## \ud83e\udde0 Podsumowanie: Autostrada dla Gradientu\n",
     "\n",
-    "Dlaczego ten \"Residual Connection\" (`x + residual`) jest taki ważny?\n",
+    "Dlaczego ten \"Residual Connection\" (`x + residual`) jest taki wa\u017cny?\n",
     "\n",
-    "Wyobraź sobie sieć, która ma 100 warstw.\n",
-    "Podczas treningu (Backpropagation), gradient musi przejść przez mnożenie 100 razy.\n",
-    "Jeśli mnożysz liczby mniejsze od 1 (np. 0.9) przez siebie 100 razy -> wynik to 0.00002. Gradient znika. Sieć przestaje się uczyć.\n",
+    "Wyobra\u017a sobie sie\u0107, kt\u00f3ra ma 100 warstw.\n",
+    "Podczas treningu (Backpropagation), gradient musi przej\u015b\u0107 przez mno\u017cenie 100 razy.\n",
+    "Je\u015bli mno\u017cysz liczby mniejsze od 1 (np. 0.9) przez siebie 100 razy -> wynik to 0.00002. Gradient znika. Sie\u0107 przestaje si\u0119 uczy\u0107.\n",
     "\n",
-    "**Dodawanie (`+`)** działa jak \"bypass\" (obwodnica).\n",
-    "Gradient może popłynąć \"autostradą\" bezpośrednio od końca do początku sieci, omijając skomplikowane obliczenia w Attention/MLP.\n",
-    "Dzięki temu możemy trenować **bardzo głębokie** sieci.\n",
+    "**Dodawanie (`+`)** dzia\u0142a jak \"bypass\" (obwodnica).\n",
+    "Gradient mo\u017ce pop\u0142yn\u0105\u0107 \"autostrad\u0105\" bezpo\u015brednio od ko\u0144ca do pocz\u0105tku sieci, omijaj\u0105c skomplikowane obliczenia w Attention/MLP.\n",
+    "Dzi\u0119ki temu mo\u017cemy trenowa\u0107 **bardzo g\u0142\u0119bokie** sieci.\n",
     "\n",
-    "To jest sekret sukcesu ResNet (obrazy) i Transformerów (tekst)."
+    "To jest sekret sukcesu ResNet (obrazy) i Transformer\u00f3w (tekst)."
    ]
   }
  ],
