--- a/47_SVM_Kernel_Trick.ipynb
+++ b/47_SVM_Kernel_Trick.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/47_SVM_Kernel_Trick.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48a19a1d",
    "metadata": {},
    "source": [
-    "# 🤺 SVM & Kernel Trick: Matematyczne Jiu-Jitsu\n",
+    "# \ud83e\udd3a SVM & Kernel Trick: Matematyczne Jiu-Jitsu\n",
     "\n",
-    "Wyobraź sobie, że na stole leżą wymieszane kulki czerwone i niebieskie.\n",
-    "Czerwone są w środku, niebieskie dookoła nich.\n",
-    "Nie da się położyć na stole prostego kija (linii), żeby je rozdzielić.\n",
+    "Wyobra\u017a sobie, \u017ce na stole le\u017c\u0105 wymieszane kulki czerwone i niebieskie.\n",
+    "Czerwone s\u0105 w \u015brodku, niebieskie dooko\u0142a nich.\n",
+    "Nie da si\u0119 po\u0142o\u017cy\u0107 na stole prostego kija (linii), \u017ceby je rozdzieli\u0107.\n",
     "\n",
-    "**Kernel Trick (Trik Jądrowy):**\n",
-    "SVM uderza ręką w stół. Kulki podskakują.\n",
-    "Czerwone są lżejsze -> lecą wysoko.\n",
-    "Niebieskie są cięższe -> zostają nisko.\n",
-    "Teraz, w powietrzu (w 3D), możesz włożyć między nie płaską kartkę papieru (płaszczyznę).\n",
+    "**Kernel Trick (Trik J\u0105drowy):**\n",
+    "SVM uderza r\u0119k\u0105 w st\u00f3\u0142. Kulki podskakuj\u0105.\n",
+    "Czerwone s\u0105 l\u017cejsze -> lec\u0105 wysoko.\n",
+    "Niebieskie s\u0105 ci\u0119\u017csze -> zostaj\u0105 nisko.\n",
+    "Teraz, w powietrzu (w 3D), mo\u017cesz w\u0142o\u017cy\u0107 mi\u0119dzy nie p\u0142ask\u0105 kartk\u0119 papieru (p\u0142aszczyzn\u0119).\n",
     "\n",
-    "Gdy spojrzysz z góry (rzut na 2D), ta kartka będzie wyglądać jak **kółko**.\n",
-    "To jest właśnie nieliniowa klasyfikacja.\n",
+    "Gdy spojrzysz z g\u00f3ry (rzut na 2D), ta kartka b\u0119dzie wygl\u0105da\u0107 jak **k\u00f3\u0142ko**.\n",
+    "To jest w\u0142a\u015bnie nieliniowa klasyfikacja.\n",
     "\n",
-    "Użyjemy zbioru `make_circles`, żeby to zobaczyć."
+    "U\u017cyjemy zbioru `make_circles`, \u017ceby to zobaczy\u0107."
    ]
   },
   {
@@ -49,12 +56,12 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# 1. DANE NIELINIOWE\n",
-    "# Czerwone w środku, niebieskie na zewnątrz\n",
+    "# Czerwone w \u015brodku, niebieskie na zewn\u0105trz\n",
     "X, y = make_circles(n_samples=500, factor=0.5, noise=0.05, random_state=42)\n",
     "\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, cmap='bwr', edgecolor='k')\n",
-    "plt.title(\"Problem: Jak to rozdzielić prostą linią?\")\n",
+    "plt.title(\"Problem: Jak to rozdzieli\u0107 prost\u0105 lini\u0105?\")\n",
     "plt.show()"
    ]
   },
@@ -63,10 +70,10 @@
    "id": "c1781a11",
    "metadata": {},
    "source": [
-    "## Podejście 1: Model Liniowy (Porażka)\n",
+    "## Podej\u015bcie 1: Model Liniowy (Pora\u017cka)\n",
     "\n",
-    "Spróbujmy użyć **Regresji Logistycznej** (lub SVM z kernelem liniowym).\n",
-    "Model będzie próbował narysować prostą kreskę. To fizycznie niemożliwe, żeby oddzielić środek od zewnętrza jedną kreską."
+    "Spr\u00f3bujmy u\u017cy\u0107 **Regresji Logistycznej** (lub SVM z kernelem liniowym).\n",
+    "Model b\u0119dzie pr\u00f3bowa\u0142 narysowa\u0107 prost\u0105 kresk\u0119. To fizycznie niemo\u017cliwe, \u017ceby oddzieli\u0107 \u015brodek od zewn\u0119trza jedn\u0105 kresk\u0105."
    ]
   },
   {
@@ -91,7 +98,7 @@
     "clf_linear = LogisticRegression()\n",
     "clf_linear.fit(X, y)\n",
     "\n",
-    "# Funkcja do rysowania granic (skopiujmy ją sobie, przyda się)\n",
+    "# Funkcja do rysowania granic (skopiujmy j\u0105 sobie, przyda si\u0119)\n",
     "def plot_decision_boundary(model, X, y, title):\n",
     "    x_min, x_max = X[:, 0].min() - 0.5, X[:, 0].max() + 0.5\n",
     "    y_min, y_max = X[:, 1].min() - 0.5, X[:, 1].max() + 0.5\n",
@@ -106,7 +113,7 @@
     "    plt.title(title)\n",
     "    plt.show()\n",
     "\n",
-    "plot_decision_boundary(clf_linear, X, y, \"Model Liniowy (Porażka - 50% skuteczności)\")"
+    "plot_decision_boundary(clf_linear, X, y, \"Model Liniowy (Pora\u017cka - 50% skuteczno\u015bci)\")"
    ]
   },
   {
@@ -114,16 +121,16 @@
    "id": "80ba6c91",
    "metadata": {},
    "source": [
-    "## Podejście 2: SVM z Kernelem RBF (Magia)\n",
+    "## Podej\u015bcie 2: SVM z Kernelem RBF (Magia)\n",
     "\n",
-    "Teraz użyjemy `SVC` z parametrem `kernel='rbf'` (Radial Basis Function).\n",
-    "To jest ten moment, w którym model \"wygina przestrzeń\".\n",
+    "Teraz u\u017cyjemy `SVC` z parametrem `kernel='rbf'` (Radial Basis Function).\n",
+    "To jest ten moment, w kt\u00f3rym model \"wygina przestrze\u0144\".\n",
     "\n",
-    "Matematycznie RBF liczy podobieństwo każdego punktu do pewnych punktów centralnych (Landmarks). Działa jak góry i doliny.\n",
+    "Matematycznie RBF liczy podobie\u0144stwo ka\u017cdego punktu do pewnych punkt\u00f3w centralnych (Landmarks). Dzia\u0142a jak g\u00f3ry i doliny.\n",
     "\n",
     "Kluczowe parametry:\n",
-    "1.  **C (Koszt):** Jak bardzo karamy za błędy? (Duże C = Wąski margines, mało błędów, ryzyko overfittingu).\n",
-    "2.  **Gamma:** Jak daleko sięga wpływ jednego punktu? (Duża gamma = każdy punkt tworzy własną \"wyspę\")."
+    "1.  **C (Koszt):** Jak bardzo karamy za b\u0142\u0119dy? (Du\u017ce C = W\u0105ski margines, ma\u0142o b\u0142\u0119d\u00f3w, ryzyko overfittingu).\n",
+    "2.  **Gamma:** Jak daleko si\u0119ga wp\u0142yw jednego punktu? (Du\u017ca gamma = ka\u017cdy punkt tworzy w\u0142asn\u0105 \"wysp\u0119\")."
    ]
   },
   {
@@ -158,13 +165,13 @@
    "id": "a7b67e0f",
    "metadata": {},
    "source": [
-    "## Wizualizacja 3D (Co się stało pod spodem?)\n",
+    "## Wizualizacja 3D (Co si\u0119 sta\u0142o pod spodem?)\n",
     "\n",
-    "Dlaczego to zadziałało?\n",
+    "Dlaczego to zadzia\u0142a\u0142o?\n",
     "Dodajmy sztucznie trzeci wymiar.\n",
-    "Niech Oś Z zależy od odległości od środka: $z = x^2 + y^2$.\n",
+    "Niech O\u015b Z zale\u017cy od odleg\u0142o\u015bci od \u015brodka: $z = x^2 + y^2$.\n",
     "\n",
-    "Zobaczysz, że w 3D te dane są **płaskie** i da się je przeciąć kartką papieru."
+    "Zobaczysz, \u017ce w 3D te dane s\u0105 **p\u0142askie** i da si\u0119 je przeci\u0105\u0107 kartk\u0105 papieru."
    ]
   },
   {
@@ -187,7 +194,7 @@
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "# Dodajemy 3 wymiar: Odległość od środka\n",
+    "# Dodajemy 3 wymiar: Odleg\u0142o\u015b\u0107 od \u015brodka\n",
     "z = X[:, 0]**2 + X[:, 1]**2\n",
     "\n",
     "fig = plt.figure(figsize=(10, 8))\n",
@@ -196,13 +203,13 @@
     "# Rysujemy punkty 3D\n",
     "ax.scatter(X[:, 0], X[:, 1], z, c=y, cmap='bwr', s=50, edgecolor='k')\n",
     "\n",
-    "# Rysujemy płaszczyznę cięcia (tę \"kartkę papieru\")\n",
-    "# W tym przypadku kartka jest na wysokości z = ok. 0.25\n",
+    "# Rysujemy p\u0142aszczyzn\u0119 ci\u0119cia (t\u0119 \"kartk\u0119 papieru\")\n",
+    "# W tym przypadku kartka jest na wysoko\u015bci z = ok. 0.25\n",
     "xx, yy = np.meshgrid(np.linspace(-1.5, 1.5, 10), np.linspace(-1.5, 1.5, 10))\n",
-    "zz = np.full_like(xx, 0.25) # Stała wysokość\n",
+    "zz = np.full_like(xx, 0.25) # Sta\u0142a wysoko\u015b\u0107\n",
     "ax.plot_surface(xx, yy, zz, alpha=0.3, color='gray')\n",
     "\n",
-    "ax.set_title(\"Kernel Trick w 3D: Separacja liniowa jest możliwa!\")\n",
+    "ax.set_title(\"Kernel Trick w 3D: Separacja liniowa jest mo\u017cliwa!\")\n",
     "ax.set_xlabel(\"X1\")\n",
     "ax.set_ylabel(\"X2\")\n",
     "ax.set_zlabel(\"Z (Nowy Wymiar)\")\n",
@@ -214,16 +221,16 @@
    "id": "988235b3",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Czy SVM jest nadal używany?\n",
+    "## \ud83e\udde0 Podsumowanie: Czy SVM jest nadal u\u017cywany?\n",
     "\n",
-    "W erze Deep Learningu SVM stracił na popularności przy obrazkach (CNN są lepsze) i tekście (Transformery są lepsze).\n",
+    "W erze Deep Learningu SVM straci\u0142 na popularno\u015bci przy obrazkach (CNN s\u0105 lepsze) i tek\u015bcie (Transformery s\u0105 lepsze).\n",
     "\n",
-    "Ale SVM nadal króluje w dwóch przypadkach:\n",
-    "1.  **Małe dane:** Gdy masz 50 próbek, Sieć Neuronowa niczego się nie nauczy. SVM zadziała świetnie.\n",
-    "2.  **Wysoki wymiar:** Gdy masz więcej cech niż próbek (np. genetyka, 100 pacjentów i 20 000 genów). SVM radzi sobie z tym matematycznie najlepiej.\n",
+    "Ale SVM nadal kr\u00f3luje w dw\u00f3ch przypadkach:\n",
+    "1.  **Ma\u0142e dane:** Gdy masz 50 pr\u00f3bek, Sie\u0107 Neuronowa niczego si\u0119 nie nauczy. SVM zadzia\u0142a \u015bwietnie.\n",
+    "2.  **Wysoki wymiar:** Gdy masz wi\u0119cej cech ni\u017c pr\u00f3bek (np. genetyka, 100 pacjent\u00f3w i 20 000 gen\u00f3w). SVM radzi sobie z tym matematycznie najlepiej.\n",
     "\n",
-    "**Zapamiętaj:**\n",
-    "Jeśli dane nie są liniowe -> użyj Kernela RBF. To jak zagięcie przestrzeni, żeby uprościć problem."
+    "**Zapami\u0119taj:**\n",
+    "Je\u015bli dane nie s\u0105 liniowe -> u\u017cyj Kernela RBF. To jak zagi\u0119cie przestrzeni, \u017ceby upro\u015bci\u0107 problem."
    ]
   }
  ],
