--- a/48_tSNE_vs_PCA_Dimensionality_Reduction.ipynb
+++ b/48_tSNE_vs_PCA_Dimensionality_Reduction.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/48_tSNE_vs_PCA_Dimensionality_Reduction.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "74ace728",
    "metadata": {},
    "source": [
-    "# 🗺️ t-SNE vs PCA: Jak narysować 64 wymiary?\n",
+    "# \ud83d\uddfa\ufe0f t-SNE vs PCA: Jak narysowa\u0107 64 wymiary?\n",
     "\n",
-    "Mamy zbiór danych **Digits** (Cyfry). Każda cyfra to obrazek 8x8 pikseli.\n",
+    "Mamy zbi\u00f3r danych **Digits** (Cyfry). Ka\u017cda cyfra to obrazek 8x8 pikseli.\n",
     "To daje **64 wymiary** ($8 \\times 8 = 64$).\n",
-    "Chcemy to narysować na ekranie (2D).\n",
+    "Chcemy to narysowa\u0107 na ekranie (2D).\n",
     "\n",
-    "1.  **PCA (Linear):** Rzutuje cień.\n",
-    "    *   *Problem:* Jeśli cyfry są do siebie podobne w skomplikowany sposób, PCA nałoży je na siebie.\n",
-    "2.  **t-SNE (Non-linear):** Liczy prawdopodobieństwo sąsiedztwa.\n",
-    "    *   *Zasada:* \"Jeśli A i B są blisko w 64D, to mają być blisko w 2D. Jeśli są daleko, odsuń je jak najdalej\".\n",
-    "    *   *Efekt:* Tworzy wyraźne \"Wyspy\" (Klastry).\n",
+    "1.  **PCA (Linear):** Rzutuje cie\u0144.\n",
+    "    *   *Problem:* Je\u015bli cyfry s\u0105 do siebie podobne w skomplikowany spos\u00f3b, PCA na\u0142o\u017cy je na siebie.\n",
+    "2.  **t-SNE (Non-linear):** Liczy prawdopodobie\u0144stwo s\u0105siedztwa.\n",
+    "    *   *Zasada:* \"Je\u015bli A i B s\u0105 blisko w 64D, to maj\u0105 by\u0107 blisko w 2D. Je\u015bli s\u0105 daleko, odsu\u0144 je jak najdalej\".\n",
+    "    *   *Efekt:* Tworzy wyra\u017ane \"Wyspy\" (Klastry).\n",
     "\n",
-    "Użyjemy t-SNE do wizualizacji, jak bardzo różnią się od siebie cyfry 0, 1, 2..."
+    "U\u017cyjemy t-SNE do wizualizacji, jak bardzo r\u00f3\u017cni\u0105 si\u0119 od siebie cyfry 0, 1, 2..."
    ]
   },
   {
@@ -30,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kształt danych: (1797, 64)\n",
-      "Każdy wiersz to spłaszczony obrazek 8x8.\n"
+      "Kszta\u0142t danych: (1797, 64)\n",
+      "Ka\u017cdy wiersz to sp\u0142aszczony obrazek 8x8.\n"
      ]
     },
     {
@@ -59,10 +66,10 @@
     "X = digits.data   # 64 wymiary (piksele)\n",
     "y = digits.target # Etykieta (0-9)\n",
     "\n",
-    "print(f\"Kształt danych: {X.shape}\")\n",
-    "print(\"Każdy wiersz to spłaszczony obrazek 8x8.\")\n",
+    "print(f\"Kszta\u0142t danych: {X.shape}\")\n",
+    "print(\"Ka\u017cdy wiersz to sp\u0142aszczony obrazek 8x8.\")\n",
     "\n",
-    "# Zobaczmy przykładową cyfrę\n",
+    "# Zobaczmy przyk\u0142adow\u0105 cyfr\u0119\n",
     "plt.imshow(X[0].reshape(8, 8), cmap='gray')\n",
     "plt.title(f\"To jest cyfra: {y[0]}\")\n",
     "plt.show()"
@@ -73,10 +80,10 @@
    "id": "497b84e6",
    "metadata": {},
    "source": [
-    "## Runda 1: PCA (Stara szkoła)\n",
+    "## Runda 1: PCA (Stara szko\u0142a)\n",
     "\n",
-    "Zredukujmy 64 wymiary do 2 za pomocą PCA.\n",
-    "Zobaczymy, czy cyfry się odseparują, czy zleją w jedną plamę."
+    "Zredukujmy 64 wymiary do 2 za pomoc\u0105 PCA.\n",
+    "Zobaczymy, czy cyfry si\u0119 odseparuj\u0105, czy zlej\u0105 w jedn\u0105 plam\u0119."
    ]
   },
   {
@@ -115,7 +122,7 @@
     "    legend=\"full\",\n",
     "    alpha=0.7\n",
     ")\n",
-    "plt.title(\"PCA: Cyfry są wymieszane\")\n",
+    "plt.title(\"PCA: Cyfry s\u0105 wymieszane\")\n",
     "plt.show()"
    ]
   },
@@ -126,11 +133,11 @@
    "source": [
     "## Runda 2: t-SNE (Nowoczesna wizualizacja)\n",
     "\n",
-    "Teraz użyjemy t-SNE.\n",
+    "Teraz u\u017cyjemy t-SNE.\n",
     "Kluczowy parametr: **Perplexity**.\n",
-    "Określa on, na ilu sąsiadów patrzy każdy punkt. Zazwyczaj wartości 30-50 działają najlepiej.\n",
+    "Okre\u015bla on, na ilu s\u0105siad\u00f3w patrzy ka\u017cdy punkt. Zazwyczaj warto\u015bci 30-50 dzia\u0142aj\u0105 najlepiej.\n",
     "\n",
-    "*Uwaga: t-SNE jest wolniejsze niż PCA!*"
+    "*Uwaga: t-SNE jest wolniejsze ni\u017c PCA!*"
    ]
   },
   {
@@ -152,11 +159,11 @@
    ],
    "source": [
     "# t-SNE na 2 wymiary\n",
-    "# Usunąłem n_iter (domyślnie jest 1000, więc wyjdzie na to samo)\n",
-    "# init='pca' pomaga ustabilizować wynik\n",
+    "# Usun\u0105\u0142em n_iter (domy\u015blnie jest 1000, wi\u0119c wyjdzie na to samo)\n",
+    "# init='pca' pomaga ustabilizowa\u0107 wynik\n",
     "tsne = TSNE(n_components=2, perplexity=30, random_state=42, init='pca', learning_rate='auto')\n",
     "\n",
-    "# Uruchamiamy transformację\n",
+    "# Uruchamiamy transformacj\u0119\n",
     "X_tsne = tsne.fit_transform(X)\n",
     "\n",
     "# DataFrame\n",
@@ -173,7 +180,7 @@
     "    legend=\"full\",\n",
     "    alpha=0.7\n",
     ")\n",
-    "plt.title(\"t-SNE: Wyraźne wyspy (Klastry)\")\n",
+    "plt.title(\"t-SNE: Wyra\u017ane wyspy (Klastry)\")\n",
     "plt.show()"
    ]
   },
@@ -182,21 +189,21 @@
    "id": "7d5e5fe1",
    "metadata": {},
    "source": [
-    "## Analiza Porównawcza\n",
+    "## Analiza Por\u00f3wnawcza\n",
     "\n",
-    "Spójrz na oba wykresy.\n",
+    "Sp\u00f3jrz na oba wykresy.\n",
     "\n",
     "1.  **PCA:**\n",
     "    *   Wszystko jest zlane w centrum.\n",
-    "    *   Trudno odróżnić cyfrę 3 od 9.\n",
-    "    *   Struktura wygląda jak chmura.\n",
+    "    *   Trudno odr\u00f3\u017cni\u0107 cyfr\u0119 3 od 9.\n",
+    "    *   Struktura wygl\u0105da jak chmura.\n",
     "\n",
     "2.  **t-SNE:**\n",
-    "    *   Widzisz wyraźne, oddzielne wysepki.\n",
+    "    *   Widzisz wyra\u017ane, oddzielne wysepki.\n",
     "    *   Grupa \"0\" jest daleko od grupy \"1\".\n",
-    "    *   Nawet podobne cyfry (np. 3 i 9) tworzą osobne klastry.\n",
+    "    *   Nawet podobne cyfry (np. 3 i 9) tworz\u0105 osobne klastry.\n",
     "\n",
-    "To dowód na to, że w 64-wymiarowej przestrzeni te cyfry są matematycznie odseparowane, tylko PCA nie potrafiło tego pokazać na płasko."
+    "To dow\u00f3d na to, \u017ce w 64-wymiarowej przestrzeni te cyfry s\u0105 matematycznie odseparowane, tylko PCA nie potrafi\u0142o tego pokaza\u0107 na p\u0142asko."
    ]
   },
   {
@@ -204,18 +211,18 @@
    "id": "e58fce9c",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Kiedy czego używać?\n",
+    "## \ud83e\udde0 Podsumowanie: Kiedy czego u\u017cywa\u0107?\n",
     "\n",
-    "Dlaczego nie używamy t-SNE zawsze?\n",
+    "Dlaczego nie u\u017cywamy t-SNE zawsze?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "1.  **Czas:** PCA liczy się w ułamku sekundy. t-SNE na dużych danych (np. milion wierszy) może trwać godzinami (chyba że użyjesz wersji CUDA/Rapids).\n",
-    "2.  **Nowe dane:** PCA buduje \"wzór\" (macierz transformacji). Możesz wziąć nowe zdjęcie i wrzucić je na stary wykres PCA.\n",
-    "    **t-SNE nie ma wzoru.** Uczy się układu tylko dla *konkretnych danych*. Nie możesz łatwo \"dodać\" nowego punktu do istniejącego wykresu t-SNE.\n",
+    "1.  **Czas:** PCA liczy si\u0119 w u\u0142amku sekundy. t-SNE na du\u017cych danych (np. milion wierszy) mo\u017ce trwa\u0107 godzinami (chyba \u017ce u\u017cyjesz wersji CUDA/Rapids).\n",
+    "2.  **Nowe dane:** PCA buduje \"wz\u00f3r\" (macierz transformacji). Mo\u017cesz wzi\u0105\u0107 nowe zdj\u0119cie i wrzuci\u0107 je na stary wykres PCA.\n",
+    "    **t-SNE nie ma wzoru.** Uczy si\u0119 uk\u0142adu tylko dla *konkretnych danych*. Nie mo\u017cesz \u0142atwo \"doda\u0107\" nowego punktu do istniej\u0105cego wykresu t-SNE.\n",
     "\n",
     "**Werdykt:**\n",
-    "*   Chcesz zmniejszyć wymiary, żeby wrzucić dane do modelu? -> **PCA**.\n",
-    "*   Chcesz zrobić ładny wykres do prezentacji i zrozumieć strukturę danych? -> **t-SNE** (lub nowszy **UMAP**)."
+    "*   Chcesz zmniejszy\u0107 wymiary, \u017ceby wrzuci\u0107 dane do modelu? -> **PCA**.\n",
+    "*   Chcesz zrobi\u0107 \u0142adny wykres do prezentacji i zrozumie\u0107 struktur\u0119 danych? -> **t-SNE** (lub nowszy **UMAP**)."
    ]
   }
  ],
