--- a/49_Object_Detection_IoU.ipynb
+++ b/49_Object_Detection_IoU.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/49_Object_Detection_IoU.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "20b61be4",
    "metadata": {},
    "source": [
-    "# 🎯 IoU: Matematyka Wykrywania Obiektów\n",
+    "# \ud83c\udfaf IoU: Matematyka Wykrywania Obiekt\u00f3w\n",
     "\n",
     "W klasyfikacji sprawa jest prosta: wynik to 0 lub 1.\n",
-    "W detekcji obiektów wynik to **4 liczby** (współrzędne ramki: x1, y1, x2, y2).\n",
+    "W detekcji obiekt\u00f3w wynik to **4 liczby** (wsp\u00f3\u0142rz\u0119dne ramki: x1, y1, x2, y2).\n",
     "\n",
-    "Jak sprawdzić, czy model trafił?\n",
-    "Używamy metryki **IoU (Intersection over Union)**.\n",
+    "Jak sprawdzi\u0107, czy model trafi\u0142?\n",
+    "U\u017cywamy metryki **IoU (Intersection over Union)**.\n",
     "\n",
-    "$$ IoU = \\frac{\\text{Obszar Przecięcia (Intersection)}}{\\text{Obszar Sumy (Union)}} $$\n",
+    "$$ IoU = \\frac{\\text{Obszar Przeci\u0119cia (Intersection)}}{\\text{Obszar Sumy (Union)}} $$\n",
     "\n",
-    "*   **IoU = 1.0:** Ramki pokrywają się idealnie.\n",
-    "*   **IoU = 0.0:** Ramki się nie dotykają.\n",
+    "*   **IoU = 1.0:** Ramki pokrywaj\u0105 si\u0119 idealnie.\n",
+    "*   **IoU = 0.0:** Ramki si\u0119 nie dotykaj\u0105.\n",
     "*   **IoU > 0.5:** Zazwyczaj uznajemy to za \"Dobre trafienie\" (Good detection).\n",
     "\n",
-    "W tym notatniku napiszemy funkcję IoU od zera i zwizualizujemy ją."
+    "W tym notatniku napiszemy funkcj\u0119 IoU od zera i zwizualizujemy j\u0105."
    ]
   },
   {
@@ -43,14 +50,14 @@
     "import numpy as np\n",
     "\n",
     "# Definiujemy dwie ramki (Format: [x1, y1, x2, y2])\n",
-    "# x1, y1 = lewy górny róg\n",
-    "# x2, y2 = prawy dolny róg\n",
+    "# x1, y1 = lewy g\u00f3rny r\u00f3g\n",
+    "# x2, y2 = prawy dolny r\u00f3g\n",
     "\n",
     "# Ramka Prawdziwa (Ground Truth) - Zielona\n",
     "box_true = [50, 50, 200, 200] \n",
     "\n",
     "# Ramka Przewidziana przez AI (Prediction) - Czerwona\n",
-    "# Trochę przesunięta w prawo i w dół\n",
+    "# Troch\u0119 przesuni\u0119ta w prawo i w d\u00f3\u0142\n",
     "box_pred = [100, 100, 220, 230]\n",
     "\n",
     "print(f\"Prawda: {box_true}\")\n",
@@ -62,16 +69,16 @@
    "id": "d14628f5",
    "metadata": {},
    "source": [
-    "## Matematyka Przecięcia (Intersection)\n",
+    "## Matematyka Przeci\u0119cia (Intersection)\n",
     "\n",
-    "To jest najtrudniejsza część logiczna. Jak znaleźć prostokąt, który jest częścią wspólną?\n",
+    "To jest najtrudniejsza cz\u0119\u015b\u0107 logiczna. Jak znale\u017a\u0107 prostok\u0105t, kt\u00f3ry jest cz\u0119\u015bci\u0105 wsp\u00f3ln\u0105?\n",
     "\n",
-    "1.  **Lewa krawędź:** To maksimum z lewych krawędzi obu ramek (`max(x1_a, x1_b)`).\n",
-    "2.  **Górna krawędź:** To maksimum z górnych krawędzi.\n",
-    "3.  **Prawa krawędź:** To minimum z prawych krawędzi.\n",
-    "4.  **Dolna krawędź:** To minimum z dolnych krawędzi.\n",
+    "1.  **Lewa kraw\u0119d\u017a:** To maksimum z lewych kraw\u0119dzi obu ramek (`max(x1_a, x1_b)`).\n",
+    "2.  **G\u00f3rna kraw\u0119d\u017a:** To maksimum z g\u00f3rnych kraw\u0119dzi.\n",
+    "3.  **Prawa kraw\u0119d\u017a:** To minimum z prawych kraw\u0119dzi.\n",
+    "4.  **Dolna kraw\u0119d\u017a:** To minimum z dolnych kraw\u0119dzi.\n",
     "\n",
-    "Jeśli \"Prawa\" jest mniejsza niż \"Lewa\" -> Brak przecięcia (Area = 0)."
+    "Je\u015bli \"Prawa\" jest mniejsza ni\u017c \"Lewa\" -> Brak przeci\u0119cia (Area = 0)."
    ]
   },
   {
@@ -90,14 +97,14 @@
    ],
    "source": [
     "def calculate_iou(boxA, boxB):\n",
-    "    # 1. Obliczamy współrzędne prostokąta przecięcia (Intersection)\n",
+    "    # 1. Obliczamy wsp\u00f3\u0142rz\u0119dne prostok\u0105ta przeci\u0119cia (Intersection)\n",
     "    xA = max(boxA[0], boxB[0])\n",
     "    yA = max(boxA[1], boxB[1])\n",
     "    xB = min(boxA[2], boxB[2])\n",
     "    yB = min(boxA[3], boxB[3])\n",
     "\n",
-    "    # 2. Obliczamy pole powierzchni przecięcia\n",
-    "    # max(0, ...) jest potrzebne, bo jeśli ramki się nie stykają, różnica będzie ujemna\n",
+    "    # 2. Obliczamy pole powierzchni przeci\u0119cia\n",
+    "    # max(0, ...) jest potrzebne, bo je\u015bli ramki si\u0119 nie stykaj\u0105, r\u00f3\u017cnica b\u0119dzie ujemna\n",
     "    interWidth = max(0, xB - xA)\n",
     "    interHeight = max(0, yB - yA)\n",
     "    interArea = interWidth * interHeight\n",
@@ -106,8 +113,8 @@
     "    boxAArea = (boxA[2] - boxA[0]) * (boxA[3] - boxA[1])\n",
     "    boxBArea = (boxB[2] - boxB[0]) * (boxB[3] - boxB[1])\n",
     "\n",
-    "    # 4. Obliczamy sumę (Union)\n",
-    "    # Wzór: Pole A + Pole B - Część Wspólna (żeby nie liczyć jej podwójnie)\n",
+    "    # 4. Obliczamy sum\u0119 (Union)\n",
+    "    # Wz\u00f3r: Pole A + Pole B - Cz\u0119\u015b\u0107 Wsp\u00f3lna (\u017ceby nie liczy\u0107 jej podw\u00f3jnie)\n",
     "    unionArea = boxAArea + boxBArea - interArea\n",
     "\n",
     "    # Zabezpieczenie przed dzieleniem przez zero\n",
@@ -117,7 +124,7 @@
     "    iou = interArea / unionArea\n",
     "    return iou\n",
     "\n",
-    "# Sprawdźmy nasz wynik\n",
+    "# Sprawd\u017amy nasz wynik\n",
     "iou_score = calculate_iou(box_true, box_pred)\n",
     "print(f\"Wynik IoU: {iou_score:.4f}\")"
    ]
@@ -129,7 +136,7 @@
    "source": [
     "## Wizualizacja\n",
     "\n",
-    "Narysujmy to, żeby zobaczyć, czy matematyka zgadza się z rzeczywistością."
+    "Narysujmy to, \u017ceby zobaczy\u0107, czy matematyka zgadza si\u0119 z rzeczywisto\u015bci\u0105."
    ]
   },
   {
@@ -153,16 +160,16 @@
     "def plot_boxes(boxA, boxB, iou):\n",
     "    fig, ax = plt.subplots(1)\n",
     "    \n",
-    "    # Ustawiamy rozmiar płótna\n",
+    "    # Ustawiamy rozmiar p\u0142\u00f3tna\n",
     "    ax.set_xlim(0, 300)\n",
-    "    ax.set_ylim(300, 0) # Odwracamy oś Y (bo w obrazkach 0 jest na górze)\n",
+    "    ax.set_ylim(300, 0) # Odwracamy o\u015b Y (bo w obrazkach 0 jest na g\u00f3rze)\n",
     "    \n",
-    "    # Rysujemy Prawdę (Zielony)\n",
+    "    # Rysujemy Prawd\u0119 (Zielony)\n",
     "    # Matplotlib chce (x, y, width, height), my mamy (x1, y1, x2, y2)\n",
     "    rectA = patches.Rectangle((boxA[0], boxA[1]), boxA[2]-boxA[0], boxA[3]-boxA[1], \n",
     "                              linewidth=2, edgecolor='g', facecolor='none', label='Prawda')\n",
     "    \n",
-    "    # Rysujemy Predykcję (Czerwony)\n",
+    "    # Rysujemy Predykcj\u0119 (Czerwony)\n",
     "    rectB = patches.Rectangle((boxB[0], boxB[1]), boxB[2]-boxB[0], boxB[3]-boxB[1], \n",
     "                              linewidth=2, edgecolor='r', facecolor='none', label='AI')\n",
     "    \n",
@@ -189,7 +196,7 @@
       "--- TESTY ---\n",
       "Idealne trafienie: 1.00 (Oczekiwane: 1.00)\n",
       "Brak styku:       0.00 (Oczekiwane: 0.00)\n",
-      "Mały styk:        0.0038\n"
+      "Ma\u0142y styk:        0.0038\n"
      ]
     }
    ],
@@ -205,9 +212,9 @@
     "box_far = [250, 250, 300, 300]\n",
     "print(f\"Brak styku:       {calculate_iou(box_true, box_far):.2f} (Oczekiwane: 0.00)\")\n",
     "\n",
-    "# 3. Mały kawałek\n",
+    "# 3. Ma\u0142y kawa\u0142ek\n",
     "box_small = [190, 190, 250, 250]\n",
-    "print(f\"Mały styk:        {calculate_iou(box_true, box_small):.4f}\")"
+    "print(f\"Ma\u0142y styk:        {calculate_iou(box_true, box_small):.4f}\")"
    ]
   },
   {
@@ -215,16 +222,16 @@
    "id": "69b31aa2",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Jak działa Tesla?\n",
+    "## \ud83e\udde0 Podsumowanie: Jak dzia\u0142a Tesla?\n",
     "\n",
-    "Dokładnie ten kod (tylko zoptymalizowany w C++) działa w samochodach autonomicznych tysiące razy na sekundę.\n",
+    "Dok\u0142adnie ten kod (tylko zoptymalizowany w C++) dzia\u0142a w samochodach autonomicznych tysi\u0105ce razy na sekund\u0119.\n",
     "\n",
-    "Samochód widzi innego pieszego. Sieć YOLO wypluwa 100 ramek wokół tego pieszego.\n",
-    "1.  Samochód liczy IoU między tymi ramkami.\n",
-    "2.  Jeśli ramki mają IoU > 0.9 (pokrywają się prawie idealnie), to znaczy, że to **ten sam pieszy**, a nie 5 różnych.\n",
-    "3.  Używa algorytmu **NMS (Non-Max Suppression)**, żeby zostawić tylko jedną, najlepszą ramkę, a resztę (duplikaty) wyrzucić.\n",
+    "Samoch\u00f3d widzi innego pieszego. Sie\u0107 YOLO wypluwa 100 ramek wok\u00f3\u0142 tego pieszego.\n",
+    "1.  Samoch\u00f3d liczy IoU mi\u0119dzy tymi ramkami.\n",
+    "2.  Je\u015bli ramki maj\u0105 IoU > 0.9 (pokrywaj\u0105 si\u0119 prawie idealnie), to znaczy, \u017ce to **ten sam pieszy**, a nie 5 r\u00f3\u017cnych.\n",
+    "3.  U\u017cywa algorytmu **NMS (Non-Max Suppression)**, \u017ceby zostawi\u0107 tylko jedn\u0105, najlepsz\u0105 ramk\u0119, a reszt\u0119 (duplikaty) wyrzuci\u0107.\n",
     "\n",
-    "Bez matematyki IoU systemy wizyjne widziałyby duchy i duplikaty obiektów."
+    "Bez matematyki IoU systemy wizyjne widzia\u0142yby duchy i duplikaty obiekt\u00f3w."
    ]
   }
  ],
