--- a/50_UNet_Image_Segmentation.ipynb
+++ b/50_UNet_Image_Segmentation.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/50_UNet_Image_Segmentation.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d86828fc",
    "metadata": {},
    "source": [
-    "# 🩺 U-Net: Precyzyjna Segmentacja Obrazu\n",
+    "# \ud83e\ude7a U-Net: Precyzyjna Segmentacja Obrazu\n",
     "\n",
-    "Klasyfikacja mówi: \"Tu jest kot\".\n",
-    "Detekcja mówi: \"Kot jest w tym pudełku\".\n",
-    "**Segmentacja** mówi: \"Te piksele to kot, a tamte to tło\".\n",
+    "Klasyfikacja m\u00f3wi: \"Tu jest kot\".\n",
+    "Detekcja m\u00f3wi: \"Kot jest w tym pude\u0142ku\".\n",
+    "**Segmentacja** m\u00f3wi: \"Te piksele to kot, a tamte to t\u0142o\".\n",
     "\n",
-    "Architektura U-Net to standard w medycynie. Składa się z:\n",
-    "1.  **Zjeżdżalni w dół (Encoder):** Używa `Conv2d` i `MaxPool`, żeby zrozumieć *co jest na zdjęciu* (ale traci informację o lokalizacji, bo obrazek robi się mały).\n",
-    "2.  **Wspinaczki w górę (Decoder):** Używa `ConvTranspose2d` (odwrotny splot), żeby powiększyć obrazek z powrotem do oryginalnego rozmiaru.\n",
-    "3.  **Skrótów (Skip Connections):** Kopiujemy obrazek z lewej strony na prawą. Dzięki temu sieć pamięta, gdzie były krawędzie.\n",
+    "Architektura U-Net to standard w medycynie. Sk\u0142ada si\u0119 z:\n",
+    "1.  **Zje\u017cd\u017calni w d\u00f3\u0142 (Encoder):** U\u017cywa `Conv2d` i `MaxPool`, \u017ceby zrozumie\u0107 *co jest na zdj\u0119ciu* (ale traci informacj\u0119 o lokalizacji, bo obrazek robi si\u0119 ma\u0142y).\n",
+    "2.  **Wspinaczki w g\u00f3r\u0119 (Decoder):** U\u017cywa `ConvTranspose2d` (odwrotny splot), \u017ceby powi\u0119kszy\u0107 obrazek z powrotem do oryginalnego rozmiaru.\n",
+    "3.  **Skr\u00f3t\u00f3w (Skip Connections):** Kopiujemy obrazek z lewej strony na praw\u0105. Dzi\u0119ki temu sie\u0107 pami\u0119ta, gdzie by\u0142y kraw\u0119dzie.\n",
     "\n",
-    "Zbudujemy tę architekturę od zera w PyTorch."
+    "Zbudujemy t\u0119 architektur\u0119 od zera w PyTorch."
    ]
   },
   {
@@ -69,11 +76,11 @@
     "## Budowa U-Net\n",
     "\n",
     "To jest serce modelu.\n",
-    "*   **Downs:** Lista warstw idących w dół (zwiększamy liczbę filtrów: 64 -> 128 -> 256...).\n",
-    "*   **Ups:** Lista warstw idących w górę (zmniejszamy liczbę filtrów: ...256 -> 128 -> 64).\n",
-    "*   **Bottleneck:** Najniższy punkt litery U.\n",
+    "*   **Downs:** Lista warstw id\u0105cych w d\u00f3\u0142 (zwi\u0119kszamy liczb\u0119 filtr\u00f3w: 64 -> 128 -> 256...).\n",
+    "*   **Ups:** Lista warstw id\u0105cych w g\u00f3r\u0119 (zmniejszamy liczb\u0119 filtr\u00f3w: ...256 -> 128 -> 64).\n",
+    "*   **Bottleneck:** Najni\u017cszy punkt litery U.\n",
     "\n",
-    "Najważniejsza linijka w kodzie to `torch.cat`. To ona łączy (skleja) obrazek z Encodera z obrazkiem z Decodera."
+    "Najwa\u017cniejsza linijka w kodzie to `torch.cat`. To ona \u0142\u0105czy (skleja) obrazek z Encodera z obrazkiem z Decodera."
    ]
   },
   {
@@ -98,18 +105,18 @@
     "        self.downs = nn.ModuleList()\n",
     "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "\n",
-    "        # 1. Budujemy Zjeżdżalnię (Down)\n",
+    "        # 1. Budujemy Zje\u017cd\u017calni\u0119 (Down)\n",
     "        for feature in features:\n",
     "            self.downs.append(DoubleConv(in_channels, feature))\n",
     "            in_channels = feature\n",
     "\n",
-    "        # 2. Budujemy Wspinaczkę (Up)\n",
+    "        # 2. Budujemy Wspinaczk\u0119 (Up)\n",
     "        for feature in reversed(features):\n",
-    "            # ConvTranspose2d powiększa obrazek (2x2 -> 4x4)\n",
+    "            # ConvTranspose2d powi\u0119ksza obrazek (2x2 -> 4x4)\n",
     "            self.ups.append(nn.ConvTranspose2d(feature*2, feature, kernel_size=2, stride=2))\n",
     "            self.ups.append(DoubleConv(feature*2, feature))\n",
     "\n",
-    "        # 3. Najniższy punkt (Bottleneck)\n",
+    "        # 3. Najni\u017cszy punkt (Bottleneck)\n",
     "        self.bottleneck = DoubleConv(features[-1], features[-1]*2)\n",
     "        \n",
     "        # 4. Ostatnia warstwa (Mapowanie na wynik 1x1)\n",
@@ -118,32 +125,32 @@
     "    def forward(self, x):\n",
     "        skip_connections = []\n",
     "\n",
-    "        # --- W DÓŁ ---\n",
+    "        # --- W D\u00d3\u0141 ---\n",
     "        for down in self.downs:\n",
     "            x = down(x)\n",
-    "            skip_connections.append(x) # Zapisujemy obrazek na później (do skrótu)\n",
+    "            skip_connections.append(x) # Zapisujemy obrazek na p\u00f3\u017aniej (do skr\u00f3tu)\n",
     "            x = self.pool(x)\n",
     "\n",
     "        # Dno sieci\n",
     "        x = self.bottleneck(x)\n",
     "        \n",
-    "        # Odwracamy listę skrótów, żeby brać je w dobrej kolejności\n",
+    "        # Odwracamy list\u0119 skr\u00f3t\u00f3w, \u017ceby bra\u0107 je w dobrej kolejno\u015bci\n",
     "        skip_connections = skip_connections[::-1]\n",
     "\n",
-    "        # --- W GÓRĘ ---\n",
+    "        # --- W G\u00d3R\u0118 ---\n",
     "        # Iterujemy co 2 kroki (bo mamy Transpose + DoubleConv)\n",
     "        for idx in range(0, len(self.ups), 2):\n",
-    "            x = self.ups[idx](x) # Powiększamy\n",
+    "            x = self.ups[idx](x) # Powi\u0119kszamy\n",
     "            \n",
-    "            skip_connection = skip_connections[idx//2] # Bierzemy pasujący skrót\n",
+    "            skip_connection = skip_connections[idx//2] # Bierzemy pasuj\u0105cy skr\u00f3t\n",
     "            \n",
     "            # --- MAGIA: Sklejamy (Concatenate) ---\n",
-    "            # Jeśli wymiary się nie zgadzają (np. przez nieparzyste dzielenie), trzeba przyciąć.\n",
-    "            # Tutaj dla uproszczenia zakładamy idealne wymiary (potęgi 2).\n",
+    "            # Je\u015bli wymiary si\u0119 nie zgadzaj\u0105 (np. przez nieparzyste dzielenie), trzeba przyci\u0105\u0107.\n",
+    "            # Tutaj dla uproszczenia zak\u0142adamy idealne wymiary (pot\u0119gi 2).\n",
     "            if x.shape != skip_connection.shape:\n",
     "                x = TF.resize(x, size=skip_connection.shape[2:])\n",
     "\n",
-    "            concat_skip = torch.cat((skip_connection, x), dim=1) # Sklejamy wzdłuż kanałów\n",
+    "            concat_skip = torch.cat((skip_connection, x), dim=1) # Sklejamy wzd\u0142u\u017c kana\u0142\u00f3w\n",
     "            x = self.ups[idx+1](concat_skip)\n",
     "\n",
     "        return self.final_conv(x)\n",
@@ -156,11 +163,11 @@
    "id": "10f8d2e1",
    "metadata": {},
    "source": [
-    "## Test Wymiarów (Smoke Test)\n",
+    "## Test Wymiar\u00f3w (Smoke Test)\n",
     "\n",
-    "Zanim zaczniemy trenować na prawdziwych zdjęciach (co trwa godziny), sprawdźmy, czy matematyka się zgadza.\n",
+    "Zanim zaczniemy trenowa\u0107 na prawdziwych zdj\u0119ciach (co trwa godziny), sprawd\u017amy, czy matematyka si\u0119 zgadza.\n",
     "Wrzucimy losowy szum o wymiarach `160x160`.\n",
-    "Oczekujemy, że sieć zwróci `160x160` (mapę segmentacji). Jeśli zwróci inny rozmiar -> mamy błąd w kodzie."
+    "Oczekujemy, \u017ce sie\u0107 zwr\u00f3ci `160x160` (map\u0119 segmentacji). Je\u015bli zwr\u00f3ci inny rozmiar -> mamy b\u0142\u0105d w kodzie."
    ]
   },
   {
@@ -173,15 +180,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wejście: torch.Size([3, 1, 160, 160])\n",
-      "Wyjście: torch.Size([3, 1, 160, 160])\n",
-      "✅ SUKCES! Wymiary wejścia i wyjścia są identyczne.\n"
+      "Wej\u015bcie: torch.Size([3, 1, 160, 160])\n",
+      "Wyj\u015bcie: torch.Size([3, 1, 160, 160])\n",
+      "\u2705 SUKCES! Wymiary wej\u015bcia i wyj\u015bcia s\u0105 identyczne.\n"
      ]
     }
    ],
    "source": [
     "def test_unet():\n",
-    "    # Losowy obrazek: Batch=3, Kanały=1 (czarno-biały), 160x160 pikseli\n",
+    "    # Losowy obrazek: Batch=3, Kana\u0142y=1 (czarno-bia\u0142y), 160x160 pikseli\n",
     "    x = torch.randn((3, 1, 160, 160))\n",
     "    \n",
     "    # Tworzymy model\n",
@@ -190,11 +197,11 @@
     "    # Przepuszczamy dane\n",
     "    preds = model(x)\n",
     "    \n",
-    "    print(f\"Wejście: {x.shape}\")\n",
-    "    print(f\"Wyjście: {preds.shape}\")\n",
+    "    print(f\"Wej\u015bcie: {x.shape}\")\n",
+    "    print(f\"Wyj\u015bcie: {preds.shape}\")\n",
     "    \n",
     "    assert preds.shape == x.shape\n",
-    "    print(\"✅ SUKCES! Wymiary wejścia i wyjścia są identyczne.\")\n",
+    "    print(\"\u2705 SUKCES! Wymiary wej\u015bcia i wyj\u015bcia s\u0105 identyczne.\")\n",
     "\n",
     "test_unet()"
    ]
@@ -204,18 +211,18 @@
    "id": "5fc54751",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Po co te skróty (Skip Connections)?\n",
+    "## \ud83e\udde0 Podsumowanie: Po co te skr\u00f3ty (Skip Connections)?\n",
     "\n",
-    "Dlaczego U-Net jest lepszy od zwykłego Autoenkodera?\n",
+    "Dlaczego U-Net jest lepszy od zwyk\u0142ego Autoenkodera?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "Kiedy Autoenkoder zmniejsza zdjęcie do malutkiego wektora (Bottleneck), traci informację o **precyzyjnych krawędziach**. Wie, że na zdjęciu jest \"płuco\", ale nie wie dokładnie, gdzie kończy się jego granica (piksel 120 czy 121?).\n",
+    "Kiedy Autoenkoder zmniejsza zdj\u0119cie do malutkiego wektora (Bottleneck), traci informacj\u0119 o **precyzyjnych kraw\u0119dziach**. Wie, \u017ce na zdj\u0119ciu jest \"p\u0142uco\", ale nie wie dok\u0142adnie, gdzie ko\u0144czy si\u0119 jego granica (piksel 120 czy 121?).\n",
     "\n",
-    "**Skip Connections** działają jak kalka techniczna.\n",
-    "Decoder próbuje narysować płuco z pamięci (z Bottlenecku), ale dostaje też \"ściągę\" z Encodera – oryginalny obraz w wysokiej rozdzielczości z danej warstwy.\n",
-    "Łączy te dwie informacje:\n",
-    "*   Kontekst (\"To jest płuco\") z dołu.\n",
-    "*   Lokalizację (\"Krawędź jest tutaj\") ze skrótu.\n",
+    "**Skip Connections** dzia\u0142aj\u0105 jak kalka techniczna.\n",
+    "Decoder pr\u00f3buje narysowa\u0107 p\u0142uco z pami\u0119ci (z Bottlenecku), ale dostaje te\u017c \"\u015bci\u0105g\u0119\" z Encodera \u2013 oryginalny obraz w wysokiej rozdzielczo\u015bci z danej warstwy.\n",
+    "\u0141\u0105czy te dwie informacje:\n",
+    "*   Kontekst (\"To jest p\u0142uco\") z do\u0142u.\n",
+    "*   Lokalizacj\u0119 (\"Kraw\u0119d\u017a jest tutaj\") ze skr\u00f3tu.\n",
     "\n",
     "Dlatego U-Net daje ostre jak brzytwa maski segmentacji."
    ]
