--- a/52_Genetic_Algorithms_Evolution.ipynb
+++ b/52_Genetic_Algorithms_Evolution.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/52_Genetic_Algorithms_Evolution.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f082648",
    "metadata": {},
    "source": [
-    "# 🧬 Algorytmy Genetyczne: Ewolucja w Kodzie\n",
+    "# \ud83e\uddec Algorytmy Genetyczne: Ewolucja w Kodzie\n",
     "\n",
-    "Kiedy Gradient Descent nie działa (bo problem jest dyskretny lub poszarpany), wzywamy na pomoc Karola Darwina.\n",
+    "Kiedy Gradient Descent nie dzia\u0142a (bo problem jest dyskretny lub poszarpany), wzywamy na pomoc Karola Darwina.\n",
     "\n",
-    "Rozwiążemy **Problem Plecakowy**:\n",
-    "*   Mamy listę przedmiotów (Złoto, Laptop, Kamień...).\n",
-    "*   Każdy ma **Wagę** i **Wartość**.\n",
+    "Rozwi\u0105\u017cemy **Problem Plecakowy**:\n",
+    "*   Mamy list\u0119 przedmiot\u00f3w (Z\u0142oto, Laptop, Kamie\u0144...).\n",
+    "*   Ka\u017cdy ma **Wag\u0119** i **Warto\u015b\u0107**.\n",
     "*   Plecak ma limit wagowy.\n",
     "\n",
-    "**Cel:** Wybrać taki zestaw przedmiotów (0/1), żeby wartość była maksymalna, a waga nie przekroczyła limitu.\n",
+    "**Cel:** Wybra\u0107 taki zestaw przedmiot\u00f3w (0/1), \u017ceby warto\u015b\u0107 by\u0142a maksymalna, a waga nie przekroczy\u0142a limitu.\n",
     "\n",
-    "Zrobimy to bez matematycznych wzorów, używając czystej symulacji ewolucji."
+    "Zrobimy to bez matematycznych wzor\u00f3w, u\u017cywaj\u0105c czystej symulacji ewolucji."
    ]
   },
   {
@@ -29,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Liczba przedmiotów: 10\n",
+      "Liczba przedmiot\u00f3w: 10\n",
       "Limit wagi: 50 kg\n"
      ]
     }
@@ -40,9 +47,9 @@
     "import random\n",
     "\n",
     "# 1. DEFINIUJEMY PROBLEM\n",
-    "# Przedmioty: [Waga (kg), Wartość ($)]\n",
+    "# Przedmioty: [Waga (kg), Warto\u015b\u0107 ($)]\n",
     "items = [\n",
-    "    [10, 60],  # Przedmiot 0 (Ciężki, średnio drogi)\n",
+    "    [10, 60],  # Przedmiot 0 (Ci\u0119\u017cki, \u015brednio drogi)\n",
     "    [20, 100], # Przedmiot 1\n",
     "    [30, 120], # Przedmiot 2\n",
     "    [5,  100], # Przedmiot 3 (Lekki, drogi - Super!)\n",
@@ -55,9 +62,9 @@
     "]\n",
     "items = np.array(items)\n",
     "\n",
-    "MAX_WEIGHT = 50 # Maksymalny udźwig plecaka\n",
+    "MAX_WEIGHT = 50 # Maksymalny ud\u017awig plecaka\n",
     "\n",
-    "print(f\"Liczba przedmiotów: {len(items)}\")\n",
+    "print(f\"Liczba przedmiot\u00f3w: {len(items)}\")\n",
     "print(f\"Limit wagi: {MAX_WEIGHT} kg\")"
    ]
   },
@@ -68,10 +75,10 @@
    "source": [
     "## Krok 1: DNA i Populacja\n",
     "\n",
-    "Nasze DNA to prosty ciąg zer i jedynek.\n",
-    "*   `[1, 0, 0, 1, ...]` oznacza: \"Biorę przedmiot nr 0 i nr 3. Resztę zostawiam\".\n",
+    "Nasze DNA to prosty ci\u0105g zer i jedynek.\n",
+    "*   `[1, 0, 0, 1, ...]` oznacza: \"Bior\u0119 przedmiot nr 0 i nr 3. Reszt\u0119 zostawiam\".\n",
     "\n",
-    "Stworzymy populację 50 losowych \"osobników\" (plecaków)."
+    "Stworzymy populacj\u0119 50 losowych \"osobnik\u00f3w\" (plecak\u00f3w)."
    ]
   },
   {
@@ -84,9 +91,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- PRZYKŁADOWY OSOBNIK (GENOM) ---\n",
+      "--- PRZYK\u0141ADOWY OSOBNIK (GENOM) ---\n",
       "[1 0 0 0 1 1 1 0 1 1]\n",
-      "(1 = zabrać, 0 = zostawić)\n"
+      "(1 = zabra\u0107, 0 = zostawi\u0107)\n"
      ]
     }
    ],
@@ -94,12 +101,12 @@
     "POPULATION_SIZE = 50\n",
     "DNA_LENGTH = len(items)\n",
     "\n",
-    "# Generujemy losową populację (macierz 50 x 10 zer i jedynek)\n",
+    "# Generujemy losow\u0105 populacj\u0119 (macierz 50 x 10 zer i jedynek)\n",
     "population = np.random.randint(0, 2, size=(POPULATION_SIZE, DNA_LENGTH))\n",
     "\n",
-    "print(\"--- PRZYKŁADOWY OSOBNIK (GENOM) ---\")\n",
+    "print(\"--- PRZYK\u0141ADOWY OSOBNIK (GENOM) ---\")\n",
     "print(population[0])\n",
-    "print(\"(1 = zabrać, 0 = zostawić)\")"
+    "print(\"(1 = zabra\u0107, 0 = zostawi\u0107)\")"
    ]
   },
   {
@@ -109,10 +116,10 @@
    "source": [
     "## Krok 2: Fitness Function (Przystosowanie)\n",
     "\n",
-    "To najważniejsza funkcja. Musi ocenić, jak \"dobry\" jest dany plecak.\n",
-    "1.  Sumujemy wartości przedmiotów.\n",
+    "To najwa\u017cniejsza funkcja. Musi oceni\u0107, jak \"dobry\" jest dany plecak.\n",
+    "1.  Sumujemy warto\u015bci przedmiot\u00f3w.\n",
     "2.  Sumujemy wagi.\n",
-    "3.  **Kara:** Jeśli waga > limit, to plecak jest bezużyteczny (wartość = 0 lub kara). Tutaj dla uproszczenia ustawimy Fitness = 0, żeby takie osobniki \"wymarły\"."
+    "3.  **Kara:** Je\u015bli waga > limit, to plecak jest bezu\u017cyteczny (warto\u015b\u0107 = 0 lub kara). Tutaj dla uproszczenia ustawimy Fitness = 0, \u017ceby takie osobniki \"wymar\u0142y\"."
    ]
   },
   {
@@ -134,11 +141,11 @@
     "    scores = []\n",
     "    \n",
     "    for individual in population:\n",
-    "        # Mnożymy DNA (0/1) przez wartości przedmiotów\n",
+    "        # Mno\u017cymy DNA (0/1) przez warto\u015bci przedmiot\u00f3w\n",
     "        current_weight = np.sum(individual * items[:, 0])\n",
     "        current_value  = np.sum(individual * items[:, 1])\n",
     "        \n",
-    "        # Jeśli plecak jest za ciężki -> Fitness = 0 (Śmierć)\n",
+    "        # Je\u015bli plecak jest za ci\u0119\u017cki -> Fitness = 0 (\u015amier\u0107)\n",
     "        if current_weight > max_weight:\n",
     "            scores.append(0)\n",
     "        else:\n",
@@ -156,14 +163,14 @@
    "id": "e272bc18",
    "metadata": {},
    "source": [
-    "## Krok 3: Ewolucja (Pętla Życia)\n",
+    "## Krok 3: Ewolucja (P\u0119tla \u017bycia)\n",
     "\n",
-    "Teraz uruchamiamy machinę Darwina na 100 pokoleń.\n",
+    "Teraz uruchamiamy machin\u0119 Darwina na 100 pokole\u0144.\n",
     "\n",
-    "W każdym pokoleniu:\n",
-    "1.  **Selekcja:** Losujemy rodziców. Im lepszy wynik (Fitness), tym większa szansa na bycie wybranym.\n",
-    "2.  **Krzyżowanie (Crossover):** Bierzemy połówkę DNA od taty i połówkę od mamy.\n",
-    "3.  **Mutacja:** Z bardzo małą szansą (np. 1%) zmieniamy losowy bit (żeby odkryć nowe możliwości)."
+    "W ka\u017cdym pokoleniu:\n",
+    "1.  **Selekcja:** Losujemy rodzic\u00f3w. Im lepszy wynik (Fitness), tym wi\u0119ksza szansa na bycie wybranym.\n",
+    "2.  **Krzy\u017cowanie (Crossover):** Bierzemy po\u0142\u00f3wk\u0119 DNA od taty i po\u0142\u00f3wk\u0119 od mamy.\n",
+    "3.  **Mutacja:** Z bardzo ma\u0142\u0105 szans\u0105 (np. 1%) zmieniamy losowy bit (\u017ceby odkry\u0107 nowe mo\u017cliwo\u015bci)."
    ]
   },
   {
@@ -176,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏆 Koniec ewolucji!\n",
+      "\ud83c\udfc6 Koniec ewolucji!\n",
       "Najlepszy wynik: 370$\n",
       "Najlepsze DNA: [1 0 0 1 0 0 1 1 0 1]\n"
      ]
@@ -184,7 +191,7 @@
    ],
    "source": [
     "GENERATIONS = 100\n",
-    "MUTATION_RATE = 0.05 # 5% szansy na mutację genu\n",
+    "MUTATION_RATE = 0.05 # 5% szansy na mutacj\u0119 genu\n",
     "\n",
     "history_best = []\n",
     "\n",
@@ -196,31 +203,31 @@
     "    best_score = np.max(fitness)\n",
     "    history_best.append(best_score)\n",
     "    \n",
-    "    # Jeśli wszyscy umarli (za ciężkie plecaki), restartujemy losowo\n",
+    "    # Je\u015bli wszyscy umarli (za ci\u0119\u017ckie plecaki), restartujemy losowo\n",
     "    if best_score == 0:\n",
     "        population = np.random.randint(0, 2, size=(POPULATION_SIZE, DNA_LENGTH))\n",
     "        continue\n",
     "\n",
     "    # 2. SELEKCJA (Ruletka)\n",
-    "    # Prawdopodobieństwo wyboru zależy od wyniku\n",
+    "    # Prawdopodobie\u0144stwo wyboru zale\u017cy od wyniku\n",
     "    probs = fitness / fitness.sum()\n",
     "    \n",
-    "    # Wybieramy rodziców (z powtórzeniami)\n",
+    "    # Wybieramy rodzic\u00f3w (z powt\u00f3rzeniami)\n",
     "    parents_indices = np.random.choice(np.arange(POPULATION_SIZE), size=POPULATION_SIZE, p=probs)\n",
     "    parents = population[parents_indices]\n",
     "    \n",
-    "    # 3. KRZYŻOWANIE (Crossover)\n",
+    "    # 3. KRZY\u017bOWANIE (Crossover)\n",
     "    children = []\n",
     "    for i in range(0, POPULATION_SIZE, 2):\n",
     "        parent1 = parents[i]\n",
     "        parent2 = parents[i+1]\n",
     "        \n",
-    "        # Punkt przecięcia (gdzie tniemy DNA?)\n",
+    "        # Punkt przeci\u0119cia (gdzie tniemy DNA?)\n",
     "        cut = np.random.randint(1, DNA_LENGTH-1)\n",
     "        \n",
-    "        # Dziecko 1: Głowa Taty, Ogon Mamy\n",
+    "        # Dziecko 1: G\u0142owa Taty, Ogon Mamy\n",
     "        child1 = np.concatenate([parent1[:cut], parent2[cut:]])\n",
-    "        # Dziecko 2: Głowa Mamy, Ogon Taty\n",
+    "        # Dziecko 2: G\u0142owa Mamy, Ogon Taty\n",
     "        child2 = np.concatenate([parent2[:cut], parent1[cut:]])\n",
     "        \n",
     "        children.append(child1)\n",
@@ -229,20 +236,20 @@
     "    children = np.array(children)\n",
     "    \n",
     "    # 4. MUTACJA\n",
-    "    # Tworzymy maskę losowych zmian (0 lub 1)\n",
+    "    # Tworzymy mask\u0119 losowych zmian (0 lub 1)\n",
     "    mutation_mask = np.random.random(children.shape) < MUTATION_RATE\n",
-    "    # Odwracamy bity tam, gdzie wypadła mutacja (XOR)\n",
+    "    # Odwracamy bity tam, gdzie wypad\u0142a mutacja (XOR)\n",
     "    children = np.logical_xor(children, mutation_mask).astype(int)\n",
     "    \n",
-    "    # Nowe pokolenie zastępuje stare\n",
+    "    # Nowe pokolenie zast\u0119puje stare\n",
     "    population = children\n",
     "\n",
-    "# WYNIK KOŃCOWY\n",
+    "# WYNIK KO\u0143COWY\n",
     "final_fitness = calculate_fitness(population, items, MAX_WEIGHT)\n",
     "best_idx = np.argmax(final_fitness)\n",
     "best_dna = population[best_idx]\n",
     "\n",
-    "print(f\"🏆 Koniec ewolucji!\")\n",
+    "print(f\"\ud83c\udfc6 Koniec ewolucji!\")\n",
     "print(f\"Najlepszy wynik: {final_fitness[best_idx]}$\")\n",
     "print(f\"Najlepsze DNA: {best_dna}\")"
    ]
@@ -267,40 +274,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- ZAWARTOŚĆ ZWYCIĘSKIEGO PLECAKA ---\n",
-      "Przedmiot 0: Waga 10kg, Wartość 60$\n",
-      "Przedmiot 3: Waga 5kg, Wartość 100$\n",
-      "Przedmiot 6: Waga 2kg, Wartość 20$\n",
-      "Przedmiot 7: Waga 8kg, Wartość 40$\n",
-      "Przedmiot 9: Waga 25kg, Wartość 150$\n",
+      "--- ZAWARTO\u015a\u0106 ZWYCI\u0118SKIEGO PLECAKA ---\n",
+      "Przedmiot 0: Waga 10kg, Warto\u015b\u0107 60$\n",
+      "Przedmiot 3: Waga 5kg, Warto\u015b\u0107 100$\n",
+      "Przedmiot 6: Waga 2kg, Warto\u015b\u0107 20$\n",
+      "Przedmiot 7: Waga 8kg, Warto\u015b\u0107 40$\n",
+      "Przedmiot 9: Waga 25kg, Warto\u015b\u0107 150$\n",
       "------------------------------\n",
-      "SUMA: Waga 50/50kg, Wartość 370$\n"
+      "SUMA: Waga 50/50kg, Warto\u015b\u0107 370$\n"
      ]
     }
    ],
    "source": [
-    "# Wizualizacja postępu\n",
+    "# Wizualizacja post\u0119pu\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(history_best)\n",
     "plt.title(\"Ewolucja Najlepszego Wyniku\")\n",
     "plt.xlabel(\"Pokolenie\")\n",
-    "plt.ylabel(\"Wartość plecaka ($)\")\n",
+    "plt.ylabel(\"Warto\u015b\u0107 plecaka ($)\")\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# Co dokładnie zabraliśmy?\n",
-    "print(\"--- ZAWARTOŚĆ ZWYCIĘSKIEGO PLECAKA ---\")\n",
+    "# Co dok\u0142adnie zabrali\u015bmy?\n",
+    "print(\"--- ZAWARTO\u015a\u0106 ZWYCI\u0118SKIEGO PLECAKA ---\")\n",
     "total_w = 0\n",
     "total_v = 0\n",
     "for i, take in enumerate(best_dna):\n",
     "    if take:\n",
     "        w, v = items[i]\n",
-    "        print(f\"Przedmiot {i}: Waga {w}kg, Wartość {v}$\")\n",
+    "        print(f\"Przedmiot {i}: Waga {w}kg, Warto\u015b\u0107 {v}$\")\n",
     "        total_w += w\n",
     "        total_v += v\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(f\"SUMA: Waga {total_w}/{MAX_WEIGHT}kg, Wartość {total_v}$\")"
+    "print(f\"SUMA: Waga {total_w}/{MAX_WEIGHT}kg, Warto\u015b\u0107 {total_v}$\")"
    ]
   },
   {
@@ -308,16 +315,16 @@
    "id": "52167d78",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Siła Przypadku\n",
+    "## \ud83e\udde0 Podsumowanie: Si\u0142a Przypadku\n",
     "\n",
-    "Algorytm genetyczny nie \"myśli\" i nie liczy pochodnych. On po prostu **zgaduje**, ale robi to w sposób ukierunkowany (selekcja).\n",
+    "Algorytm genetyczny nie \"my\u015bli\" i nie liczy pochodnych. On po prostu **zgaduje**, ale robi to w spos\u00f3b ukierunkowany (selekcja).\n",
     "\n",
-    "**Kiedy stosować?**\n",
-    "1.  Gdy problem jest \"nieciągły\" (np. nie możesz zabrać 0.5 laptopa).\n",
-    "2.  Gdy funkcja celu jest bardzo skomplikowana (np. projektowanie kształtu skrzydła samolotu pod tunel aerodynamiczny).\n",
-    "3.  Gdy nie zależy nam na idealnym rozwiązaniu (optimum globalne), ale na \"wystarczająco dobrym\" w krótkim czasie.\n",
+    "**Kiedy stosowa\u0107?**\n",
+    "1.  Gdy problem jest \"nieci\u0105g\u0142y\" (np. nie mo\u017cesz zabra\u0107 0.5 laptopa).\n",
+    "2.  Gdy funkcja celu jest bardzo skomplikowana (np. projektowanie kszta\u0142tu skrzyd\u0142a samolotu pod tunel aerodynamiczny).\n",
+    "3.  Gdy nie zale\u017cy nam na idealnym rozwi\u0105zaniu (optimum globalne), ale na \"wystarczaj\u0105co dobrym\" w kr\u00f3tkim czasie.\n",
     "\n",
-    "W naszym przypadku, po 20-30 pokoleniach, algorytm prawdopodobnie znalazł optymalne lub bliskie optymalnemu upakowanie plecaka."
+    "W naszym przypadku, po 20-30 pokoleniach, algorytm prawdopodobnie znalaz\u0142 optymalne lub bliskie optymalnemu upakowanie plecaka."
    ]
   }
  ],
