--- a/53_Monte_Carlo_Simulation.ipynb
+++ b/53_Monte_Carlo_Simulation.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/53_Monte_Carlo_Simulation.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "05cad692",
    "metadata": {},
    "source": [
-    "# 🎲 Symulacja Monte Carlo: Dr Strange i Multiwersum\n",
+    "# \ud83c\udfb2 Symulacja Monte Carlo: Dr Strange i Multiwersum\n",
     "\n",
-    "Nikt nie zna przyszłości. Ale jeśli znamy statystykę przeszłości (średni wzrost i zmienność), możemy wygenerować **tysiące możliwych scenariuszy**.\n",
+    "Nikt nie zna przysz\u0142o\u015bci. Ale je\u015bli znamy statystyk\u0119 przesz\u0142o\u015bci (\u015bredni wzrost i zmienno\u015b\u0107), mo\u017cemy wygenerowa\u0107 **tysi\u0105ce mo\u017cliwych scenariuszy**.\n",
     "\n",
-    "Zamiast pytać: \"Ile zarobię?\", pytamy: \"Jaka jest szansa, że stracę wszystko?\".\n",
+    "Zamiast pyta\u0107: \"Ile zarobi\u0119?\", pytamy: \"Jaka jest szansa, \u017ce strac\u0119 wszystko?\".\n",
     "\n",
     "**Scenariusz:**\n",
-    "*   Masz 1000 zł.\n",
-    "*   Inwestujesz w akcje, które historycznie rosną 10% rocznie (średnio).\n",
-    "*   Ale mają dużą zmienność (Volatility) - ceny skaczą o 20% góra/dół.\n",
+    "*   Masz 1000 z\u0142.\n",
+    "*   Inwestujesz w akcje, kt\u00f3re historycznie rosn\u0105 10% rocznie (\u015brednio).\n",
+    "*   Ale maj\u0105 du\u017c\u0105 zmienno\u015b\u0107 (Volatility) - ceny skacz\u0105 o 20% g\u00f3ra/d\u00f3\u0142.\n",
     "\n",
-    "Uruchomimy symulację na 1 rok (252 dni sesyjne) **tysiąc razy**."
+    "Uruchomimy symulacj\u0119 na 1 rok (252 dni sesyjne) **tysi\u0105c razy**."
    ]
   },
   {
@@ -40,13 +47,13 @@
     "import seaborn as sns\n",
     "\n",
     "# Ustawienia\n",
-    "SIMULATIONS = 1000   # Ile alternatywnych wszechświatów tworzymy?\n",
+    "SIMULATIONS = 1000   # Ile alternatywnych wszech\u015bwiat\u00f3w tworzymy?\n",
     "DAYS = 252           # Dni handlowe w roku\n",
-    "START_PRICE = 1000   # Początkowy kapitał\n",
+    "START_PRICE = 1000   # Pocz\u0105tkowy kapita\u0142\n",
     "\n",
-    "# Parametry rynku (historyczne założenia)\n",
+    "# Parametry rynku (historyczne za\u0142o\u017cenia)\n",
     "MU = 0.10            # Oczekiwany zwrot roczny (10%)\n",
-    "SIGMA = 0.20         # Zmienność (Ryzyko - 20%)\n",
+    "SIGMA = 0.20         # Zmienno\u015b\u0107 (Ryzyko - 20%)\n",
     "\n",
     "print(f\"Startujemy z {START_PRICE} PLN.\")\n",
     "print(f\"Cel: Symulacja {SIMULATIONS} scenariuszy na rok do przodu.\")"
@@ -59,11 +66,11 @@
    "source": [
     "## Matematyka: Geometryczne Ruchy Browna\n",
     "\n",
-    "Nie wchodząc głęboko w równania różniczkowe: cena jutro to cena dziś pomnożona przez pewien \"szok\".\n",
+    "Nie wchodz\u0105c g\u0142\u0119boko w r\u00f3wnania r\u00f3\u017cniczkowe: cena jutro to cena dzi\u015b pomno\u017cona przez pewien \"szok\".\n",
     "$$ P_t = P_{t-1} \\times e^{(drift + shock)} $$\n",
     "\n",
-    "*   **Drift (Trend):** To ta część, która pcha cenę w górę (nasze 10% zysku).\n",
-    "*   **Shock (Losowość):** To losowa liczba z rozkładu normalnego, pomnożona przez zmienność ($\\sigma$). Raz na plus, raz na minus."
+    "*   **Drift (Trend):** To ta cz\u0119\u015b\u0107, kt\u00f3ra pcha cen\u0119 w g\u00f3r\u0119 (nasze 10% zysku).\n",
+    "*   **Shock (Losowo\u015b\u0107):** To losowa liczba z rozk\u0142adu normalnego, pomno\u017cona przez zmienno\u015b\u0107 ($\\sigma$). Raz na plus, raz na minus."
    ]
   },
   {
@@ -76,27 +83,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symulacja zakończona.\n",
-      "Kształt danych: (252, 1000) (Dni x Scenariusze)\n"
+      "Symulacja zako\u0144czona.\n",
+      "Kszta\u0142t danych: (252, 1000) (Dni x Scenariusze)\n"
      ]
     }
    ],
    "source": [
     "np.random.seed(42)\n",
     "\n",
-    "# Tworzymy tablicę wyników [Dni, Symulacje]\n",
-    "# Każda kolumna to jedna historia alternatywna\n",
+    "# Tworzymy tablic\u0119 wynik\u00f3w [Dni, Symulacje]\n",
+    "# Ka\u017cda kolumna to jedna historia alternatywna\n",
     "price_paths = np.zeros((DAYS, SIMULATIONS))\n",
     "price_paths[0] = START_PRICE\n",
     "\n",
     "# Generujemy losowe zmiany dzienne (Return)\n",
-    "dt = 1 / DAYS # Krok czasowy (1 dzień)\n",
+    "dt = 1 / DAYS # Krok czasowy (1 dzie\u0144)\n",
     "\n",
     "for t in range(1, DAYS):\n",
-    "    # Losowy szok dla każdej symulacji\n",
+    "    # Losowy szok dla ka\u017cdej symulacji\n",
     "    shock = np.random.normal(0, 1, SIMULATIONS)\n",
     "    \n",
-    "    # Wzór na zmianę ceny (Drift + Shock)\n",
+    "    # Wz\u00f3r na zmian\u0119 ceny (Drift + Shock)\n",
     "    # Drift: (mu - 0.5 * sigma^2) * dt\n",
     "    # Shock: sigma * sqrt(dt) * Z\n",
     "    drift = (MU - 0.5 * SIGMA**2) * dt\n",
@@ -105,8 +112,8 @@
     "    # Aktualizacja ceny\n",
     "    price_paths[t] = price_paths[t-1] * np.exp(drift + diffusion)\n",
     "\n",
-    "print(\"Symulacja zakończona.\")\n",
-    "print(f\"Kształt danych: {price_paths.shape} (Dni x Scenariusze)\")"
+    "print(\"Symulacja zako\u0144czona.\")\n",
+    "print(f\"Kszta\u0142t danych: {price_paths.shape} (Dni x Scenariusze)\")"
    ]
   },
   {
@@ -114,10 +121,10 @@
    "id": "8ed5bf50",
    "metadata": {},
    "source": [
-    "## Wizualizacja: Stożek Niepewności\n",
+    "## Wizualizacja: Sto\u017cek Niepewno\u015bci\n",
     "\n",
     "Narysujmy pierwsze 50 symulacji.\n",
-    "Zobaczysz, że wszystkie zaczynają się w punkcie 1000, ale potem rozjeżdżają się jak spaghetti."
+    "Zobaczysz, \u017ce wszystkie zaczynaj\u0105 si\u0119 w punkcie 1000, ale potem rozje\u017cd\u017caj\u0105 si\u0119 jak spaghetti."
    ]
   },
   {
@@ -139,11 +146,11 @@
    ],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
-    "# Rysujemy pierwsze 50 ścieżek\n",
+    "# Rysujemy pierwsze 50 \u015bcie\u017cek\n",
     "plt.plot(price_paths[:, :50], lw=1, alpha=0.6)\n",
     "\n",
-    "plt.title(\"Monte Carlo: 50 możliwych przyszłości\")\n",
-    "plt.xlabel(\"Dzień\")\n",
+    "plt.title(\"Monte Carlo: 50 mo\u017cliwych przysz\u0142o\u015bci\")\n",
+    "plt.xlabel(\"Dzie\u0144\")\n",
     "plt.ylabel(\"Cena Akcji (PLN)\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.axhline(START_PRICE, color='k', linestyle='--', label='Start (1000)')\n",
@@ -156,13 +163,13 @@
    "id": "c24d4113",
    "metadata": {},
    "source": [
-    "## Analiza Ryzyka: Histogram Końcowy\n",
+    "## Analiza Ryzyka: Histogram Ko\u0144cowy\n",
     "\n",
-    "Spojrzeliśmy na ścieżki. Teraz spójrzmy na **koniec roku** (ostatni dzień).\n",
-    "Gdzie wylądowaliśmy w tych 1000 symulacjach?\n",
+    "Spojrzeli\u015bmy na \u015bcie\u017cki. Teraz sp\u00f3jrzmy na **koniec roku** (ostatni dzie\u0144).\n",
+    "Gdzie wyl\u0105dowali\u015bmy w tych 1000 symulacjach?\n",
     "\n",
     "Obliczymy **VaR (Value at Risk)** na poziomie 95%.\n",
-    "To liczba, która mówi: *\"W 95% przypadków nie będzie gorzej niż...\"*."
+    "To liczba, kt\u00f3ra m\u00f3wi: *\"W 95% przypadk\u00f3w nie b\u0119dzie gorzej ni\u017c...\"*."
    ]
   },
   {
@@ -175,12 +182,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średni wynik: 1105.84 PLN (Zysk: 105.84)\n",
-      "Najlepszy scenariusz: 1948.50 PLN (To the moon! 🚀)\n",
-      "Najgorszy scenariusz: 599.42 PLN (Bankructwo ☠️)\n",
+      "\u015aredni wynik: 1105.84 PLN (Zysk: 105.84)\n",
+      "Najlepszy scenariusz: 1948.50 PLN (To the moon! \ud83d\ude80)\n",
+      "Najgorszy scenariusz: 599.42 PLN (Bankructwo \u2620\ufe0f)\n",
       "------------------------------\n",
       "VaR (95%): 784.54 PLN\n",
-      "Oznacza to, że masz 95% pewności, że nie skończysz z kwotą mniejszą niż 784.54.\n",
+      "Oznacza to, \u017ce masz 95% pewno\u015bci, \u017ce nie sko\u0144czysz z kwot\u0105 mniejsz\u0105 ni\u017c 784.54.\n",
       "Ryzykowana kwota: 215.46 PLN.\n"
      ]
     },
@@ -205,15 +212,15 @@
     "max_final = np.max(final_prices)\n",
     "\n",
     "# Value at Risk (5% najgorszych scenariuszy)\n",
-    "# 5. percentyl oznacza: 5% wyników jest niższych od tej liczby\n",
+    "# 5. percentyl oznacza: 5% wynik\u00f3w jest ni\u017cszych od tej liczby\n",
     "var_95 = np.percentile(final_prices, 5)\n",
     "\n",
-    "print(f\"Średni wynik: {mean_final:.2f} PLN (Zysk: {mean_final - START_PRICE:.2f})\")\n",
-    "print(f\"Najlepszy scenariusz: {max_final:.2f} PLN (To the moon! 🚀)\")\n",
-    "print(f\"Najgorszy scenariusz: {min_final:.2f} PLN (Bankructwo ☠️)\")\n",
+    "print(f\"\u015aredni wynik: {mean_final:.2f} PLN (Zysk: {mean_final - START_PRICE:.2f})\")\n",
+    "print(f\"Najlepszy scenariusz: {max_final:.2f} PLN (To the moon! \ud83d\ude80)\")\n",
+    "print(f\"Najgorszy scenariusz: {min_final:.2f} PLN (Bankructwo \u2620\ufe0f)\")\n",
     "print(\"-\" * 30)\n",
     "print(f\"VaR (95%): {var_95:.2f} PLN\")\n",
-    "print(f\"Oznacza to, że masz 95% pewności, że nie skończysz z kwotą mniejszą niż {var_95:.2f}.\")\n",
+    "print(f\"Oznacza to, \u017ce masz 95% pewno\u015bci, \u017ce nie sko\u0144czysz z kwot\u0105 mniejsz\u0105 ni\u017c {var_95:.2f}.\")\n",
     "print(f\"Ryzykowana kwota: {START_PRICE - var_95:.2f} PLN.\")\n",
     "\n",
     "# Histogram\n",
@@ -221,7 +228,7 @@
     "sns.histplot(final_prices, kde=True, color='green', bins=50)\n",
     "plt.axvline(START_PRICE, color='k', linestyle='--', label='Start')\n",
     "plt.axvline(var_95, color='red', linestyle='-', linewidth=3, label=f'VaR 95% ({var_95:.0f})')\n",
-    "plt.title(\"Rozkład kapitału po roku\")\n",
+    "plt.title(\"Rozk\u0142ad kapita\u0142u po roku\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -231,20 +238,20 @@
    "id": "40930ddb",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Zarządzanie Ryzykiem\n",
+    "## \ud83e\udde0 Podsumowanie: Zarz\u0105dzanie Ryzykiem\n",
     "\n",
-    "Monte Carlo to potężne narzędzie, bo pozwala \"przeżyć\" 1000 lat w jedną sekundę.\n",
+    "Monte Carlo to pot\u0119\u017cne narz\u0119dzie, bo pozwala \"prze\u017cy\u0107\" 1000 lat w jedn\u0105 sekund\u0119.\n",
     "\n",
-    "**Co nam to dało?**\n",
-    "Wiemy, że średnio zarobimy (średnia wyszła > 1000).\n",
-    "ALE wiemy też, że istnieje realne ryzyko (czerwona linia VaR), że skończymy z kwotą np. 700 zł.\n",
+    "**Co nam to da\u0142o?**\n",
+    "Wiemy, \u017ce \u015brednio zarobimy (\u015brednia wysz\u0142a > 1000).\n",
+    "ALE wiemy te\u017c, \u017ce istnieje realne ryzyko (czerwona linia VaR), \u017ce sko\u0144czymy z kwot\u0105 np. 700 z\u0142.\n",
     "\n",
-    "**Gdzie się tego używa?**\n",
+    "**Gdzie si\u0119 tego u\u017cywa?**\n",
     "1.  **Finanse:** Wycena opcji, ryzyko portfela.\n",
-    "2.  **Inżynieria:** Wytrzymałość mostu (losujemy siłę wiatru, jakość betonu).\n",
-    "3.  **Biznes:** Prognozowanie sprzedaży (losujemy popyt, ceny konkurencji).\n",
+    "2.  **In\u017cynieria:** Wytrzyma\u0142o\u015b\u0107 mostu (losujemy si\u0142\u0119 wiatru, jako\u015b\u0107 betonu).\n",
+    "3.  **Biznes:** Prognozowanie sprzeda\u017cy (losujemy popyt, ceny konkurencji).\n",
     "\n",
-    "Zamiast zgadywać jedną liczbę, podejmujesz decyzję w oparciu o prawdopodobieństwo."
+    "Zamiast zgadywa\u0107 jedn\u0105 liczb\u0119, podejmujesz decyzj\u0119 w oparciu o prawdopodobie\u0144stwo."
    ]
   }
  ],
