--- a/54_FFT_Signal_Processing.ipynb
+++ b/54_FFT_Signal_Processing.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/54_FFT_Signal_Processing.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ddb384a",
    "metadata": {},
    "source": [
-    "# 📡 FFT: Jak zamienić Czas na Częstotliwość?\n",
+    "# \ud83d\udce1 FFT: Jak zamieni\u0107 Czas na Cz\u0119stotliwo\u015b\u0107?\n",
     "\n",
-    "Większość danych, które widzisz (ceny, dźwięk), jest w **Domenie Czasu** (oś X to sekundy/dni).\n",
-    "FFT przenosi nas do **Domeny Częstotliwości** (oś X to Hz).\n",
+    "Wi\u0119kszo\u015b\u0107 danych, kt\u00f3re widzisz (ceny, d\u017awi\u0119k), jest w **Domenie Czasu** (o\u015b X to sekundy/dni).\n",
+    "FFT przenosi nas do **Domeny Cz\u0119stotliwo\u015bci** (o\u015b X to Hz).\n",
     "\n",
     "**Idea Fouriera:**\n",
-    "Każdy, nawet najbardziej skomplikowany wykres, można zbudować, dodając do siebie proste sinusoidy.\n",
+    "Ka\u017cdy, nawet najbardziej skomplikowany wykres, mo\u017cna zbudowa\u0107, dodaj\u0105c do siebie proste sinusoidy.\n",
     "\n",
-    "**Przykład praktyczny:**\n",
-    "Masz nagranie rozmowy, w tle słychać pisk klimatyzacji.\n",
-    "*   W czasie: Widzisz zaszumioną falę. Trudno to naprawić.\n",
-    "*   W częstotliwości: Widzisz wyraźny \"pik\" na 5000 Hz (to ten pisk).\n",
+    "**Przyk\u0142ad praktyczny:**\n",
+    "Masz nagranie rozmowy, w tle s\u0142ycha\u0107 pisk klimatyzacji.\n",
+    "*   W czasie: Widzisz zaszumion\u0105 fal\u0119. Trudno to naprawi\u0107.\n",
+    "*   W cz\u0119stotliwo\u015bci: Widzisz wyra\u017any \"pik\" na 5000 Hz (to ten pisk).\n",
     "*   Akcja: Zerujesz ten pik i wracasz do czasu (Inverse FFT). Szum znika.\n",
     "\n",
     "Zrobimy to teraz w kodzie."
@@ -44,28 +51,28 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.fft import fft, fftfreq, ifft\n",
     "\n",
-    "# 1. GENERUJEMY SYGNAŁ (Koktajl dźwiękowy)\n",
+    "# 1. GENERUJEMY SYGNA\u0141 (Koktajl d\u017awi\u0119kowy)\n",
     "# Ustawienia\n",
-    "SAMPLE_RATE = 1000  # Próbkowanie (ile punktów na sekundę)\n",
+    "SAMPLE_RATE = 1000  # Pr\u00f3bkowanie (ile punkt\u00f3w na sekund\u0119)\n",
     "DURATION = 2        # Sekundy\n",
     "\n",
-    "N = SAMPLE_RATE * DURATION # Liczba wszystkich punktów\n",
-    "x = np.linspace(0, DURATION, N, endpoint=False) # Oś czasu\n",
+    "N = SAMPLE_RATE * DURATION # Liczba wszystkich punkt\u00f3w\n",
+    "x = np.linspace(0, DURATION, N, endpoint=False) # O\u015b czasu\n",
     "\n",
-    "# Składniki sygnału\n",
-    "# 1. Czysty, niski sygnał (np. głos) - 5 Hz\n",
+    "# Sk\u0142adniki sygna\u0142u\n",
+    "# 1. Czysty, niski sygna\u0142 (np. g\u0142os) - 5 Hz\n",
     "signal_clean = 2.0 * np.sin(2 * np.pi * 5 * x)\n",
     "\n",
     "# 2. Szum (wysoki pisk) - 50 Hz\n",
     "noise = 0.5 * np.sin(2 * np.pi * 50 * x)\n",
     "\n",
-    "# 3. Mieszamy (To słyszy mikrofon)\n",
+    "# 3. Mieszamy (To s\u0142yszy mikrofon)\n",
     "signal_dirty = signal_clean + noise\n",
     "\n",
-    "# Wizualizacja (tylko kawałek, żeby było widać kształt)\n",
+    "# Wizualizacja (tylko kawa\u0142ek, \u017ceby by\u0142o wida\u0107 kszta\u0142t)\n",
     "plt.figure(figsize=(12, 4))\n",
     "plt.plot(x[:100], signal_dirty[:100])\n",
-    "plt.title(\"Sygnał w Czasie (Zaszumiony)\")\n",
+    "plt.title(\"Sygna\u0142 w Czasie (Zaszumiony)\")\n",
     "plt.xlabel(\"Czas (s)\")\n",
     "plt.ylabel(\"Amplituda\")\n",
     "plt.grid()\n",
@@ -77,12 +84,12 @@
    "id": "8a5b1cfb",
    "metadata": {},
    "source": [
-    "## Krok 1: FFT (Rozszczepienie światła)\n",
+    "## Krok 1: FFT (Rozszczepienie \u015bwiat\u0142a)\n",
     "\n",
-    "Teraz użyjemy `fft`.\n",
-    "Zwraca ona liczby zespolone (Complex Numbers). Nas interesuje ich **Moduł (Abs)**, czyli siła danej częstotliwości.\n",
+    "Teraz u\u017cyjemy `fft`.\n",
+    "Zwraca ona liczby zespolone (Complex Numbers). Nas interesuje ich **Modu\u0142 (Abs)**, czyli si\u0142a danej cz\u0119stotliwo\u015bci.\n",
     "\n",
-    "Oś X musimy przeliczyć sami (funkcja `fftfreq`), żeby wiedzieć, który słupek to ile Hz."
+    "O\u015b X musimy przeliczy\u0107 sami (funkcja `fftfreq`), \u017ceby wiedzie\u0107, kt\u00f3ry s\u0142upek to ile Hz."
    ]
   },
   {
@@ -107,9 +114,9 @@
      "text": [
       "ANALIZA:\n",
       "Widzisz dwa piki?\n",
-      "Jeden gigantyczny na 5 Hz (Nasz sygnał).\n",
+      "Jeden gigantyczny na 5 Hz (Nasz sygna\u0142).\n",
       "Jeden mniejszy na 50 Hz (Szum).\n",
-      "FFT idealnie rozpoznało składniki koktajlu!\n"
+      "FFT idealnie rozpozna\u0142o sk\u0142adniki koktajlu!\n"
      ]
     }
    ],
@@ -117,27 +124,27 @@
     "# 1. Liczymy FFT\n",
     "yf = fft(signal_dirty)\n",
     "\n",
-    "# 2. Generujemy oś częstotliwości (Oś X)\n",
+    "# 2. Generujemy o\u015b cz\u0119stotliwo\u015bci (O\u015b X)\n",
     "xf = fftfreq(N, 1 / SAMPLE_RATE)\n",
     "\n",
-    "# 3. Bierzemy tylko dodatnią połowę (FFT jest symetryczne, druga połowa to lustrzane odbicie)\n",
+    "# 3. Bierzemy tylko dodatni\u0105 po\u0142ow\u0119 (FFT jest symetryczne, druga po\u0142owa to lustrzane odbicie)\n",
     "# Interesuje nas zakres od 0 do N//2\n",
     "n_half = N // 2\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(xf[:n_half], np.abs(yf[:n_half])) # abs() jest kluczowe!\n",
-    "plt.title(\"Widmo Częstotliwości (FFT)\")\n",
-    "plt.xlabel(\"Częstotliwość (Hz)\")\n",
+    "plt.title(\"Widmo Cz\u0119stotliwo\u015bci (FFT)\")\n",
+    "plt.xlabel(\"Cz\u0119stotliwo\u015b\u0107 (Hz)\")\n",
     "plt.ylabel(\"Moc\")\n",
     "plt.grid()\n",
-    "plt.xlim(0, 60) # Zbliżenie na interesujący nas zakres\n",
+    "plt.xlim(0, 60) # Zbli\u017cenie na interesuj\u0105cy nas zakres\n",
     "plt.show()\n",
     "\n",
     "print(\"ANALIZA:\")\n",
     "print(\"Widzisz dwa piki?\")\n",
-    "print(\"Jeden gigantyczny na 5 Hz (Nasz sygnał).\")\n",
+    "print(\"Jeden gigantyczny na 5 Hz (Nasz sygna\u0142).\")\n",
     "print(\"Jeden mniejszy na 50 Hz (Szum).\")\n",
-    "print(\"FFT idealnie rozpoznało składniki koktajlu!\")"
+    "print(\"FFT idealnie rozpozna\u0142o sk\u0142adniki koktajlu!\")"
    ]
   },
   {
@@ -147,11 +154,11 @@
    "source": [
     "## Krok 2: Filtrowanie (Wycinamy Szum)\n",
     "\n",
-    "Skoro wiemy, że 50 Hz to szum, możemy to usunąć.\n",
-    "Działamy jak chirurg:\n",
+    "Skoro wiemy, \u017ce 50 Hz to szum, mo\u017cemy to usun\u0105\u0107.\n",
+    "Dzia\u0142amy jak chirurg:\n",
     "1.  Bierzemy wynik FFT.\n",
-    "2.  Wszystkie wartości powyżej np. 20 Hz ustawiamy na ZERO.\n",
-    "3.  Robimy **Odwrotną Transformatę (Inverse FFT)**, żeby wrócić do dźwięku."
+    "2.  Wszystkie warto\u015bci powy\u017cej np. 20 Hz ustawiamy na ZERO.\n",
+    "3.  Robimy **Odwrotn\u0105 Transformat\u0119 (Inverse FFT)**, \u017ceby wr\u00f3ci\u0107 do d\u017awi\u0119ku."
    ]
   },
   {
@@ -175,15 +182,15 @@
     "# Kopia wyniku FFT\n",
     "yf_clean = yf.copy()\n",
     "\n",
-    "# Filtr: Wyzeruj wszystko, co ma częstotliwość większą niż 20 Hz\n",
-    "# (Musimy to zrobić dla obu połówek - dodatniej i ujemnej)\n",
+    "# Filtr: Wyzeruj wszystko, co ma cz\u0119stotliwo\u015b\u0107 wi\u0119ksz\u0105 ni\u017c 20 Hz\n",
+    "# (Musimy to zrobi\u0107 dla obu po\u0142\u00f3wek - dodatniej i ujemnej)\n",
     "indices = np.abs(xf) > 20\n",
     "yf_clean[indices] = 0\n",
     "\n",
-    "# Wizualizacja po cięciu\n",
+    "# Wizualizacja po ci\u0119ciu\n",
     "plt.figure(figsize=(12, 4))\n",
     "plt.plot(xf[:n_half], np.abs(yf_clean[:n_half]), color='green')\n",
-    "plt.title(\"Widmo po filtrowaniu (Pik 50Hz zniknął)\")\n",
+    "plt.title(\"Widmo po filtrowaniu (Pik 50Hz znikn\u0105\u0142)\")\n",
     "plt.xlim(0, 60)\n",
     "plt.grid()\n",
     "plt.show()"
@@ -209,29 +216,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sukces! Czerwona linia przerywana (odzyskana z FFT) pokrywa się z zielonym oryginałem.\n"
+      "Sukces! Czerwona linia przerywana (odzyskana z FFT) pokrywa si\u0119 z zielonym orygina\u0142em.\n"
      ]
     }
    ],
    "source": [
-    "# Powrót do Czasu (iFFT)\n",
+    "# Powr\u00f3t do Czasu (iFFT)\n",
     "new_signal = ifft(yf_clean)\n",
     "\n",
-    "# Wizualizacja porównawcza\n",
+    "# Wizualizacja por\u00f3wnawcza\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "plt.subplot(2, 1, 1)\n",
-    "plt.plot(x[:100], signal_dirty[:100], label='Oryginał (Brudny)', color='gray', alpha=0.7)\n",
+    "plt.plot(x[:100], signal_dirty[:100], label='Orygina\u0142 (Brudny)', color='gray', alpha=0.7)\n",
     "plt.plot(x[:100], np.real(new_signal[:100]), label='Po FFT (Czysty)', color='red', linestyle='--')\n",
     "plt.legend()\n",
-    "plt.title(\"Naprawianie sygnału\")\n",
+    "plt.title(\"Naprawianie sygna\u0142u\")\n",
     "\n",
     "plt.subplot(2, 1, 2)\n",
     "plt.plot(x[:100], signal_clean[:100], label='Idealny Wzorzec', color='green')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "print(\"Sukces! Czerwona linia przerywana (odzyskana z FFT) pokrywa się z zielonym oryginałem.\")"
+    "print(\"Sukces! Czerwona linia przerywana (odzyskana z FFT) pokrywa si\u0119 z zielonym orygina\u0142em.\")"
    ]
   },
   {
@@ -239,17 +246,17 @@
    "id": "ac3c0487",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Jak słyszy AI?\n",
+    "## \ud83e\udde0 Podsumowanie: Jak s\u0142yszy AI?\n",
     "\n",
-    "Dokładnie tak działa kompresja **MP3** (wyrzuca częstotliwości, których ucho nie słyszy) i odszumianie w słuchawkach.\n",
+    "Dok\u0142adnie tak dzia\u0142a kompresja **MP3** (wyrzuca cz\u0119stotliwo\u015bci, kt\u00f3rych ucho nie s\u0142yszy) i odszumianie w s\u0142uchawkach.\n",
     "\n",
-    "W Deep Learningu (Audio), zamiast wrzucać do sieci surową falę (która jest długa i trudna), wrzucamy **Spektrogram**.\n",
+    "W Deep Learningu (Audio), zamiast wrzuca\u0107 do sieci surow\u0105 fal\u0119 (kt\u00f3ra jest d\u0142uga i trudna), wrzucamy **Spektrogram**.\n",
     "Spektrogram to obrazek, gdzie:\n",
-    "*   Oś X: Czas.\n",
-    "*   Oś Y: Częstotliwość (z FFT).\n",
+    "*   O\u015b X: Czas.\n",
+    "*   O\u015b Y: Cz\u0119stotliwo\u015b\u0107 (z FFT).\n",
     "*   Kolor: Moc.\n",
     "\n",
-    "Dzięki temu sieci CNN (te od obrazków) mogą \"widzieć\" dźwięk i rozpoznawać słowa (\"Hey Siri\")."
+    "Dzi\u0119ki temu sieci CNN (te od obrazk\u00f3w) mog\u0105 \"widzie\u0107\" d\u017awi\u0119k i rozpoznawa\u0107 s\u0142owa (\"Hey Siri\")."
    ]
   }
  ],
