--- a/55_LoRA_Fine_Tuning_Math.ipynb
+++ b/55_LoRA_Fine_Tuning_Math.ipynb
@@ -2,27 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/55_LoRA_Fine_Tuning_Math.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0379e65",
    "metadata": {},
    "source": [
-    "# 🔧 LoRA: Jak trenować giganty na domowym laptopie?\n",
+    "# \ud83d\udd27 LoRA: Jak trenowa\u0107 giganty na domowym laptopie?\n",
     "\n",
     "Fine-tuning wielkich modeli (LLM) polega na aktualizacji ich wag:\n",
     "$$ W_{new} = W_{old} + \\Delta W $$\n",
     "\n",
-    "Gdzie $\\Delta W$ (zmiana) jest tak samo wielka jak $W$. Jeśli $W$ ma 10 miliardów parametrów, to $\\Delta W$ też. To zatyka pamięć GPU.\n",
+    "Gdzie $\\Delta W$ (zmiana) jest tak samo wielka jak $W$. Je\u015bli $W$ ma 10 miliard\u00f3w parametr\u00f3w, to $\\Delta W$ te\u017c. To zatyka pami\u0119\u0107 GPU.\n",
     "\n",
     "**Idea LoRA:**\n",
-    "Hipoteza: Zmiana wiedzy ($\\Delta W$) nie jest \"szumem\". Ma strukturę. Można ją zapisać znacznie prościej.\n",
-    "Zastępujemy wielką macierz $\\Delta W$ iloczynem dwóch chudych macierzy $A$ i $B$:\n",
+    "Hipoteza: Zmiana wiedzy ($\\Delta W$) nie jest \"szumem\". Ma struktur\u0119. Mo\u017cna j\u0105 zapisa\u0107 znacznie pro\u015bciej.\n",
+    "Zast\u0119pujemy wielk\u0105 macierz $\\Delta W$ iloczynem dw\u00f3ch chudych macierzy $A$ i $B$:\n",
     "$$ \\Delta W \\approx A \\times B $$\n",
     "\n",
-    "*   $W$: Wymiar $1000 \\times 1000$ (1 mln parametrów).\n",
+    "*   $W$: Wymiar $1000 \\times 1000$ (1 mln parametr\u00f3w).\n",
     "*   $A$: Wymiar $1000 \\times 4$.\n",
     "*   $B$: Wymiar $4 \\times 1000$.\n",
-    "*   Razem: $4000 + 4000 = 8000$ parametrów.\n",
+    "*   Razem: $4000 + 4000 = 8000$ parametr\u00f3w.\n",
     "\n",
-    "**Zysk:** Zredukowaliśmy liczbę parametrów do treningu o **99.2%**, a wynik matematyczny (wymiar wyjścia) jest ten sam!"
+    "**Zysk:** Zredukowali\u015bmy liczb\u0119 parametr\u00f3w do treningu o **99.2%**, a wynik matematyczny (wymiar wyj\u015bcia) jest ten sam!"
    ]
   },
   {
@@ -36,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "Wymiar oryginalnej wagi: torch.Size([100, 100])\n",
-      "Liczba parametrów (zamrożonych): 10000\n"
+      "Liczba parametr\u00f3w (zamro\u017conych): 10000\n"
      ]
     }
    ],
@@ -47,17 +54,17 @@
     "import numpy as np\n",
     "\n",
     "# Konfiguracja\n",
-    "IN_DIM = 100   # Wejście\n",
-    "OUT_DIM = 100  # Wyjście\n",
-    "RANK = 4       # \"Ranga\" LoRA (Szerokość gardła - im mniej, tym większa kompresja)\n",
+    "IN_DIM = 100   # Wej\u015bcie\n",
+    "OUT_DIM = 100  # Wyj\u015bcie\n",
+    "RANK = 4       # \"Ranga\" LoRA (Szeroko\u015b\u0107 gard\u0142a - im mniej, tym wi\u0119ksza kompresja)\n",
     "\n",
     "# Symulacja Gigantycznej Warstwy (np. z GPT-3)\n",
-    "# To jest zamrożone (Frozen). Tego nie będziemy trenować.\n",
+    "# To jest zamro\u017cone (Frozen). Tego nie b\u0119dziemy trenowa\u0107.\n",
     "pretrained_layer = nn.Linear(IN_DIM, OUT_DIM, bias=False)\n",
     "pretrained_layer.weight.requires_grad = False # Mrozimy!\n",
     "\n",
     "print(f\"Wymiar oryginalnej wagi: {pretrained_layer.weight.shape}\")\n",
-    "print(f\"Liczba parametrów (zamrożonych): {pretrained_layer.weight.numel()}\")"
+    "print(f\"Liczba parametr\u00f3w (zamro\u017conych): {pretrained_layer.weight.numel()}\")"
    ]
   },
   {
@@ -67,15 +74,15 @@
    "source": [
     "## Implementacja LoRA od zera\n",
     "\n",
-    "Stworzymy klasę `LoRALayer`, która \"oplata\" oryginalną warstwę.\n",
-    "1.  **Ścieżka Główna:** Dane idą przez zamrożony model ($W_{old} \\cdot x$).\n",
-    "2.  **Ścieżka Boczna (LoRA):** Dane idą przez macierz A, potem przez B ($B \\cdot A \\cdot x$).\n",
+    "Stworzymy klas\u0119 `LoRALayer`, kt\u00f3ra \"oplata\" oryginaln\u0105 warstw\u0119.\n",
+    "1.  **\u015acie\u017cka G\u0142\u00f3wna:** Dane id\u0105 przez zamro\u017cony model ($W_{old} \\cdot x$).\n",
+    "2.  **\u015acie\u017cka Boczna (LoRA):** Dane id\u0105 przez macierz A, potem przez B ($B \\cdot A \\cdot x$).\n",
     "3.  **Suma:** Wynik to $W_{old} \\cdot x + (B \\cdot A) \\cdot x \\cdot scaling$.\n",
     "\n",
-    "**Ważny szczegół:**\n",
+    "**Wa\u017cny szczeg\u00f3\u0142:**\n",
     "*   Macierz A inicjalizujemy losowo.\n",
     "*   Macierz B inicjalizujemy zerami.\n",
-    "*   Dzięki temu na samym początku treningu LoRA nic nie zmienia (wynik = 0), więc nie psujemy wiedzy, którą model już ma."
+    "*   Dzi\u0119ki temu na samym pocz\u0105tku treningu LoRA nic nie zmienia (wynik = 0), wi\u0119c nie psujemy wiedzy, kt\u00f3r\u0105 model ju\u017c ma."
    ]
   },
   {
@@ -88,9 +95,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pełne parametry: 10800\n",
+      "Pe\u0142ne parametry: 10800\n",
       "Parametry do treningu (LoRA): 800\n",
-      "Oszczędność: 92.59% mniej pamięci!\n"
+      "Oszcz\u0119dno\u015b\u0107: 92.59% mniej pami\u0119ci!\n"
      ]
     }
    ],
@@ -98,9 +105,9 @@
     "class LoRAParametrization(nn.Module):\n",
     "    def __init__(self, original_layer, rank=4, alpha=1.0):\n",
     "        super().__init__()\n",
-    "        self.original_layer = original_layer # Zapisujemy oryginał\n",
+    "        self.original_layer = original_layer # Zapisujemy orygina\u0142\n",
     "        \n",
-    "        # Pobieramy wymiary z oryginału\n",
+    "        # Pobieramy wymiary z orygina\u0142u\n",
     "        in_dim = original_layer.in_features\n",
     "        out_dim = original_layer.out_features\n",
     "        \n",
@@ -110,13 +117,13 @@
     "        # B: Dekompresja (rank -> out) - Inicjalizacja ZERAMI!\n",
     "        self.lora_B = nn.Parameter(torch.zeros(rank, out_dim))\n",
     "        \n",
-    "        self.scale = alpha / rank # Stała skalująca\n",
+    "        self.scale = alpha / rank # Sta\u0142a skaluj\u0105ca\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # 1. Oryginalny wynik (Zamrożony)\n",
+    "        # 1. Oryginalny wynik (Zamro\u017cony)\n",
     "        original_out = self.original_layer(x)\n",
     "        \n",
-    "        # 2. Wynik LoRA (A potem B) - macierze w PyTorch mnoży się odwrotnie (x @ A @ B)\n",
+    "        # 2. Wynik LoRA (A potem B) - macierze w PyTorch mno\u017cy si\u0119 odwrotnie (x @ A @ B)\n",
     "        # x @ A -> [Batch, Rank]\n",
     "        # result @ B -> [Batch, Out]\n",
     "        lora_out = (x @ self.lora_A) @ self.lora_B\n",
@@ -131,9 +138,9 @@
     "trainable_params = sum(p.numel() for p in lora_model.parameters() if p.requires_grad)\n",
     "total_params = sum(p.numel() for p in lora_model.parameters())\n",
     "\n",
-    "print(f\"Pełne parametry: {total_params}\")\n",
+    "print(f\"Pe\u0142ne parametry: {total_params}\")\n",
     "print(f\"Parametry do treningu (LoRA): {trainable_params}\")\n",
-    "print(f\"Oszczędność: {100 - (trainable_params/total_params*100):.2f}% mniej pamięci!\")"
+    "print(f\"Oszcz\u0119dno\u015b\u0107: {100 - (trainable_params/total_params*100):.2f}% mniej pami\u0119ci!\")"
    ]
   },
   {
@@ -143,12 +150,12 @@
    "source": [
     "## Symulacja Fine-Tuningu\n",
     "\n",
-    "Załóżmy, że nasz \"Pre-trained Model\" umie mnożyć wejście przez 1.\n",
-    "Chcemy go douczyć, żeby mnożył wejście przez 2 (zmienił zachowanie), ale **nie dotykając oryginalnych wag**.\n",
+    "Za\u0142\u00f3\u017cmy, \u017ce nasz \"Pre-trained Model\" umie mno\u017cy\u0107 wej\u015bcie przez 1.\n",
+    "Chcemy go douczy\u0107, \u017ceby mno\u017cy\u0142 wej\u015bcie przez 2 (zmieni\u0142 zachowanie), ale **nie dotykaj\u0105c oryginalnych wag**.\n",
     "\n",
-    "*   Oryginał: $y = 1 \\cdot x$\n",
+    "*   Orygina\u0142: $y = 1 \\cdot x$\n",
     "*   Cel: $y = 2 \\cdot x$\n",
-    "*   Zadanie LoRA: Nauczyć się dodawać brakujące $1 \\cdot x$."
+    "*   Zadanie LoRA: Nauczy\u0107 si\u0119 dodawa\u0107 brakuj\u0105ce $1 \\cdot x$."
    ]
   },
   {
@@ -173,20 +180,20 @@
       "Epoka 80 | Loss: 0.002691\n",
       "Epoka 90 | Loss: 0.000427\n",
       "\n",
-      "✅ Trening zakończony.\n"
+      "\u2705 Trening zako\u0144czony.\n"
      ]
     }
    ],
    "source": [
     "# 1. Dane\n",
-    "# Wejście: losowe wektory\n",
-    "# Cel: Wejście * 2 (czyli przesunięcie o +x)\n",
+    "# Wej\u015bcie: losowe wektory\n",
+    "# Cel: Wej\u015bcie * 2 (czyli przesuni\u0119cie o +x)\n",
     "X = torch.randn(10, IN_DIM)\n",
-    "target = pretrained_layer(X) + X # Oryginał + X (czyli x2, zakładając że oryginał to Identity, ale tu jest losowy)\n",
-    "# Uprośćmy cel: Chcemy, żeby wynik był po prostu inny niż oryginał.\n",
-    "target = pretrained_layer(X) + 5.0 # Chcemy dodać 5 do każdego wyniku\n",
+    "target = pretrained_layer(X) + X # Orygina\u0142 + X (czyli x2, zak\u0142adaj\u0105c \u017ce orygina\u0142 to Identity, ale tu jest losowy)\n",
+    "# Upro\u015b\u0107my cel: Chcemy, \u017ceby wynik by\u0142 po prostu inny ni\u017c orygina\u0142.\n",
+    "target = pretrained_layer(X) + 5.0 # Chcemy doda\u0107 5 do ka\u017cdego wyniku\n",
     "\n",
-    "# 2. Optymalizator (Tylko dla parametrów LoRA!)\n",
+    "# 2. Optymalizator (Tylko dla parametr\u00f3w LoRA!)\n",
     "optimizer = optim.Adam(\n",
     "    [lora_model.lora_A, lora_model.lora_B], # Trenujemy tylko A i B\n",
     "    lr=0.1\n",
@@ -211,7 +218,7 @@
     "    if epoch % 10 == 0:\n",
     "        print(f\"Epoka {epoch} | Loss: {loss.item():.6f}\")\n",
     "\n",
-    "print(\"\\n✅ Trening zakończony.\")"
+    "print(\"\\n\u2705 Trening zako\u0144czony.\")"
    ]
   },
   {
@@ -224,33 +231,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suma wag oryginału (czy się zmieniła?): 0.7843\n",
-      "Siła wag LoRA (czy są niezerowe?): 6521.6572\n",
+      "Suma wag orygina\u0142u (czy si\u0119 zmieni\u0142a?): 0.7843\n",
+      "Si\u0142a wag LoRA (czy s\u0105 niezerowe?): 6521.6572\n",
       "\n",
-      "Różnica w wyniku (LoRA vs Oryginał): -2.0992\n",
-      "Oczekiwaliśmy ok. 5.0 (bo taki był cel treningu).\n"
+      "R\u00f3\u017cnica w wyniku (LoRA vs Orygina\u0142): -2.0992\n",
+      "Oczekiwali\u015bmy ok. 5.0 (bo taki by\u0142 cel treningu).\n"
      ]
     }
    ],
    "source": [
     "# WERYFIKACJA\n",
-    "# Sprawdźmy, czy wagi oryginału się zmieniły (nie powinny!)\n",
+    "# Sprawd\u017amy, czy wagi orygina\u0142u si\u0119 zmieni\u0142y (nie powinny!)\n",
     "original_weight_sum = pretrained_layer.weight.sum().item()\n",
-    "print(f\"Suma wag oryginału (czy się zmieniła?): {original_weight_sum:.4f}\")\n",
+    "print(f\"Suma wag orygina\u0142u (czy si\u0119 zmieni\u0142a?): {original_weight_sum:.4f}\")\n",
     "\n",
-    "# Sprawdźmy, czy LoRA się nauczyła (macierze A i B nie powinny być puste)\n",
+    "# Sprawd\u017amy, czy LoRA si\u0119 nauczy\u0142a (macierze A i B nie powinny by\u0107 puste)\n",
     "lora_magnitude = torch.matmul(lora_model.lora_A, lora_model.lora_B).abs().sum().item()\n",
-    "print(f\"Siła wag LoRA (czy są niezerowe?): {lora_magnitude:.4f}\")\n",
+    "print(f\"Si\u0142a wag LoRA (czy s\u0105 niezerowe?): {lora_magnitude:.4f}\")\n",
     "\n",
-    "# Test działania\n",
+    "# Test dzia\u0142ania\n",
     "with torch.no_grad():\n",
     "    x_test = torch.randn(1, IN_DIM)\n",
     "    orig_out = pretrained_layer(x_test)\n",
     "    lora_out = lora_model(x_test)\n",
     "    \n",
     "    diff = (lora_out - orig_out).mean().item()\n",
-    "    print(f\"\\nRóżnica w wyniku (LoRA vs Oryginał): {diff:.4f}\")\n",
-    "    print(\"Oczekiwaliśmy ok. 5.0 (bo taki był cel treningu).\")"
+    "    print(f\"\\nR\u00f3\u017cnica w wyniku (LoRA vs Orygina\u0142): {diff:.4f}\")\n",
+    "    print(\"Oczekiwali\u015bmy ok. 5.0 (bo taki by\u0142 cel treningu).\")"
    ]
   },
   {
@@ -258,16 +265,16 @@
    "id": "a47b3deb",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Adaptery\n",
+    "## \ud83e\udde0 Podsumowanie: Adaptery\n",
     "\n",
-    "Co się stało?\n",
-    "1.  Oryginalna sieć pozostała nienaruszona (Wagi są identyczne).\n",
-    "2.  Całą \"nową wiedzę\" (dodawanie 5.0) przejęły malutkie macierze A i B.\n",
+    "Co si\u0119 sta\u0142o?\n",
+    "1.  Oryginalna sie\u0107 pozosta\u0142a nienaruszona (Wagi s\u0105 identyczne).\n",
+    "2.  Ca\u0142\u0105 \"now\u0105 wiedz\u0119\" (dodawanie 5.0) przej\u0119\u0142y malutkie macierze A i B.\n",
     "\n",
     "**Dlaczego to rewolucja?**\n",
-    "Gdy ściągasz z internetu \"Llamę douczoną do pisania po polsku\", nie ściągasz 50 GB modelu. Ściągasz plik ważący **100 MB** (Adapter LoRA).\n",
-    "Wczytujesz bazową Llamę, doklejasz adapter i gotowe.\n",
-    "Możesz mieć jeden model bazowy i 10 adapterów (jeden do prawa, jeden do medycyny, jeden do kodowania) i przełączać je w locie."
+    "Gdy \u015bci\u0105gasz z internetu \"Llam\u0119 douczon\u0105 do pisania po polsku\", nie \u015bci\u0105gasz 50 GB modelu. \u015aci\u0105gasz plik wa\u017c\u0105cy **100 MB** (Adapter LoRA).\n",
+    "Wczytujesz bazow\u0105 Llam\u0119, doklejasz adapter i gotowe.\n",
+    "Mo\u017cesz mie\u0107 jeden model bazowy i 10 adapter\u00f3w (jeden do prawa, jeden do medycyny, jeden do kodowania) i prze\u0142\u0105cza\u0107 je w locie."
    ]
   }
  ],
