--- a/04_Statistics and Scaling.ipynb
+++ b/04_Statistics and Scaling.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/04_Statistics and Scaling.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ffb029d",
    "metadata": {},
    "source": [
-    "# 🧪 Statystyka i Skalowanie Danych\n",
+    "# \ud83e\uddea Statystyka i Skalowanie Danych\n",
     "\n",
-    "W tym notatniku przećwiczymy dwa kluczowe pojęcia w Data Science:\n",
+    "W tym notatniku prze\u0107wiczymy dwa kluczowe poj\u0119cia w Data Science:\n",
     "\n",
-    "1.  **Hipoteza Zerowa i P-value:** Jak matematycznie sprawdzić, czy nasz eksperyment (np. nowy lek) naprawdę działa, czy to tylko przypadek.\n",
-    "2.  **Skalowanie (Standaryzacja):** Jak przygotować dane liczbowe (np. Wiek i Zarobki), aby algorytmy Machine Learning nie \"zgłupiały\" przez różnice w wielkości liczb."
+    "1.  **Hipoteza Zerowa i P-value:** Jak matematycznie sprawdzi\u0107, czy nasz eksperyment (np. nowy lek) naprawd\u0119 dzia\u0142a, czy to tylko przypadek.\n",
+    "2.  **Skalowanie (Standaryzacja):** Jak przygotowa\u0107 dane liczbowe (np. Wiek i Zarobki), aby algorytmy Machine Learning nie \"zg\u0142upia\u0142y\" przez r\u00f3\u017cnice w wielko\u015bci liczb."
    ]
   },
   {
@@ -23,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biblioteki załadowane! Możemy zaczynać.\n"
+      "Biblioteki za\u0142adowane! Mo\u017cemy zaczyna\u0107.\n"
      ]
     }
    ],
@@ -33,7 +40,7 @@
     "from scipy import stats\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "\n",
-    "print(\"Biblioteki załadowane! Możemy zaczynać.\")"
+    "print(\"Biblioteki za\u0142adowane! Mo\u017cemy zaczyna\u0107.\")"
    ]
   },
   {
@@ -41,18 +48,18 @@
    "id": "fb8f0df0",
    "metadata": {},
    "source": [
-    "## CZĘŚĆ 1: P-value i Hipoteza Zerowa (Symulacja Medyczna)\n",
+    "## CZ\u0118\u015a\u0106 1: P-value i Hipoteza Zerowa (Symulacja Medyczna)\n",
     "\n",
-    "Wyobraź sobie, że testujemy nowy lek na odchudzanie.\n",
-    "Mamy dwie grupy po 100 osób:\n",
-    "1.  **Grupa A (Placebo):** Dostaje zwykły cukierek.\n",
-    "2.  **Grupa B (Lek):** Dostaje naszą nową substancję.\n",
+    "Wyobra\u017a sobie, \u017ce testujemy nowy lek na odchudzanie.\n",
+    "Mamy dwie grupy po 100 os\u00f3b:\n",
+    "1.  **Grupa A (Placebo):** Dostaje zwyk\u0142y cukierek.\n",
+    "2.  **Grupa B (Lek):** Dostaje nasz\u0105 now\u0105 substancj\u0119.\n",
     "\n",
     "### Zasady gry:\n",
-    "*   **Hipoteza Zerowa ($H_0$):** \"Nuda. Lek nie działa. Różnice w wadze to czysty przypadek.\"\n",
-    "*   **P-value:** Liczba, która mówi: \"Jaka jest szansa, że ten wynik to przypadek?\".\n",
-    "    *   Jeśli **p < 0.05** (mniej niż 5%) -> To nie przypadek! **Lek działa.** (Odrzucamy $H_0$)\n",
-    "    *   Jeśli **p > 0.05** -> To może być przypadek. Nie mamy dowodu. (Zostajemy przy $H_0$)"
+    "*   **Hipoteza Zerowa ($H_0$):** \"Nuda. Lek nie dzia\u0142a. R\u00f3\u017cnice w wadze to czysty przypadek.\"\n",
+    "*   **P-value:** Liczba, kt\u00f3ra m\u00f3wi: \"Jaka jest szansa, \u017ce ten wynik to przypadek?\".\n",
+    "    *   Je\u015bli **p < 0.05** (mniej ni\u017c 5%) -> To nie przypadek! **Lek dzia\u0142a.** (Odrzucamy $H_0$)\n",
+    "    *   Je\u015bli **p > 0.05** -> To mo\u017ce by\u0107 przypadek. Nie mamy dowodu. (Zostajemy przy $H_0$)"
    ]
   },
   {
@@ -65,35 +72,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średnia utrata wagi (Placebo): 1.84 kg\n",
-      "Średnia utrata wagi (Lek):     3.03 kg\n",
+      "\u015arednia utrata wagi (Placebo): 1.84 kg\n",
+      "\u015arednia utrata wagi (Lek):     3.03 kg\n",
       "--------------------------------------------------\n",
       "P-value wynosi: 0.0000000083\n",
       "--------------------------------------------------\n",
       "WERDYKT:\n",
-      "✅ P jest bliskie zera (mniejsze niż 0.05).\n",
+      "\u2705 P jest bliskie zera (mniejsze ni\u017c 0.05).\n",
       "To na pewno NIE jest przypadek.\n",
-      "WNIOSEK: Odrzucamy hipotezę zerową -> LEK DZIAŁA!\n"
+      "WNIOSEK: Odrzucamy hipotez\u0119 zerow\u0105 -> LEK DZIA\u0141A!\n"
      ]
     }
    ],
    "source": [
-    "# Ustawiamy \"ziarno\" losowości, żeby wyniki były powtarzalne\n",
+    "# Ustawiamy \"ziarno\" losowo\u015bci, \u017ceby wyniki by\u0142y powtarzalne\n",
     "np.random.seed(42)\n",
     "\n",
     "# 1. GENERUJEMY DANE (Symulacja)\n",
-    "# Grupa Placebo: Średnio chudną 2 kg, odchylenie standardowe 1.5\n",
+    "# Grupa Placebo: \u015arednio chudn\u0105 2 kg, odchylenie standardowe 1.5\n",
     "placebo = np.random.normal(loc=2.0, scale=1.5, size=100)\n",
     "\n",
-    "# Grupa Leku: Średnio chudną 3 kg (LEPIEJ!), odchylenie standardowe 1.5\n",
+    "# Grupa Leku: \u015arednio chudn\u0105 3 kg (LEPIEJ!), odchylenie standardowe 1.5\n",
     "lek = np.random.normal(loc=3.0, scale=1.5, size=100)\n",
     "\n",
-    "print(f\"Średnia utrata wagi (Placebo): {np.mean(placebo):.2f} kg\")\n",
-    "print(f\"Średnia utrata wagi (Lek):     {np.mean(lek):.2f} kg\")\n",
+    "print(f\"\u015arednia utrata wagi (Placebo): {np.mean(placebo):.2f} kg\")\n",
+    "print(f\"\u015arednia utrata wagi (Lek):     {np.mean(lek):.2f} kg\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "# 2. TEST STATYSTYCZNY (T-test)\n",
-    "# Sprawdzamy matematycznie, czy ta różnica (2kg vs 3kg) jest istotna.\n",
+    "# Sprawdzamy matematycznie, czy ta r\u00f3\u017cnica (2kg vs 3kg) jest istotna.\n",
     "t_stat, p_value = stats.ttest_ind(placebo, lek)\n",
     "\n",
     "print(f\"P-value wynosi: {p_value:.10f}\") \n",
@@ -104,13 +111,13 @@
     "\n",
     "# 3. INTERPRETACJA AUTOMATYCZNA\n",
     "if p_value < 0.05:\n",
-    "    print(\"✅ P jest bliskie zera (mniejsze niż 0.05).\")\n",
+    "    print(\"\u2705 P jest bliskie zera (mniejsze ni\u017c 0.05).\")\n",
     "    print(\"To na pewno NIE jest przypadek.\")\n",
-    "    print(\"WNIOSEK: Odrzucamy hipotezę zerową -> LEK DZIAŁA!\")\n",
+    "    print(\"WNIOSEK: Odrzucamy hipotez\u0119 zerow\u0105 -> LEK DZIA\u0141A!\")\n",
     "else:\n",
-    "    print(\"❌ P jest duże (większe niż 0.05).\")\n",
-    "    print(\"To mógł być przypadek.\")\n",
-    "    print(\"WNIOSEK: Nie mamy dowodów, że lek działa.\")"
+    "    print(\"\u274c P jest du\u017ce (wi\u0119ksze ni\u017c 0.05).\")\n",
+    "    print(\"To m\u00f3g\u0142 by\u0107 przypadek.\")\n",
+    "    print(\"WNIOSEK: Nie mamy dowod\u00f3w, \u017ce lek dzia\u0142a.\")"
    ]
   },
   {
@@ -118,18 +125,18 @@
    "id": "4e8ec91e",
    "metadata": {},
    "source": [
-    "## CZĘŚĆ 2: Skalowanie Danych (MinMax vs Standard)\n",
+    "## CZ\u0118\u015a\u0106 2: Skalowanie Danych (MinMax vs Standard)\n",
     "\n",
-    "Algorytmy (np. KNN, Sieci Neuronowe) widzą świat przez pryzmat liczb.\n",
-    "Jeśli masz:\n",
+    "Algorytmy (np. KNN, Sieci Neuronowe) widz\u0105 \u015bwiat przez pryzmat liczb.\n",
+    "Je\u015bli masz:\n",
     "*   **Wiek:** 30\n",
     "*   **Zarobki:** 10 000\n",
     "\n",
-    "Dla algorytmu zmiana zarobków o 100 jednostek jest \"większa i ważniejsza\" niż zmiana wieku o 10 lat. **To błąd!** Musimy sprowadzić te dane do \"wspólnego mianownika\".\n",
+    "Dla algorytmu zmiana zarobk\u00f3w o 100 jednostek jest \"wi\u0119ksza i wa\u017cniejsza\" ni\u017c zmiana wieku o 10 lat. **To b\u0142\u0105d!** Musimy sprowadzi\u0107 te dane do \"wsp\u00f3lnego mianownika\".\n",
     "\n",
-    "Mamy dwie główne metody:\n",
-    "1.  **Min-Max Scaler:** Ściska dane do przedziału **[0, 1]**. (Dobre dla obrazów).\n",
-    "2.  **Standard Scaler:** Przesuwa średnią do **0**. (Dobre dla większości algorytmów ML)."
+    "Mamy dwie g\u0142\u00f3wne metody:\n",
+    "1.  **Min-Max Scaler:** \u015aciska dane do przedzia\u0142u **[0, 1]**. (Dobre dla obraz\u00f3w).\n",
+    "2.  **Standard Scaler:** Przesuwa \u015bredni\u0105 do **0**. (Dobre dla wi\u0119kszo\u015bci algorytm\u00f3w ML)."
    ]
   },
   {
@@ -151,7 +158,7 @@
       "4    60    20000\n",
       "\n",
       "\n",
-      "--- PO MIN-MAX SCALER (Wartości 0-1) ---\n",
+      "--- PO MIN-MAX SCALER (Warto\u015bci 0-1) ---\n",
       "   Wiek   Zarobki\n",
       "0  0.00  0.000000\n",
       "1  0.25  0.088235\n",
@@ -160,7 +167,7 @@
       "4  1.00  1.000000\n",
       "\n",
       "\n",
-      "--- PO STANDARD SCALER (Wokół zera) ---\n",
+      "--- PO STANDARD SCALER (Wok\u00f3\u0142 zera) ---\n",
       "   Wiek  Zarobki\n",
       "0 -1.41    -1.07\n",
       "1 -0.71    -0.82\n",
@@ -171,10 +178,10 @@
     }
    ],
    "source": [
-    "# 1. Tworzymy dane z ogromną różnicą skali\n",
+    "# 1. Tworzymy dane z ogromn\u0105 r\u00f3\u017cnic\u0105 skali\n",
     "df = pd.DataFrame({\n",
-    "    'Wiek': [20, 30, 40, 50, 60],        # Małe liczby\n",
-    "    'Zarobki': [3000, 4500, 8000, 12000, 20000] # Duże liczby\n",
+    "    'Wiek': [20, 30, 40, 50, 60],        # Ma\u0142e liczby\n",
+    "    'Zarobki': [3000, 4500, 8000, 12000, 20000] # Du\u017ce liczby\n",
     "})\n",
     "\n",
     "print(\"--- DANE ORYGINALNE ---\")\n",
@@ -182,20 +189,20 @@
     "print(\"\\n\")\n",
     "\n",
     "# --- METODA A: MIN-MAX SCALER ---\n",
-    "# Wszystko będzie pomiędzy 0 a 1\n",
+    "# Wszystko b\u0119dzie pomi\u0119dzy 0 a 1\n",
     "scaler_minmax = MinMaxScaler()\n",
     "df_minmax = pd.DataFrame(scaler_minmax.fit_transform(df), columns=['Wiek', 'Zarobki'])\n",
     "\n",
-    "print(\"--- PO MIN-MAX SCALER (Wartości 0-1) ---\")\n",
+    "print(\"--- PO MIN-MAX SCALER (Warto\u015bci 0-1) ---\")\n",
     "print(df_minmax)\n",
     "print(\"\\n\")\n",
     "\n",
     "# --- METODA B: STANDARD SCALER ---\n",
-    "# Średnia = 0. Wartości ujemne = poniżej średniej.\n",
+    "# \u015arednia = 0. Warto\u015bci ujemne = poni\u017cej \u015bredniej.\n",
     "scaler_std = StandardScaler()\n",
     "df_std = pd.DataFrame(scaler_std.fit_transform(df), columns=['Wiek', 'Zarobki'])\n",
     "\n",
-    "print(\"--- PO STANDARD SCALER (Wokół zera) ---\")\n",
+    "print(\"--- PO STANDARD SCALER (Wok\u00f3\u0142 zera) ---\")\n",
     "print(df_std.round(2))"
    ]
   }
