--- a/19_Cross_Validation.ipynb
+++ b/19_Cross_Validation.ipynb
@@ -2,28 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/19_Cross_Validation.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e459ee0",
    "metadata": {},
    "source": [
-    "# 🔄 Cross-Validation: Prawdziwy Egzamin (K-Fold)\n",
+    "# \ud83d\udd04 Cross-Validation: Prawdziwy Egzamin (K-Fold)\n",
     "\n",
-    "Standardowe podejście do uczenia maszynowego to:\n",
+    "Standardowe podej\u015bcie do uczenia maszynowego to:\n",
     "1.  Podziel dane na Trening (80%) i Test (20%).\n",
     "2.  Naucz model.\n",
-    "3.  Sprawdź wynik.\n",
+    "3.  Sprawd\u017a wynik.\n",
     "\n",
     "**Problem:**\n",
-    "A co, jeśli do zbioru testowego trafiły same łatwe przykłady? Twój wynik będzie sztucznie zawyżony.\n",
-    "A co, jeśli trafiły same trudne? Wynik będzie zaniżony.\n",
+    "A co, je\u015bli do zbioru testowego trafi\u0142y same \u0142atwe przyk\u0142ady? Tw\u00f3j wynik b\u0119dzie sztucznie zawy\u017cony.\n",
+    "A co, je\u015bli trafi\u0142y same trudne? Wynik b\u0119dzie zani\u017cony.\n",
     "To jest **Wariancja Losowania**.\n",
     "\n",
-    "**Rozwiązanie: K-Fold Cross-Validation**\n",
-    "1.  Dzielimy dane na K części (np. 5 kawałków tortu).\n",
+    "**Rozwi\u0105zanie: K-Fold Cross-Validation**\n",
+    "1.  Dzielimy dane na K cz\u0119\u015bci (np. 5 kawa\u0142k\u00f3w tortu).\n",
     "2.  Trenujemy model 5 razy.\n",
-    "    *   Runda 1: Testujemy na kawałku 1, uczymy na reszcie.\n",
-    "    *   Runda 2: Testujemy na kawałku 2, uczymy na reszcie.\n",
+    "    *   Runda 1: Testujemy na kawa\u0142ku 1, uczymy na reszcie.\n",
+    "    *   Runda 2: Testujemy na kawa\u0142ku 2, uczymy na reszcie.\n",
     "    *   ...\n",
-    "3.  Wyciągamy średnią ze wszystkich rund.\n",
+    "3.  Wyci\u0105gamy \u015bredni\u0105 ze wszystkich rund.\n",
     "\n",
     "Dopiero ten wynik jest wiarygodny."
    ]
@@ -38,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dane załadowane.\n"
+      "Dane za\u0142adowane.\n"
      ]
     }
    ],
@@ -50,13 +57,13 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# 1. ŁADUJEMY DANE\n",
-    "# Użyjemy Drzewa Decyzyjnego, bo one są bardzo wrażliwe na zmianę danych (niestabilne).\n",
+    "# 1. \u0141ADUJEMY DANE\n",
+    "# U\u017cyjemy Drzewa Decyzyjnego, bo one s\u0105 bardzo wra\u017cliwe na zmian\u0119 danych (niestabilne).\n",
     "iris = load_iris()\n",
     "X = iris.data\n",
     "y = iris.target\n",
     "\n",
-    "print(\"Dane załadowane.\")"
+    "print(\"Dane za\u0142adowane.\")"
    ]
   },
   {
@@ -64,10 +71,10 @@
    "id": "b2bf7f69",
    "metadata": {},
    "source": [
-    "## Eksperyment 1: Loteria (Zwykły Split)\n",
+    "## Eksperyment 1: Loteria (Zwyk\u0142y Split)\n",
     "\n",
-    "Zróbmy pętlę, w której 5 razy losujemy podział danych (`train_test_split`) z innym ziarnem losowości (`random_state`).\n",
-    "Zobaczysz, jak bardzo wynik skacze góra-dół."
+    "Zr\u00f3bmy p\u0119tl\u0119, w kt\u00f3rej 5 razy losujemy podzia\u0142 danych (`train_test_split`) z innym ziarnem losowo\u015bci (`random_state`).\n",
+    "Zobaczysz, jak bardzo wynik skacze g\u00f3ra-d\u00f3\u0142."
    ]
   },
   {
@@ -80,31 +87,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- METODA STARA (Jeden podział) ---\n",
-      "Próba 1: Accuracy = 97.78%\n",
-      "Próba 2: Accuracy = 95.56%\n",
-      "Próba 3: Accuracy = 95.56%\n",
-      "Próba 4: Accuracy = 95.56%\n",
-      "Próba 5: Accuracy = 97.78%\n",
+      "--- METODA STARA (Jeden podzia\u0142) ---\n",
+      "Pr\u00f3ba 1: Accuracy = 97.78%\n",
+      "Pr\u00f3ba 2: Accuracy = 95.56%\n",
+      "Pr\u00f3ba 3: Accuracy = 95.56%\n",
+      "Pr\u00f3ba 4: Accuracy = 95.56%\n",
+      "Pr\u00f3ba 5: Accuracy = 97.78%\n",
       "\n",
-      "Wniosek: Raz masz 100%, raz 91%. Który wynik jest prawdziwy? Nie wiadomo.\n"
+      "Wniosek: Raz masz 100%, raz 91%. Kt\u00f3ry wynik jest prawdziwy? Nie wiadomo.\n"
      ]
     }
    ],
    "source": [
-    "print(\"--- METODA STARA (Jeden podział) ---\")\n",
+    "print(\"--- METODA STARA (Jeden podzia\u0142) ---\")\n",
     "\n",
     "for i in range(5):\n",
-    "    # Za każdym razem inne random_state (inne losowanie)\n",
+    "    # Za ka\u017cdym razem inne random_state (inne losowanie)\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=i)\n",
     "    \n",
     "    model = DecisionTreeClassifier()\n",
     "    model.fit(X_train, y_train)\n",
     "    wynik = accuracy_score(y_test, model.predict(X_test))\n",
     "    \n",
-    "    print(f\"Próba {i+1}: Accuracy = {wynik*100:.2f}%\")\n",
+    "    print(f\"Pr\u00f3ba {i+1}: Accuracy = {wynik*100:.2f}%\")\n",
     "\n",
-    "print(\"\\nWniosek: Raz masz 100%, raz 91%. Który wynik jest prawdziwy? Nie wiadomo.\")"
+    "print(\"\\nWniosek: Raz masz 100%, raz 91%. Kt\u00f3ry wynik jest prawdziwy? Nie wiadomo.\")"
    ]
   },
   {
@@ -114,11 +121,11 @@
    "source": [
     "## Eksperyment 2: Cross-Validation (K-Fold)\n",
     "\n",
-    "Teraz użyjemy `cross_val_score`.\n",
-    "Podzielimy dane na **5 części (folds)**.\n",
-    "Każdy przykład z danych zostanie użyty dokładnie raz jako test i 4 razy jako trening.\n",
+    "Teraz u\u017cyjemy `cross_val_score`.\n",
+    "Podzielimy dane na **5 cz\u0119\u015bci (folds)**.\n",
+    "Ka\u017cdy przyk\u0142ad z danych zostanie u\u017cyty dok\u0142adnie raz jako test i 4 razy jako trening.\n",
     "\n",
-    "To daje nam **5 niezależnych ocen** tego samego modelu."
+    "To daje nam **5 niezale\u017cnych ocen** tego samego modelu."
    ]
   },
   {
@@ -132,27 +139,27 @@
      "output_type": "stream",
      "text": [
       "--- METODA NOWA (Cross-Validation) ---\n",
-      "Wyniki poszczególnych rund: [1.         0.96666667 0.93333333 0.93333333 0.93333333]\n",
+      "Wyniki poszczeg\u00f3lnych rund: [1.         0.96666667 0.93333333 0.93333333 0.93333333]\n",
       "------------------------------\n",
-      "ŚREDNIA DOKŁADNOŚĆ: 95.33%\n",
-      "ODCHYLENIE (Niepewność): +/- 2.67%\n"
+      "\u015aREDNIA DOK\u0141ADNO\u015a\u0106: 95.33%\n",
+      "ODCHYLENIE (Niepewno\u015b\u0107): +/- 2.67%\n"
      ]
     }
    ],
    "source": [
-    "# Konfigurujemy K-Fold (5 części, tasujemy dane przed podziałem)\n",
+    "# Konfigurujemy K-Fold (5 cz\u0119\u015bci, tasujemy dane przed podzia\u0142em)\n",
     "kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "model = DecisionTreeClassifier()\n",
     "\n",
-    "# Magiczna linijka, która robi wszystko za nas\n",
+    "# Magiczna linijka, kt\u00f3ra robi wszystko za nas\n",
     "wyniki = cross_val_score(model, X, y, cv=kfold)\n",
     "\n",
     "print(\"--- METODA NOWA (Cross-Validation) ---\")\n",
-    "print(f\"Wyniki poszczególnych rund: {wyniki}\")\n",
+    "print(f\"Wyniki poszczeg\u00f3lnych rund: {wyniki}\")\n",
     "print(\"-\" * 30)\n",
-    "print(f\"ŚREDNIA DOKŁADNOŚĆ: {wyniki.mean()*100:.2f}%\")\n",
-    "print(f\"ODCHYLENIE (Niepewność): +/- {wyniki.std()*100:.2f}%\")"
+    "print(f\"\u015aREDNIA DOK\u0141ADNO\u015a\u0106: {wyniki.mean()*100:.2f}%\")\n",
+    "print(f\"ODCHYLENIE (Niepewno\u015b\u0107): +/- {wyniki.std()*100:.2f}%\")"
    ]
   },
   {
@@ -160,10 +167,10 @@
    "id": "200b9fbb",
    "metadata": {},
    "source": [
-    "## Wizualizacja Stabilności\n",
+    "## Wizualizacja Stabilno\u015bci\n",
     "\n",
-    "Narysujmy to na wykresie pudełkowym (Boxplot), żeby zobaczyć, jak bardzo nasz model jest \"rozchwiany\".\n",
-    "Porównamy **Drzewo Decyzyjne** (zwykle niestabilne) z **KNN** (zwykle stabilniejszy)."
+    "Narysujmy to na wykresie pude\u0142kowym (Boxplot), \u017ceby zobaczy\u0107, jak bardzo nasz model jest \"rozchwiany\".\n",
+    "Por\u00f3wnamy **Drzewo Decyzyjne** (zwykle niestabilne) z **KNN** (zwykle stabilniejszy)."
    ]
   },
   {
@@ -176,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Drzewo Decyzyjne: Średnia = 0.953, Std = 0.043\n",
-      "KNN (Sąsiedzi): Średnia = 0.967, Std = 0.045\n"
+      "Drzewo Decyzyjne: \u015arednia = 0.953, Std = 0.043\n",
+      "KNN (S\u0105siedzi): \u015arednia = 0.967, Std = 0.045\n"
      ]
     },
     {
@@ -203,27 +210,27 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# Porównujemy dwa modele\n",
+    "# Por\u00f3wnujemy dwa modele\n",
     "models = {\n",
     "    \"Drzewo Decyzyjne\": DecisionTreeClassifier(),\n",
-    "    \"KNN (Sąsiedzi)\": KNeighborsClassifier()\n",
+    "    \"KNN (S\u0105siedzi)\": KNeighborsClassifier()\n",
     "}\n",
     "\n",
     "results = []\n",
     "names = []\n",
     "\n",
     "for name, model in models.items():\n",
-    "    # Robimy 10-krotną walidację dla każdego modelu\n",
+    "    # Robimy 10-krotn\u0105 walidacj\u0119 dla ka\u017cdego modelu\n",
     "    cv_results = cross_val_score(model, X, y, cv=10, scoring='accuracy')\n",
     "    results.append(cv_results)\n",
     "    names.append(name)\n",
-    "    print(f\"{name}: Średnia = {cv_results.mean():.3f}, Std = {cv_results.std():.3f}\")\n",
+    "    print(f\"{name}: \u015arednia = {cv_results.mean():.3f}, Std = {cv_results.std():.3f}\")\n",
     "\n",
     "# Rysujemy\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.boxplot(results, labels=names)\n",
-    "plt.title('Porównanie Stabilności Modeli (Cross-Validation)')\n",
-    "plt.ylabel('Dokładność (Accuracy)')\n",
+    "plt.title('Por\u00f3wnanie Stabilno\u015bci Modeli (Cross-Validation)')\n",
+    "plt.ylabel('Dok\u0142adno\u015b\u0107 (Accuracy)')\n",
     "plt.grid(axis='y', alpha=0.5)\n",
     "plt.show()"
    ]
@@ -233,18 +240,18 @@
    "id": "90d9b5c6",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Zaufanie to waluta\n",
+    "## \ud83e\udde0 Podsumowanie: Zaufanie to waluta\n",
     "\n",
-    "Dlaczego Cross-Validation jest tak ważna?\n",
+    "Dlaczego Cross-Validation jest tak wa\u017cna?\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "W biznesie nie chodzi o to, żeby mieć najwyższy wynik. Chodzi o to, żeby mieć **przewidywalny** wynik.\n",
-    "*   Jeśli powiesz szefowi: \"Model ma 98% skuteczności\", a w przyszłym miesiącu spadnie do 85%, stracisz pracę.\n",
-    "*   Jeśli powiesz: \"Model ma średnio 94% skuteczności, z odchyleniem +/- 3%\", jesteś kryty (bo przewidziałeś spadki).\n",
+    "W biznesie nie chodzi o to, \u017ceby mie\u0107 najwy\u017cszy wynik. Chodzi o to, \u017ceby mie\u0107 **przewidywalny** wynik.\n",
+    "*   Je\u015bli powiesz szefowi: \"Model ma 98% skuteczno\u015bci\", a w przysz\u0142ym miesi\u0105cu spadnie do 85%, stracisz prac\u0119.\n",
+    "*   Je\u015bli powiesz: \"Model ma \u015brednio 94% skuteczno\u015bci, z odchyleniem +/- 3%\", jeste\u015b kryty (bo przewidzia\u0142e\u015b spadki).\n",
     "\n",
-    "**Kiedy stosować?**\n",
-    "*   **Zawsze**, gdy masz mały lub średni zbiór danych (< 50 000 wierszy).\n",
-    "*   W Deep Learningu (ogromne zbiory, np. zdjęcia) często się tego unika, bo trening trwa zbyt długo. Tam wracamy do zwykłego podziału Train/Test/Val, ale na ogromnych liczbach statystyka działa na naszą korzyść."
+    "**Kiedy stosowa\u0107?**\n",
+    "*   **Zawsze**, gdy masz ma\u0142y lub \u015bredni zbi\u00f3r danych (< 50 000 wierszy).\n",
+    "*   W Deep Learningu (ogromne zbiory, np. zdj\u0119cia) cz\u0119sto si\u0119 tego unika, bo trening trwa zbyt d\u0142ugo. Tam wracamy do zwyk\u0142ego podzia\u0142u Train/Test/Val, ale na ogromnych liczbach statystyka dzia\u0142a na nasz\u0105 korzy\u015b\u0107."
    ]
   }
  ],
