--- a/32_PyTorch_Tensors_Autograd.ipynb
+++ b/32_PyTorch_Tensors_Autograd.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/32_PyTorch_Tensors_Autograd.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a60f3d43",
    "metadata": {},
    "source": [
-    "# 🔥 PyTorch: Tensors & Autograd (Silnik Deep Learningu)\n",
+    "# \ud83d\udd25 PyTorch: Tensors & Autograd (Silnik Deep Learningu)\n",
     "\n",
-    "Wchodzimy w świat \"Prawdziwego AI\".\n",
-    "Większość modeli, o których słyszysz (ChatGPT, Stable Diffusion), jest napisana w **PyTorch**.\n",
+    "Wchodzimy w \u015bwiat \"Prawdziwego AI\".\n",
+    "Wi\u0119kszo\u015b\u0107 modeli, o kt\u00f3rych s\u0142yszysz (ChatGPT, Stable Diffusion), jest napisana w **PyTorch**.\n",
     "\n",
-    "Zrozumiemy dziś dwa pojęcia:\n",
+    "Zrozumiemy dzi\u015b dwa poj\u0119cia:\n",
     "\n",
     "1.  **Tensor:**\n",
     "    *   W NumPy mamy `np.array`.\n",
     "    *   W PyTorch mamy `torch.Tensor`.\n",
-    "    *   Różnica? Tensor można wrzucić na **GPU** (kartę graficzną), co przyspiesza obliczenia 100x.\n",
+    "    *   R\u00f3\u017cnica? Tensor mo\u017cna wrzuci\u0107 na **GPU** (kart\u0119 graficzn\u0105), co przyspiesza obliczenia 100x.\n",
     "\n",
     "2.  **Autograd (Automatic Differentiation):**\n",
-    "    *   W Deep Learningu musimy liczyć spadki (gradienty), żeby uczyć sieć.\n",
-    "    *   Liczenie tego ręcznie dla miliona wag jest niemożliwe.\n",
-    "    *   PyTorch \"śledzi\" każde działanie matematyczne, jakie wykonujesz, i potrafi \"odwinąć je do tyłu\", żeby policzyć błędy."
+    "    *   W Deep Learningu musimy liczy\u0107 spadki (gradienty), \u017ceby uczy\u0107 sie\u0107.\n",
+    "    *   Liczenie tego r\u0119cznie dla miliona wag jest niemo\u017cliwe.\n",
+    "    *   PyTorch \"\u015bledzi\" ka\u017cde dzia\u0142anie matematyczne, jakie wykonujesz, i potrafi \"odwin\u0105\u0107 je do ty\u0142u\", \u017ceby policzy\u0107 b\u0142\u0119dy."
    ]
   },
   {
@@ -46,7 +53,7 @@
     }
    ],
    "source": [
-    "# Instalacja (w Colab jest domyślnie, ale na lokalnym PC trzeba zainstalować)\n",
+    "# Instalacja (w Colab jest domy\u015blnie, ale na lokalnym PC trzeba zainstalowa\u0107)\n",
     "!uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu130\n",
     "\n",
     "import torch\n",
@@ -62,8 +69,8 @@
    "source": [
     "## Krok 1: Tensor vs NumPy\n",
     "\n",
-    "Zobaczysz, że składnia jest prawie identyczna. Jeśli znasz NumPy, znasz PyTorch.\n",
-    "Jedyna różnica to \"typ\" obiektu."
+    "Zobaczysz, \u017ce sk\u0142adnia jest prawie identyczna. Je\u015bli znasz NumPy, znasz PyTorch.\n",
+    "Jedyna r\u00f3\u017cnica to \"typ\" obiektu."
    ]
   },
   {
@@ -83,11 +90,11 @@
       "tensor([[1, 2],\n",
       "        [3, 4]])\n",
       "------------------------------\n",
-      "Operacje matematyczne są takie same:\n",
-      "Mnożenie (NumPy): \n",
+      "Operacje matematyczne s\u0105 takie same:\n",
+      "Mno\u017cenie (NumPy): \n",
       "[[2 4]\n",
       " [6 8]]\n",
-      "Mnożenie (Torch): \n",
+      "Mno\u017cenie (Torch): \n",
       "tensor([[2, 4],\n",
       "        [6, 8]])\n"
      ]
@@ -107,9 +114,9 @@
     "print(f\"Tensor:\\n{tensor}\")\n",
     "\n",
     "print(\"-\" * 30)\n",
-    "print(\"Operacje matematyczne są takie same:\")\n",
-    "print(f\"Mnożenie (NumPy): \\n{np_array * 2}\")\n",
-    "print(f\"Mnożenie (Torch): \\n{tensor * 2}\")"
+    "print(\"Operacje matematyczne s\u0105 takie same:\")\n",
+    "print(f\"Mno\u017cenie (NumPy): \\n{np_array * 2}\")\n",
+    "print(f\"Mno\u017cenie (Torch): \\n{tensor * 2}\")"
    ]
   },
   {
@@ -119,11 +126,11 @@
    "source": [
     "## Krok 2: Magia GPU (CUDA)\n",
     "\n",
-    "To jest powód, dla którego używamy PyTorch.\n",
-    "Zwykła macierz NumPy żyje w RAM-ie i jest liczona przez procesor (CPU).\n",
-    "Tensor możemy wysłać na kartę graficzną (GPU/CUDA).\n",
+    "To jest pow\u00f3d, dla kt\u00f3rego u\u017cywamy PyTorch.\n",
+    "Zwyk\u0142a macierz NumPy \u017cyje w RAM-ie i jest liczona przez procesor (CPU).\n",
+    "Tensor mo\u017cemy wys\u0142a\u0107 na kart\u0119 graficzn\u0105 (GPU/CUDA).\n",
     "\n",
-    "*Uwaga: Jeśli uruchamiasz to na zwykłym laptopie bez NVIDIA GPU, kod użyje CPU, ale składnia `to(device)` jest uniwersalna.*"
+    "*Uwaga: Je\u015bli uruchamiasz to na zwyk\u0142ym laptopie bez NVIDIA GPU, kod u\u017cyje CPU, ale sk\u0142adnia `to(device)` jest uniwersalna.*"
    ]
   },
   {
@@ -136,32 +143,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Znaleziono GPU NVIDIA (CUDA)!\n",
-      "Gdzie żyje nasz tensor? cuda:0\n",
-      "Teraz wszystkie obliczenia na 'x' będą super-szybkie.\n"
+      "\u2705 Znaleziono GPU NVIDIA (CUDA)!\n",
+      "Gdzie \u017cyje nasz tensor? cuda:0\n",
+      "Teraz wszystkie obliczenia na 'x' b\u0119d\u0105 super-szybkie.\n"
      ]
     }
    ],
    "source": [
-    "# Sprawdzamy, czy mamy dostępną kartę graficzną\n",
+    "# Sprawdzamy, czy mamy dost\u0119pn\u0105 kart\u0119 graficzn\u0105\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
-    "    print(\"✅ Znaleziono GPU NVIDIA (CUDA)!\")\n",
+    "    print(\"\u2705 Znaleziono GPU NVIDIA (CUDA)!\")\n",
     "elif torch.backends.mps.is_available():\n",
     "    device = torch.device(\"mps\")\n",
-    "    print(\"✅ Znaleziono GPU Apple Silicon (M1/M2)!\")\n",
+    "    print(\"\u2705 Znaleziono GPU Apple Silicon (M1/M2)!\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
-    "    print(\"⚠️ Brak GPU. Używamy procesora (CPU).\")\n",
+    "    print(\"\u26a0\ufe0f Brak GPU. U\u017cywamy procesora (CPU).\")\n",
     "\n",
     "# Tworzymy tensor\n",
     "x = torch.tensor([10.0, 20.0])\n",
     "\n",
-    "# Przenosimy go na urządzenie (to trwa ułamek sekundy, ale fizycznie kopiuje dane)\n",
+    "# Przenosimy go na urz\u0105dzenie (to trwa u\u0142amek sekundy, ale fizycznie kopiuje dane)\n",
     "x = x.to(device)\n",
     "\n",
-    "print(f\"Gdzie żyje nasz tensor? {x.device}\")\n",
-    "print(\"Teraz wszystkie obliczenia na 'x' będą super-szybkie.\")"
+    "print(f\"Gdzie \u017cyje nasz tensor? {x.device}\")\n",
+    "print(\"Teraz wszystkie obliczenia na 'x' b\u0119d\u0105 super-szybkie.\")"
    ]
   },
   {
@@ -171,16 +178,16 @@
    "source": [
     "## Krok 3: Autograd (Automatyczne Pochodne)\n",
     "\n",
-    "To jest **najważniejsza część**.\n",
-    "Wyobraź sobie prostą funkcję:\n",
+    "To jest **najwa\u017cniejsza cz\u0119\u015b\u0107**.\n",
+    "Wyobra\u017a sobie prost\u0105 funkcj\u0119:\n",
     "$$ y = x^2 + 5 $$\n",
     "\n",
-    "Chcemy policzyć pochodną (czyli nachylenie/gradient) w punkcie $x=3$.\n",
-    "Z matematyki wiemy, że:\n",
+    "Chcemy policzy\u0107 pochodn\u0105 (czyli nachylenie/gradient) w punkcie $x=3$.\n",
+    "Z matematyki wiemy, \u017ce:\n",
     "$$ y' = 2x $$\n",
-    "Więc dla $x=3$, wynik powinien wynosić $6$.\n",
+    "Wi\u0119c dla $x=3$, wynik powinien wynosi\u0107 $6$.\n",
     "\n",
-    "Sprawdźmy, czy PyTorch policzy to sam, bez znajomości wzoru na pochodną."
+    "Sprawd\u017amy, czy PyTorch policzy to sam, bez znajomo\u015bci wzoru na pochodn\u0105."
    ]
   },
   {
@@ -196,18 +203,18 @@
       "X: 3.0\n",
       "Y (Wynik funkcji): 14.0\n",
       "------------------------------\n",
-      "Matematyka mówi: pochodna z x^2 w punkcie 3 to 2*3 = 6.\n",
-      "PyTorch wyliczył: 6.0\n",
-      "✅ Autograd działa idealnie!\n"
+      "Matematyka m\u00f3wi: pochodna z x^2 w punkcie 3 to 2*3 = 6.\n",
+      "PyTorch wyliczy\u0142: 6.0\n",
+      "\u2705 Autograd dzia\u0142a idealnie!\n"
      ]
     }
    ],
    "source": [
     "# 1. Definiujemy X\n",
-    "# WAŻNE: requires_grad=True mówi PyTorchowi: \"Śledź każdą operację na tej zmiennej!\"\n",
+    "# WA\u017bNE: requires_grad=True m\u00f3wi PyTorchowi: \"\u015aled\u017a ka\u017cd\u0105 operacj\u0119 na tej zmiennej!\"\n",
     "x = torch.tensor(3.0, requires_grad=True)\n",
     "\n",
-    "# 2. Definiujemy funkcję Y (Symulacja błędu sieci)\n",
+    "# 2. Definiujemy funkcj\u0119 Y (Symulacja b\u0142\u0119du sieci)\n",
     "# y = x^2 + 5\n",
     "y = x**2 + 5\n",
     "\n",
@@ -215,16 +222,16 @@
     "print(f\"Y (Wynik funkcji): {y}\")\n",
     "\n",
     "# 3. MAGIA: Backward Pass (Wsteczna propagacja)\n",
-    "# Mówimy: \"Policz, jak zmiana X wpływa na Y\"\n",
+    "# M\u00f3wimy: \"Policz, jak zmiana X wp\u0142ywa na Y\"\n",
     "y.backward()\n",
     "\n",
     "# 4. Sprawdzamy wynik\n",
     "print(\"-\" * 30)\n",
-    "print(f\"Matematyka mówi: pochodna z x^2 w punkcie 3 to 2*3 = 6.\")\n",
-    "print(f\"PyTorch wyliczył: {x.grad}\")\n",
+    "print(f\"Matematyka m\u00f3wi: pochodna z x^2 w punkcie 3 to 2*3 = 6.\")\n",
+    "print(f\"PyTorch wyliczy\u0142: {x.grad}\")\n",
     "\n",
     "if x.grad == 6.0:\n",
-    "    print(\"✅ Autograd działa idealnie!\")"
+    "    print(\"\u2705 Autograd dzia\u0142a idealnie!\")"
    ]
   },
   {
@@ -232,21 +239,21 @@
    "id": "d5834356",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Po co nam to?\n",
+    "## \ud83e\udde0 Podsumowanie: Po co nam to?\n",
     "\n",
-    "W powyższym przykładzie `y = x^2 + 5`:\n",
-    "*   **x** to Wagi twojej sieci neuronowej (to, co chcemy poprawić).\n",
-    "*   **y** to Błąd sieci (Loss) - np. różnica między tym co sieć przewidziała, a prawdą.\n",
+    "W powy\u017cszym przyk\u0142adzie `y = x^2 + 5`:\n",
+    "*   **x** to Wagi twojej sieci neuronowej (to, co chcemy poprawi\u0107).\n",
+    "*   **y** to B\u0142\u0105d sieci (Loss) - np. r\u00f3\u017cnica mi\u0119dzy tym co sie\u0107 przewidzia\u0142a, a prawd\u0105.\n",
     "\n",
-    "Gdy wywołujesz `loss.backward()`, PyTorch automatycznie liczy:\n",
-    "*\"Jak bardzo muszę zmienić wagę X, żeby zmniejszyć błąd Y?\"*.\n",
+    "Gdy wywo\u0142ujesz `loss.backward()`, PyTorch automatycznie liczy:\n",
+    "*\"Jak bardzo musz\u0119 zmieni\u0107 wag\u0119 X, \u017ceby zmniejszy\u0107 b\u0142\u0105d Y?\"*.\n",
     "\n",
     "**Tu jest haczyk.**\n",
-    "W GPT-4 masz bilion wag (parametrów).\n",
-    "Ręczne liczenie pochodnych zajęłoby wieczność.\n",
-    "PyTorch robi to automatycznie, budując w pamięci tzw. **Graf Obliczeniowy**. Zapamiętuje, że `y` powstało przez podniesienie `x` do kwadratu, więc wie, jak wrócić po swoich śladach.\n",
+    "W GPT-4 masz bilion wag (parametr\u00f3w).\n",
+    "R\u0119czne liczenie pochodnych zaj\u0119\u0142oby wieczno\u015b\u0107.\n",
+    "PyTorch robi to automatycznie, buduj\u0105c w pami\u0119ci tzw. **Graf Obliczeniowy**. Zapami\u0119tuje, \u017ce `y` powsta\u0142o przez podniesienie `x` do kwadratu, wi\u0119c wie, jak wr\u00f3ci\u0107 po swoich \u015bladach.\n",
     "\n",
-    "W następnym notatniku użyjemy tego, żeby zbudować prawdziwą sieć w stylu **Object Oriented Programming**."
+    "W nast\u0119pnym notatniku u\u017cyjemy tego, \u017ceby zbudowa\u0107 prawdziw\u0105 sie\u0107 w stylu **Object Oriented Programming**."
    ]
   }
  ],
