--- a/35_ANOVA_Hypothesis_Testing.ipynb
+++ b/35_ANOVA_Hypothesis_Testing.ipynb
@@ -2,28 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/35_ANOVA_Hypothesis_Testing.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "667bfbdc",
    "metadata": {},
    "source": [
-    "# 📊 ANOVA: Jak porównać więcej niż dwie grupy?\n",
+    "# \ud83d\udcca ANOVA: Jak por\u00f3wna\u0107 wi\u0119cej ni\u017c dwie grupy?\n",
     "\n",
     "**Problem:**\n",
-    "T-test działa świetnie dla 2 grup (A vs B).\n",
-    "Jeśli masz 3 grupy (A, B, C) i zrobisz 3 osobne testy, to ryzyko, że \"przypadkiem\" znajdziesz różnicę, drastycznie rośnie (Problem wielokrotnych porównań).\n",
+    "T-test dzia\u0142a \u015bwietnie dla 2 grup (A vs B).\n",
+    "Je\u015bli masz 3 grupy (A, B, C) i zrobisz 3 osobne testy, to ryzyko, \u017ce \"przypadkiem\" znajdziesz r\u00f3\u017cnic\u0119, drastycznie ro\u015bnie (Problem wielokrotnych por\u00f3wna\u0144).\n",
     "\n",
-    "**Rozwiązanie: One-Way ANOVA (Jednoczynnikowa Analiza Wariancji).**\n",
-    "Testuje hipotezę zerową: *\"Średnie we WSZYSTKICH grupach są takie same\"*.\n",
+    "**Rozwi\u0105zanie: One-Way ANOVA (Jednoczynnikowa Analiza Wariancji).**\n",
+    "Testuje hipotez\u0119 zerow\u0105: *\"\u015arednie we WSZYSTKICH grupach s\u0105 takie same\"*.\n",
     "\n",
-    "*   Jeśli **p < 0.05** -> Przynajmniej jedna grupa różni się od reszty.\n",
-    "*   Ale uwaga: ANOVA nie mówi **która**. Do tego potrzebujemy testu \"post-hoc\" (Tukey HSD).\n",
+    "*   Je\u015bli **p < 0.05** -> Przynajmniej jedna grupa r\u00f3\u017cni si\u0119 od reszty.\n",
+    "*   Ale uwaga: ANOVA nie m\u00f3wi **kt\u00f3ra**. Do tego potrzebujemy testu \"post-hoc\" (Tukey HSD).\n",
     "\n",
     "### Scenariusz: Testy Strony WWW\n",
     "Mamy 3 wersje sklepu internetowego:\n",
     "1.  **Control:** Stara wersja.\n",
     "2.  **Design A:** Nowe kolory.\n",
-    "3.  **Design B:** Nowy układ przycisków.\n",
+    "3.  **Design B:** Nowy uk\u0142ad przycisk\u00f3w.\n",
     "\n",
-    "Chcemy sprawdzić, czy któraś wersja generuje większą sprzedaż."
+    "Chcemy sprawdzi\u0107, czy kt\u00f3ra\u015b wersja generuje wi\u0119ksz\u0105 sprzeda\u017c."
    ]
   },
   {
@@ -125,20 +132,20 @@
     "import seaborn as sns\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "\n",
-    "# 1. GENERUJEMY DANE (Symulacja Sprzedaży)\n",
+    "# 1. GENERUJEMY DANE (Symulacja Sprzeda\u017cy)\n",
     "np.random.seed(42)\n",
-    "n = 50 # próbek w każdej grupie\n",
+    "n = 50 # pr\u00f3bek w ka\u017cdej grupie\n",
     "\n",
-    "# Control: Średnia sprzedaż 100 zł\n",
+    "# Control: \u015arednia sprzeda\u017c 100 z\u0142\n",
     "control = np.random.normal(loc=100, scale=15, size=n)\n",
     "\n",
-    "# Design A: Średnia 103 zł (Minimalnie lepiej, ale czy istotnie?)\n",
+    "# Design A: \u015arednia 103 z\u0142 (Minimalnie lepiej, ale czy istotnie?)\n",
     "design_a = np.random.normal(loc=103, scale=15, size=n)\n",
     "\n",
-    "# Design B: Średnia 115 zł (Wyraźnie lepiej)\n",
+    "# Design B: \u015arednia 115 z\u0142 (Wyra\u017anie lepiej)\n",
     "design_b = np.random.normal(loc=115, scale=15, size=n)\n",
     "\n",
-    "# Łączymy w DataFrame\n",
+    "# \u0141\u0105czymy w DataFrame\n",
     "df = pd.DataFrame({\n",
     "    'Sprzedaz': np.concatenate([control, design_a, design_b]),\n",
     "    'Grupa': ['Control']*n + ['Design A']*n + ['Design B']*n\n",
@@ -147,13 +154,13 @@
     "print(\"--- DANE Z EKSPERYMENTU ---\")\n",
     "display(df.sample(5))\n",
     "\n",
-    "# Wizualizacja (Boxplot prawdę ci powie)\n",
+    "# Wizualizacja (Boxplot prawd\u0119 ci powie)\n",
     "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "# POPRAWKA: Dodaliśmy hue='Grupa' i legend=False\n",
+    "# POPRAWKA: Dodali\u015bmy hue='Grupa' i legend=False\n",
     "sns.boxplot(x='Grupa', y='Sprzedaz', data=df, hue='Grupa', palette='Set2', legend=False)\n",
     "\n",
-    "plt.title(\"Rozkład Sprzedaży w Grupach\")\n",
+    "plt.title(\"Rozk\u0142ad Sprzeda\u017cy w Grupach\")\n",
     "plt.show()"
    ]
   },
@@ -164,13 +171,13 @@
    "source": [
     "## Krok 1: Test ANOVA (F-Test)\n",
     "\n",
-    "ANOVA liczy tzw. **Statystykę F**.\n",
-    "$$ F = \\frac{\\text{Wariancja MIĘDZY grupami}}{\\text{Wariancja WEWNĄTRZ grup}} $$\n",
+    "ANOVA liczy tzw. **Statystyk\u0119 F**.\n",
+    "$$ F = \\frac{\\text{Wariancja MI\u0118DZY grupami}}{\\text{Wariancja WEWN\u0104TRZ grup}} $$\n",
     "\n",
-    "*   **Licznik (Między):** Jak bardzo \"rozjechane\" są średnie grup (A vs B vs C). Chcemy, żeby był duży.\n",
-    "*   **Mianownik (Wewnątrz):** Jak bardzo \"rozrzuceni\" są ludzie wewnątrz jednej grupy (szum). Chcemy, żeby był mały.\n",
+    "*   **Licznik (Mi\u0119dzy):** Jak bardzo \"rozjechane\" s\u0105 \u015brednie grup (A vs B vs C). Chcemy, \u017ceby by\u0142 du\u017cy.\n",
+    "*   **Mianownik (Wewn\u0105trz):** Jak bardzo \"rozrzuceni\" s\u0105 ludzie wewn\u0105trz jednej grupy (szum). Chcemy, \u017ceby by\u0142 ma\u0142y.\n",
     "\n",
-    "Jeśli F jest duże -> Różnica między grupami jest ważniejsza niż szum."
+    "Je\u015bli F jest du\u017ce -> R\u00f3\u017cnica mi\u0119dzy grupami jest wa\u017cniejsza ni\u017c szum."
    ]
   },
   {
@@ -187,9 +194,9 @@
       "Statystyka F: 20.2030\n",
       "P-value:      0.0000000177\n",
       "------------------------------\n",
-      "✅ WYNIK ISTOTNY: Odrzucamy hipotezę zerową.\n",
-      "Przynajmniej jedna grupa różni się od innych!\n",
-      "Ale która? ANOVA tego nie mówi.\n"
+      "\u2705 WYNIK ISTOTNY: Odrzucamy hipotez\u0119 zerow\u0105.\n",
+      "Przynajmniej jedna grupa r\u00f3\u017cni si\u0119 od innych!\n",
+      "Ale kt\u00f3ra? ANOVA tego nie m\u00f3wi.\n"
      ]
     }
    ],
@@ -204,11 +211,11 @@
     "\n",
     "print(\"-\" * 30)\n",
     "if p_value < 0.05:\n",
-    "    print(\"✅ WYNIK ISTOTNY: Odrzucamy hipotezę zerową.\")\n",
-    "    print(\"Przynajmniej jedna grupa różni się od innych!\")\n",
-    "    print(\"Ale która? ANOVA tego nie mówi.\")\n",
+    "    print(\"\u2705 WYNIK ISTOTNY: Odrzucamy hipotez\u0119 zerow\u0105.\")\n",
+    "    print(\"Przynajmniej jedna grupa r\u00f3\u017cni si\u0119 od innych!\")\n",
+    "    print(\"Ale kt\u00f3ra? ANOVA tego nie m\u00f3wi.\")\n",
     "else:\n",
-    "    print(\"❌ BRAK RÓŻNIC: Wszystkie zmiany to tylko szum.\")"
+    "    print(\"\u274c BRAK R\u00d3\u017bNIC: Wszystkie zmiany to tylko szum.\")"
    ]
   },
   {
@@ -218,12 +225,12 @@
    "source": [
     "## Krok 2: Detektywistyczna Robota (Post-hoc Tukey HSD)\n",
     "\n",
-    "Skoro ANOVA powiedziała \"TAK, jest różnica\", to musimy sprawdzić pary:\n",
+    "Skoro ANOVA powiedzia\u0142a \"TAK, jest r\u00f3\u017cnica\", to musimy sprawdzi\u0107 pary:\n",
     "*   Control vs A\n",
     "*   Control vs B\n",
     "*   A vs B\n",
     "\n",
-    "Użyjemy testu **Tukey HSD (Honest Significant Difference)**. Jest on bardziej rygorystyczny niż zwykły T-test, żeby uniknąć błędów przy wielokrotnym sprawdzaniu."
+    "U\u017cyjemy testu **Tukey HSD (Honest Significant Difference)**. Jest on bardziej rygorystyczny ni\u017c zwyk\u0142y T-test, \u017ceby unikn\u0105\u0107 b\u0142\u0119d\u00f3w przy wielokrotnym sprawdzaniu."
    ]
   },
   {
@@ -236,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- SZCZEGÓŁOWE PORÓWNANIE (TUKEY) ---\n",
+      "--- SZCZEG\u00d3\u0141OWE POR\u00d3WNANIE (TUKEY) ---\n",
       "  Multiple Comparison of Means - Tukey HSD, FWER=0.05   \n",
       "========================================================\n",
       " group1   group2  meandiff p-adj   lower   upper  reject\n",
@@ -262,14 +269,14 @@
     "# Test Tukeya z biblioteki statsmodels\n",
     "tukey = pairwise_tukeyhsd(endog=df['Sprzedaz'],   # Dane liczbowe\n",
     "                          groups=df['Grupa'],     # Etykiety grup\n",
-    "                          alpha=0.05)             # Poziom istotności\n",
+    "                          alpha=0.05)             # Poziom istotno\u015bci\n",
     "\n",
-    "print(\"--- SZCZEGÓŁOWE PORÓWNANIE (TUKEY) ---\")\n",
+    "print(\"--- SZCZEG\u00d3\u0141OWE POR\u00d3WNANIE (TUKEY) ---\")\n",
     "print(tukey)\n",
     "\n",
-    "# Wyświetlmy to na wykresie\n",
+    "# Wy\u015bwietlmy to na wykresie\n",
     "fig = tukey.plot_simultaneous()\n",
-    "plt.title(\"Które grupy nachodzą na siebie?\")\n",
+    "plt.title(\"Kt\u00f3re grupy nachodz\u0105 na siebie?\")\n",
     "plt.show()"
    ]
   },
@@ -278,20 +285,20 @@
    "id": "4f0e9c4d",
    "metadata": {},
    "source": [
-    "## 🧠 Analiza Wyników (Jak to czytać?)\n",
+    "## \ud83e\udde0 Analiza Wynik\u00f3w (Jak to czyta\u0107?)\n",
     "\n",
-    "Spójrz na tabelkę powyżej (kolumna `reject`):\n",
+    "Sp\u00f3jrz na tabelk\u0119 powy\u017cej (kolumna `reject`):\n",
     "\n",
     "1.  **Control vs Design A:** `reject = False`.\n",
-    "    *   Wniosek: Różnica między 100 zł a 103 zł jest **nieistotna statystycznie**. To mógł być przypadek. Szkoda pieniędzy na wdrażanie Designu A.\n",
+    "    *   Wniosek: R\u00f3\u017cnica mi\u0119dzy 100 z\u0142 a 103 z\u0142 jest **nieistotna statystycznie**. To m\u00f3g\u0142 by\u0107 przypadek. Szkoda pieni\u0119dzy na wdra\u017canie Designu A.\n",
     "\n",
     "2.  **Control vs Design B:** `reject = True`.\n",
-    "    *   Wniosek: Różnica jest prawdziwa. Design B faktycznie działa lepiej.\n",
+    "    *   Wniosek: R\u00f3\u017cnica jest prawdziwa. Design B faktycznie dzia\u0142a lepiej.\n",
     "\n",
     "3.  **Design A vs Design B:** `reject = True`.\n",
-    "    *   Wniosek: Design B jest też istotnie lepszy od Designu A.\n",
+    "    *   Wniosek: Design B jest te\u017c istotnie lepszy od Designu A.\n",
     "\n",
-    "**Zwycięzca:** Design B."
+    "**Zwyci\u0119zca:** Design B."
    ]
   },
   {
@@ -299,16 +306,16 @@
    "id": "5a67eecb",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Sygnał kontra Szum\n",
+    "## \ud83e\udde0 Podsumowanie: Sygna\u0142 kontra Szum\n",
     "\n",
-    "Dlaczego nie mogliśmy po prostu spojrzeć na średnie (100 vs 115) i uznać, że B jest lepsze?\n",
+    "Dlaczego nie mogli\u015bmy po prostu spojrze\u0107 na \u015brednie (100 vs 115) i uzna\u0107, \u017ce B jest lepsze?\n",
     "\n",
-    "**Tu jest haczyk (Wariancja Wewnątrz-grupowa).**\n",
-    "Wyobraź sobie, że w grupie Control jeden klient kupił towar za 1000 zł (tzw. Outlier). Średnia grupy skoczyłaby w górę.\n",
-    "ANOVA bierze to pod uwagę.\n",
-    "Test F sprawdza: *\"Czy różnica między średnimi grup (Sygnał) jest wystarczająco duża, by przebić się przez rozrzut danych wewnątrz grup (Szum)?\"*.\n",
+    "**Tu jest haczyk (Wariancja Wewn\u0105trz-grupowa).**\n",
+    "Wyobra\u017a sobie, \u017ce w grupie Control jeden klient kupi\u0142 towar za 1000 z\u0142 (tzw. Outlier). \u015arednia grupy skoczy\u0142aby w g\u00f3r\u0119.\n",
+    "ANOVA bierze to pod uwag\u0119.\n",
+    "Test F sprawdza: *\"Czy r\u00f3\u017cnica mi\u0119dzy \u015brednimi grup (Sygna\u0142) jest wystarczaj\u0105co du\u017ca, by przebi\u0107 si\u0119 przez rozrzut danych wewn\u0105trz grup (Szum)?\"*.\n",
     "\n",
-    "Dlatego ANOVA jest podstawowym narzędziem w **A/B Testing** w dużych firmach (Netflix, Uber, Amazon), gdzie małe zmiany mogą generować miliony, ale łatwo je pomylić z szumem."
+    "Dlatego ANOVA jest podstawowym narz\u0119dziem w **A/B Testing** w du\u017cych firmach (Netflix, Uber, Amazon), gdzie ma\u0142e zmiany mog\u0105 generowa\u0107 miliony, ale \u0142atwo je pomyli\u0107 z szumem."
    ]
   }
  ],
