--- a/41_GAN_Generative_Adversarial_Network.ipynb
+++ b/41_GAN_Generative_Adversarial_Network.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/41_GAN_Generative_Adversarial_Network.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8877f737",
    "metadata": {},
    "source": [
-    "# 🎨 GAN: Wojna Sieci (Generator vs Dyskryminator)\n",
+    "# \ud83c\udfa8 GAN: Wojna Sieci (Generator vs Dyskryminator)\n",
     "\n",
-    "W GAN-ie mamy dwóch graczy:\n",
+    "W GAN-ie mamy dw\u00f3ch graczy:\n",
     "\n",
-    "1.  **Generator (Fałszerz):**\n",
+    "1.  **Generator (Fa\u0142szerz):**\n",
     "    *   Dostaje losowy szum (przypadkowe liczby).\n",
-    "    *   Jego zadaniem jest stworzyć z tego obrazek, który oszuka Policjanta.\n",
-    "    *   *Cel:* Sprawić, by Policjant powiedział \"To oryginał\".\n",
+    "    *   Jego zadaniem jest stworzy\u0107 z tego obrazek, kt\u00f3ry oszuka Policjanta.\n",
+    "    *   *Cel:* Sprawi\u0107, by Policjant powiedzia\u0142 \"To orygina\u0142\".\n",
     "\n",
     "2.  **Dyskryminator (Policjant):**\n",
-    "    *   Dostaje obrazki prawdziwe (z bazy danych) i fałszywe (od Generatora).\n",
-    "    *   Jego zadaniem jest je odróżnić.\n",
-    "    *   *Cel:* Bezbłędnie wykrywać fałszywki.\n",
+    "    *   Dostaje obrazki prawdziwe (z bazy danych) i fa\u0142szywe (od Generatora).\n",
+    "    *   Jego zadaniem jest je odr\u00f3\u017cni\u0107.\n",
+    "    *   *Cel:* Bezb\u0142\u0119dnie wykrywa\u0107 fa\u0142szywki.\n",
     "\n",
-    "Trenują się nawzajem. Im lepszy jest Fałszerz, tym lepszy musi być Policjant (i odwrotnie).\n",
-    "Użyjemy zbioru **MNIST** (cyfry), żeby nauczyć sieć pisać ręcznie."
+    "Trenuj\u0105 si\u0119 nawzajem. Im lepszy jest Fa\u0142szerz, tym lepszy musi by\u0107 Policjant (i odwrotnie).\n",
+    "U\u017cyjemy zbioru **MNIST** (cyfry), \u017ceby nauczy\u0107 sie\u0107 pisa\u0107 r\u0119cznie."
    ]
   },
   {
@@ -33,17 +40,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9.91M/9.91M [00:09<00:00, 1.01MB/s]\n",
-      "100%|██████████| 28.9k/28.9k [00:00<00:00, 196kB/s]\n",
-      "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.15MB/s]\n",
-      "100%|██████████| 4.54k/4.54k [00:00<00:00, 18.4MB/s]"
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 9.91M/9.91M [00:09<00:00, 1.01MB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 28.9k/28.9k [00:00<00:00, 196kB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 1.65M/1.65M [00:01<00:00, 1.15MB/s]\n",
+      "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 4.54k/4.54k [00:00<00:00, 18.4MB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dane gotowe. Urządzenie: cuda\n"
+      "Dane gotowe. Urz\u0105dzenie: cuda\n"
      ]
     },
     {
@@ -65,21 +72,21 @@
     "\n",
     "# Konfiguracja\n",
     "BATCH_SIZE = 64\n",
-    "LR = 0.0002 # GAN-y lubią mały Learning Rate\n",
-    "EPOCHS = 50  # Żeby zobaczyć efekt, trzeba trochę potrenować\n",
+    "LR = 0.0002 # GAN-y lubi\u0105 ma\u0142y Learning Rate\n",
+    "EPOCHS = 50  # \u017beby zobaczy\u0107 efekt, trzeba troch\u0119 potrenowa\u0107\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# 1. DANE (MNIST)\n",
     "# Transformujemy: Zamiana na Tensor + Normalizacja do zakresu [-1, 1]\n",
     "transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.5,), (0.5,)) # Ważne dla Tanh w Generatorze\n",
+    "    transforms.Normalize((0.5,), (0.5,)) # Wa\u017cne dla Tanh w Generatorze\n",
     "])\n",
     "\n",
     "dataset = datasets.MNIST(root=\"data\", train=True, transform=transform, download=True)\n",
     "loader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "print(f\"Dane gotowe. Urządzenie: {DEVICE}\")"
+    "print(f\"Dane gotowe. Urz\u0105dzenie: {DEVICE}\")"
    ]
   },
   {
@@ -90,16 +97,16 @@
     "## Budowa Graczy\n",
     "\n",
     "1.  **Generator:**\n",
-    "    *   Wejście: Wektor losowy (np. 64 liczby) -> tzw. Latent Space.\n",
+    "    *   Wej\u015bcie: Wektor losowy (np. 64 liczby) -> tzw. Latent Space.\n",
     "    *   Warstwy: Linear -> ReLU.\n",
-    "    *   Wyjście: Obrazek 28x28 (784 piksele).\n",
-    "    *   **Ważne:** Na końcu używamy `Tanh`, żeby piksele były w zakresie [-1, 1].\n",
+    "    *   Wyj\u015bcie: Obrazek 28x28 (784 piksele).\n",
+    "    *   **Wa\u017cne:** Na ko\u0144cu u\u017cywamy `Tanh`, \u017ceby piksele by\u0142y w zakresie [-1, 1].\n",
     "\n",
     "2.  **Dyskryminator:**\n",
-    "    *   Wejście: Obrazek 28x28 (784 piksele).\n",
-    "    *   Warstwy: Linear -> LeakyReLU (lepiej działa w GAN).\n",
-    "    *   Wyjście: Jedna liczba (Prawdopodobieństwo: 1=Prawda, 0=Fałsz).\n",
-    "    *   **Ważne:** Na końcu `Sigmoid`."
+    "    *   Wej\u015bcie: Obrazek 28x28 (784 piksele).\n",
+    "    *   Warstwy: Linear -> LeakyReLU (lepiej dzia\u0142a w GAN).\n",
+    "    *   Wyj\u015bcie: Jedna liczba (Prawdopodobie\u0144stwo: 1=Prawda, 0=Fa\u0142sz).\n",
+    "    *   **Wa\u017cne:** Na ko\u0144cu `Sigmoid`."
    ]
   },
   {
@@ -126,7 +133,7 @@
     "            nn.Linear(256, 1024),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(1024, img_dim),\n",
-    "            nn.Tanh()  # Wyjście -1 do 1\n",
+    "            nn.Tanh()  # Wyj\u015bcie -1 do 1\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -141,7 +148,7 @@
     "            nn.Linear(1024, 256),\n",
     "            nn.LeakyReLU(0.2),\n",
     "            nn.Linear(256, 1),\n",
-    "            nn.Sigmoid() # Prawdopodobieństwo (0-1)\n",
+    "            nn.Sigmoid() # Prawdopodobie\u0144stwo (0-1)\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -167,20 +174,20 @@
    "id": "9264cc04",
    "metadata": {},
    "source": [
-    "## Pętla Treningowa (Wojna)\n",
+    "## P\u0119tla Treningowa (Wojna)\n",
     "\n",
-    "To jest najtrudniejsza część. W każdej pętli:\n",
+    "To jest najtrudniejsza cz\u0119\u015b\u0107. W ka\u017cdej p\u0119tli:\n",
     "\n",
     "1.  **Trenujemy Dyskryminatora:**\n",
-    "    *   Pokazujemy mu prawdziwe zdjęcia (wymagamy 1).\n",
-    "    *   Pokazujemy mu fałszywki wygenerowane przez Generator (wymagamy 0).\n",
-    "    *   Liczymy błąd i poprawiamy Policjanta.\n",
+    "    *   Pokazujemy mu prawdziwe zdj\u0119cia (wymagamy 1).\n",
+    "    *   Pokazujemy mu fa\u0142szywki wygenerowane przez Generator (wymagamy 0).\n",
+    "    *   Liczymy b\u0142\u0105d i poprawiamy Policjanta.\n",
     "\n",
     "2.  **Trenujemy Generatora:**\n",
-    "    *   Generujemy fałszywki.\n",
+    "    *   Generujemy fa\u0142szywki.\n",
     "    *   Pokazujemy je Policjantowi.\n",
-    "    *   **Haczyk:** Chcemy, żeby Policjant powiedział 1 (oszukujemy go!).\n",
-    "    *   Liczymy błąd i poprawiamy Fałszerza."
+    "    *   **Haczyk:** Chcemy, \u017ceby Policjant powiedzia\u0142 1 (oszukujemy go!).\n",
+    "    *   Liczymy b\u0142\u0105d i poprawiamy Fa\u0142szerza."
    ]
   },
   {
@@ -193,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rozpoczynam trening (To potrwa chwilę)...\n",
+      "Rozpoczynam trening (To potrwa chwil\u0119)...\n",
       "Epoka [1/50] Loss D: 0.0392, Loss G: 6.1809\n",
       "Epoka [2/50] Loss D: 0.0397, Loss G: 4.3559\n",
       "Epoka [3/50] Loss D: 0.0565, Loss G: 5.0640\n",
@@ -248,39 +255,39 @@
     }
    ],
    "source": [
-    "# Lista do przechowywania postępów\n",
-    "fixed_noise = torch.randn(9, z_dim).to(DEVICE) # Stały szum do wizualizacji (żeby widzieć jak te same liczby zmieniają się w cyfry)\n",
+    "# Lista do przechowywania post\u0119p\u00f3w\n",
+    "fixed_noise = torch.randn(9, z_dim).to(DEVICE) # Sta\u0142y szum do wizualizacji (\u017ceby widzie\u0107 jak te same liczby zmieniaj\u0105 si\u0119 w cyfry)\n",
     "step = 0\n",
     "\n",
-    "print(\"Rozpoczynam trening (To potrwa chwilę)...\")\n",
+    "print(\"Rozpoczynam trening (To potrwa chwil\u0119)...\")\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
     "    for batch_idx, (real, _) in enumerate(loader):\n",
     "        # Przygotowanie danych\n",
-    "        real = real.view(-1, 28*28).to(DEVICE) # Spłaszczamy obrazek [Batch, 784]\n",
+    "        real = real.view(-1, 28*28).to(DEVICE) # Sp\u0142aszczamy obrazek [Batch, 784]\n",
     "        batch_size = real.shape[0]\n",
     "        \n",
     "        ### 1. TRENING DYSKRYMINATORA (POLICJANT) ###\n",
     "        # Generujemy szum\n",
     "        noise = torch.randn(batch_size, z_dim).to(DEVICE)\n",
-    "        fake = generator(noise) # Fałszywki\n",
+    "        fake = generator(noise) # Fa\u0142szywki\n",
     "        \n",
     "        # Ocena prawdziwych (chcemy same jedynki)\n",
     "        disc_real = discriminator(real).view(-1)\n",
     "        loss_disc_real = criterion(disc_real, torch.ones_like(disc_real))\n",
     "        \n",
-    "        # Ocena fałszywych (chcemy same zera)\n",
-    "        disc_fake = discriminator(fake.detach()).view(-1) # .detach() bo nie chcemy tu ruszać generatora\n",
+    "        # Ocena fa\u0142szywych (chcemy same zera)\n",
+    "        disc_fake = discriminator(fake.detach()).view(-1) # .detach() bo nie chcemy tu rusza\u0107 generatora\n",
     "        loss_disc_fake = criterion(disc_fake, torch.zeros_like(disc_fake))\n",
     "        \n",
-    "        # Średnia strata i Backprop\n",
+    "        # \u015arednia strata i Backprop\n",
     "        loss_disc = (loss_disc_real + loss_disc_fake) / 2\n",
     "        discriminator.zero_grad()\n",
     "        loss_disc.backward()\n",
     "        opt_disc.step()\n",
     "        \n",
-    "        ### 2. TRENING GENERATORA (FAŁSZERZ) ###\n",
-    "        # Oceniamy fałszywki jeszcze raz (tym razem chcemy oszukać)\n",
+    "        ### 2. TRENING GENERATORA (FA\u0141SZERZ) ###\n",
+    "        # Oceniamy fa\u0142szywki jeszcze raz (tym razem chcemy oszuka\u0107)\n",
     "        output = discriminator(fake).view(-1)\n",
     "        \n",
     "        # CHCEMY JEDYNKI (Oszustwo udane)\n",
@@ -290,7 +297,7 @@
     "        loss_gen.backward()\n",
     "        opt_gen.step()\n",
     "\n",
-    "    # Wypisz status co epokę\n",
+    "    # Wypisz status co epok\u0119\n",
     "    print(f\"Epoka [{epoch+1}/{EPOCHS}] Loss D: {loss_disc:.4f}, Loss G: {loss_gen:.4f}\")"
    ]
   },
@@ -304,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- CO STWORZYŁ GENERATOR? ---\n"
+      "--- CO STWORZY\u0141 GENERATOR? ---\n"
      ]
     },
     {
@@ -319,14 +326,14 @@
     }
    ],
    "source": [
-    "# WIZUALIZACJA WYNIKÓW\n",
-    "print(\"--- CO STWORZYŁ GENERATOR? ---\")\n",
+    "# WIZUALIZACJA WYNIK\u00d3W\n",
+    "print(\"--- CO STWORZY\u0141 GENERATOR? ---\")\n",
     "\n",
     "with torch.no_grad():\n",
     "    fake_images = generator(fixed_noise).reshape(-1, 1, 28, 28)\n",
     "    fake_images = fake_images.cpu().detach() # Przenosimy na CPU do rysowania\n",
     "\n",
-    "# Rysujemy siatkę 3x3\n",
+    "# Rysujemy siatk\u0119 3x3\n",
     "fig, axs = plt.subplots(3, 3, figsize=(6, 6))\n",
     "for i, ax in enumerate(axs.flat):\n",
     "    ax.imshow(fake_images[i][0], cmap='gray')\n",
@@ -339,16 +346,16 @@
    "id": "ef477bb6",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Równowaga Nasha\n",
+    "## \ud83e\udde0 Podsumowanie: R\u00f3wnowaga Nasha\n",
     "\n",
-    "Jeśli na obrazkach widzisz coś przypominającego cyfry (nawet zamazane), to sukces!\n",
+    "Je\u015bli na obrazkach widzisz co\u015b przypominaj\u0105cego cyfry (nawet zamazane), to sukces!\n",
     "\n",
-    "**Tu jest haczyk (Stabilność).**\n",
-    "GAN-y są niezwykle trudne w treningu.\n",
-    "*   Jeśli Dyskryminator będzie za mądry -> Generator nigdy go nie oszuka, zniechęci się i przestanie uczyć (Gradient Vanishing).\n",
-    "*   Jeśli Dyskryminator będzie za głupi -> Generator będzie tworzył byle co, a i tak wygra.\n",
+    "**Tu jest haczyk (Stabilno\u015b\u0107).**\n",
+    "GAN-y s\u0105 niezwykle trudne w treningu.\n",
+    "*   Je\u015bli Dyskryminator b\u0119dzie za m\u0105dry -> Generator nigdy go nie oszuka, zniech\u0119ci si\u0119 i przestanie uczy\u0107 (Gradient Vanishing).\n",
+    "*   Je\u015bli Dyskryminator b\u0119dzie za g\u0142upi -> Generator b\u0119dzie tworzy\u0142 byle co, a i tak wygra.\n",
     "\n",
-    "Idealny stan to **Równowaga**, gdzie Policjant ma 50% skuteczności (zgaduje losowo), bo Fałszerz tworzy idealne kopie."
+    "Idealny stan to **R\u00f3wnowaga**, gdzie Policjant ma 50% skuteczno\u015bci (zgaduje losowo), bo Fa\u0142szerz tworzy idealne kopie."
    ]
   }
  ],
