--- a/51_Recommender_Systems_SVD.ipynb
+++ b/51_Recommender_Systems_SVD.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n<a href=\"https://colab.research.google.com/github/takzen/ai-engineering-handbook/blob/main/51_Recommender_Systems_SVD.ipynb\" target=\"_parent\">\n    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71ab4979",
    "metadata": {},
    "source": [
-    "# 🎬 Systemy Rekomendacyjne: SVD i Ukryte Cechy\n",
+    "# \ud83c\udfac Systemy Rekomendacyjne: SVD i Ukryte Cechy\n",
     "\n",
     "Mamy problem:\n",
-    "*   5 użytkowników.\n",
-    "*   6 filmów.\n",
+    "*   5 u\u017cytkownik\u00f3w.\n",
+    "*   6 film\u00f3w.\n",
     "*   Kilka ocen (1-5 gwiazdek).\n",
-    "*   Mnóstwo pustych miejsc (NaN).\n",
+    "*   Mn\u00f3stwo pustych miejsc (NaN).\n",
     "\n",
-    "Chcemy przewidzieć, jak Użytkownik 3 oceniłby Film 4.\n",
+    "Chcemy przewidzie\u0107, jak U\u017cytkownik 3 oceni\u0142by Film 4.\n",
     "\n",
     "**Metoda: SVD (Singular Value Decomposition).**\n",
-    "Algorytm rozbija wielką macierz ocen na dwie mniejsze:\n",
-    "1.  **Macierz Użytkowników:** Opisuje gust każdego widza za pomocą \"ukrytych liczb\" (Latent Features).\n",
-    "2.  **Macierz Filmów:** Opisuje każdy film za pomocą tych samych ukrytych liczb.\n",
+    "Algorytm rozbija wielk\u0105 macierz ocen na dwie mniejsze:\n",
+    "1.  **Macierz U\u017cytkownik\u00f3w:** Opisuje gust ka\u017cdego widza za pomoc\u0105 \"ukrytych liczb\" (Latent Features).\n",
+    "2.  **Macierz Film\u00f3w:** Opisuje ka\u017cdy film za pomoc\u0105 tych samych ukrytych liczb.\n",
     "\n",
-    "Gdy pomnożymy te dwie macierze z powrotem, otrzymamy pełną tabelę z wypełnionymi lukami."
+    "Gdy pomno\u017cymy te dwie macierze z powrotem, otrzymamy pe\u0142n\u0105 tabel\u0119 z wype\u0142nionymi lukami."
    ]
   },
   {
@@ -132,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Widzisz wzorzec? A i B lubią Sci-Fi. C i D lubią Romanse. E lubi bajki.\n"
+      "Widzisz wzorzec? A i B lubi\u0105 Sci-Fi. C i D lubi\u0105 Romanse. E lubi bajki.\n"
      ]
     }
    ],
@@ -142,9 +149,9 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "# 1. DANE (User-Item Matrix)\n",
-    "# Wiersze = Użytkownicy (A, B, C, D, E)\n",
+    "# Wiersze = U\u017cytkownicy (A, B, C, D, E)\n",
     "# Kolumny = Filmy (Matrix, StarWars, Titanic, NottingHill, Rambo, Shrek)\n",
-    "# 0 = Brak oceny (nie widział filmu)\n",
+    "# 0 = Brak oceny (nie widzia\u0142 filmu)\n",
     "\n",
     "data = {\n",
     "    'Matrix':      [5, 4, 0, 0, 1],\n",
@@ -159,7 +166,7 @@
     "\n",
     "print(\"--- NASZA MACIERZ OCEN (0 = Brak danych) ---\")\n",
     "display(ratings)\n",
-    "print(\"\\nWidzisz wzorzec? A i B lubią Sci-Fi. C i D lubią Romanse. E lubi bajki.\")"
+    "print(\"\\nWidzisz wzorzec? A i B lubi\u0105 Sci-Fi. C i D lubi\u0105 Romanse. E lubi bajki.\")"
    ]
   },
   {
@@ -169,10 +176,10 @@
    "source": [
     "## Krok 1: SVD w akcji\n",
     "\n",
-    "Użyjemy `TruncatedSVD` ze Scikit-Learn.\n",
-    "Musimy wybrać liczbę **komponentów** (cech ukrytych).\n",
-    "Powiedzmy, że chcemy opisać świat filmów za pomocą **2 cech**.\n",
-    "(Algorytm sam wymyśli, co to za cechy – my możemy się domyślać, że to np. \"Akcja\" i \"Romantyzm\")."
+    "U\u017cyjemy `TruncatedSVD` ze Scikit-Learn.\n",
+    "Musimy wybra\u0107 liczb\u0119 **komponent\u00f3w** (cech ukrytych).\n",
+    "Powiedzmy, \u017ce chcemy opisa\u0107 \u015bwiat film\u00f3w za pomoc\u0105 **2 cech**.\n",
+    "(Algorytm sam wymy\u015bli, co to za cechy \u2013 my mo\u017cemy si\u0119 domy\u015bla\u0107, \u017ce to np. \"Akcja\" i \"Romantyzm\")."
    ]
   },
   {
@@ -185,14 +192,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- UKRYTE CECHY UŻYTKOWNIKÓW (User Matrix) ---\n",
+      "--- UKRYTE CECHY U\u017bYTKOWNIK\u00d3W (User Matrix) ---\n",
       "[[ 7.89  0.  ]\n",
       " [ 5.99  0.  ]\n",
       " [-0.    7.06]\n",
       " [-0.    6.39]\n",
       " [ 3.06  0.  ]]\n",
       "\n",
-      "--- UKRYTE CECHY FILMÓW (Item Matrix) ---\n",
+      "--- UKRYTE CECHY FILM\u00d3W (Item Matrix) ---\n",
       "[[ 0.62  0.7  -0.   -0.    0.32  0.14]\n",
       " [ 0.    0.    0.67  0.74  0.    0.  ]]\n"
      ]
@@ -205,15 +212,15 @@
     "# Tworzymy SVD (szukamy 2 ukrytych cech)\n",
     "svd = TruncatedSVD(n_components=2, random_state=42)\n",
     "\n",
-    "# Trenujemy (Dopasowujemy macierz użytkowników)\n",
+    "# Trenujemy (Dopasowujemy macierz u\u017cytkownik\u00f3w)\n",
     "matrix_user_features = svd.fit_transform(X)\n",
     "\n",
-    "print(\"--- UKRYTE CECHY UŻYTKOWNIKÓW (User Matrix) ---\")\n",
+    "print(\"--- UKRYTE CECHY U\u017bYTKOWNIK\u00d3W (User Matrix) ---\")\n",
     "# Wiersze to userzy, kolumny to nasze 2 tajne cechy\n",
     "print(matrix_user_features.round(2))\n",
     "\n",
-    "print(\"\\n--- UKRYTE CECHY FILMÓW (Item Matrix) ---\")\n",
-    "# To jest ukryte wewnątrz obiektu SVD (components_)\n",
+    "print(\"\\n--- UKRYTE CECHY FILM\u00d3W (Item Matrix) ---\")\n",
+    "# To jest ukryte wewn\u0105trz obiektu SVD (components_)\n",
     "matrix_movie_features = svd.components_\n",
     "print(matrix_movie_features.round(2))"
    ]
@@ -223,15 +230,15 @@
    "id": "c3506f9c",
    "metadata": {},
    "source": [
-    "## Krok 2: Rekonstrukcja (Wypełnianie luk)\n",
+    "## Krok 2: Rekonstrukcja (Wype\u0142nianie luk)\n",
     "\n",
-    "Teraz najważniejszy moment.\n",
-    "Mnożymy macierz użytkowników przez macierz filmów.\n",
+    "Teraz najwa\u017cniejszy moment.\n",
+    "Mno\u017cymy macierz u\u017cytkownik\u00f3w przez macierz film\u00f3w.\n",
     "$$ X_{new} = U \\times V^T $$\n",
     "\n",
-    "Wynikowa macierz będzie miała liczby w każdym polu.\n",
-    "*   Tam, gdzie były oceny – liczby powinny być podobne do oryginału.\n",
-    "*   Tam, gdzie było 0 – pojawią się **predykcje**."
+    "Wynikowa macierz b\u0119dzie mia\u0142a liczby w ka\u017cdym polu.\n",
+    "*   Tam, gdzie by\u0142y oceny \u2013 liczby powinny by\u0107 podobne do orygina\u0142u.\n",
+    "*   Tam, gdzie by\u0142o 0 \u2013 pojawi\u0105 si\u0119 **predykcje**."
    ]
   },
   {
@@ -244,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- MACIERZ PRZEWIDYWANA (Wypełnione luki) ---\n"
+      "--- MACIERZ PRZEWIDYWANA (Wype\u0142nione luki) ---\n"
      ]
     },
     {
@@ -344,10 +351,10 @@
      "text": [
       "------------------------------\n",
       "ANALIZA:\n",
-      "Spójrz na User_B (drugi wiersz).\n",
-      "Oryginał Rambo: 0 (Nie widział)\n",
+      "Sp\u00f3jrz na User_B (drugi wiersz).\n",
+      "Orygina\u0142 Rambo: 0 (Nie widzia\u0142)\n",
       "Przewidywanie Rambo: 1.93\n",
-      "System przewidział, że User_B oceniłby Rambo na ~2.86 (bo lubi Matrixa, ale Rambo to trochę co innego).\n"
+      "System przewidzia\u0142, \u017ce User_B oceni\u0142by Rambo na ~2.86 (bo lubi Matrixa, ale Rambo to troch\u0119 co innego).\n"
      ]
     }
    ],
@@ -355,18 +362,18 @@
     "# Rekonstrukcja macierzy (Iloczyn skalarny)\n",
     "predicted_ratings = np.dot(matrix_user_features, matrix_movie_features)\n",
     "\n",
-    "# Zamiana na DataFrame dla czytelności\n",
+    "# Zamiana na DataFrame dla czytelno\u015bci\n",
     "pred_df = pd.DataFrame(predicted_ratings, index=ratings.index, columns=ratings.columns)\n",
     "\n",
-    "print(\"--- MACIERZ PRZEWIDYWANA (Wypełnione luki) ---\")\n",
+    "print(\"--- MACIERZ PRZEWIDYWANA (Wype\u0142nione luki) ---\")\n",
     "display(pred_df.round(2))\n",
     "\n",
     "print(\"-\" * 30)\n",
     "print(\"ANALIZA:\")\n",
-    "print(\"Spójrz na User_B (drugi wiersz).\")\n",
-    "print(f\"Oryginał Rambo: {ratings.loc['User_B', 'Rambo']} (Nie widział)\")\n",
+    "print(\"Sp\u00f3jrz na User_B (drugi wiersz).\")\n",
+    "print(f\"Orygina\u0142 Rambo: {ratings.loc['User_B', 'Rambo']} (Nie widzia\u0142)\")\n",
     "print(f\"Przewidywanie Rambo: {pred_df.loc['User_B', 'Rambo']:.2f}\")\n",
-    "print(\"System przewidział, że User_B oceniłby Rambo na ~2.86 (bo lubi Matrixa, ale Rambo to trochę co innego).\")"
+    "print(\"System przewidzia\u0142, \u017ce User_B oceni\u0142by Rambo na ~2.86 (bo lubi Matrixa, ale Rambo to troch\u0119 co innego).\")"
    ]
   },
   {
@@ -379,23 +386,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- KTÓRY FILM PASUJE DO KTÓREGO? ---\n",
-      "Podobieństwo do Matrixa: Matrix       = 1.0000\n",
-      "Podobieństwo do Matrixa: StarWars     = 1.0000\n",
-      "Podobieństwo do Matrixa: Rambo        = 1.0000\n",
-      "Podobieństwo do Matrixa: Shrek        = 1.0000\n",
-      "Podobieństwo do Matrixa: Titanic      = -1.0000\n",
-      "Podobieństwo do Matrixa: NottingHill  = -1.0000\n"
+      "--- KT\u00d3RY FILM PASUJE DO KT\u00d3REGO? ---\n",
+      "Podobie\u0144stwo do Matrixa: Matrix       = 1.0000\n",
+      "Podobie\u0144stwo do Matrixa: StarWars     = 1.0000\n",
+      "Podobie\u0144stwo do Matrixa: Rambo        = 1.0000\n",
+      "Podobie\u0144stwo do Matrixa: Shrek        = 1.0000\n",
+      "Podobie\u0144stwo do Matrixa: Titanic      = -1.0000\n",
+      "Podobie\u0144stwo do Matrixa: NottingHill  = -1.0000\n"
      ]
     }
    ],
    "source": [
-    "# KORELACJA FILMÓW (Podobieństwo)\n",
-    "# Skoro mamy wektory cech dla filmów, możemy sprawdzić, które są do siebie podobne (używając Korelacji Pearsona na macierzy korelacji)\n",
+    "# KORELACJA FILM\u00d3W (Podobie\u0144stwo)\n",
+    "# Skoro mamy wektory cech dla film\u00f3w, mo\u017cemy sprawdzi\u0107, kt\u00f3re s\u0105 do siebie podobne (u\u017cywaj\u0105c Korelacji Pearsona na macierzy korelacji)\n",
     "\n",
-    "corr_matrix = np.corrcoef(matrix_movie_features.T) # .T żeby korelacja była między filmami (kolumnami)\n",
+    "corr_matrix = np.corrcoef(matrix_movie_features.T) # .T \u017ceby korelacja by\u0142a mi\u0119dzy filmami (kolumnami)\n",
     "\n",
-    "print(\"--- KTÓRY FILM PASUJE DO KTÓREGO? ---\")\n",
+    "print(\"--- KT\u00d3RY FILM PASUJE DO KT\u00d3REGO? ---\")\n",
     "# Wypiszmy, co jest podobne do \"Matrixa\" (Index 0)\n",
     "matrix_corr = corr_matrix[0]\n",
     "similar_movies = list(zip(ratings.columns, matrix_corr))\n",
@@ -404,7 +411,7 @@
     "sorted_sim = sorted(similar_movies, key=lambda x: x[1], reverse=True)\n",
     "\n",
     "for movie, score in sorted_sim:\n",
-    "    print(f\"Podobieństwo do Matrixa: {movie:<12} = {score:.4f}\")"
+    "    print(f\"Podobie\u0144stwo do Matrixa: {movie:<12} = {score:.4f}\")"
    ]
   },
   {
@@ -412,19 +419,19 @@
    "id": "95bfee3b",
    "metadata": {},
    "source": [
-    "## 🧠 Podsumowanie: Jak Netflix zarabia miliony?\n",
+    "## \ud83e\udde0 Podsumowanie: Jak Netflix zarabia miliony?\n",
     "\n",
-    "Algorytm poprawnie wykrył, że:\n",
+    "Algorytm poprawnie wykry\u0142, \u017ce:\n",
     "1.  **Matrix** jest bardzo podobny do **StarWars** (korelacja bliska 1.0).\n",
-    "2.  **Matrix** jest totalnym przeciwieństwem **Titanica** (korelacja ujemna -1.0).\n",
+    "2.  **Matrix** jest totalnym przeciwie\u0144stwem **Titanica** (korelacja ujemna -1.0).\n",
     "\n",
     "**Tu jest haczyk (Cold Start).**\n",
-    "SVD działa genialnie, gdy masz historię ocen.\n",
-    "Ale co zrobić, gdy zarejestruje się **nowy użytkownik**, który nie ocenił niczego? Jego wiersz to same zera. SVD nic nie przewidzi (wynik też będzie zerem).\n",
-    "To tzw. problem \"Zimnego Startu\". Wtedy Netflix używa prostych reguł (\"Co jest popularne w Twoim kraju?\").\n",
+    "SVD dzia\u0142a genialnie, gdy masz histori\u0119 ocen.\n",
+    "Ale co zrobi\u0107, gdy zarejestruje si\u0119 **nowy u\u017cytkownik**, kt\u00f3ry nie oceni\u0142 niczego? Jego wiersz to same zera. SVD nic nie przewidzi (wynik te\u017c b\u0119dzie zerem).\n",
+    "To tzw. problem \"Zimnego Startu\". Wtedy Netflix u\u017cywa prostych regu\u0142 (\"Co jest popularne w Twoim kraju?\").\n",
     "\n",
     "**Wniosek:**\n",
-    "Faktoryzacja macierzy to fundament. Choć nowoczesne systemy używają do tego sieci neuronowych (Neural Collaborative Filtering), to matematyka pod spodem (mnożenie wektorów cech) pozostaje ta sama."
+    "Faktoryzacja macierzy to fundament. Cho\u0107 nowoczesne systemy u\u017cywaj\u0105 do tego sieci neuronowych (Neural Collaborative Filtering), to matematyka pod spodem (mno\u017cenie wektor\u00f3w cech) pozostaje ta sama."
    ]
   }
  ],
